run post_process_transliteration for Thai v book 1

--- a/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-1/1-1-1-1.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-1/1-1-1-1.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="24" book="para">
 
 <Paragraph number="41" book="para">
-เตน โข ปน สมเยน เวสาลิยา อวิทูเร กลนฺทคาโม นาม อตฺถิ. ตตฺถ สุทินฺโน นาม กลนฺทปุตฺโต เสฏฺฐิปุตฺโต โหติ. อถ โข สุทินฺโน กลนฺทปุตฺโต สมฺพหุเลหิ สหายเกหิ สทฺธึ เวสาลึ อคมาสิ เกนจิเทว กรณีเยน. เตน โข ปน สมเยน ภควา มหติยา ปริสาย ปริวุโต ธมฺมํ เทเสนฺโต นิสินฺโน โหติ. อทฺทส โข สุทินฺโน กลนฺทปุตฺโต ภควนฺตํ มหติยา ปริสาย ปริวุตํ ธมฺมํ เทเสนฺตํ นิสินฺนํ. ทิสฺวานสฺส เอตทโหสิ—  “ยนฺนูนาหมฺปิ ธมฺมํ สุเณยฺยนฺ”ติ. อถ โข สุทินฺโน กลนฺทปุตฺโต เยน สา ปริสา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺนสฺส โข สุทินฺนสฺส กลนฺทปุตฺตสฺส เอตทโหสิ—  “ยถา ยถา โข อหํ ภควตา ธมฺมํ เทสิตํ อาชานามิ, นยิทํ สุกรํ อคารํ อชฺฌาวสตา เอกนฺตปริปุณฺณํ เอกนฺตปริสุทฺธํ สงฺขลิขิตํ พฺรหฺมจริยํ จริตุํ; ยนฺนูนาหํ เกสมสฺสุํ โอหาเรตฺวา กาสายานิ วตฺถานิ อจฺฉาเทตฺวา อคารสฺมา อนคาริยํ ปพฺพเชยฺยนฺ”ติ. อถ โข สา ปริสา ภควตา ธมฺมิยา กถาย สนฺทสฺสิตา สมาทปิตา สมุตฺเตชิตา สมฺปหํสิตา อุฏฺฐายาสนา ภควนฺตํ อภิวาเทตฺวา ปทกฺขิณํ กตฺวา ปกฺกามิ.
+เตน โข ปน สมเยน เวสาลิยา อวิทูเร กลนฺทคาโม นาม อตฺถิ. ตตฺถ สุทินฺโน นาม กลนฺทปุตฺโต เสฏฺฐิปุตฺโต โหติ. อถ โข สุทินฺโน กลนฺทปุตฺโต สมฺพหุเลหิ สหายเกหิ สทฺธิํ เวสาลิํ อคมาสิ เกนจิเทว กรณีเยน. เตน โข ปน สมเยน ภควา มหติยา ปริสาย ปริวุโต ธมฺมํ เทเสนฺโต นิสินฺโน โหติ. อทฺทส โข สุทินฺโน กลนฺทปุตฺโต ภควนฺตํ มหติยา ปริสาย ปริวุตํ ธมฺมํ เทเสนฺตํ นิสินฺนํ. ทิสฺวานสฺส เอตทโหสิ—  “ยนฺนูนาหมฺปิ ธมฺมํ สุเณยฺยนฺ”ติ. อถ โข สุทินฺโน กลนฺทปุตฺโต เยน สา ปริสา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺนสฺส โข สุทินฺนสฺส กลนฺทปุตฺตสฺส เอตทโหสิ—  “ยถา ยถา โข อหํ ภควตา ธมฺมํ เทสิตํ อาชานามิ, นยิทํ สุกรํ อคารํ อชฺฌาวสตา เอกนฺตปริปุณฺณํ เอกนฺตปริสุทฺธํ สงฺขลิขิตํ พฺรหฺมจริยํ จริตุํ; ยนฺนูนาหํ เกสมสฺสุํ โอหาเรตฺวา กาสายานิ วตฺถานิ อจฺฉาเทตฺวา อคารสฺมา อนคาริยํ ปพฺพเชยฺยนฺ”ติ. อถ โข สา ปริสา ภควตา ธมฺมิยา กถาย สนฺทสฺสิตา สมาทปิตา สมุตฺเตชิตา สมฺปหํสิตา อุฏฺฐายาสนา ภควนฺตํ อภิวาเทตฺวา ปทกฺขิณํ กตฺวา ปกฺกามิ.
 </Paragraph>
 
 </Division>
@@ -32,15 +32,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="26" book="para">
 
 <Paragraph number="43" book="para">
-อถ โข สุทินฺโน กลนฺทปุตฺโต เวสาลิยํ ตํ กรณียํ ตีเรตฺวา เยน กลนฺทคาโม เยน มาตาปิตโร เตนุปสงฺกมิ; อุปสงฺกมิตฺวา มาตาปิตโร เอตทโวจ—  “อมฺมตาตา, ยถา ยถาหํ ภควตา ธมฺมํ เทสิตํ อาชานามิ, นยิทํ สุกรํ อคารํ อชฺฌาวสตา เอกนฺตปริปุณฺณํ เอกนฺตปริสุทฺธํ สงฺขลิขิตํ พฺรหฺมจริยํ จริตุํ; อิจฺฉามหํ เกสมสฺสุํ โอหาเรตฺวา กาสายานิ วตฺถานิ อจฺฉาเทตฺวา อคารสฺมา อนคาริยํ ปพฺพชิตุํ. อนุชานาถ มํ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. เอวํ วุตฺเต, สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, ตาต สุทินฺน, อมฺหากํ เอกปุตฺตโก ปิโย มนาโป สุเขธิโต สุขปริหโต. น ตฺวํ, ตาต สุทินฺน, กิญฺจิ ทุกฺขสฺส ชานาสิ. มรเณนปิ มยํ เต อกามกา วินา ภวิสฺสาม, กึ ปน มยํ ตํ ชีวนฺตํ อนุชานิสฺสาม อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ.
+อถ โข สุทินฺโน กลนฺทปุตฺโต เวสาลิยํ ตํ กรณียํ ตีเรตฺวา เยน กลนฺทคาโม เยน มาตาปิตโร เตนุปสงฺกมิ; อุปสงฺกมิตฺวา มาตาปิตโร เอตทโวจ—  “อมฺมตาตา, ยถา ยถาหํ ภควตา ธมฺมํ เทสิตํ อาชานามิ, นยิทํ สุกรํ อคารํ อชฺฌาวสตา เอกนฺตปริปุณฺณํ เอกนฺตปริสุทฺธํ สงฺขลิขิตํ พฺรหฺมจริยํ จริตุํ; อิจฺฉามหํ เกสมสฺสุํ โอหาเรตฺวา กาสายานิ วตฺถานิ อจฺฉาเทตฺวา อคารสฺมา อนคาริยํ ปพฺพชิตุํ. อนุชานาถ มํ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. เอวํ วุตฺเต, สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, ตาต สุทินฺน, อมฺหากํ เอกปุตฺตโก ปิโย มนาโป สุเขธิโต สุขปริหโต. น ตฺวํ, ตาต สุทินฺน, กิญฺจิ ทุกฺขสฺส ชานาสิ. มรเณนปิ มยํ เต อกามกา วินา ภวิสฺสาม, กิํ ปน มยํ ตํ ชีวนฺตํ อนุชานิสฺสาม อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ.
 </Paragraph>
 
 <Paragraph number="44" book="para">
-ทุติยมฺปิ โข สุทินฺโน กลนฺทปุตฺโต มาตาปิตโร เอตทโวจ—  “อมฺมตาตา, ยถา ยถาหํ ภควตา ธมฺมํ เทสิตํ อาชานามิ, นยิทํ สุกรํ อคารํ อชฺฌาวสตา เอกนฺตปริปุณฺณํ เอกนฺตปริสุทฺธํ สงฺขลิขิตํ พฺรหฺมจริยํ จริตุํ; อิจฺฉามหํ เกสมสฺสุํ โอหาเรตฺวา กาสายานิ วตฺถานิ อจฺฉาเทตฺวา อคารสฺมา อนคาริยํ ปพฺพชิตุํ. อนุชานาถ มํ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. ทุติยมฺปิ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, ตาต สุทินฺน, อมฺหากํ เอกปุตฺตโก ปิโย มนาโป สุเขธิโต สุขปริหโต. น ตฺวํ, ตาต สุทินฺน, กิญฺจิ ทุกฺขสฺส ชานาสิ. มรเณนปิ มยํ เต อกามกา วินา ภวิสฺสาม, กึ ปน มยํ ตํ ชีวนฺตํ อนุชานิสฺสาม อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ.
+ทุติยมฺปิ โข สุทินฺโน กลนฺทปุตฺโต มาตาปิตโร เอตทโวจ—  “อมฺมตาตา, ยถา ยถาหํ ภควตา ธมฺมํ เทสิตํ อาชานามิ, นยิทํ สุกรํ อคารํ อชฺฌาวสตา เอกนฺตปริปุณฺณํ เอกนฺตปริสุทฺธํ สงฺขลิขิตํ พฺรหฺมจริยํ จริตุํ; อิจฺฉามหํ เกสมสฺสุํ โอหาเรตฺวา กาสายานิ วตฺถานิ อจฺฉาเทตฺวา อคารสฺมา อนคาริยํ ปพฺพชิตุํ. อนุชานาถ มํ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. ทุติยมฺปิ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, ตาต สุทินฺน, อมฺหากํ เอกปุตฺตโก ปิโย มนาโป สุเขธิโต สุขปริหโต. น ตฺวํ, ตาต สุทินฺน, กิญฺจิ ทุกฺขสฺส ชานาสิ. มรเณนปิ มยํ เต อกามกา วินา ภวิสฺสาม, กิํ ปน มยํ ตํ ชีวนฺตํ อนุชานิสฺสาม อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ.
 </Paragraph>
 
 <Paragraph number="45" book="para">
-ตติยมฺปิ โข สุทินฺโน กลนฺทปุตฺโต มาตาปิตโร เอตทโวจ—  “อมฺมตาตา, ยถา ยถาหํ ภควตา ธมฺมํ เทสิตํ อาชานามิ, นยิทํ สุกรํ อคารํ อชฺฌาวสตา เอกนฺตปริปุณฺณํ เอกนฺตปริสุทฺธํ สงฺขลิขิตํ พฺรหฺมจริยํ จริตุํ; อิจฺฉามหํ เกสมสฺสุํ โอหาเรตฺวา กาสายานิ วตฺถานิ อจฺฉาเทตฺวา อคารสฺมา อนคาริยํ ปพฺพชิตุํ. อนุชานาถ มํ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. ตติยมฺปิ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, ตาต สุทินฺน, อมฺหากํ เอกปุตฺตโก ปิโย มนาโป สุเขธิโต สุขปริหโต. น ตฺวํ, ตาต สุทินฺน, กิญฺจิ ทุกฺขสฺส ชานาสิ. มรเณนปิ มยํ เต อกามกา วินา ภวิสฺสาม, กึ ปน มยํ ตํ ชีวนฺตํ อนุชานิสฺสาม อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ.
+ตติยมฺปิ โข สุทินฺโน กลนฺทปุตฺโต มาตาปิตโร เอตทโวจ—  “อมฺมตาตา, ยถา ยถาหํ ภควตา ธมฺมํ เทสิตํ อาชานามิ, นยิทํ สุกรํ อคารํ อชฺฌาวสตา เอกนฺตปริปุณฺณํ เอกนฺตปริสุทฺธํ สงฺขลิขิตํ พฺรหฺมจริยํ จริตุํ; อิจฺฉามหํ เกสมสฺสุํ โอหาเรตฺวา กาสายานิ วตฺถานิ อจฺฉาเทตฺวา อคารสฺมา อนคาริยํ ปพฺพชิตุํ. อนุชานาถ มํ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. ตติยมฺปิ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, ตาต สุทินฺน, อมฺหากํ เอกปุตฺตโก ปิโย มนาโป สุเขธิโต สุขปริหโต. น ตฺวํ, ตาต สุทินฺน, กิญฺจิ ทุกฺขสฺส ชานาสิ. มรเณนปิ มยํ เต อกามกา วินา ภวิสฺสาม, กิํ ปน มยํ ตํ ชีวนฺตํ อนุชานิสฺสาม อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ.
 </Paragraph>
 
 </Division>
@@ -54,22 +54,22 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="28" book="para">
 
 <Paragraph number="47" book="para">
-อถ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, ตาต สุทินฺน, อมฺหากํ เอกปุตฺตโก ปิโย มนาโป สุเขธิโต สุขปริหโต. น ตฺวํ, ตาต สุทินฺน, กิญฺจิ ทุกฺขสฺส ชานาสิ. มรเณนปิ มยํ เต อกามกา วินา ภวิสฺสาม, กึ ปน มยํ ตํ ชีวนฺตํ อนุชานิสฺสาม อคารสฺมา อนคาริยํ ปพฺพชฺชาย? อุฏฺเฐหิ, ตาต สุทินฺน, ภุญฺช จ ปิว จ ปริจาเรหิ จ, ภุญฺชนฺโต ปิวนฺโต ปริจาเรนฺโต กาเม ปริภุญฺชนฺโต ปุญฺญานิ กโรนฺโต อภิรมสฺสุ. น ตํ มยํ อนุชานาม อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. เอวํ วุตฺเต, สุทินฺโน กลนฺทปุตฺโต ตุณฺหี อโหสิ.
+อถ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, ตาต สุทินฺน, อมฺหากํ เอกปุตฺตโก ปิโย มนาโป สุเขธิโต สุขปริหโต. น ตฺวํ, ตาต สุทินฺน, กิญฺจิ ทุกฺขสฺส ชานาสิ. มรเณนปิ มยํ เต อกามกา วินา ภวิสฺสาม, กิํ ปน มยํ ตํ ชีวนฺตํ อนุชานิสฺสาม อคารสฺมา อนคาริยํ ปพฺพชฺชาย? อุฏฺเฐหิ, ตาต สุทินฺน, ภุญฺช จ ปิว จ ปริจาเรหิ จ, ภุญฺชนฺโต ปิวนฺโต ปริจาเรนฺโต กาเม ปริภุญฺชนฺโต ปุญฺญานิ กโรนฺโต อภิรมสฺสุ. น ตํ มยํ อนุชานาม อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. เอวํ วุตฺเต, สุทินฺโน กลนฺทปุตฺโต ตุณฺหี อโหสิ.
 </Paragraph>
 
 <Paragraph number="48" book="para">
-ทุติยมฺปิ โข …เป…  ตติยมฺปิ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, ตาต สุทินฺน, อมฺหากํ เอกปุตฺตโก ปิโย มนาโป สุเขธิโต สุขปริหโต. น ตฺวํ, ตาต สุทินฺน, กิญฺจิ ทุกฺขสฺส ชานาสิ. มรเณนปิ มยํ เต อกามกา วินา ภวิสฺสาม, กึ ปน มยํ ตํ ชีวนฺตํ อนุชานิสฺสาม อคารสฺมา อนคาริยํ ปพฺพชฺชาย. อุฏฺเฐหิ, ตาต สุทินฺน, ภุญฺช จ ปิว จ ปริจาเรหิ จ, ภุญฺชนฺโต ปิวนฺโต ปริจาเรนฺโต กาเม ปริภุญฺชนฺโต ปุญฺญานิ กโรนฺโต อภิรมสฺสุ. น ตํ มยํ อนุชานาม อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. ตติยมฺปิ โข สุทินฺโน กลนฺทปุตฺโต ตุณฺหี อโหสิ.
+ทุติยมฺปิ โข …เป…  ตติยมฺปิ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, ตาต สุทินฺน, อมฺหากํ เอกปุตฺตโก ปิโย มนาโป สุเขธิโต สุขปริหโต. น ตฺวํ, ตาต สุทินฺน, กิญฺจิ ทุกฺขสฺส ชานาสิ. มรเณนปิ มยํ เต อกามกา วินา ภวิสฺสาม, กิํ ปน มยํ ตํ ชีวนฺตํ อนุชานิสฺสาม อคารสฺมา อนคาริยํ ปพฺพชฺชาย. อุฏฺเฐหิ, ตาต สุทินฺน, ภุญฺช จ ปิว จ ปริจาเรหิ จ, ภุญฺชนฺโต ปิวนฺโต ปริจาเรนฺโต กาเม ปริภุญฺชนฺโต ปุญฺญานิ กโรนฺโต อภิรมสฺสุ. น ตํ มยํ อนุชานาม อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. ตติยมฺปิ โข สุทินฺโน กลนฺทปุตฺโต ตุณฺหี อโหสิ.
 </Paragraph>
 
 <Paragraph number="49" book="para">
-อถ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส สหายกา เยน สุทินฺโน กลนฺทปุตฺโต เตนุปสงฺกมึสุ; อุปสงฺกมิตฺวา สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, สมฺม สุทินฺน, มาตาปิตูนํ เอกปุตฺตโก ปิโย มนาโป สุเขธิโต สุขปริหโต. น ตฺวํ, สมฺม สุทินฺน, กิญฺจิ ทุกฺขสฺส ชานาสิ. มรเณนปิ เต มาตาปิตโร อกามกา วินา ภวิสฺสนฺติ, กึ ปน ตํ ชีวนฺตํ อนุชานิสฺสนฺติ อคารสฺมา อนคาริยํ ปพฺพชาย. อุฏฺเฐหิ, สมฺม สุทินฺน, ภุญฺช จ ปิว จ ปริจาเรหิ จ, ภุญฺชนฺโต ปิวนฺโต ปริจาเรนฺโต กาเม ปริภุญฺชนฺโต ปุญฺญานิ กโรนฺโต อภิรมสฺสุ, น ตํ มาตาปิตโร อนุชานิสฺสนฺติ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. เอวํ วุตฺเต, สุทินฺโน กลนฺทปุตฺโต ตุณฺหี อโหสิ. ทุติยมฺปิ โข …เป…  ตติยมฺปิ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส สหายกา สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, สมฺม สุทินฺน …เป…  ตติยมฺปิ โข สุทินฺโน กลนฺทปุตฺโต ตุณฺหี อโหสิ.
+อถ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส สหายกา เยน สุทินฺโน กลนฺทปุตฺโต เตนุปสงฺกมิํสุ; อุปสงฺกมิตฺวา สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, สมฺม สุทินฺน, มาตาปิตูนํ เอกปุตฺตโก ปิโย มนาโป สุเขธิโต สุขปริหโต. น ตฺวํ, สมฺม สุทินฺน, กิญฺจิ ทุกฺขสฺส ชานาสิ. มรเณนปิ เต มาตาปิตโร อกามกา วินา ภวิสฺสนฺติ, กิํ ปน ตํ ชีวนฺตํ อนุชานิสฺสนฺติ อคารสฺมา อนคาริยํ ปพฺพชาย. อุฏฺเฐหิ, สมฺม สุทินฺน, ภุญฺช จ ปิว จ ปริจาเรหิ จ, ภุญฺชนฺโต ปิวนฺโต ปริจาเรนฺโต กาเม ปริภุญฺชนฺโต ปุญฺญานิ กโรนฺโต อภิรมสฺสุ, น ตํ มาตาปิตโร อนุชานิสฺสนฺติ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. เอวํ วุตฺเต, สุทินฺโน กลนฺทปุตฺโต ตุณฺหี อโหสิ. ทุติยมฺปิ โข …เป…  ตติยมฺปิ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส สหายกา สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “ตฺวํ โขสิ, สมฺม สุทินฺน …เป…  ตติยมฺปิ โข สุทินฺโน กลนฺทปุตฺโต ตุณฺหี อโหสิ.
 </Paragraph>
 
 </Division>
 <Division number="29" book="para">
 
 <Paragraph number="50" book="para">
-อถ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส สหายกา เยน สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร เตนุปสงฺกมึสุ; อุปสงฺกมิตฺวา สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร เอตทโวจุํ—  “อมฺมตาตา, เอโส สุทินฺโน อนนฺตรหิตาย ภูมิยา นิปนฺโน—  ‘อิเธว เม มรณํ ภวิสฺสติ ปพฺพชฺชา วา’ติ. สเจ ตุเมฺห สุทินฺนํ นานุชานิสฺสถ อคารสฺมา อนคาริยํ ปพฺพชฺชาย, ตตฺเถว มรณํ อาคมิสฺสติ. สเจ ปน ตุเมฺห สุทินฺนํ อนุชานิสฺสถ อคารสฺมา อนคาริยํ ปพฺพชฺชาย, ปพฺพชิตมฺปิ นํ ทกฺขิสฺสถ. สเจ สุทินฺโน นาภิรมิสฺสติ อคารสฺมา อนคาริยํ ปพฺพชฺชาย, กา ตสฺส อญฺญา คติ ภวิสฺสติ, อิเธว ปจฺจาคมิสฺสติ. อนุชานาถ สุทินฺนํ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. “อนุชานาม, ตาตา, สุทินฺนํ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. อถ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส สหายกา เยน สุทินฺโน กลนฺทปุตฺโต เตนุปสงฺกมึสุ; อุปสงฺกมิตฺวา สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “อุฏฺเฐหิ, สมฺม สุทินฺน, อนุญฺญาโตสิ มาตาปิตูหิ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ.
+อถ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส สหายกา เยน สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร เตนุปสงฺกมิํสุ; อุปสงฺกมิตฺวา สุทินฺนสฺส กลนฺทปุตฺตสฺส มาตาปิตโร เอตทโวจุํ—  “อมฺมตาตา, เอโส สุทินฺโน อนนฺตรหิตาย ภูมิยา นิปนฺโน—  ‘อิเธว เม มรณํ ภวิสฺสติ ปพฺพชฺชา วา’ติ. สเจ ตุเมฺห สุทินฺนํ นานุชานิสฺสถ อคารสฺมา อนคาริยํ ปพฺพชฺชาย, ตตฺเถว มรณํ อาคมิสฺสติ. สเจ ปน ตุเมฺห สุทินฺนํ อนุชานิสฺสถ อคารสฺมา อนคาริยํ ปพฺพชฺชาย, ปพฺพชิตมฺปิ นํ ทกฺขิสฺสถ. สเจ สุทินฺโน นาภิรมิสฺสติ อคารสฺมา อนคาริยํ ปพฺพชฺชาย, กา ตสฺส อญฺญา คติ ภวิสฺสติ, อิเธว ปจฺจาคมิสฺสติ. อนุชานาถ สุทินฺนํ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. “อนุชานาม, ตาตา, สุทินฺนํ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ. อถ โข สุทินฺนสฺส กลนฺทปุตฺตสฺส สหายกา เยน สุทินฺโน กลนฺทปุตฺโต เตนุปสงฺกมิํสุ; อุปสงฺกมิตฺวา สุทินฺนํ กลนฺทปุตฺตํ เอตทโวจุํ—  “อุฏฺเฐหิ, สมฺม สุทินฺน, อนุญฺญาโตสิ มาตาปิตูหิ อคารสฺมา อนคาริยํ ปพฺพชฺชายา”ติ.
 </Paragraph>
 
 </Division>
@@ -84,14 +84,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="53" book="para">
-อถ โข อายสฺมา สุทินฺโน เสนาสนํ สํสาเมตฺวา ปตฺตจีวรมาทาย เยน เวสาลี เตน ปกฺกามิ. อนุปุพฺเพน เยน เวสาลี ตทวสริ. ตตฺร สุทํ อายสฺมา สุทินฺโน เวสาลิยํ วิหรติ มหาวเน กูฏาคารสาลายํ. อโสฺสสุํ โข อายสฺมโต สุทินฺนสฺส ญาตกา—  “สุทินฺโน กิร กลนฺทปุตฺโต เวสาลึ อนุปฺปตฺโต”ติ. เต อายสฺมโต สุทินฺนสฺส สฏฺฐิมตฺเต ถาลิปาเก ภตฺตาภิหารํ อภิหรึสุ. อถ โข อายสฺมา สุทินฺโน เต สฏฺฐิมตฺเต ถาลิปาเก ภิกฺขูนํ วิสฺสชฺเชตฺวา ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรมาทาย กลนฺทคามํ ปิณฺฑาย ปาวิสิ. กลนฺทคาเม สปทานํ ปิณฺฑาย จรมาโน เยน สกปิตุ นิเวสนํ เตนุปสงฺกมิ.
+อถ โข อายสฺมา สุทินฺโน เสนาสนํ สํสาเมตฺวา ปตฺตจีวรมาทาย เยน เวสาลี เตน ปกฺกามิ. อนุปุพฺเพน เยน เวสาลี ตทวสริ. ตตฺร สุทํ อายสฺมา สุทินฺโน เวสาลิยํ วิหรติ มหาวเน กูฏาคารสาลายํ. อโสฺสสุํ โข อายสฺมโต สุทินฺนสฺส ญาตกา—  “สุทินฺโน กิร กลนฺทปุตฺโต เวสาลิํ อนุปฺปตฺโต”ติ. เต อายสฺมโต สุทินฺนสฺส สฏฺฐิมตฺเต ถาลิปาเก ภตฺตาภิหารํ อภิหริํสุ. อถ โข อายสฺมา สุทินฺโน เต สฏฺฐิมตฺเต ถาลิปาเก ภิกฺขูนํ วิสฺสชฺเชตฺวา ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรมาทาย กลนฺทคามํ ปิณฺฑาย ปาวิสิ. กลนฺทคาเม สปทานํ ปิณฺฑาย จรมาโน เยน สกปิตุ นิเวสนํ เตนุปสงฺกมิ.
 </Paragraph>
 
 </Division>
 <Division number="31" book="para">
 
 <Paragraph number="54" book="para">
-เตน โข ปน สมเยน อายสฺมโต สุทินฺนสฺส ญาติทาสี อาภิโทสิกํ กุมฺมาสํ ฉฑฺเฑตุกามา โหติ. อถ โข อายสฺมา สุทินฺโน ตํ ญาติทาสึ เอตทโวจ—  “สเจ ตํ, ภคินิ, ฉฑฺฑนียธมฺมํ, อิธ เม ปตฺเต อากิรา”ติ. อถ โข อายสฺมโต สุทินฺนสฺส ญาติทาสี ตํ อาภิโทสิกํ กุมฺมาสํ อายสฺมโต สุทินฺนสฺส ปตฺเต อากิรนฺตี หตฺถานญฺจ ปาทานญฺจ สรสฺส จ นิมิตฺตํ อคฺคเหสิ. อถ โข อายสฺมโต สุทินฺนสฺส ญาติทาสี เยนายสฺมโต สุทินฺนสฺส มาตา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมโต สุทินฺนสฺส มาตรํ เอตทโวจ—  “ยคฺเฆเยฺย, ชาเนยฺยาสิ, อยฺยปุตฺโต สุทินฺโน อนุปฺปตฺโต”ติ. “สเจ, เช, ตฺวํ สจฺจํ ภณสิ, อทาสึ ตํ กโรมี”ติ.
+เตน โข ปน สมเยน อายสฺมโต สุทินฺนสฺส ญาติทาสี อาภิโทสิกํ กุมฺมาสํ ฉฑฺเฑตุกามา โหติ. อถ โข อายสฺมา สุทินฺโน ตํ ญาติทาสิํ เอตทโวจ—  “สเจ ตํ, ภคินิ, ฉฑฺฑนียธมฺมํ, อิธ เม ปตฺเต อากิรา”ติ. อถ โข อายสฺมโต สุทินฺนสฺส ญาติทาสี ตํ อาภิโทสิกํ กุมฺมาสํ อายสฺมโต สุทินฺนสฺส ปตฺเต อากิรนฺตี หตฺถานญฺจ ปาทานญฺจ สรสฺส จ นิมิตฺตํ อคฺคเหสิ. อถ โข อายสฺมโต สุทินฺนสฺส ญาติทาสี เยนายสฺมโต สุทินฺนสฺส มาตา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมโต สุทินฺนสฺส มาตรํ เอตทโวจ—  “ยคฺเฆเยฺย, ชาเนยฺยาสิ, อยฺยปุตฺโต สุทินฺโน อนุปฺปตฺโต”ติ. “สเจ, เช, ตฺวํ สจฺจํ ภณสิ, อทาสิํ ตํ กโรมี”ติ.
 </Paragraph>
 
 </Division>
@@ -105,7 +105,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="33" book="para">
 
 <Paragraph number="56" book="para">
-อถ โข อายสฺมโต สุทินฺนสฺส มาตา ตสฺสา รตฺติยา อจฺจเยน หริเตน โคมเยน ปถวึ โอปุญฺชาเปตฺวา เทฺว ปุญฺเช การาเปสิ—  เอกํ หิรญฺญสฺส, เอกํ สุวณฺณสฺส. ตาว มหนฺตา ปุญฺชา อเหสุํ, โอรโต ฐิโต ปุริโส ปารโต ฐิตํ ปุริสํ น ปสฺสติ; ปารโต ฐิโต ปุริโส โอรโต ฐิตํ ปุริสํ น ปสฺสติ. เต ปุญฺเช กิลญฺเชหิ ปฏิจฺฉาทาเปตฺวา มชฺเฌ อาสนํ ปญฺญาเปตฺวา ติโรกรณียํ ปริกฺขิปิตฺวา อายสฺมโต สุทินฺนสฺส ปุราณทุติยิกํ อามนฺเตสิ—  “เตน หิ, วธุ, เยน อลงฺกาเรน อลงฺกตา ปุตฺตสฺส เม สุทินฺนสฺส ปิยา อโหสิ มนาปา เตน อลงฺกาเรน อลงฺกรา”ติ. “เอวํ, อเยฺย”ติ, โข อายสฺมโต สุทินฺนสฺส ปุราณทุติยิกา อายสฺมโต สุทินฺนสฺส มาตุยา ปจฺจโสฺสสิ.
+อถ โข อายสฺมโต สุทินฺนสฺส มาตา ตสฺสา รตฺติยา อจฺจเยน หริเตน โคมเยน ปถวิํ โอปุญฺชาเปตฺวา เทฺว ปุญฺเช การาเปสิ—  เอกํ หิรญฺญสฺส, เอกํ สุวณฺณสฺส. ตาว มหนฺตา ปุญฺชา อเหสุํ, โอรโต ฐิโต ปุริโส ปารโต ฐิตํ ปุริสํ น ปสฺสติ; ปารโต ฐิโต ปุริโส โอรโต ฐิตํ ปุริสํ น ปสฺสติ. เต ปุญฺเช กิลญฺเชหิ ปฏิจฺฉาทาเปตฺวา มชฺเฌ อาสนํ ปญฺญาเปตฺวา ติโรกรณียํ ปริกฺขิปิตฺวา อายสฺมโต สุทินฺนสฺส ปุราณทุติยิกํ อามนฺเตสิ—  “เตน หิ, วธุ, เยน อลงฺกาเรน อลงฺกตา ปุตฺตสฺส เม สุทินฺนสฺส ปิยา อโหสิ มนาปา เตน อลงฺกาเรน อลงฺกรา”ติ. “เอวํ, อเยฺย”ติ, โข อายสฺมโต สุทินฺนสฺส ปุราณทุติยิกา อายสฺมโต สุทินฺนสฺส มาตุยา ปจฺจโสฺสสิ.
 </Paragraph>
 
 </Division>
@@ -123,7 +123,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="59" book="para">
-อถ โข อายสฺมา สุทินฺโน ปิตรํ เอตทโวจ—  “สเจ, คหปติ, โภชนํ ทาตพฺพํ เทถ, มา โน วิเหฐยิตฺถา”ติ. “ภุญฺช, ตาต สุทินฺนา”ติ. อถ โข อายสฺมโต สุทินฺนสฺส มาตา จ ปิตา จ อายสฺมนฺตํ สุทินฺนํ ปณีเตน ขาทนีเยน โภชนีเยน สหตฺถา สนฺตปฺเปสุํ สมฺปวาเรสุํ. อถ โข อายสฺมโต สุทินฺนสฺส มาตา อายสฺมนฺตํ สุทินฺนํ ภุตฺตาวึ โอนีตปตฺตปาณึ เอตทโวจ—  “อิทํ, ตาต สุทินฺน, กุลํ อฑฺฒํ มหทฺธนํ มหาโภคํ ปหูตชาตรูปรชตํ ปหูตวิตฺตูปกรณํ ปหูตธนธญฺญํ. ลพฺภา, ตาต สุทินฺน, หีนายาวตฺติตฺวา โภคา จ ภุญฺชิตุํ ปุญฺญานิ จ กาตุํ. เอหิ ตฺวํ, ตาต สุทินฺน, หีนายาวตฺติตฺวา โภเค จ ภุญฺชสฺสุ ปุญฺญานิ จ กโรหี”ติ. “อมฺม, น อุสฺสหามิ น วิสหามิ, อภิรโต อหํ พฺรหฺมจริยํ จรามี”ติ.
+อถ โข อายสฺมา สุทินฺโน ปิตรํ เอตทโวจ—  “สเจ, คหปติ, โภชนํ ทาตพฺพํ เทถ, มา โน วิเหฐยิตฺถา”ติ. “ภุญฺช, ตาต สุทินฺนา”ติ. อถ โข อายสฺมโต สุทินฺนสฺส มาตา จ ปิตา จ อายสฺมนฺตํ สุทินฺนํ ปณีเตน ขาทนีเยน โภชนีเยน สหตฺถา สนฺตปฺเปสุํ สมฺปวาเรสุํ. อถ โข อายสฺมโต สุทินฺนสฺส มาตา อายสฺมนฺตํ สุทินฺนํ ภุตฺตาวิํ โอนีตปตฺตปาณิํ เอตทโวจ—  “อิทํ, ตาต สุทินฺน, กุลํ อฑฺฒํ มหทฺธนํ มหาโภคํ ปหูตชาตรูปรชตํ ปหูตวิตฺตูปกรณํ ปหูตธนธญฺญํ. ลพฺภา, ตาต สุทินฺน, หีนายาวตฺติตฺวา โภคา จ ภุญฺชิตุํ ปุญฺญานิ จ กาตุํ. เอหิ ตฺวํ, ตาต สุทินฺน, หีนายาวตฺติตฺวา โภเค จ ภุญฺชสฺสุ ปุญฺญานิ จ กโรหี”ติ. “อมฺม, น อุสฺสหามิ น วิสหามิ, อภิรโต อหํ พฺรหฺมจริยํ จรามี”ติ.
 </Paragraph>
 
 <Paragraph number="60" book="para">
@@ -142,7 +142,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="63" book="para">
-ภุมฺมา เทวา สทฺทมนุสฺสาเวสุํ—  “นิรพฺพุโท วต โภ ภิกฺขุสํโฆ นิราทีนโว; สุทินฺเนน กลนฺทปุตฺเตน อพฺพุทํ อุปฺปาทิตํ, อาทีนโว อุปฺปาทิโต”ติ. ภุมฺมานํ เทวานํ สทฺทํ สุตฺวา จาตุมหาราชิกา เทวา สทฺทมนุสฺสาเวสุํ …เป…  ตาวตึสา เทวา…  ยามา เทวา…  ตุสิตา เทวา…  นิมฺมานรตี เทวา…  ปรนิมฺมิตวสวตฺตี เทวา…  พฺรหฺมกายิกา เทวา สทฺทมนุสฺสาเวสุํ—  “นิรพฺพุโท วต โภ ภิกฺขุสํโฆ นิราทีนโว; สุทินฺเนน กลนฺทปุตฺเตน อพฺพุทํ อุปฺปาทิตํ, อาทีนโว อุปฺปาทิโต”ติ. อิติห เตน ขเณน เตน มุหุตฺเตน ยาว พฺรหฺมโลกา สทฺโท อพฺภุคฺคจฺฉิ.
+ภุมฺมา เทวา สทฺทมนุสฺสาเวสุํ—  “นิรพฺพุโท วต โภ ภิกฺขุสํโฆ นิราทีนโว; สุทินฺเนน กลนฺทปุตฺเตน อพฺพุทํ อุปฺปาทิตํ, อาทีนโว อุปฺปาทิโต”ติ. ภุมฺมานํ เทวานํ สทฺทํ สุตฺวา จาตุมหาราชิกา เทวา สทฺทมนุสฺสาเวสุํ …เป…  ตาวติํสา เทวา…  ยามา เทวา…  ตุสิตา เทวา…  นิมฺมานรตี เทวา…  ปรนิมฺมิตวสวตฺตี เทวา…  พฺรหฺมกายิกา เทวา สทฺทมนุสฺสาเวสุํ—  “นิรพฺพุโท วต โภ ภิกฺขุสํโฆ นิราทีนโว; สุทินฺเนน กลนฺทปุตฺเตน อพฺพุทํ อุปฺปาทิตํ, อาทีนโว อุปฺปาทิโต”ติ. อิติห เตน ขเณน เตน มุหุตฺเตน ยาว พฺรหฺมโลกา สทฺโท อพฺภุคฺคจฺฉิ.
 </Paragraph>
 
 <Paragraph number="64" book="para">
@@ -153,7 +153,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="37" book="para">
 
 <Paragraph number="65" book="para">
-อถ โข อายสฺมโต สุทินฺนสฺส อหุเทว กุกฺกุจฺจํ, อหุ วิปฺปฏิสาโร—  “อลาภา วต เม, น วต เม ลาภา; ทุลฺลทฺธํ วต เม, น วต เม สุลทฺธํ; โยหํ เอวํ สฺวากฺขาเต ธมฺมวินเย ปพฺพชิตฺวา นาสกฺขึ ยาวชีวํ ปริปุณฺณํ ปริสุทฺธํ พฺรหฺมจริยํ จริตุนฺ”ติ. โส เตเนว กุกฺกุจฺเจน เตน วิปฺปฏิสาเรน กิโส อโหสิ ลูโข ทุพฺพณฺโณ อุปฺปณฺฑุปฺปณฺฑุกชาโต ธมนิสนฺถตคตฺโต อนฺโตมโน ลีนมโน ทุกฺขี ทุมฺมโน วิปฺปฏิสารี ปชฺฌายิ.
+อถ โข อายสฺมโต สุทินฺนสฺส อหุเทว กุกฺกุจฺจํ, อหุ วิปฺปฏิสาโร—  “อลาภา วต เม, น วต เม ลาภา; ทุลฺลทฺธํ วต เม, น วต เม สุลทฺธํ; โยหํ เอวํ สฺวากฺขาเต ธมฺมวินเย ปพฺพชิตฺวา นาสกฺขิํ ยาวชีวํ ปริปุณฺณํ ปริสุทฺธํ พฺรหฺมจริยํ จริตุนฺ”ติ. โส เตเนว กุกฺกุจฺเจน เตน วิปฺปฏิสาเรน กิโส อโหสิ ลูโข ทุพฺพณฺโณ อุปฺปณฺฑุปฺปณฺฑุกชาโต ธมนิสนฺถตคตฺโต อนฺโตมโน ลีนมโน ทุกฺขี ทุมฺมโน วิปฺปฏิสารี ปชฺฌายิ.
 </Paragraph>
 
 </Division>
@@ -164,7 +164,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="67" book="para">
-“น โข อหํ, อาวุโส, อนภิรโต พฺรหฺมจริยํ จรามิ. อตฺถิ เม ปาปกมฺมํ กตํ; ปุราณทุติยิกาย เมถุโน ธมฺโม ปฏิเสวิโต; ตสฺส มยฺหํ, อาวุโส, อหุเทว กุกฺกุจฺจํ อหุ วิปฺปฏิสาโร—  ‘อลาภา วต เม, น วต เม ลาภา; ทุลฺลทฺธํ วต เม, น วต เม สุลทฺธํ; โยหํ เอวํ สฺวากฺขาเต ธมฺมวินเย ปพฺพชิตฺวา นาสกฺขึ ยาวชีวํ ปริปุณฺณํ ปริสุทฺธํ พฺรหฺมจริยํ จริตุนฺ’”ติ.
+“น โข อหํ, อาวุโส, อนภิรโต พฺรหฺมจริยํ จรามิ. อตฺถิ เม ปาปกมฺมํ กตํ; ปุราณทุติยิกาย เมถุโน ธมฺโม ปฏิเสวิโต; ตสฺส มยฺหํ, อาวุโส, อหุเทว กุกฺกุจฺจํ อหุ วิปฺปฏิสาโร—  ‘อลาภา วต เม, น วต เม ลาภา; ทุลฺลทฺธํ วต เม, น วต เม สุลทฺธํ; โยหํ เอวํ สฺวากฺขาเต ธมฺมวินเย ปพฺพชิตฺวา นาสกฺขิํ ยาวชีวํ ปริปุณฺณํ ปริสุทฺธํ พฺรหฺมจริยํ จริตุนฺ’”ติ.
 </Paragraph>
 
 <Paragraph number="68" book="para">
@@ -175,15 +175,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="39" book="para">
 
 <Paragraph number="69" book="para">
-อถ โข เต ภิกฺขู อายสฺมนฺตํ สุทินฺนํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ สุทินฺนํ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, สุทินฺน, ปุราณทุติยิกาย เมถุนํ ธมฺมํ ปฏิเสวี”ติ? “สจฺจํ, ภควา”ติ.
+อถ โข เต ภิกฺขู อายสฺมนฺตํ สุทินฺนํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ สุทินฺนํ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, สุทินฺน, ปุราณทุติยิกาย เมถุนํ ธมฺมํ ปฏิเสวี”ติ? “สจฺจํ, ภควา”ติ.
 </Paragraph>
 
 <Paragraph number="70" book="para">
-วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริส, อนนุโลมิกํ อปฺปฏิรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตฺวํ, โมฆปุริส, เอวํ สฺวากฺขาเต ธมฺมวินเย ปพฺพชิตฺวา น สกฺขิสฺสสิ ยาวชีวํ ปริปุณฺณํ ปริสุทฺธํ พฺรหฺมจริยํ จริตุํ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน วิราคาย ธมฺโม เทสิโต, โน สราคาย; วิสํโยคาย ธมฺโม เทสิโต, โน สํโยคาย; อนุปาทานาย ธมฺโม เทสิโต, โน เสาปาทานาย. ตตฺถ นาม ตฺวํ, โมฆปุริส, มยา วิราคาย ธมฺเม เทสิเต สราคาย เจเตสฺสสิ, วิสํโยคาย ธมฺเม เทสิเต สํโยคาย เจเตสฺสสิ, อนุปาทานาย ธมฺเม เทสิเต เสาปาทานาย เจเตสฺสสิ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน ราควิราคาย ธมฺโม เทสิโต. มทนิมฺมทนาย ปิปาสวินยาย อาลยสมุคฺฆาตาย วฏฺฏุปจฺเฉทาย ตณฺหากฺขยาย วิราคาย นิโรธาย นิพฺพานาย ธมฺโม เทสิโต. นนุ มยา, โมฆปุริส, อเนกปริยาเยน กามานํ ปหานํ อกฺขาตํ, กามสญฺญานํ ปริญฺญา อกฺขาตา, กามปิปาสานํ ปฏิวินโย อกฺขาโต, กามวิตกฺกานํ สมุคฺฆาโต อกฺขาโต, กามปริฬาหานํ วูปสโม อกฺขาโต. วรํ เต, โมฆปุริส, อาสิวิสสฺส โฆรวิสสฺส มุเข องฺคชาตํ ปกฺขิตฺตํ, น เตฺวว มาตุคามสฺส องฺคชาเต องฺคชาตํ ปกฺขิตฺตํ. วรํ เต, โมฆปุริส, กณฺหสปฺปสฺส มุเข องฺคชาตํ ปกฺขิตฺตํ, น เตฺวว มาตุคามสฺส องฺคชาเต องฺคชาตํ ปกฺขิตฺตํ. วรํ เต, โมฆปุริส, องฺคารกาสุยา อาทิตฺตาย สมฺปชฺชลิตาย สโชติภูตาย องฺคชาตํ ปกฺขิตฺตํ, น เตฺวว มาตุคามสฺส องฺคชาเต องฺคชาตํ ปกฺขิตฺตํ. ตํ กิสฺส เหตุ? ตโตนิทานญฺหิ, โมฆปุริส, มรณํ วา นิคจฺเฉยฺย มรณมตฺตํ วา ทุกฺขํ, น เตฺวว ตปฺปจฺจยา กายสฺส เภทา ปรํ มรณา อปายํ ทุคฺคตึ วินิปาตํ นิรยํ อุปปชฺเชยฺย. อิโตนิทานญฺจ โข, โมฆปุริส, กายสฺส เภทา ปรํ มรณา อปายํ ทุคฺคตึ วินิปาตํ นิรยํ อุปปชฺเชยฺย. ตตฺถ นาม ตฺวํ, โมฆปุริส, ยํ ตฺวํ อสทฺธมฺมํ คามธมฺมํ วสลธมฺมํ ทุฏฺฐุลฺลํ โอทกนฺติกํ รหสฺสํ ทฺวยํทฺวยสมาปตฺตึ สมาปชฺชิสฺสสิ, พหูนํ โข ตฺวํ, โมฆปุริส, อกุสลานํ ธมฺมานํ อาทิกตฺตา ปุพฺพงฺคโม. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย, ปสนฺนานํ วา ภิโยฺยภาวาย; อถ เขฺวตํ, โมฆปุริส, อปฺปสนฺนานญฺเจว อปฺปสาทาย, ปสนฺนานญฺจ เอกจฺจานํ อญฺญถตฺตายา”ติ.
+วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริส, อนนุโลมิกํ อปฺปฏิรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตฺวํ, โมฆปุริส, เอวํ สฺวากฺขาเต ธมฺมวินเย ปพฺพชิตฺวา น สกฺขิสฺสสิ ยาวชีวํ ปริปุณฺณํ ปริสุทฺธํ พฺรหฺมจริยํ จริตุํ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน วิราคาย ธมฺโม เทสิโต, โน สราคาย; วิสํโยคาย ธมฺโม เทสิโต, โน สํโยคาย; อนุปาทานาย ธมฺโม เทสิโต, โน เสาปาทานาย. ตตฺถ นาม ตฺวํ, โมฆปุริส, มยา วิราคาย ธมฺเม เทสิเต สราคาย เจเตสฺสสิ, วิสํโยคาย ธมฺเม เทสิเต สํโยคาย เจเตสฺสสิ, อนุปาทานาย ธมฺเม เทสิเต เสาปาทานาย เจเตสฺสสิ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน ราควิราคาย ธมฺโม เทสิโต. มทนิมฺมทนาย ปิปาสวินยาย อาลยสมุคฺฆาตาย วฏฺฏุปจฺเฉทาย ตณฺหากฺขยาย วิราคาย นิโรธาย นิพฺพานาย ธมฺโม เทสิโต. นนุ มยา, โมฆปุริส, อเนกปริยาเยน กามานํ ปหานํ อกฺขาตํ, กามสญฺญานํ ปริญฺญา อกฺขาตา, กามปิปาสานํ ปฏิวินโย อกฺขาโต, กามวิตกฺกานํ สมุคฺฆาโต อกฺขาโต, กามปริฬาหานํ วูปสโม อกฺขาโต. วรํ เต, โมฆปุริส, อาสิวิสสฺส โฆรวิสสฺส มุเข องฺคชาตํ ปกฺขิตฺตํ, น เตฺวว มาตุคามสฺส องฺคชาเต องฺคชาตํ ปกฺขิตฺตํ. วรํ เต, โมฆปุริส, กณฺหสปฺปสฺส มุเข องฺคชาตํ ปกฺขิตฺตํ, น เตฺวว มาตุคามสฺส องฺคชาเต องฺคชาตํ ปกฺขิตฺตํ. วรํ เต, โมฆปุริส, องฺคารกาสุยา อาทิตฺตาย สมฺปชฺชลิตาย สโชติภูตาย องฺคชาตํ ปกฺขิตฺตํ, น เตฺวว มาตุคามสฺส องฺคชาเต องฺคชาตํ ปกฺขิตฺตํ. ตํ กิสฺส เหตุ? ตโตนิทานญฺหิ, โมฆปุริส, มรณํ วา นิคจฺเฉยฺย มรณมตฺตํ วา ทุกฺขํ, น เตฺวว ตปฺปจฺจยา กายสฺส เภทา ปรํ มรณา อปายํ ทุคฺคติํ วินิปาตํ นิรยํ อุปปชฺเชยฺย. อิโตนิทานญฺจ โข, โมฆปุริส, กายสฺส เภทา ปรํ มรณา อปายํ ทุคฺคติํ วินิปาตํ นิรยํ อุปปชฺเชยฺย. ตตฺถ นาม ตฺวํ, โมฆปุริส, ยํ ตฺวํ อสทฺธมฺมํ คามธมฺมํ วสลธมฺมํ ทุฏฺฐุลฺลํ โอทกนฺติกํ รหสฺสํ ทฺวยํทฺวยสมาปตฺติํ สมาปชฺชิสฺสสิ, พหูนํ โข ตฺวํ, โมฆปุริส, อกุสลานํ ธมฺมานํ อาทิกตฺตา ปุพฺพงฺคโม. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย, ปสนฺนานํ วา ภิโยฺยภาวาย; อถ เขฺวตํ, โมฆปุริส, อปฺปสนฺนานญฺเจว อปฺปสาทาย, ปสนฺนานญฺจ เอกจฺจานํ อญฺญถตฺตายา”ติ.
 </Paragraph>
 
 <Paragraph number="71" book="para">
-อถ โข ภควา อายสฺมนฺตํ สุทินฺนํ อเนกปริยาเยน วิครหิตฺวา ทุพฺภรตาย ทุปฺโปสตาย มหิจฺฉตาย อสนฺตุฏฺฐิตาย สงฺคณิกาย โกสชฺชสฺส อวณฺณํ ภาสิตฺวา อเนกปริยาเยน สุภรตาย สุโปสตาย อปฺปิจฺฉสฺส สนฺตุฏฺฐสฺส สเลฺลขสฺส ธุตสฺส ปาสาทิกสฺส อปจยสฺส วีริยารมฺภสฺส วณฺณํ ภาสิตฺวา ภิกฺขูนํ ตทนุจฺฉวิกํ ตทนุโลมิกํ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “เตน หิ, ภิกฺขเว, ภิกฺขูนํ สิกฺขาปทํ ปญฺญเปสฺสามิ ทส อตฺถวเส ปฏิจฺจ—  สํฆสุฏฺฐุตาย, สํฆผาสุตาย, ทุมฺมงฺกูนํ ปุคฺคลานํ นิคฺคหาย, เปสลานํ ภิกฺขูนํ ผาสุวิหาราย, ทิฏฺฐธมฺมิกานํ อาสวานํ สํวราย, สมฺปรายิกานํ อาสวานํ ปฏิฆาตาย, อปฺปสนฺนานํ ปสาทาย, ปสนฺนานํ ภิโยฺยภาวาย, สทฺธมฺมฏฺฐิติยา, วินยานุคฺคหาย. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข ภควา อายสฺมนฺตํ สุทินฺนํ อเนกปริยาเยน วิครหิตฺวา ทุพฺภรตาย ทุปฺโปสตาย มหิจฺฉตาย อสนฺตุฏฺฐิตาย สงฺคณิกาย โกสชฺชสฺส อวณฺณํ ภาสิตฺวา อเนกปริยาเยน สุภรตาย สุโปสตาย อปฺปิจฺฉสฺส สนฺตุฏฺฐสฺส สเลฺลขสฺส ธุตสฺส ปาสาทิกสฺส อปจยสฺส วีริยารมฺภสฺส วณฺณํ ภาสิตฺวา ภิกฺขูนํ ตทนุจฺฉวิกํ ตทนุโลมิกํ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “เตน หิ, ภิกฺขเว, ภิกฺขูนํ สิกฺขาปทํ ปญฺญเปสฺสามิ ทส อตฺถวเส ปฏิจฺจ—  สํฆสุฏฺฐุตาย, สํฆผาสุตาย, ทุมฺมงฺกูนํ ปุคฺคลานํ นิคฺคหาย, เปสลานํ ภิกฺขูนํ ผาสุวิหาราย, ทิฏฺฐธมฺมิกานํ อาสวานํ สํวราย, สมฺปรายิกานํ อาสวานํ ปฏิฆาตาย, อปฺปสนฺนานํ ปสาทาย, ปสนฺนานํ ภิโยฺยภาวาย, สทฺธมฺมฏฺฐิติยา, วินยานุคฺคหาย. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 </Paragraph>
 
 <Paragraph number="72" book="para">
