--- a/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-1/1-1-1-3.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-1/1-1-1-3.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="43" book="para">
 
 <Paragraph number="82" book="para">
-เตน โข ปน สมเยน สมฺพหุลา เวสาลิกา วชฺชิปุตฺตกา ภิกฺขู ยาวทตฺถํ ภุญฺชึสุ, ยาวทตฺถํ สุปึสุ, ยาวทตฺถํ นฺหายึสุ. ยาวทตฺถํ ภุญฺชิตฺวา ยาวทตฺถํ สุปิตฺวา ยาวทตฺถํ นฺหายิตฺวา อโยนิโส มนสิ กริตฺวา สิกฺขํ อปจฺจกฺขาย ทุพฺพลฺยํ อนาวิกตฺวา เมถุนํ ธมฺมํ ปฏิเสวึสุ. เต อปเรน สมเยน ญาติพฺยสเนนปิ ผุฏฺฐา โภคพฺยสเนนปิ ผุฏฺฐา โรคพฺยสเนนปิ ผุฏฺฐา อายสฺมนฺตํ อานนฺทํ อุปสงฺกมิตฺวา เอวํ วทนฺติ—  “น มยํ, ภนฺเต อานนฺท, พุทฺธครหิโน น ธมฺมครหิโน น สํฆครหิโน; อตฺตครหิโน มยํ, ภนฺเต อานนฺท, อนญฺญครหิโน. มยเมวมฺหา อลกฺขิกา มยํ อปฺปปุญฺญา, เย มยํ เอวํ สฺวากฺขาเต ธมฺมวินเย ปพฺพชิตฺวา นาสกฺขิมฺหา ยาวชีวํ ปริปุณฺณํ ปริสุทฺธํ พฺรหฺมจริยํ จริตุํ. อิทานิ เจปิ มยํ, ภนฺเต อานนฺท, ลเภยฺยาม ภควโต สนฺติเก ปพฺพชฺชํ ลเภยฺยาม อุปสมฺปทํ, อิทานิปิ มยํ วิปสฺสกา กุสลานํ ธมฺมานํ ปุพฺพรตฺตาปรรตฺตํ โพธิปกฺขิกานํ ธมฺมานํ ภาวนานุโยคมนุยุตฺตา วิหเรยฺยาม. สาธุ, ภนฺเต อานนฺท, ภควโต เอตมตฺถํ อาโรเจหี”ติ. “เอวมาวุโส”ติ โข อายสฺมา อานนฺโท เวสาลิกานํ วชฺชิปุตฺตกานํ ปฏิสฺสุณิตฺวา เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควโต เอตมตฺถํ อาโรเจสิ.
+เตน โข ปน สมเยน สมฺพหุลา เวสาลิกา วชฺชิปุตฺตกา ภิกฺขู ยาวทตฺถํ ภุญฺชิํสุ, ยาวทตฺถํ สุปิํสุ, ยาวทตฺถํ นฺหายิํสุ. ยาวทตฺถํ ภุญฺชิตฺวา ยาวทตฺถํ สุปิตฺวา ยาวทตฺถํ นฺหายิตฺวา อโยนิโส มนสิ กริตฺวา สิกฺขํ อปจฺจกฺขาย ทุพฺพลฺยํ อนาวิกตฺวา เมถุนํ ธมฺมํ ปฏิเสวิํสุ. เต อปเรน สมเยน ญาติพฺยสเนนปิ ผุฏฺฐา โภคพฺยสเนนปิ ผุฏฺฐา โรคพฺยสเนนปิ ผุฏฺฐา อายสฺมนฺตํ อานนฺทํ อุปสงฺกมิตฺวา เอวํ วทนฺติ—  “น มยํ, ภนฺเต อานนฺท, พุทฺธครหิโน น ธมฺมครหิโน น สํฆครหิโน; อตฺตครหิโน มยํ, ภนฺเต อานนฺท, อนญฺญครหิโน. มยเมวมฺหา อลกฺขิกา มยํ อปฺปปุญฺญา, เย มยํ เอวํ สฺวากฺขาเต ธมฺมวินเย ปพฺพชิตฺวา นาสกฺขิมฺหา ยาวชีวํ ปริปุณฺณํ ปริสุทฺธํ พฺรหฺมจริยํ จริตุํ. อิทานิ เจปิ มยํ, ภนฺเต อานนฺท, ลเภยฺยาม ภควโต สนฺติเก ปพฺพชฺชํ ลเภยฺยาม อุปสมฺปทํ, อิทานิปิ มยํ วิปสฺสกา กุสลานํ ธมฺมานํ ปุพฺพรตฺตาปรรตฺตํ โพธิปกฺขิกานํ ธมฺมานํ ภาวนานุโยคมนุยุตฺตา วิหเรยฺยาม. สาธุ, ภนฺเต อานนฺท, ภควโต เอตมตฺถํ อาโรเจหี”ติ. “เอวมาวุโส”ติ โข อายสฺมา อานนฺโท เวสาลิกานํ วชฺชิปุตฺตกานํ ปฏิสฺสุณิตฺวา เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควโต เอตมตฺถํ อาโรเจสิ.
 </Paragraph>
 
 <Paragraph number="83" book="para">
@@ -26,7 +26,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="84" book="para">
-อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “โย, ภิกฺขเว, สิกฺขํ อปจฺจกฺขาย ทุพฺพลฺยํ อนาวิกตฺวา เมถุนํ ธมฺมํ ปฏิเสวติ โส อาคโต น อุปสมฺปาเทตพฺโพ. โย จ โข, ภิกฺขเว, สิกฺขํ ปจฺจกฺขาย ทุพฺพลฺยํ อาวิกตฺวา เมถุนํ ธมฺมํ ปฏิเสวติ โส อาคโต อุปสมฺปาเทตพฺโพ. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “โย, ภิกฺขเว, สิกฺขํ อปจฺจกฺขาย ทุพฺพลฺยํ อนาวิกตฺวา เมถุนํ ธมฺมํ ปฏิเสวติ โส อาคโต น อุปสมฺปาเทตพฺโพ. โย จ โข, ภิกฺขเว, สิกฺขํ ปจฺจกฺขาย ทุพฺพลฺยํ อาวิกตฺวา เมถุนํ ธมฺมํ ปฏิเสวติ โส อาคโต อุปสมฺปาเทตพฺโพ. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 </Paragraph>
 
 </Division>
@@ -44,15 +44,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="87" book="para">
-<Emphasis>ภิกฺขู</Emphasis>ติ ภิกฺขโกติ ภิกฺขุ, ภิกฺขาจริยํ อชฺฌุปคโตติ ภิกฺขุ, ภินฺนปฏธโรติ ภิกฺขุ, สมญฺญาย ภิกฺขุ, ปฏิญฺญาย ภิกฺขุ, เอหิ ภิกฺขูติ ภิกฺขุ, ตีหิ สรณคมเนหิ อุปสมฺปนฺโนติ ภิกฺขุ, ภโทฺร ภิกฺขุ, สาโร ภิกฺขุ, เสโข ภิกฺขุ, อเสโข ภิกฺขุ, สมคฺเคน สํเฆน ญตฺติจตุตฺเถน กมฺเมน อกุปฺเปน ฐานารเหน อุปสมฺปนฺโนติ ภิกฺขุ. ตตฺร ยฺวายํ ภิกฺขุ สมคฺเคน สํเฆน ญตฺติจตุตฺเถน กมฺเมน อกุปฺเปน ฐานารเหน อุปสมฺปนฺโน, อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>ภิกฺขู</Emphasis>ติ ภิกฺขโกติ ภิกฺขุ, ภิกฺขาจริยํ อชฺฌุปคโตติ ภิกฺขุ, ภินฺนปฏธโรติ ภิกฺขุ, สมญฺญาย ภิกฺขุ, ปฏิญฺญาย ภิกฺขุ, เอหิ ภิกฺขูติ ภิกฺขุ, ตีหิ สรณคมเนหิ อุปสมฺปนฺโนติ ภิกฺขุ, ภโทฺร ภิกฺขุ, สาโร ภิกฺขุ, เสโข ภิกฺขุ, อเสโข ภิกฺขุ, สมคฺเคน สํเฆน ญตฺติจตุตฺเถน กมฺเมน อกุปฺเปน ฐานารเหน อุปสมฺปนฺโนติ ภิกฺขุ. ตตฺร ยฺวายํ ภิกฺขุ สมคฺเคน สํเฆน ญตฺติจตุตฺเถน กมฺเมน อกุปฺเปน ฐานารเหน อุปสมฺปนฺโน, อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="88" book="para">
-<Emphasis>สิกฺขา</Emphasis>ติ ติโสฺส สิกฺขา—  อธิสีลสิกฺขา, อธิจิตฺตสิกฺขา, อธิปญฺญาสิกฺขา. ตตฺร ยายํ อธิสีลสิกฺขา, อยํ อิมสฺมึ อตฺเถ อธิปฺเปตา สิกฺขาติ.
+<Emphasis>สิกฺขา</Emphasis>ติ ติโสฺส สิกฺขา—  อธิสีลสิกฺขา, อธิจิตฺตสิกฺขา, อธิปญฺญาสิกฺขา. ตตฺร ยายํ อธิสีลสิกฺขา, อยํ อิมสฺมิํ อตฺเถ อธิปฺเปตา สิกฺขาติ.
 </Paragraph>
 
 <Paragraph number="89" book="para">
-<Emphasis>สาชีวํ</Emphasis> นาม ยํ ภควตา ปญฺญตฺตํ สิกฺขาปทํ, เอตํ สาชีวํ นาม. ตสฺมึ สิกฺขติ, เตน วุจฺจติ สาชีวสมาปนฺโนติ.
+<Emphasis>สาชีวํ</Emphasis> นาม ยํ ภควตา ปญฺญตฺตํ สิกฺขาปทํ, เอตํ สาชีวํ นาม. ตสฺมิํ สิกฺขติ, เตน วุจฺจติ สาชีวสมาปนฺโนติ.
 </Paragraph>
 
 <Paragraph number="90" book="para">
@@ -64,7 +64,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="92" book="para">
-อถ วา ปน อุกฺกณฺฐิโต อนภิรโต สามญฺญา จวิตุกาโม ภิกฺขุภาวํ อฏฺฏียมาโน หรายมาโน ชิคุจฺฉมาโน คิหิภาวํ ปตฺถยมาโน …เป…  อสกฺยปุตฺติยภาวํ ปตฺถยมาโน—  “ยนฺนูนาหํ ธมฺมํ ปจฺจกฺเขยฺยนฺ”ติ วทติ วิญฺญาเปติ …เป…  “ยนฺนูนาหํ สํฆํ…  ยนฺนูนาหํ สิกฺขํ…  ยนฺนูนาหํ วินยํ…  ยนฺนูนาหํ ปาติโมกฺขํ…  ยนฺนูนาหํ อุทฺเทสํ…  ยนฺนูนาหํ อุปชฺฌายํ…  ยนฺนูนาหํ อาจริยํ…  ยนฺนูนาหํ สทฺธิวิหาริกํ…  ยนฺนูนาหํ อนฺเตวาสิกํ…  ยนฺนูนาหํ สมานุปชฺฌายกํ…  ยนฺนูนาหํ สมานาจริยกํ…  ยนฺนูนาหํ สพฺรหฺมจารึ ปจฺจกฺเขยฺยนฺ”ติ วทติ วิญฺญาเปติ. “ยนฺนูนาหํ คิหี อสฺสนฺ”ติ วทติ วิญฺญาเปติ. “ยนฺนูนาหํ อุปาสโก อสฺสนฺ”ติ…  “ยนฺนูนาหํ อารามิโก อสฺสนฺ”ติ…  “ยนฺนูนาหํ สามเณโร อสฺสนฺ”ติ…  “ยนฺนูนาหํ ติตฺถิโย อสฺสนฺ”ติ…  “ยนฺนูนาหํ ติตฺถิยสาวโก อสฺสนฺ”ติ…  “ยนฺนูนาหํ อสฺสมโณ อสฺสนฺ”ติ…  “ยนฺนูนาหํ อสกฺยปุตฺติโย อสฺสนฺ”ติ วทติ วิญฺญาเปติ. เอวมฺปิ, ภิกฺขเว, ทุพฺพลฺยาวิกมฺมญฺเจว โหติ สิกฺขา จ อปจฺจกฺขาตา.
+อถ วา ปน อุกฺกณฺฐิโต อนภิรโต สามญฺญา จวิตุกาโม ภิกฺขุภาวํ อฏฺฏียมาโน หรายมาโน ชิคุจฺฉมาโน คิหิภาวํ ปตฺถยมาโน …เป…  อสกฺยปุตฺติยภาวํ ปตฺถยมาโน—  “ยนฺนูนาหํ ธมฺมํ ปจฺจกฺเขยฺยนฺ”ติ วทติ วิญฺญาเปติ …เป…  “ยนฺนูนาหํ สํฆํ…  ยนฺนูนาหํ สิกฺขํ…  ยนฺนูนาหํ วินยํ…  ยนฺนูนาหํ ปาติโมกฺขํ…  ยนฺนูนาหํ อุทฺเทสํ…  ยนฺนูนาหํ อุปชฺฌายํ…  ยนฺนูนาหํ อาจริยํ…  ยนฺนูนาหํ สทฺธิวิหาริกํ…  ยนฺนูนาหํ อนฺเตวาสิกํ…  ยนฺนูนาหํ สมานุปชฺฌายกํ…  ยนฺนูนาหํ สมานาจริยกํ…  ยนฺนูนาหํ สพฺรหฺมจาริํ ปจฺจกฺเขยฺยนฺ”ติ วทติ วิญฺญาเปติ. “ยนฺนูนาหํ คิหี อสฺสนฺ”ติ วทติ วิญฺญาเปติ. “ยนฺนูนาหํ อุปาสโก อสฺสนฺ”ติ…  “ยนฺนูนาหํ อารามิโก อสฺสนฺ”ติ…  “ยนฺนูนาหํ สามเณโร อสฺสนฺ”ติ…  “ยนฺนูนาหํ ติตฺถิโย อสฺสนฺ”ติ…  “ยนฺนูนาหํ ติตฺถิยสาวโก อสฺสนฺ”ติ…  “ยนฺนูนาหํ อสฺสมโณ อสฺสนฺ”ติ…  “ยนฺนูนาหํ อสกฺยปุตฺติโย อสฺสนฺ”ติ วทติ วิญฺญาเปติ. เอวมฺปิ, ภิกฺขเว, ทุพฺพลฺยาวิกมฺมญฺเจว โหติ สิกฺขา จ อปจฺจกฺขาตา.
 </Paragraph>
 
 </Division>
@@ -78,7 +78,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="47" book="para">
 
 <Paragraph number="94" book="para">
-อถ วา ปน อุกฺกณฺฐิโต อนภิรโต สามญฺญา จวิตุกาโม ภิกฺขุภาวํ อฏฺฏียมาโน หรายมาโน ชิคุจฺฉมาโน คิหิภาวํ ปตฺถยมาโน …เป…  อสกฺยปุตฺติยภาวํ ปตฺถยมาโน “มาตรํ สรามี”ติ วทติ วิญฺญาเปติ…  “ปิตรํ สรามี”ติ วทติ วิญฺญาเปติ…  “ภาตรํ สรามี”ติ วทติ วิญฺญาเปติ…  “ภคินึ สรามี”ติ วทติ วิญฺญาเปติ…  “ปุตฺตํ สรามี”ติ วทติ วิญฺญาเปติ…  “ธีตรํ สรามี”ติ วทติ วิญฺญาเปติ…  “ปชาปตึ สรามี”ติ วทติ วิญฺญาเปติ…  “ญาตเก สรามี”ติ วทติ วิญฺญาเปติ…  “มิตฺเต สรามี”ติ วทติ วิญฺญาเปติ…  “คามํ สรามี”ติ วทติ วิญฺญาเปติ…  “นิคมํ สรามี”ติ วทติ วิญฺญาเปติ…  “เขตฺตํ สรามี”ติ วทติ วิญฺญาเปติ…  “วตฺถุํ สรามี”ติ วทติ วิญฺญาเปติ…  “หิรญฺญํ สรามี”ติ วทติ วิญฺญาเปติ…  “สุวณฺณํ สรามี”ติ วทติ วิญฺญาเปติ…  “สิปฺปํ สรามี”ติ วทติ วิญฺญาเปติ…  “ปุพฺเพ หสิตํ ลปิตํ กีฬิตํ สมนุสฺสรามี”ติ วทติ วิญฺญาเปติ. เอวมฺปิ, ภิกฺขเว, ทุพฺพลฺยาวิกมฺมญฺเจว โหติ สิกฺขา จ อปจฺจกฺขาตา.
+อถ วา ปน อุกฺกณฺฐิโต อนภิรโต สามญฺญา จวิตุกาโม ภิกฺขุภาวํ อฏฺฏียมาโน หรายมาโน ชิคุจฺฉมาโน คิหิภาวํ ปตฺถยมาโน …เป…  อสกฺยปุตฺติยภาวํ ปตฺถยมาโน “มาตรํ สรามี”ติ วทติ วิญฺญาเปติ…  “ปิตรํ สรามี”ติ วทติ วิญฺญาเปติ…  “ภาตรํ สรามี”ติ วทติ วิญฺญาเปติ…  “ภคินิํ สรามี”ติ วทติ วิญฺญาเปติ…  “ปุตฺตํ สรามี”ติ วทติ วิญฺญาเปติ…  “ธีตรํ สรามี”ติ วทติ วิญฺญาเปติ…  “ปชาปติํ สรามี”ติ วทติ วิญฺญาเปติ…  “ญาตเก สรามี”ติ วทติ วิญฺญาเปติ…  “มิตฺเต สรามี”ติ วทติ วิญฺญาเปติ…  “คามํ สรามี”ติ วทติ วิญฺญาเปติ…  “นิคมํ สรามี”ติ วทติ วิญฺญาเปติ…  “เขตฺตํ สรามี”ติ วทติ วิญฺญาเปติ…  “วตฺถุํ สรามี”ติ วทติ วิญฺญาเปติ…  “หิรญฺญํ สรามี”ติ วทติ วิญฺญาเปติ…  “สุวณฺณํ สรามี”ติ วทติ วิญฺญาเปติ…  “สิปฺปํ สรามี”ติ วทติ วิญฺญาเปติ…  “ปุพฺเพ หสิตํ ลปิตํ กีฬิตํ สมนุสฺสรามี”ติ วทติ วิญฺญาเปติ. เอวมฺปิ, ภิกฺขเว, ทุพฺพลฺยาวิกมฺมญฺเจว โหติ สิกฺขา จ อปจฺจกฺขาตา.
 </Paragraph>
 
 </Division>
@@ -110,14 +110,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="99" book="para">
-อถ วา ปน อุกฺกณฺฐิโต อนภิรโต สามญฺญา จวิตุกาโม ภิกฺขุภาวํ อฏฺฏียมาโน หรายมาโน ชิคุจฺฉมาโน คิหิภาวํ ปตฺถยมาโน …เป…  อสกฺยปุตฺติยภาวํ ปตฺถยมาโน—  “ธมฺมํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “สํฆํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “สิกฺขํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “วินยํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “ปาติโมกฺขํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “อุทฺเทสํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “อุปชฺฌายํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “อาจริยํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “สทฺธิวิหาริกํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “อนฺเตวาสิกํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “สมานุปชฺฌายกํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “สมานาจริยกํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “สพฺรหฺมจารึ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “คิหีติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “อุปาสโกติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “อารามิโกติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “สามเณโรติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “ติตฺถิโยติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “ติตฺถิยสาวโกติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “อสฺสมโณติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “อสกฺยปุตฺติโยติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ. เอวมฺปิ, ภิกฺขเว, ทุพฺพลฺยาวิกมฺมญฺเจว โหติ สิกฺขา จ ปจฺจกฺขาตา.
+อถ วา ปน อุกฺกณฺฐิโต อนภิรโต สามญฺญา จวิตุกาโม ภิกฺขุภาวํ อฏฺฏียมาโน หรายมาโน ชิคุจฺฉมาโน คิหิภาวํ ปตฺถยมาโน …เป…  อสกฺยปุตฺติยภาวํ ปตฺถยมาโน—  “ธมฺมํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “สํฆํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “สิกฺขํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “วินยํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “ปาติโมกฺขํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “อุทฺเทสํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “อุปชฺฌายํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “อาจริยํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “สทฺธิวิหาริกํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “อนฺเตวาสิกํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “สมานุปชฺฌายกํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “สมานาจริยกํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “สพฺรหฺมจาริํ ปจฺจกฺขามี”ติ วทติ วิญฺญาเปติ…  “คิหีติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “อุปาสโกติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “อารามิโกติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “สามเณโรติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “ติตฺถิโยติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “ติตฺถิยสาวโกติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “อสฺสมโณติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ…  “อสกฺยปุตฺติโยติ มํ ธาเรหี”ติ วทติ วิญฺญาเปติ. เอวมฺปิ, ภิกฺขเว, ทุพฺพลฺยาวิกมฺมญฺเจว โหติ สิกฺขา จ ปจฺจกฺขาตา.
 </Paragraph>
 
 </Division>
 <Division number="52" book="para">
 
 <Paragraph number="100" book="para">
-อถ วา ปน อุกฺกณฺฐิโต อนภิรโต สามญฺญา จวิตุกาโม ภิกฺขุภาวํ อฏฺฏียมาโน หรายมาโน ชิคุจฺฉมาโน คิหิภาวํ ปตฺถยมาโน …เป…  อสกฺยปุตฺติยภาวํ ปตฺถยมาโน—  “อลํ เม พุทฺเธนา”ติ วทติ วิญฺญาเปติ …เป…  “อลํ เม สพฺรหฺมจารีหี”ติ วทติ วิญฺญาเปติ. เอวมฺปิ …เป…  อถ วา ปน …เป…  “กึ นุ เม พุทฺเธนา”ติ วทติ วิญฺญาเปติ …เป…  “กึ นุ เม สพฺรหฺมจารีหี”ติ วทติ วิญฺญาเปติ…  “น มมตฺโถ พุทฺเธนา”ติ วทติ วิญฺญาเปติ …เป…  “น มมตฺโถ สพฺรหฺมจารีหี”ติ วทติ วิญฺญาเปติ…  “สุมุตฺตาหํ พุทฺเธนา”ติ วทติ วิญฺญาเปติ …เป…  “สุมุตฺตาหํ สพฺรหฺมจารีหี”ติ วทติ วิญฺญาเปติ. เอวมฺปิ, ภิกฺขเว, ทุพฺพลฺยาวิกมฺมญฺเจว โหติ สิกฺขา จ ปจฺจกฺขาตา.
+อถ วา ปน อุกฺกณฺฐิโต อนภิรโต สามญฺญา จวิตุกาโม ภิกฺขุภาวํ อฏฺฏียมาโน หรายมาโน ชิคุจฺฉมาโน คิหิภาวํ ปตฺถยมาโน …เป…  อสกฺยปุตฺติยภาวํ ปตฺถยมาโน—  “อลํ เม พุทฺเธนา”ติ วทติ วิญฺญาเปติ …เป…  “อลํ เม สพฺรหฺมจารีหี”ติ วทติ วิญฺญาเปติ. เอวมฺปิ …เป…  อถ วา ปน …เป…  “กิํ นุ เม พุทฺเธนา”ติ วทติ วิญฺญาเปติ …เป…  “กิํ นุ เม สพฺรหฺมจารีหี”ติ วทติ วิญฺญาเปติ…  “น มมตฺโถ พุทฺเธนา”ติ วทติ วิญฺญาเปติ …เป…  “น มมตฺโถ สพฺรหฺมจารีหี”ติ วทติ วิญฺญาเปติ…  “สุมุตฺตาหํ พุทฺเธนา”ติ วทติ วิญฺญาเปติ …เป…  “สุมุตฺตาหํ สพฺรหฺมจารีหี”ติ วทติ วิญฺญาเปติ. เอวมฺปิ, ภิกฺขเว, ทุพฺพลฺยาวิกมฺมญฺเจว โหติ สิกฺขา จ ปจฺจกฺขาตา.
 </Paragraph>
 
 </Division>
@@ -154,7 +154,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="107" book="para">
-<Emphasis>อสํวาโส</Emphasis>ติ สํวาโส นาม เอกกมฺมํ เอกุทฺเทโส สมสิกฺขตา—  เอโส สํวาโส นาม. โส เตน สทฺธึ นตฺถิ. เตน วุจฺจติ—  “อสํวาโส”ติ.
+<Emphasis>อสํวาโส</Emphasis>ติ สํวาโส นาม เอกกมฺมํ เอกุทฺเทโส สมสิกฺขตา—  เอโส สํวาโส นาม. โส เตน สทฺธิํ นตฺถิ. เตน วุจฺจติ—  “อสํวาโส”ติ.
 </Paragraph>
 
 </Division>
@@ -179,22 +179,22 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="58" book="para">
 
 <Paragraph number="111" book="para">
-ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถึ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส. ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถึ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ น สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส. ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถึ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ น สาทิยติ, ปวิฏฺฐํ น สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส. ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถึ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ น สาทิยติ, ปวิฏฺฐํ น สาทิยติ, ฐิตํ น สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส. ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถึ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ น สาทิยติ, ปวิฏฺฐํ น สาทิยติ, ฐิตํ น สาทิยติ, อุทฺธรณํ น สาทิยติ, อนาปตฺติ.
+ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถิํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส. ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถิํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ น สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส. ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถิํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ น สาทิยติ, ปวิฏฺฐํ น สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส. ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถิํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ น สาทิยติ, ปวิฏฺฐํ น สาทิยติ, ฐิตํ น สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส. ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถิํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ น สาทิยติ, ปวิฏฺฐํ น สาทิยติ, ฐิตํ น สาทิยติ, อุทฺธรณํ น สาทิยติ, อนาปตฺติ.
 </Paragraph>
 
 <Paragraph number="112" book="para">
-ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถึ ภิกฺขุสฺส สนฺติเก อาเนตฺวา ปสฺสาวมคฺเคน…  มุเขน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส …เป…  น สาทิยติ, อนาปตฺติ.
+ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถิํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา ปสฺสาวมคฺเคน…  มุเขน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส …เป…  น สาทิยติ, อนาปตฺติ.
 </Paragraph>
 
 </Division>
 <Division number="59" book="para">
 
 <Paragraph number="113" book="para">
-ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถึ ชาครนฺตึ…  สุตฺตํ…  มตฺตํ…  อุมฺมตฺตํ…  ปมตฺตํ…  มตํ อกฺขายิตํ…  มตํ เยภุเยฺยน อกฺขายิตํ …เป…  อาปตฺติ ปาราชิกสฺส. มตํ เยภุเยฺยน ขายิตํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน…  ปสฺสาวมคฺเคน…  มุเขน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ถุลฺลจฺจยสฺส …เป…  น สาทิยติ, อนาปตฺติ.
+ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถิํ ชาครนฺติํ…  สุตฺตํ…  มตฺตํ…  อุมฺมตฺตํ…  ปมตฺตํ…  มตํ อกฺขายิตํ…  มตํ เยภุเยฺยน อกฺขายิตํ …เป…  อาปตฺติ ปาราชิกสฺส. มตํ เยภุเยฺยน ขายิตํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน…  ปสฺสาวมคฺเคน…  มุเขน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ถุลฺลจฺจยสฺส …เป…  น สาทิยติ, อนาปตฺติ.
 </Paragraph>
 
 <Paragraph number="114" book="para">
-ภิกฺขุปจฺจตฺถิกา อมนุสฺสิตฺถึ…  ติรจฺฉานคติตฺถึ…  มนุสฺสุภโตพฺยญฺชนกํ…  อมนุสฺสุภโตพฺยญฺชนกํ…  ติรจฺฉานคตุภโตพฺยญฺชนกํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน…  ปสฺสาวมคฺเคน…  มุเขน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส …เป…  น สาทิยติ, อนาปตฺติ.
+ภิกฺขุปจฺจตฺถิกา อมนุสฺสิตฺถิํ…  ติรจฺฉานคติตฺถิํ…  มนุสฺสุภโตพฺยญฺชนกํ…  อมนุสฺสุภโตพฺยญฺชนกํ…  ติรจฺฉานคตุภโตพฺยญฺชนกํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน…  ปสฺสาวมคฺเคน…  มุเขน องฺคชาตํ อภินิสีเทนฺติ. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส …เป…  น สาทิยติ, อนาปตฺติ.
 </Paragraph>
 
 <Paragraph number="115" book="para">
@@ -224,15 +224,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="61" book="para">
 
 <Paragraph number="120" book="para">
-ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถึ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน…  ปสฺสาวมคฺเคน…  มุเขน องฺคชาตํ อภินิสีเทนฺติ สนฺถตาย อสนฺถตสฺส, อสนฺถตาย สนฺถตสฺส, สนฺถตาย สนฺถตสฺส, อสนฺถตาย อสนฺถตสฺส. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส …เป…  น สาทิยติ, อนาปตฺติ.
+ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถิํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน…  ปสฺสาวมคฺเคน…  มุเขน องฺคชาตํ อภินิสีเทนฺติ สนฺถตาย อสนฺถตสฺส, อสนฺถตาย สนฺถตสฺส, สนฺถตาย สนฺถตสฺส, อสนฺถตาย อสนฺถตสฺส. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส …เป…  น สาทิยติ, อนาปตฺติ.
 </Paragraph>
 
 <Paragraph number="121" book="para">
-ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถึ ชาครนฺตึ…  สุตฺตํ…  มตฺตํ…  อุมฺมตฺตํ…  ปมตฺตํ…  มตํ อกฺขายิตํ…  มตํ เยภุเยฺยน อกฺขายิตํ …เป…  อาปตฺติ ปาราชิกสฺส. มตํ เยภุเยฺยน ขายิตํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน…  ปสฺสาวมคฺเคน…  มุเขน องฺคชาตํ อภินิสีเทนฺติ, สนฺถตาย อสนฺถตสฺส, อสนฺถตาย สนฺถตสฺส, สนฺถตาย สนฺถตสฺส, อสนฺถตาย อสนฺถตสฺส. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ถุลฺลจฺจยสฺส …เป…  น สาทิยติ, อนาปตฺติ.
+ภิกฺขุปจฺจตฺถิกา มนุสฺสิตฺถิํ ชาครนฺติํ…  สุตฺตํ…  มตฺตํ…  อุมฺมตฺตํ…  ปมตฺตํ…  มตํ อกฺขายิตํ…  มตํ เยภุเยฺยน อกฺขายิตํ …เป…  อาปตฺติ ปาราชิกสฺส. มตํ เยภุเยฺยน ขายิตํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน…  ปสฺสาวมคฺเคน…  มุเขน องฺคชาตํ อภินิสีเทนฺติ, สนฺถตาย อสนฺถตสฺส, อสนฺถตาย สนฺถตสฺส, สนฺถตาย สนฺถตสฺส, อสนฺถตาย อสนฺถตสฺส. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ถุลฺลจฺจยสฺส …เป…  น สาทิยติ, อนาปตฺติ.
 </Paragraph>
 
 <Paragraph number="122" book="para">
-ภิกฺขุปจฺจตฺถิกา อมนุสฺสิตฺถึ…  ติรจฺฉานคติตฺถึ…  มนุสฺสุภโตพฺยญฺชนกํ…  อมนุสฺสุภโตพฺยญฺชนกํ…  ติรจฺฉานคตุภโตพฺยญฺชนกํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน…  ปสฺสาวมคฺเคน…  มุเขน องฺคชาตํ อภินิสีเทนฺติ สนฺถตสฺส อสนฺถตสฺส, อสนฺถตสฺส สนฺถตสฺส, สนฺถตสฺส สนฺถตสฺส, อสนฺถตสฺส อสนฺถตสฺส. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส …เป…  น สาทิยติ, อนาปตฺติ.
+ภิกฺขุปจฺจตฺถิกา อมนุสฺสิตฺถิํ…  ติรจฺฉานคติตฺถิํ…  มนุสฺสุภโตพฺยญฺชนกํ…  อมนุสฺสุภโตพฺยญฺชนกํ…  ติรจฺฉานคตุภโตพฺยญฺชนกํ ภิกฺขุสฺส สนฺติเก อาเนตฺวา วจฺจมคฺเคน…  ปสฺสาวมคฺเคน…  มุเขน องฺคชาตํ อภินิสีเทนฺติ สนฺถตสฺส อสนฺถตสฺส, อสนฺถตสฺส สนฺถตสฺส, สนฺถตสฺส สนฺถตสฺส, อสนฺถตสฺส อสนฺถตสฺส. โส เจ ปเวสนํ สาทิยติ, ปวิฏฺฐํ สาทิยติ, ฐิตํ สาทิยติ, อุทฺธรณํ สาทิยติ, อาปตฺติ ปาราชิกสฺส …เป…  น สาทิยติ, อนาปตฺติ.
 </Paragraph>
 
 <Paragraph number="123" book="para">
