--- a/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-2.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-2.mdx
@@ -19,7 +19,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="84" book="para">
 
 <Paragraph number="191" book="para">
-เตน สมเยน พุทฺโธ ภควา ราชคเห วิหรติ คิชฺฌกูเฏ ปพฺพเต. เตน โข ปน สมเยน สมฺพหุลา สนฺทิฏฺฐา สมฺภตฺตา ภิกฺขู อิสิคิลิปเสฺส ติณกุฏิโย กริตฺวา วสฺสํ อุปคจฺฉึสุ. อายสฺมาปิ ธนิโย กุมฺภการปุตฺโต ติณกุฏิกํ กริตฺวา วสฺสํ อุปคจฺฉิ. อถ โข เต ภิกฺขู วสฺสํวุฏฺฐา เตมาสจฺจเยน ติณกุฏิโย ภินฺทิตฺวา ติณญฺจ กฏฺฐญฺจ ปฏิสาเมตฺวา ชนปทจาริกํ ปกฺกมึสุ. อายสฺมา ปน ธนิโย กุมฺภการปุตฺโต ตตฺเถว วสฺสํ วสิ, ตตฺถ เหมนฺตํ, ตตฺถ คิมฺหํ. อถ โข อายสฺมโต ธนิยสฺส กุมฺภการปุตฺตสฺส คามํ ปิณฺฑาย ปวิฏฺฐสฺส ติณหาริโย กฏฺฐหาริโย ติณกุฏิกํ ภินฺทิตฺวา ติณญฺจ กฏฺฐญฺจ อาทาย อคมํสุ. ทุติยมฺปิ โข อายสฺมา ธนิโย กุมฺภการปุตฺโต ติณญฺจ กฏฺฐญฺจ สงฺกฑฺฒิตฺวา ติณกุฏิกํ อกาสิ. ทุติยมฺปิ โข อายสฺมโต ธนิยสฺส กุมฺภการปุตฺตสฺส คามํ ปิณฺฑาย ปวิฏฺฐสฺส ติณหาริโย กฏฺฐหาริโย ติณกุฏิกํ ภินฺทิตฺวา ติณญฺจ กฏฺฐญฺจ อาทาย อคมํสุ. ตติยมฺปิ โข อายสฺมา ธนิโย กุมฺภการปุตฺโต ติณญฺจ กฏฺฐญฺจ สงฺกฑฺฒิตฺวา ติณกุฏิกํ อกาสิ. ตติยมฺปิ โข อายสฺมโต ธนิยสฺส กุมฺภการปุตฺตสฺส คามํ ปิณฺฑาย ปวิฏฺฐสฺส ติณหาริโย กฏฺฐหาริโย ติณกุฏิกํ ภินฺทิตฺวา ติณญฺจ กฏฺฐญฺจ อาทาย อคมํสุ.
+เตน สมเยน พุทฺโธ ภควา ราชคเห วิหรติ คิชฺฌกูเฏ ปพฺพเต. เตน โข ปน สมเยน สมฺพหุลา สนฺทิฏฺฐา สมฺภตฺตา ภิกฺขู อิสิคิลิปเสฺส ติณกุฏิโย กริตฺวา วสฺสํ อุปคจฺฉิํสุ. อายสฺมาปิ ธนิโย กุมฺภการปุตฺโต ติณกุฏิกํ กริตฺวา วสฺสํ อุปคจฺฉิ. อถ โข เต ภิกฺขู วสฺสํวุฏฺฐา เตมาสจฺจเยน ติณกุฏิโย ภินฺทิตฺวา ติณญฺจ กฏฺฐญฺจ ปฏิสาเมตฺวา ชนปทจาริกํ ปกฺกมิํสุ. อายสฺมา ปน ธนิโย กุมฺภการปุตฺโต ตตฺเถว วสฺสํ วสิ, ตตฺถ เหมนฺตํ, ตตฺถ คิมฺหํ. อถ โข อายสฺมโต ธนิยสฺส กุมฺภการปุตฺตสฺส คามํ ปิณฺฑาย ปวิฏฺฐสฺส ติณหาริโย กฏฺฐหาริโย ติณกุฏิกํ ภินฺทิตฺวา ติณญฺจ กฏฺฐญฺจ อาทาย อคมํสุ. ทุติยมฺปิ โข อายสฺมา ธนิโย กุมฺภการปุตฺโต ติณญฺจ กฏฺฐญฺจ สงฺกฑฺฒิตฺวา ติณกุฏิกํ อกาสิ. ทุติยมฺปิ โข อายสฺมโต ธนิยสฺส กุมฺภการปุตฺตสฺส คามํ ปิณฺฑาย ปวิฏฺฐสฺส ติณหาริโย กฏฺฐหาริโย ติณกุฏิกํ ภินฺทิตฺวา ติณญฺจ กฏฺฐญฺจ อาทาย อคมํสุ. ตติยมฺปิ โข อายสฺมา ธนิโย กุมฺภการปุตฺโต ติณญฺจ กฏฺฐญฺจ สงฺกฑฺฒิตฺวา ติณกุฏิกํ อกาสิ. ตติยมฺปิ โข อายสฺมโต ธนิยสฺส กุมฺภการปุตฺตสฺส คามํ ปิณฺฑาย ปวิฏฺฐสฺส ติณหาริโย กฏฺฐหาริโย ติณกุฏิกํ ภินฺทิตฺวา ติณญฺจ กฏฺฐญฺจ อาทาย อคมํสุ.
 
 
 
@@ -43,7 +43,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="85" book="para">
 
 <Paragraph number="194" book="para">
-อถ โข ภควา สมฺพหุเลหิ ภิกฺขูหิ สทฺธึ คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทส ตํ กุฏิกํ อภิรูปํ ทสฺสนียํ ปาสาทิกํ โลหิติกํ. ทิสฺวาน ภิกฺขู อามนฺเตสิ—  “กึ เอตํ, ภิกฺขเว, อภิรูปํ ทสฺสนียํ ปาสาทิกํ โลหิติกํ, เสยฺยถาปิ อินฺทโคปโก”ติ? อถ โข เต ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, ภิกฺขเว, ตสฺส โมฆปุริสสฺส อนนุโลมิกํ อปฺปติรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม โส, ภิกฺขเว, โมฆปุริโส สพฺพมตฺติกามยํ กุฏิกํ กริสฺสติ. น หิ นาม, ภิกฺขเว, ตสฺส โมฆปุริสสฺส ปาเณสุ อนุทฺทยา อนุกมฺปา อวิเหสา ภวิสฺสติ. คจฺฉเถตํ, ภิกฺขเว, กุฏิกํ ภินฺทถ. มา ปจฺฉิมา ชนตา ปาเณสุ ปาตพฺยตํ อาปชฺชิ. น จ, ภิกฺขเว, สพฺพมตฺติกามยา กุฏิกา กาตพฺพา. โย กเรยฺย, อาปตฺติ ทุกฺกฏสฺสา”ติ. “เอวํ, ภนฺเต”ติ, โข เต ภิกฺขู ภควโต ปฏิสฺสุณิตฺวา เยน สา กุฏิกา เตนุปสงฺกมึสุ; อุปสงฺกมิตฺวา ตํ กุฏิกํ ภินฺทึสุ. อถ โข อายสฺมา ธนิโย กุมฺภการปุตฺโต เต ภิกฺขู เอตทโวจ—  “กิสฺส เม ตุเมฺห, อาวุโส, กุฏิกํ ภินฺทถา”ติ? “ภควา, อาวุโส, เภทาเปตี”ติ. “ภินฺทถาวุโส, สเจ ธมฺมสฺสามี เภทาเปตี”ติ.
+อถ โข ภควา สมฺพหุเลหิ ภิกฺขูหิ สทฺธิํ คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทส ตํ กุฏิกํ อภิรูปํ ทสฺสนียํ ปาสาทิกํ โลหิติกํ. ทิสฺวาน ภิกฺขู อามนฺเตสิ—  “กิํ เอตํ, ภิกฺขเว, อภิรูปํ ทสฺสนียํ ปาสาทิกํ โลหิติกํ, เสยฺยถาปิ อินฺทโคปโก”ติ? อถ โข เต ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, ภิกฺขเว, ตสฺส โมฆปุริสสฺส อนนุโลมิกํ อปฺปติรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม โส, ภิกฺขเว, โมฆปุริโส สพฺพมตฺติกามยํ กุฏิกํ กริสฺสติ. น หิ นาม, ภิกฺขเว, ตสฺส โมฆปุริสสฺส ปาเณสุ อนุทฺทยา อนุกมฺปา อวิเหสา ภวิสฺสติ. คจฺฉเถตํ, ภิกฺขเว, กุฏิกํ ภินฺทถ. มา ปจฺฉิมา ชนตา ปาเณสุ ปาตพฺยตํ อาปชฺชิ. น จ, ภิกฺขเว, สพฺพมตฺติกามยา กุฏิกา กาตพฺพา. โย กเรยฺย, อาปตฺติ ทุกฺกฏสฺสา”ติ. “เอวํ, ภนฺเต”ติ, โข เต ภิกฺขู ภควโต ปฏิสฺสุณิตฺวา เยน สา กุฏิกา เตนุปสงฺกมิํสุ; อุปสงฺกมิตฺวา ตํ กุฏิกํ ภินฺทิํสุ. อถ โข อายสฺมา ธนิโย กุมฺภการปุตฺโต เต ภิกฺขู เอตทโวจ—  “กิสฺส เม ตุเมฺห, อาวุโส, กุฏิกํ ภินฺทถา”ติ? “ภควา, อาวุโส, เภทาเปตี”ติ. “ภินฺทถาวุโส, สเจ ธมฺมสฺสามี เภทาเปตี”ติ.
 
 
 
@@ -101,14 +101,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="88" book="para">
 
 <Paragraph number="201" book="para">
-อถ โข อายสฺมา ธนิโย กุมฺภการปุตฺโต เยน รญฺโญ มาคธสฺส เสนิยสฺส พิมฺพิสารสฺส นิเวสนํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปญฺญตฺเต อาสเน นิสีทิ. อถ โข ราชา มาคโธ เสนิโย พิมฺพิสาโร เยนายสฺมา ธนิโย กุมฺภการปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ ธนิยํ กุมฺภการปุตฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺโน โข ราชา มาคโธ เสนิโย พิมฺพิสาโร อายสฺมนฺตํ ธนิยํ กุมฺภการปุตฺตํ เอตทโวจ—  “สจฺจํ กิร มยา, ภนฺเต, เทวคหทารูนิ นครปฏิสงฺขาริกานิ อาปทตฺถาย นิกฺขิตฺตานิ อยฺยสฺส ทินฺนานี”ติ? “เอวํ, มหาราชา”ติ. “มยํ โข, ภนฺเต, ราชาโน นาม พหุกิจฺจา พหุกรณียา, ทตฺวาปิ น สเรยฺยาม; อิงฺฆ, ภนฺเต, สราเปหี”ติ. “สรสิ ตฺวํ, มหาราช, ปฐมาภิสิตฺโต เอวรูปึ วาจํ ภาสิตา—  ‘ทินฺนญฺเญว สมณพฺราหฺมณานํ ติณกฏฺโฐทกํ ปริภุญฺชนฺตู’”ติ. “สรามหํ, ภนฺเต. สนฺติ, ภนฺเต, สมณพฺราหฺมณา ลชฺชิโน กุกฺกุจฺจกา สิกฺขากามา. เตสํ อปฺปมตฺตเกปิ กุกฺกุจฺจํ อุปฺปชฺชติ. เตสํ มยา สนฺธาย ภาสิตํ, ตญฺจ โข อรญฺเญ อปริคฺคหิตํ. โส ตฺวํ, ภนฺเต, เตน เลเสน ทารูนิ อทินฺนํ หริตุํ มญฺญสิ. กถญฺหิ นาม มาทิโส สมณํ วา พฺราหฺมณํ วา วิชิเต วสนฺตํ หเนยฺย วา พนฺเธยฺย วา ปพฺพาเชยฺย วา. คจฺฉ, ภนฺเต, โลเมน ตฺวํ มุตฺโตสิ. มาสฺสุ ปุนปิ เอวรูปํ อกาสี”ติ.
+อถ โข อายสฺมา ธนิโย กุมฺภการปุตฺโต เยน รญฺโญ มาคธสฺส เสนิยสฺส พิมฺพิสารสฺส นิเวสนํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปญฺญตฺเต อาสเน นิสีทิ. อถ โข ราชา มาคโธ เสนิโย พิมฺพิสาโร เยนายสฺมา ธนิโย กุมฺภการปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ ธนิยํ กุมฺภการปุตฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺโน โข ราชา มาคโธ เสนิโย พิมฺพิสาโร อายสฺมนฺตํ ธนิยํ กุมฺภการปุตฺตํ เอตทโวจ—  “สจฺจํ กิร มยา, ภนฺเต, เทวคหทารูนิ นครปฏิสงฺขาริกานิ อาปทตฺถาย นิกฺขิตฺตานิ อยฺยสฺส ทินฺนานี”ติ? “เอวํ, มหาราชา”ติ. “มยํ โข, ภนฺเต, ราชาโน นาม พหุกิจฺจา พหุกรณียา, ทตฺวาปิ น สเรยฺยาม; อิงฺฆ, ภนฺเต, สราเปหี”ติ. “สรสิ ตฺวํ, มหาราช, ปฐมาภิสิตฺโต เอวรูปิํ วาจํ ภาสิตา—  ‘ทินฺนญฺเญว สมณพฺราหฺมณานํ ติณกฏฺโฐทกํ ปริภุญฺชนฺตู’”ติ. “สรามหํ, ภนฺเต. สนฺติ, ภนฺเต, สมณพฺราหฺมณา ลชฺชิโน กุกฺกุจฺจกา สิกฺขากามา. เตสํ อปฺปมตฺตเกปิ กุกฺกุจฺจํ อุปฺปชฺชติ. เตสํ มยา สนฺธาย ภาสิตํ, ตญฺจ โข อรญฺเญ อปริคฺคหิตํ. โส ตฺวํ, ภนฺเต, เตน เลเสน ทารูนิ อทินฺนํ หริตุํ มญฺญสิ. กถญฺหิ นาม มาทิโส สมณํ วา พฺราหฺมณํ วา วิชิเต วสนฺตํ หเนยฺย วา พนฺเธยฺย วา ปพฺพาเชยฺย วา. คจฺฉ, ภนฺเต, โลเมน ตฺวํ มุตฺโตสิ. มาสฺสุ ปุนปิ เอวรูปํ อกาสี”ติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="202" book="para">
-มนุสฺสา อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “อลชฺชิโน อิเม สมณา สกฺยปุตฺติยา ทุสฺสีลา มุสาวาทิโน. อิเม หิ นาม ธมฺมจาริโน สมจาริโน พฺราหฺมจาริโน สจฺจวาทิโน สีลวนฺโต กลฺยาณธมฺมา ปฏิชานิสฺสนฺติ. นตฺถิ อิเมสํ สามญฺญํ, นตฺถิ อิเมสํ พฺรหฺมญฺญํ. นฏฺฐํ อิเมสํ สามญฺญํ, นฏฺฐํ อิเมสํ พฺรหฺมญฺญํ. กุโต อิเมสํ สามญฺญํ, กุโต อิเมสํ พฺรหฺมญฺญํ. อปคตา อิเม สามญฺญา, อปคตา อิเม พฺรหฺมญฺญา. ราชานมฺปิ อิเม วญฺเจนฺติ, กึ ปนญฺเญ มนุเสฺส”ติ.
+มนุสฺสา อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “อลชฺชิโน อิเม สมณา สกฺยปุตฺติยา ทุสฺสีลา มุสาวาทิโน. อิเม หิ นาม ธมฺมจาริโน สมจาริโน พฺราหฺมจาริโน สจฺจวาทิโน สีลวนฺโต กลฺยาณธมฺมา ปฏิชานิสฺสนฺติ. นตฺถิ อิเมสํ สามญฺญํ, นตฺถิ อิเมสํ พฺรหฺมญฺญํ. นฏฺฐํ อิเมสํ สามญฺญํ, นฏฺฐํ อิเมสํ พฺรหฺมญฺญํ. กุโต อิเมสํ สามญฺญํ, กุโต อิเมสํ พฺรหฺมญฺญํ. อปคตา อิเม สามญฺญา, อปคตา อิเม พฺรหฺมญฺญา. ราชานมฺปิ อิเม วญฺเจนฺติ, กิํ ปนญฺเญ มนุเสฺส”ติ.
 
 
 
@@ -122,7 +122,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="204" book="para">
-อถ โข เต ภิกฺขู อายสฺมนฺตํ ธนิยํ กุมฺภการปุตฺตํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ ธนิยํ กุมฺภการปุตฺตํ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, ธนิย, รญฺโญ ทารูนิ อทินฺนํ อาทิยี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริส, อนนุโลมิกํ อปฺปติรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตฺวํ, โมฆปุริส, รญฺโญ ทารูนิ อทินฺนํ อาทิยิสฺสสิ. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย ปสนฺนานํ วา ภิโยฺยภาวาย; อถ เขฺวตํ, โมฆปุริส, อปฺปสนฺนานญฺเจว อปฺปสาทาย ปสนฺนานญฺจ เอกจฺจานํ อญฺญถตฺตายา”ติ.
+อถ โข เต ภิกฺขู อายสฺมนฺตํ ธนิยํ กุมฺภการปุตฺตํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ ธนิยํ กุมฺภการปุตฺตํ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, ธนิย, รญฺโญ ทารูนิ อทินฺนํ อาทิยี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริส, อนนุโลมิกํ อปฺปติรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตฺวํ, โมฆปุริส, รญฺโญ ทารูนิ อทินฺนํ อาทิยิสฺสสิ. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย ปสนฺนานํ วา ภิโยฺยภาวาย; อถ เขฺวตํ, โมฆปุริส, อปฺปสนฺนานญฺเจว อปฺปสาทาย ปสนฺนานญฺจ เอกจฺจานํ อญฺญถตฺตายา”ติ.
 
 
 
@@ -163,7 +163,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="209" book="para">
-อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา ฉพฺพคฺคิเย ภิกฺขู ปฏิปุจฺฉิ—  “สจฺจํ กิร ตุเมฺห, ภิกฺขเว, รชกตฺถรณํ คนฺตฺวา รชกภณฺฑิกํ อวหริตฺถา”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริสา, อนนุโลมิกํ อปฺปฏิรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตุเมฺห, โมฆปุริสา, รชกภณฺฑิกํ อวหริสฺสถ. เนตํ, โมฆปุริสา, อปฺปสนฺนานํ วา ปสาทาย ปสนฺนานํ วา ภิโยฺยภาวาย; อถ เขฺวตํ, โมฆปุริสา, อปฺปสนฺนานญฺเจว อปฺปสาทาย ปสนฺนานญฺจ เอกจฺจานํ อญฺญถตฺตายา”ติ. อถ โข ภควา ฉพฺพคฺคิเย ภิกฺขู อเนกปริยาเยน วิครหิตฺวา ทุพฺภรตาย …เป…  วีริยารมฺภสฺส วณฺณํ ภาสิตฺวา ภิกฺขูนํ ตทนุจฺฉวิกํ ตทนุโลมิกํ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา ฉพฺพคฺคิเย ภิกฺขู ปฏิปุจฺฉิ—  “สจฺจํ กิร ตุเมฺห, ภิกฺขเว, รชกตฺถรณํ คนฺตฺวา รชกภณฺฑิกํ อวหริตฺถา”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริสา, อนนุโลมิกํ อปฺปฏิรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตุเมฺห, โมฆปุริสา, รชกภณฺฑิกํ อวหริสฺสถ. เนตํ, โมฆปุริสา, อปฺปสนฺนานํ วา ปสาทาย ปสนฺนานํ วา ภิโยฺยภาวาย; อถ เขฺวตํ, โมฆปุริสา, อปฺปสนฺนานญฺเจว อปฺปสาทาย ปสนฺนานญฺจ เอกจฺจานํ อญฺญถตฺตายา”ติ. อถ โข ภควา ฉพฺพคฺคิเย ภิกฺขู อเนกปริยาเยน วิครหิตฺวา ทุพฺภรตาย …เป…  วีริยารมฺภสฺส วณฺณํ ภาสิตฺวา ภิกฺขูนํ ตทนุจฺฉวิกํ ตทนุโลมิกํ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 
 
 
@@ -183,7 +183,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="92" book="para">
 
 <Paragraph number="211" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 
 
 
@@ -260,7 +260,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="222" book="para">
-<Emphasis>พนฺเธยฺยุํ วา</Emphasis>ติ รชฺชุพนฺธเนน วา อนฺทุพนฺธเนน วา สงฺขลิกพนฺธเนน วา ฆรพนฺธเนน วา นครพนฺธเนน วา คามพนฺธเนน วา นิคมพนฺธเนน วา พนฺเธยฺยุํ, ปุริสคุตฺตึ วา กเรยฺยุํ.
+<Emphasis>พนฺเธยฺยุํ วา</Emphasis>ติ รชฺชุพนฺธเนน วา อนฺทุพนฺธเนน วา สงฺขลิกพนฺธเนน วา ฆรพนฺธเนน วา นครพนฺธเนน วา คามพนฺธเนน วา นิคมพนฺธเนน วา พนฺเธยฺยุํ, ปุริสคุตฺติํ วา กเรยฺยุํ.
 
 
 
@@ -309,7 +309,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="229" book="para">
-<Emphasis>อสํวาโส</Emphasis>ติ สํวาโส นาม เอกกมฺมํ เอกุทฺเทโส สมสิกฺขตา. เอโส สํวาโส นาม. โส เตน สทฺธึ นตฺถิ. เตน วุจฺจติ—  “อสํวาโส”ติ.
+<Emphasis>อสํวาโส</Emphasis>ติ สํวาโส นาม เอกกมฺมํ เอกุทฺเทโส สมสิกฺขตา. เอโส สํวาโส นาม. โส เตน สทฺธิํ นตฺถิ. เตน วุจฺจติ—  “อสํวาโส”ติ.
 
 
 
@@ -329,7 +329,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="94" book="para">
 
 <Paragraph number="231" book="para">
-<Emphasis>ภูมฏฺฐํ</Emphasis> นาม ภณฺฑํ ภูมิยํ นิกฺขิตฺตํ โหติ นิขาตํ ปฏิจฺฉนฺนํ. ภูมฏฺฐํ ภณฺฑํ อวหริสฺสามีติ เถยฺยจิตฺโต ทุติยํ วา ปริเยสติ กุทาลํ วา ปิฏกํ วา ปริเยสติ คจฺฉติ วา, อาปตฺติ ทุกฺกฏสฺส. ตตฺถ ชาตกํ กฏฺฐํ วา ลตํ วา ฉินฺทติ, อาปตฺติ ทุกฺกฏสฺส. ตตฺถ ปํสุํ ขณติ วา พฺยูหติ วา อุทฺธรติ วา, อาปตฺติ ทุกฺกฏสฺส. กุมฺภึ อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. อตฺตโน ภาชนํ ปเวเสตฺวา ปญฺจมาสกํ วา อติเรกปญฺจมาสกํ วา อคฺฆนกํ เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. อตฺตโน ภาชนคตํ วา กโรติ มุฏฺฐึ วา ฉินฺทติ, อาปตฺติ ปาราชิกสฺส. สุตฺตารุฬฺหํ ภณฺฑํ ปามงฺคํ วา กณฺฐสุตฺตกํ วา กฏิสุตฺตกํ วา สาฏกํ วา เวฐนํ วา เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. โกฏิยํ คเหตฺวา อุจฺจาเรติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฆํสนฺโต นีหรติ, อาปตฺติ ถุลฺลจฺจยสฺส. อนฺตมโส เกสคฺคมตฺตมฺปิ กุมฺภิมุขา โมเจติ, อาปตฺติ ปาราชิกสฺส. สปฺปึ วา เตลํ วา มธุํ วา ผาณิตํ วา ปญฺจมาสกํ วา อติเรกปญฺจมาสกํ วา อคฺฆนกํ เถยฺยจิตฺโต เอเกน ปโยเคน ปิวติ, อาปตฺติ ปาราชิกสฺส. ตตฺเถว ภินฺทติ วา ฉฑฺเฑติ วา ฌาเปติ วา อปริโภคํ วา กโรติ, อาปตฺติ ทุกฺกฏสฺส.
+<Emphasis>ภูมฏฺฐํ</Emphasis> นาม ภณฺฑํ ภูมิยํ นิกฺขิตฺตํ โหติ นิขาตํ ปฏิจฺฉนฺนํ. ภูมฏฺฐํ ภณฺฑํ อวหริสฺสามีติ เถยฺยจิตฺโต ทุติยํ วา ปริเยสติ กุทาลํ วา ปิฏกํ วา ปริเยสติ คจฺฉติ วา, อาปตฺติ ทุกฺกฏสฺส. ตตฺถ ชาตกํ กฏฺฐํ วา ลตํ วา ฉินฺทติ, อาปตฺติ ทุกฺกฏสฺส. ตตฺถ ปํสุํ ขณติ วา พฺยูหติ วา อุทฺธรติ วา, อาปตฺติ ทุกฺกฏสฺส. กุมฺภิํ อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. อตฺตโน ภาชนํ ปเวเสตฺวา ปญฺจมาสกํ วา อติเรกปญฺจมาสกํ วา อคฺฆนกํ เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. อตฺตโน ภาชนคตํ วา กโรติ มุฏฺฐิํ วา ฉินฺทติ, อาปตฺติ ปาราชิกสฺส. สุตฺตารุฬฺหํ ภณฺฑํ ปามงฺคํ วา กณฺฐสุตฺตกํ วา กฏิสุตฺตกํ วา สาฏกํ วา เวฐนํ วา เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. โกฏิยํ คเหตฺวา อุจฺจาเรติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฆํสนฺโต นีหรติ, อาปตฺติ ถุลฺลจฺจยสฺส. อนฺตมโส เกสคฺคมตฺตมฺปิ กุมฺภิมุขา โมเจติ, อาปตฺติ ปาราชิกสฺส. สปฺปิํ วา เตลํ วา มธุํ วา ผาณิตํ วา ปญฺจมาสกํ วา อติเรกปญฺจมาสกํ วา อคฺฆนกํ เถยฺยจิตฺโต เอเกน ปโยเคน ปิวติ, อาปตฺติ ปาราชิกสฺส. ตตฺเถว ภินฺทติ วา ฉฑฺเฑติ วา ฌาเปติ วา อปริโภคํ วา กโรติ, อาปตฺติ ทุกฺกฏสฺส.
 
 
 
@@ -399,7 +399,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="101" book="para">
 
 <Paragraph number="238" book="para">
-<Emphasis>ภาโร</Emphasis> นาม สีสภาโร ขนฺธภาโร กฏิภาโร โอลมฺพโก. สีเส ภารํ เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ขนฺธํ โอโรเปติ, อาปตฺติ ปาราชิกสฺส. ขนฺเธ ภารํ เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. กฏึ โอโรเปติ, อาปตฺติ ปาราชิกสฺส. กฏิยา ภารํ เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. หตฺเถน คณฺหาติ, อาปตฺติ ปาราชิกสฺส. หตฺเถ ภารํ เถยฺยจิตฺโต ภูมิยํ นิกฺขิปติ, อาปตฺติ ปาราชิกสฺส. เถยฺยจิตฺโต ภูมิโต คณฺหาติ, อาปตฺติ ปาราชิกสฺส.
+<Emphasis>ภาโร</Emphasis> นาม สีสภาโร ขนฺธภาโร กฏิภาโร โอลมฺพโก. สีเส ภารํ เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ขนฺธํ โอโรเปติ, อาปตฺติ ปาราชิกสฺส. ขนฺเธ ภารํ เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. กฏิํ โอโรเปติ, อาปตฺติ ปาราชิกสฺส. กฏิยา ภารํ เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. หตฺเถน คณฺหาติ, อาปตฺติ ปาราชิกสฺส. หตฺเถ ภารํ เถยฺยจิตฺโต ภูมิยํ นิกฺขิปติ, อาปตฺติ ปาราชิกสฺส. เถยฺยจิตฺโต ภูมิโต คณฺหาติ, อาปตฺติ ปาราชิกสฺส.
 
 
 
@@ -409,7 +409,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="102" book="para">
 
 <Paragraph number="239" book="para">
-<Emphasis>อาราโม</Emphasis> นาม ปุปฺผาราโม ผลาราโม. <Emphasis>อารามฏฺฐํ</Emphasis> นาม ภณฺฑํ อาราเม จตูหิ ฐาเนหิ นิกฺขิตฺตํ โหติ—  ภูมฏฺฐํ ถลฏฺฐํ, อากาสฏฺฐํ, เวหาสฏฺฐํ. อารามฏฺฐํ ภณฺฑํ อวหริสฺสามีติ เถยฺยจิตฺโต ทุติยํ วา ปริเยสติ คจฺฉติ วา, อาปตฺติ ทุกฺกฏสฺส. อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. ตตฺถ ชาตกํ มูลํ วา ตจํ วา ปตฺตํ วา ปุปฺผํ วา ผลํ วา ปญฺจมาสกํ วา อติเรกปญฺจมาสกํ วา อคฺฆนกํ เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. อารามํ อภิยุญฺชติ, อาปตฺติ ทุกฺกฏสฺส. สามิกสฺส วิมตึ อุปฺปาเทติ, อาปตฺติ ถุลฺลจฺจยสฺส. สามิโก น มยฺหํ ภวิสฺสตีติ ธุรํ นิกฺขิปติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต สามิกํ ปราเชติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต ปรชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส.
+<Emphasis>อาราโม</Emphasis> นาม ปุปฺผาราโม ผลาราโม. <Emphasis>อารามฏฺฐํ</Emphasis> นาม ภณฺฑํ อาราเม จตูหิ ฐาเนหิ นิกฺขิตฺตํ โหติ—  ภูมฏฺฐํ ถลฏฺฐํ, อากาสฏฺฐํ, เวหาสฏฺฐํ. อารามฏฺฐํ ภณฺฑํ อวหริสฺสามีติ เถยฺยจิตฺโต ทุติยํ วา ปริเยสติ คจฺฉติ วา, อาปตฺติ ทุกฺกฏสฺส. อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. ตตฺถ ชาตกํ มูลํ วา ตจํ วา ปตฺตํ วา ปุปฺผํ วา ผลํ วา ปญฺจมาสกํ วา อติเรกปญฺจมาสกํ วา อคฺฆนกํ เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. อารามํ อภิยุญฺชติ, อาปตฺติ ทุกฺกฏสฺส. สามิกสฺส วิมติํ อุปฺปาเทติ, อาปตฺติ ถุลฺลจฺจยสฺส. สามิโก น มยฺหํ ภวิสฺสตีติ ธุรํ นิกฺขิปติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต สามิกํ ปราเชติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต ปรชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส.
 
 
 
@@ -419,7 +419,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="103" book="para">
 
 <Paragraph number="240" book="para">
-<Emphasis>วิหารฏฺฐํ</Emphasis> นาม ภณฺฑํ วิหาเร จตูหิ ฐาเนหิ นิกฺขิตฺตํ โหติ—  ภูมฏฺฐํ, ถลฏฺฐํ, อากาสฏฺฐํ, เวหาสฏฺฐํ. วิหารฏฺฐํ ภณฺฑํ อวหริสฺสามีติ เถยฺยจิตฺโต ทุติยํ วา ปริเยสติ คจฺฉติ วา, อาปตฺติ ทุกฺกฏสฺส. อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. วิหารํ อภิยุญฺชติ, อาปตฺติ ทุกฺกฏสฺส. สามิกสฺส วิมตึ อุปฺปาเทติ, อาปตฺติ ถุลฺลจฺจยสฺส. สามิโก น มยฺหํ ภวิสฺสตีติ ธุรํ นิกฺขิปติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต สามิกํ ปราเชติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต ปรชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส.
+<Emphasis>วิหารฏฺฐํ</Emphasis> นาม ภณฺฑํ วิหาเร จตูหิ ฐาเนหิ นิกฺขิตฺตํ โหติ—  ภูมฏฺฐํ, ถลฏฺฐํ, อากาสฏฺฐํ, เวหาสฏฺฐํ. วิหารฏฺฐํ ภณฺฑํ อวหริสฺสามีติ เถยฺยจิตฺโต ทุติยํ วา ปริเยสติ คจฺฉติ วา, อาปตฺติ ทุกฺกฏสฺส. อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. วิหารํ อภิยุญฺชติ, อาปตฺติ ทุกฺกฏสฺส. สามิกสฺส วิมติํ อุปฺปาเทติ, อาปตฺติ ถุลฺลจฺจยสฺส. สามิโก น มยฺหํ ภวิสฺสตีติ ธุรํ นิกฺขิปติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต สามิกํ ปราเชติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต ปรชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส.
 
 
 
@@ -429,7 +429,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="104" book="para">
 
 <Paragraph number="241" book="para">
-<Emphasis>เขตฺตํ</Emphasis> นาม ยตฺถ ปุพฺพณฺณํ วา อปรณฺณํ วา ชายติ. <Emphasis>เขตฺตฏฺฐํ</Emphasis> นาม ภณฺฑํ เขตฺเต จตูหิ ฐาเนหิ นิกฺขิตฺตํ โหติ—  ภูมฏฺฐํ, ถลฏฺฐํ, อากาสฏฺฐํ, เวหาสฏฺฐํ. เขตฺตฏฺฐํ ภณฺฑํ อวหริสฺสามีติ เถยฺยจิตฺโต ทุติยํ วา ปริเยสติ คจฺฉติ วา, อาปตฺติ, ทุกฺกฏสฺส. อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. ตตฺถ ชาตกํ ปุพฺพณฺณํ วา อปรณฺณํ วา ปญฺจมาสกํ วา อติเรกปญฺจมาสกํ วา อคฺฆนกํ เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. เขตฺตํ อภิยุญฺชติ, อาปตฺติ ทุกฺกฏสฺส. สามิกสฺส วิมตึ อุปฺปาเทติ, อาปตฺติ ถุลฺลจฺจยสฺส. สามิโก น มยฺหํ ภวิสฺสตีติ ธุรํ นิกฺขิปติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต สามิกํ ปราเชติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต ปรชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส. ขีลํ วา รชฺชุํ วา วตึ วา มริยาทํ วา สงฺกาเมติ, อาปตฺติ ทุกฺกฏสฺส. เอกํ ปโยคํ อนาคเต, อาปตฺติ ถุลฺลจฺจยสฺส. ตสฺมึ ปโยเค อาคเต, อาปตฺติ ปาราชิกสฺส.
+<Emphasis>เขตฺตํ</Emphasis> นาม ยตฺถ ปุพฺพณฺณํ วา อปรณฺณํ วา ชายติ. <Emphasis>เขตฺตฏฺฐํ</Emphasis> นาม ภณฺฑํ เขตฺเต จตูหิ ฐาเนหิ นิกฺขิตฺตํ โหติ—  ภูมฏฺฐํ, ถลฏฺฐํ, อากาสฏฺฐํ, เวหาสฏฺฐํ. เขตฺตฏฺฐํ ภณฺฑํ อวหริสฺสามีติ เถยฺยจิตฺโต ทุติยํ วา ปริเยสติ คจฺฉติ วา, อาปตฺติ, ทุกฺกฏสฺส. อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. ตตฺถ ชาตกํ ปุพฺพณฺณํ วา อปรณฺณํ วา ปญฺจมาสกํ วา อติเรกปญฺจมาสกํ วา อคฺฆนกํ เถยฺยจิตฺโต อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. เขตฺตํ อภิยุญฺชติ, อาปตฺติ ทุกฺกฏสฺส. สามิกสฺส วิมติํ อุปฺปาเทติ, อาปตฺติ ถุลฺลจฺจยสฺส. สามิโก น มยฺหํ ภวิสฺสตีติ ธุรํ นิกฺขิปติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต สามิกํ ปราเชติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต ปรชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส. ขีลํ วา รชฺชุํ วา วติํ วา มริยาทํ วา สงฺกาเมติ, อาปตฺติ ทุกฺกฏสฺส. เอกํ ปโยคํ อนาคเต, อาปตฺติ ถุลฺลจฺจยสฺส. ตสฺมิํ ปโยเค อาคเต, อาปตฺติ ปาราชิกสฺส.
 
 
 
@@ -439,7 +439,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="105" book="para">
 
 <Paragraph number="242" book="para">
-<Emphasis>วตฺถุ</Emphasis> นาม อารามวตฺถุ วิหารวตฺถุ. <Emphasis>วตฺถุฏฺฐํ</Emphasis> นาม ภณฺฑํ วตฺถุสฺมึ จตูหิ ฐาเนหิ นิกฺขิตฺตํ โหติ—  ภูมฏฺฐํ, ถลฏฺฐํ, อากาสฏฺฐํ, เวหาสฏฺฐํ. วตฺถุฏฺฐํ ภณฺฑํ อวหริสฺสามีติ เถยฺยจิตฺโต ทุติยํ วา ปริเยสติ คจฺฉติ วา, อาปตฺติ ทุกฺกฏสฺส. อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. วตฺถุํ อภิยุญฺชติ, อาปตฺติ ทุกฺกฏสฺส. สามิกสฺส วิมตึ อุปฺปาเทติ, อาปตฺติ ถุลฺลจฺจยสฺส. สามิโก น มยฺหํ ภวิสฺสตีติ ธุรํ นิกฺขิปติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต สามิกํ ปราเชติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต ปรชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส. ขีลํ วา รชฺชุํ วา วตึ วา ปาการํ วา สงฺกาเมติ, อาปตฺติ ทุกฺกฏสฺส. เอกํ ปโยคํ อนาคเต อาปตฺติ ถุลฺลจฺจยสฺส. ตสฺมึ ปโยเค อาคเต อาปตฺติ ปาราชิกสฺส.
+<Emphasis>วตฺถุ</Emphasis> นาม อารามวตฺถุ วิหารวตฺถุ. <Emphasis>วตฺถุฏฺฐํ</Emphasis> นาม ภณฺฑํ วตฺถุสฺมิํ จตูหิ ฐาเนหิ นิกฺขิตฺตํ โหติ—  ภูมฏฺฐํ, ถลฏฺฐํ, อากาสฏฺฐํ, เวหาสฏฺฐํ. วตฺถุฏฺฐํ ภณฺฑํ อวหริสฺสามีติ เถยฺยจิตฺโต ทุติยํ วา ปริเยสติ คจฺฉติ วา, อาปตฺติ ทุกฺกฏสฺส. อามสติ, อาปตฺติ ทุกฺกฏสฺส. ผนฺทาเปติ, อาปตฺติ ถุลฺลจฺจยสฺส. ฐานา จาเวติ, อาปตฺติ ปาราชิกสฺส. วตฺถุํ อภิยุญฺชติ, อาปตฺติ ทุกฺกฏสฺส. สามิกสฺส วิมติํ อุปฺปาเทติ, อาปตฺติ ถุลฺลจฺจยสฺส. สามิโก น มยฺหํ ภวิสฺสตีติ ธุรํ นิกฺขิปติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต สามิกํ ปราเชติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต ปรชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส. ขีลํ วา รชฺชุํ วา วติํ วา ปาการํ วา สงฺกาเมติ, อาปตฺติ ทุกฺกฏสฺส. เอกํ ปโยคํ อนาคเต อาปตฺติ ถุลฺลจฺจยสฺส. ตสฺมิํ ปโยเค อาคเต อาปตฺติ ปาราชิกสฺส.
 
 
 
@@ -489,7 +489,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="110" book="para">
 
 <Paragraph number="247" book="para">
-<Emphasis>วนปฺปติ</Emphasis> นาม โย มนุสฺสานํ ปริคฺคหิโต โหติ รุกฺโข ปริโภโค. เถยฺยจิตฺโต ฉินฺทติ, ปหาเร ปหาเร อาปตฺติ ทุกฺกฏสฺส. เอกํ ปหารํ อนาคเต, อาปตฺติ ถุลฺลจฺจยสฺส. ตสฺมึ ปหาเร อาคเต, อาปตฺติ ปาราชิกสฺส.
+<Emphasis>วนปฺปติ</Emphasis> นาม โย มนุสฺสานํ ปริคฺคหิโต โหติ รุกฺโข ปริโภโค. เถยฺยจิตฺโต ฉินฺทติ, ปหาเร ปหาเร อาปตฺติ ทุกฺกฏสฺส. เอกํ ปหารํ อนาคเต, อาปตฺติ ถุลฺลจฺจยสฺส. ตสฺมิํ ปหาเร อาคเต, อาปตฺติ ปาราชิกสฺส.
 
 
 
@@ -509,7 +509,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="112" book="para">
 
 <Paragraph number="249" book="para">
-<Emphasis>อุปนิธิ</Emphasis> นาม อุปนิกฺขิตฺตํ ภณฺฑํ. เทหิ เม ภณฺฑนฺติ วุจฺจมาโน นาหํ คณฺหามีติ ภณติ, อาปตฺติ ทุกฺกฏสฺส. สามิกสฺส วิมตึ อุปฺปาเทติ, อาปตฺติ ถุลฺลจฺจยสฺส. สามิโก น มยฺหํ ทสฺสตีติ ธุรํ นิกฺขิปติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต สามิกํ ปราเชติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต ปรชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส.
+<Emphasis>อุปนิธิ</Emphasis> นาม อุปนิกฺขิตฺตํ ภณฺฑํ. เทหิ เม ภณฺฑนฺติ วุจฺจมาโน นาหํ คณฺหามีติ ภณติ, อาปตฺติ ทุกฺกฏสฺส. สามิกสฺส วิมติํ อุปฺปาเทติ, อาปตฺติ ถุลฺลจฺจยสฺส. สามิโก น มยฺหํ ทสฺสตีติ ธุรํ นิกฺขิปติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต สามิกํ ปราเชติ, อาปตฺติ ปาราชิกสฺส. ธมฺมํ จรนฺโต ปรชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส.
 
 
 
@@ -600,7 +600,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="119" book="para">
 
 <Paragraph number="259" book="para">
-<Emphasis>สงฺเกตกมฺมํ</Emphasis> นาม สงฺเกตํ กโรติ—  “ปุเรภตฺตํ วา ปจฺฉาภตฺตํ วา รตฺตึ วา ทิวา วา เตน สงฺเกเตน ตํ ภณฺฑํ อวหรา”ติ, อาปตฺติ ทุกฺกฏสฺส. เตน สงฺเกเตน ตํ ภณฺฑํ อวหรติ, อาปตฺติ อุภินฺนํ ปาราชิกสฺส. ตํ สงฺเกตํ ปุเร วา ปจฺฉา วา ตํ ภณฺฑํ อวหรติ, มูลฏฺฐสฺส อนาปตฺติ. อวหารกสฺส อาปตฺติ ปาราชิกสฺส.
+<Emphasis>สงฺเกตกมฺมํ</Emphasis> นาม สงฺเกตํ กโรติ—  “ปุเรภตฺตํ วา ปจฺฉาภตฺตํ วา รตฺติํ วา ทิวา วา เตน สงฺเกเตน ตํ ภณฺฑํ อวหรา”ติ, อาปตฺติ ทุกฺกฏสฺส. เตน สงฺเกเตน ตํ ภณฺฑํ อวหรติ, อาปตฺติ อุภินฺนํ ปาราชิกสฺส. ตํ สงฺเกตํ ปุเร วา ปจฺฉา วา ตํ ภณฺฑํ อวหรติ, มูลฏฺฐสฺส อนาปตฺติ. อวหารกสฺส อาปตฺติ ปาราชิกสฺส.
 
 
 
@@ -610,7 +610,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="120" book="para">
 
 <Paragraph number="260" book="para">
-<Emphasis>นิมิตฺตกมฺมํ</Emphasis> นาม นิมิตฺตํ กโรติ. อกฺขึ วา นิขณิสฺสามิ ภมุกํ วา อุกฺขิปิสฺสามิ สีสํ วา อุกฺขิปิสฺสามิ, เตน นิมิตฺเตน ตํ ภณฺฑํ อวหราติ, อาปตฺติ ทุกฺกฏสฺส. เตน นิมิตฺเตน ตํ ภณฺฑํ อวหรติ, อาปตฺติ อุภินฺนํ ปาราชิกสฺส. ตํ นิมิตฺตํ ปุเร วา ปจฺฉา วา ตํ ภณฺฑํ อวหรติ, มูลฏฺฐสฺส อนาปตฺติ. อวหารกสฺส อาปตฺติ ปาราชิกสฺส.
+<Emphasis>นิมิตฺตกมฺมํ</Emphasis> นาม นิมิตฺตํ กโรติ. อกฺขิํ วา นิขณิสฺสามิ ภมุกํ วา อุกฺขิปิสฺสามิ สีสํ วา อุกฺขิปิสฺสามิ, เตน นิมิตฺเตน ตํ ภณฺฑํ อวหราติ, อาปตฺติ ทุกฺกฏสฺส. เตน นิมิตฺเตน ตํ ภณฺฑํ อวหรติ, อาปตฺติ อุภินฺนํ ปาราชิกสฺส. ตํ นิมิตฺตํ ปุเร วา ปจฺฉา วา ตํ ภณฺฑํ อวหรติ, มูลฏฺฐสฺส อนาปตฺติ. อวหารกสฺส อาปตฺติ ปาราชิกสฺส.
 
 
 
