--- a/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-3.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-3.mdx
@@ -33,7 +33,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="378" book="para">
-ภิกฺขู—  “ภควา โข อเนกปริยาเยน อสุภกถํ กเถติ, อสุภาย วณฺณํ ภาสติ, อสุภภาวนาย วณฺณํ ภาสติ, อาทิสฺส อาทิสฺส อสุภสมาปตฺติยา วณฺณํ ภาสตี”ติ, เต อเนกาการโวการํ อสุภภาวนานุโยคมนุยุตฺตา วิหรนฺติ. เต สเกน กาเยน อฏฺฏียนฺติ หรายนฺติ ชิคุจฺฉนฺติ. เสยฺยถาปิ นาม อิตฺถี วา ปุริโส วา ทหโร ยุวา มณฺฑนกชาติโก สีสํนฺหาโต อหิกุณเปน วา กุกฺกุรกุณเปน วา มนุสฺสกุณเปน วา กณฺเฐ อาสตฺเตน อฏฺฏีเยยฺย หราเยยฺย ชิคุจฺเฉยฺย; เอวเมว เต ภิกฺขู สเกน กาเยน อฏฺฏียนฺตา หรายนฺตา ชิคุจฺฉนฺตา อตฺตนาปิ อตฺตานํ ชีวิตา โวโรเปนฺติ, อญฺญมญฺญมฺปิ ชีวิตา โวโรเปนฺติ, มิคลณฺฑิกมฺปิ สมณกุตฺตกํ อุปสงฺกมิตฺวา เอวํ วทนฺติ—  “สาธุ โน, อาวุโส, ชีวิตา โวโรเปหิ. อิทํ เต ปตฺตจีวรํ ภวิสฺสตี”ติ. อถ โข มิคลณฺฑิโก สมณกุตฺตโก ปตฺตจีวเรหิ ภโฏ สมฺพหุเล ภิกฺขู ชีวิตา โวโรเปตฺวา โลหิตกํ อสึ อาทาย เยน วคฺคุมุทา นที เตนุปสงฺกมิ.
+ภิกฺขู—  “ภควา โข อเนกปริยาเยน อสุภกถํ กเถติ, อสุภาย วณฺณํ ภาสติ, อสุภภาวนาย วณฺณํ ภาสติ, อาทิสฺส อาทิสฺส อสุภสมาปตฺติยา วณฺณํ ภาสตี”ติ, เต อเนกาการโวการํ อสุภภาวนานุโยคมนุยุตฺตา วิหรนฺติ. เต สเกน กาเยน อฏฺฏียนฺติ หรายนฺติ ชิคุจฺฉนฺติ. เสยฺยถาปิ นาม อิตฺถี วา ปุริโส วา ทหโร ยุวา มณฺฑนกชาติโก สีสํนฺหาโต อหิกุณเปน วา กุกฺกุรกุณเปน วา มนุสฺสกุณเปน วา กณฺเฐ อาสตฺเตน อฏฺฏีเยยฺย หราเยยฺย ชิคุจฺเฉยฺย; เอวเมว เต ภิกฺขู สเกน กาเยน อฏฺฏียนฺตา หรายนฺตา ชิคุจฺฉนฺตา อตฺตนาปิ อตฺตานํ ชีวิตา โวโรเปนฺติ, อญฺญมญฺญมฺปิ ชีวิตา โวโรเปนฺติ, มิคลณฺฑิกมฺปิ สมณกุตฺตกํ อุปสงฺกมิตฺวา เอวํ วทนฺติ—  “สาธุ โน, อาวุโส, ชีวิตา โวโรเปหิ. อิทํ เต ปตฺตจีวรํ ภวิสฺสตี”ติ. อถ โข มิคลณฺฑิโก สมณกุตฺตโก ปตฺตจีวเรหิ ภโฏ สมฺพหุเล ภิกฺขู ชีวิตา โวโรเปตฺวา โลหิตกํ อสิํ อาทาย เยน วคฺคุมุทา นที เตนุปสงฺกมิ.
 
 
 
@@ -43,21 +43,21 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="163" book="para">
 
 <Paragraph number="379" book="para">
-อถ โข มิคลณฺฑิกสฺส สมณกุตฺตกสฺส โลหิตกํ ตํ อสึ โธวนฺตสฺส อหุเทว กุกฺกุจฺจํ อหุ วิปฺปฏิสาโร—  “อลาภา วต เม, น วต เม ลาภา; ทุลฺลทฺธํ วต เม, น วต เม สุลทฺธํ. พหุํ วต มยา อปุญฺญํ ปสุตํ, โยหํ ภิกฺขู สีลวนฺเต กลฺยาณธมฺเม ชีวิตา โวโรเปสินฺ”ติ. อถ โข อญฺญตรา มารกายิกา เทวตา อภิชฺชมาเน อุทเก อาคนฺตฺวา มิคลณฺฑิกํ สมณกุตฺตกํ เอตทโวจ—  “สาธุ สาธุ, สปฺปุริส, ลาภา เต, สปฺปุริส, สุลทฺธํ เต, สปฺปุริส. พหุํ ตยา, สปฺปุริส, ปุญฺญํ ปสุตํ, ยํ ตฺวํ อติณฺเณ ตาเรสี”ติ.
+อถ โข มิคลณฺฑิกสฺส สมณกุตฺตกสฺส โลหิตกํ ตํ อสิํ โธวนฺตสฺส อหุเทว กุกฺกุจฺจํ อหุ วิปฺปฏิสาโร—  “อลาภา วต เม, น วต เม ลาภา; ทุลฺลทฺธํ วต เม, น วต เม สุลทฺธํ. พหุํ วต มยา อปุญฺญํ ปสุตํ, โยหํ ภิกฺขู สีลวนฺเต กลฺยาณธมฺเม ชีวิตา โวโรเปสินฺ”ติ. อถ โข อญฺญตรา มารกายิกา เทวตา อภิชฺชมาเน อุทเก อาคนฺตฺวา มิคลณฺฑิกํ สมณกุตฺตกํ เอตทโวจ—  “สาธุ สาธุ, สปฺปุริส, ลาภา เต, สปฺปุริส, สุลทฺธํ เต, สปฺปุริส. พหุํ ตยา, สปฺปุริส, ปุญฺญํ ปสุตํ, ยํ ตฺวํ อติณฺเณ ตาเรสี”ติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="380" book="para">
-อถ โข มิคลณฺฑิโก สมณกุตฺตโก—  “ลาภา กิร เม, สุลทฺธํ กิร เม, พหุํ กิร มยา ปุญฺญํ ปสุตํ, อติณฺเณ กิราหํ ตาเรมี”ติ, ติณฺหํ อสึ อาทาย วิหาเรน วิหารํ ปริเวเณน ปริเวณํ อุปสงฺกมิตฺวา เอวํ วเทติ—  “โก อติณฺโณ, กํ ตาเรมี”ติ? ตตฺถ เย เต ภิกฺขู อวีตราคา เตสํ ตสฺมึ สมเย โหติเยว ภยํ โหติ ฉมฺภิตตฺตํ โหติ โลมหํโส. เย ปน เต ภิกฺขู วีตราคา เตสํ ตสฺมึ สมเย น โหติ ภยํ น โหติ ฉมฺภิตตฺตํ น โหติ โลมหํโส.
+อถ โข มิคลณฺฑิโก สมณกุตฺตโก—  “ลาภา กิร เม, สุลทฺธํ กิร เม, พหุํ กิร มยา ปุญฺญํ ปสุตํ, อติณฺเณ กิราหํ ตาเรมี”ติ, ติณฺหํ อสิํ อาทาย วิหาเรน วิหารํ ปริเวเณน ปริเวณํ อุปสงฺกมิตฺวา เอวํ วเทติ—  “โก อติณฺโณ, กํ ตาเรมี”ติ? ตตฺถ เย เต ภิกฺขู อวีตราคา เตสํ ตสฺมิํ สมเย โหติเยว ภยํ โหติ ฉมฺภิตตฺตํ โหติ โลมหํโส. เย ปน เต ภิกฺขู วีตราคา เตสํ ตสฺมิํ สมเย น โหติ ภยํ น โหติ ฉมฺภิตตฺตํ น โหติ โลมหํโส.
 
 
 
 </Paragraph>
 
 <Paragraph number="381" book="para">
-อถ โข มิคลณฺฑิโก สมณกุตฺตโก เอกมฺปิ ภิกฺขุํ เอกาเหน ชีวิตา โวโรเปสิ, เทฺวปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, ตโยปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, จตฺตาโรปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, ปญฺจปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, ทสปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, วีสมฺปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, ตึสมฺปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, จตฺตาลีสมฺปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, ปญฺญาสมฺปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, สฏฺฐิมฺปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ.
+อถ โข มิคลณฺฑิโก สมณกุตฺตโก เอกมฺปิ ภิกฺขุํ เอกาเหน ชีวิตา โวโรเปสิ, เทฺวปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, ตโยปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, จตฺตาโรปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, ปญฺจปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, ทสปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, วีสมฺปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, ติํสมฺปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, จตฺตาลีสมฺปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, ปญฺญาสมฺปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ, สฏฺฐิมฺปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ.
 
 
 
@@ -67,7 +67,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="164" book="para">
 
 <Paragraph number="382" book="para">
-อถ โข ภควา ตสฺส อทฺธมาสสฺส อจฺจเยน ปฏิสลฺลานา วุฏฺฐิโต อายสฺมนฺตํ อานนฺทํ อามนฺเตสิ—  “กึ นุ โข, อานนฺท, ตนุภูโต วิย ภิกฺขุสํโฆ”ติ? “ตถา หิ ปน, ภนฺเต, ภควา ภิกฺขูนํ อเนกปริยาเยน อสุภกถํ กเถติ, อสุภาย วณฺณํ ภาสติ, อสุภภาวนาย วณฺณํ ภาสติ, อาทิสฺส อาทิสฺส อสุภสมาปตฺติยา วณฺณํ ภาสติ. เต จ, ภนฺเต, ภิกฺขู—  ‘ภควา โข อเนกปริยาเยน อสุภกถํ กเถติ, อสุภาย วณฺณํ ภาสติ, อสุภภาวนาย วณฺณํ ภาสติ, อาทิสฺส อาทิสฺส อสุภสมาปตฺติยา วณฺณํ ภาสตี’ติ, เต อเนกาการโวการํ อสุภภาวนานุโยคมนุยุตฺตา วิหรนฺติ. เต สเกน กาเยน อฏฺฏียนฺติ หรายนฺติ ชิคุจฺฉนฺติ. เสยฺยถาปิ นาม อิตฺถี วา ปุริโส วา ทหโร ยุวา มณฺฑนกชาติโก สีสํนฺหาโต อหิกุณเปน วา กุกฺกุรกุณเปน วา มนุสฺสกุณเปน วา กณฺเฐ อาสตฺเตน อฏฺฏีเยยฺย หราเยยฺย ชิคุจฺเฉยฺย; เอวเมว เต ภิกฺขู สเกน กาเยน อฏฺฏียนฺตา หรายนฺตา ชิคุจฺฉนฺตา อตฺตนาปิ อตฺตานํ ชีวิตา โวโรเปนฺติ, อญฺญมญฺญมฺปิ ชีวิตา โวโรเปนฺติ, มิคลณฺฑิกมฺปิ สมณกุตฺตกํ อุปสงฺกมิตฺวา เอวํ วทนฺติ—  ‘สาธุ โน, อาวุโส, ชีวิตา โวโรเปหิ. อิทํ เต ปตฺตจีวรํ ภวิสฺสตี’ติ. อถ โข, ภนฺเต, มิคลณฺฑิโก สมณกุตฺตโก ปตฺตจีวเรหิ ภโฏ เอกมฺปิ ภิกฺขุํ เอกาเหน ชีวิตา โวโรเปสิ …เป…  สฏฺฐิมฺปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ. สาธุ, ภนฺเต, ภควา อญฺญํ ปริยายํ อาจิกฺขตุ ยถายํ ภิกฺขุสํโฆ อญฺญาย สณฺฐเหยฺยา”ติ. “เตนหานนฺท, ยาวติกา ภิกฺขู เวสาลึ อุปนิสฺสาย วิหรนฺติ เต สพฺเพ อุปฏฺฐานสาลายํ สนฺนิปาเตหี”ติ. “เอวํ, ภนฺเต”ติ, โข อายสฺมา อานนฺโท ภควโต ปฏิสฺสุณิตฺวา ยาวติกา ภิกฺขู เวสาลึ อุปนิสฺสาย วิหรนฺติ เต สพฺเพ อุปฏฺฐานสาลายํ สนฺนิปาเตตฺวา เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ เอตทโวจ—  “สนฺนิปติโต, ภนฺเต, ภิกฺขุสํโฆ; ยสฺสทานิ, ภนฺเต, ภควา กาลํ มญฺญตี”ติ.
+อถ โข ภควา ตสฺส อทฺธมาสสฺส อจฺจเยน ปฏิสลฺลานา วุฏฺฐิโต อายสฺมนฺตํ อานนฺทํ อามนฺเตสิ—  “กิํ นุ โข, อานนฺท, ตนุภูโต วิย ภิกฺขุสํโฆ”ติ? “ตถา หิ ปน, ภนฺเต, ภควา ภิกฺขูนํ อเนกปริยาเยน อสุภกถํ กเถติ, อสุภาย วณฺณํ ภาสติ, อสุภภาวนาย วณฺณํ ภาสติ, อาทิสฺส อาทิสฺส อสุภสมาปตฺติยา วณฺณํ ภาสติ. เต จ, ภนฺเต, ภิกฺขู—  ‘ภควา โข อเนกปริยาเยน อสุภกถํ กเถติ, อสุภาย วณฺณํ ภาสติ, อสุภภาวนาย วณฺณํ ภาสติ, อาทิสฺส อาทิสฺส อสุภสมาปตฺติยา วณฺณํ ภาสตี’ติ, เต อเนกาการโวการํ อสุภภาวนานุโยคมนุยุตฺตา วิหรนฺติ. เต สเกน กาเยน อฏฺฏียนฺติ หรายนฺติ ชิคุจฺฉนฺติ. เสยฺยถาปิ นาม อิตฺถี วา ปุริโส วา ทหโร ยุวา มณฺฑนกชาติโก สีสํนฺหาโต อหิกุณเปน วา กุกฺกุรกุณเปน วา มนุสฺสกุณเปน วา กณฺเฐ อาสตฺเตน อฏฺฏีเยยฺย หราเยยฺย ชิคุจฺเฉยฺย; เอวเมว เต ภิกฺขู สเกน กาเยน อฏฺฏียนฺตา หรายนฺตา ชิคุจฺฉนฺตา อตฺตนาปิ อตฺตานํ ชีวิตา โวโรเปนฺติ, อญฺญมญฺญมฺปิ ชีวิตา โวโรเปนฺติ, มิคลณฺฑิกมฺปิ สมณกุตฺตกํ อุปสงฺกมิตฺวา เอวํ วทนฺติ—  ‘สาธุ โน, อาวุโส, ชีวิตา โวโรเปหิ. อิทํ เต ปตฺตจีวรํ ภวิสฺสตี’ติ. อถ โข, ภนฺเต, มิคลณฺฑิโก สมณกุตฺตโก ปตฺตจีวเรหิ ภโฏ เอกมฺปิ ภิกฺขุํ เอกาเหน ชีวิตา โวโรเปสิ …เป…  สฏฺฐิมฺปิ ภิกฺขู เอกาเหน ชีวิตา โวโรเปสิ. สาธุ, ภนฺเต, ภควา อญฺญํ ปริยายํ อาจิกฺขตุ ยถายํ ภิกฺขุสํโฆ อญฺญาย สณฺฐเหยฺยา”ติ. “เตนหานนฺท, ยาวติกา ภิกฺขู เวสาลิํ อุปนิสฺสาย วิหรนฺติ เต สพฺเพ อุปฏฺฐานสาลายํ สนฺนิปาเตหี”ติ. “เอวํ, ภนฺเต”ติ, โข อายสฺมา อานนฺโท ภควโต ปฏิสฺสุณิตฺวา ยาวติกา ภิกฺขู เวสาลิํ อุปนิสฺสาย วิหรนฺติ เต สพฺเพ อุปฏฺฐานสาลายํ สนฺนิปาเตตฺวา เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ เอตทโวจ—  “สนฺนิปติโต, ภนฺเต, ภิกฺขุสํโฆ; ยสฺสทานิ, ภนฺเต, ภควา กาลํ มญฺญตี”ติ.
 
 
 
@@ -91,7 +91,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="385" book="para">
-กถํ ภาวิโต จ, ภิกฺขเว, อานาปานสฺสติสมาธิ กถํ พหุลีกโต สนฺโต เจว ปณีโต จ อเสจนโก จ สุโข จ วิหาโร อุปฺปนฺนุปฺปนฺเน จ ปาปเก อกุสเล ธมฺเม ฐานโส อนฺตรธาเปติ วูปสเมติ? อิธ, ภิกฺขเว, ภิกฺขุ อรญฺญคโต วา รุกฺขมูลคโต วา สุญฺญาคารคโต วา นิสีทติ ปลฺลงฺกํ อาภุชิตฺวา อุชุํ กายํ ปณิธาย ปริมุขํ สตึ อุปฏฺฐเปตฺวา. โส สโตว อสฺสสติ สโต ปสฺสสติ.
+กถํ ภาวิโต จ, ภิกฺขเว, อานาปานสฺสติสมาธิ กถํ พหุลีกโต สนฺโต เจว ปณีโต จ อเสจนโก จ สุโข จ วิหาโร อุปฺปนฺนุปฺปนฺเน จ ปาปเก อกุสเล ธมฺเม ฐานโส อนฺตรธาเปติ วูปสเมติ? อิธ, ภิกฺขเว, ภิกฺขุ อรญฺญคโต วา รุกฺขมูลคโต วา สุญฺญาคารคโต วา นิสีทติ ปลฺลงฺกํ อาภุชิตฺวา อุชุํ กายํ ปณิธาย ปริมุขํ สติํ อุปฏฺฐเปตฺวา. โส สโตว อสฺสสติ สโต ปสฺสสติ.
 
 
 
@@ -129,7 +129,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="166" book="para">
 
 <Paragraph number="390" book="para">
-อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา ภิกฺขู ปฏิปุจฺฉิ—  “สจฺจํ กิร, ภิกฺขเว, ภิกฺขู อตฺตนาปิ อตฺตานํ ชีวิตา โวโรเปนฺติ, อญฺญมญฺญมฺปิ ชีวิตา โวโรเปนฺติ มิคลณฺฑิกมฺปิ สมณกุตฺตกํ อุปสงฺกมิตฺวา เอวํ วทนฺติ—  ‘สาธุ โน, อาวุโส, ชีวิตา โวโรเปหิ, อิทํ เต ปตฺตจีวรํ ภวิสฺสตี’”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, ภิกฺขเว, เตสํ ภิกฺขูนํ อนนุโลมิกํ อปฺปฏิรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม เต, ภิกฺขเว, ภิกฺขู อตฺตนาปิ อตฺตานํ ชีวิตา โวโรเปสฺสนฺติ, อญฺญมญฺญมฺปิ ชีวิตา โวโรเปสฺสนฺติ, มิคลณฺฑิกมฺปิ สมณกุตฺตกํ อุปสงฺกมิตฺวา เอวํ วกฺขนฺติ—  ‘สาธุ โน, อาวุโส, ชีวิตา โวโรเปหิ, อิทํ เต ปตฺตจีวรํ ภวิสฺสตี’ติ. เนตํ, ภิกฺขเว, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา ภิกฺขู ปฏิปุจฺฉิ—  “สจฺจํ กิร, ภิกฺขเว, ภิกฺขู อตฺตนาปิ อตฺตานํ ชีวิตา โวโรเปนฺติ, อญฺญมญฺญมฺปิ ชีวิตา โวโรเปนฺติ มิคลณฺฑิกมฺปิ สมณกุตฺตกํ อุปสงฺกมิตฺวา เอวํ วทนฺติ—  ‘สาธุ โน, อาวุโส, ชีวิตา โวโรเปหิ, อิทํ เต ปตฺตจีวรํ ภวิสฺสตี’”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, ภิกฺขเว, เตสํ ภิกฺขูนํ อนนุโลมิกํ อปฺปฏิรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม เต, ภิกฺขเว, ภิกฺขู อตฺตนาปิ อตฺตานํ ชีวิตา โวโรเปสฺสนฺติ, อญฺญมญฺญมฺปิ ชีวิตา โวโรเปสฺสนฺติ, มิคลณฺฑิกมฺปิ สมณกุตฺตกํ อุปสงฺกมิตฺวา เอวํ วกฺขนฺติ—  ‘สาธุ โน, อาวุโส, ชีวิตา โวโรเปหิ, อิทํ เต ปตฺตจีวรํ ภวิสฺสตี’ติ. เนตํ, ภิกฺขเว, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 
 
 
@@ -156,7 +156,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="168" book="para">
 
 <Paragraph number="393" book="para">
-เตน โข ปน สมเยน อญฺญตโร อุปาสโก คิลาโน โหติ. ตสฺส ปชาปติ อภิรูปา โหติ ทสฺสนียา ปาสาทิกา. ฉพฺพคฺคิยา ภิกฺขู ตสฺสา อิตฺถิยา ปฏิพทฺธจิตฺตา โหนฺติ. อถ โข ฉพฺพคฺคิยานํ ภิกฺขูนํ เอตทโหสิ—  “สเจ โข โส, อาวุโส, อุปาสโก ชีวิสฺสติ น มยํ ตํ อิตฺถึ ลภิสฺสาม. หนฺท มยํ, อาวุโส, ตสฺส อุปาสกสฺส มรณวณฺณํ สํวณฺเณมา”ติ. อถ โข ฉพฺพคฺคิยา ภิกฺขู เยน โส อุปาสโก เตนุปสงฺกมึสุ; อุปสงฺกมิตฺวา ตํ อุปาสกํ เอตทโวจุํ—  “ตฺวํ โขสิ, อุปาสก, กตกลฺยาโณ กตกุสโล กตภีรุตฺตาโณ อกตปาโป อกตลุทฺโท อกตกิพฺพิโส. กตํ ตยา กลฺยาณํ, อกตํ ตยา ปาปํ. กึ ตุยฺหิมินา ปาปเกน ทุชฺชีวิเตน. มตํ เต ชีวิตา เสโยฺย. อิโต ตฺวํ กาลงฺกโต กายสฺส เภทา ปรํ มรณา สุคตึ สคฺคํ โลกํ อุปปชฺชิสฺสสิ. ตตฺถ ทิพฺเพหิ ปญฺจหิ กามคุเณหิ สมปฺปิโต สมงฺคีภูโต ปริจาเรสฺสสี”ติ.
+เตน โข ปน สมเยน อญฺญตโร อุปาสโก คิลาโน โหติ. ตสฺส ปชาปติ อภิรูปา โหติ ทสฺสนียา ปาสาทิกา. ฉพฺพคฺคิยา ภิกฺขู ตสฺสา อิตฺถิยา ปฏิพทฺธจิตฺตา โหนฺติ. อถ โข ฉพฺพคฺคิยานํ ภิกฺขูนํ เอตทโหสิ—  “สเจ โข โส, อาวุโส, อุปาสโก ชีวิสฺสติ น มยํ ตํ อิตฺถิํ ลภิสฺสาม. หนฺท มยํ, อาวุโส, ตสฺส อุปาสกสฺส มรณวณฺณํ สํวณฺเณมา”ติ. อถ โข ฉพฺพคฺคิยา ภิกฺขู เยน โส อุปาสโก เตนุปสงฺกมิํสุ; อุปสงฺกมิตฺวา ตํ อุปาสกํ เอตทโวจุํ—  “ตฺวํ โขสิ, อุปาสก, กตกลฺยาโณ กตกุสโล กตภีรุตฺตาโณ อกตปาโป อกตลุทฺโท อกตกิพฺพิโส. กตํ ตยา กลฺยาณํ, อกตํ ตยา ปาปํ. กิํ ตุยฺหิมินา ปาปเกน ทุชฺชีวิเตน. มตํ เต ชีวิตา เสโยฺย. อิโต ตฺวํ กาลงฺกโต กายสฺส เภทา ปรํ มรณา สุคติํ สคฺคํ โลกํ อุปปชฺชิสฺสสิ. ตตฺถ ทิพฺเพหิ ปญฺจหิ กามคุเณหิ สมปฺปิโต สมงฺคีภูโต ปริจาเรสฺสสี”ติ.
 
 
 
@@ -166,7 +166,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="169" book="para">
 
 <Paragraph number="394" book="para">
-อถ โข โส อุปาสโก—  “สจฺจํ โข อยฺยา อาหํสุ. อหญฺหิ กตกลฺยาโณ กตกุสโล กตภีรุตฺตาโณ อกตปาโป อกตลุทฺโท อกตกิพฺพิโส. กตํ มยา กลฺยาณํ, อกตํ มยา ปาปํ. กึ มยฺหิมินา ปาปเกน ทุชฺชีวิเตน. มตํ เม ชีวิตา เสโยฺย. อิโต อหํ กาลงฺกโต กายสฺส เภทา ปรํ มรณา สุคตึ สคฺคํ โลกํ อุปปชฺชิสฺสามิ. ตตฺถ ทิพฺเพหิ ปญฺจหิ กามคุเณหิ สมปฺปิโต สมงฺคีภูโต ปริจาเรสฺสามี”ติ, โส อสปฺปายานิ เจว โภชนานิ ภุญฺชิ อสปฺปายานิ จ ขาทนียานิ ขาทิ อสปฺปายานิ จ สายนียานิ สายิ อสปฺปายานิ จ ปานานิ ปิวิ. ตสฺส อสปฺปายานิ เจว โภชนานิ ภุญฺชโต อสปฺปายานิ จ ขาทนียานิ ขาทโต อสปฺปายานิ จ สายนียานิ สายโต อสปฺปายานิ จ ปานานิ ปิวโต ขโร อาพาโธ อุปฺปชฺชิ. โส เตเนว อาพาเธน กาลมกาสิ. ตสฺส ปชาปติ อุชฺฌายติ ขิยฺยติ วิปาเจติ—  “อลชฺชิโน อิเม สมณา สกฺยปุตฺติยา ทุสฺสีลา มุสาวาทิโน. อิเม หิ นาม ธมฺมจาริโน สมจาริโน พฺรหฺมจาริโน สจฺจวาทิโน สีลวนฺโต กลฺยาณธมฺมา ปฏิชานิสฺสนฺติ. นตฺถิ อิเมสํ สามญฺญํ นตฺถิ อิเมสํ พฺรหฺมญฺญํ, นฏฺฐํ อิเมสํ สามญฺญํ นฏฺฐํ อิเมสํ พฺรหฺมญฺญํ, กุโต อิเมสํ สามญฺญํ กุโต อิเมสํ พฺรหฺมญฺญํ, อปคตา อิเม สามญฺญา อปคตา อิเม พฺรหฺมญฺญา. อิเม เม สามิกสฺส มรณวณฺณํ สํวณฺเณสุํ. อิเมหิ เม สามิโก มาริโต”ติ. อญฺเญปิ มนุสฺสา อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “อลชฺชิโน อิเม สมณา สกฺยปุตฺติยา ทุสฺสีลา มุสาวาทิโน. อิเม หิ นาม ธมฺมจาริโน สมจาริโน พฺรหฺมจาริโน สจฺจวาทิโน สีลวนฺโต กลฺยาณธมฺมา ปฏิชานิสฺสนฺติ. นตฺถิ อิเมสํ สามญฺญํ นตฺถิ อิเมสํ พฺรหฺมญฺญํ, นฏฺฐํ อิเมสํ สามญฺญํ นฏฺฐํ อิเมสํ พฺรหฺมญฺญํ, กุโต อิเมสํ สามญฺญํ กุโต อิเมสํ พฺรหฺมญฺญํ, อปคตา อิเม สามญฺญา อปคตา อิเม พฺรหฺมญฺญา. อิเม อุปาสกสฺส มรณวณฺณํ สํวณฺเณสุํ. อิเมหิ อุปาสโก มาริโต”ติ.
+อถ โข โส อุปาสโก—  “สจฺจํ โข อยฺยา อาหํสุ. อหญฺหิ กตกลฺยาโณ กตกุสโล กตภีรุตฺตาโณ อกตปาโป อกตลุทฺโท อกตกิพฺพิโส. กตํ มยา กลฺยาณํ, อกตํ มยา ปาปํ. กิํ มยฺหิมินา ปาปเกน ทุชฺชีวิเตน. มตํ เม ชีวิตา เสโยฺย. อิโต อหํ กาลงฺกโต กายสฺส เภทา ปรํ มรณา สุคติํ สคฺคํ โลกํ อุปปชฺชิสฺสามิ. ตตฺถ ทิพฺเพหิ ปญฺจหิ กามคุเณหิ สมปฺปิโต สมงฺคีภูโต ปริจาเรสฺสามี”ติ, โส อสปฺปายานิ เจว โภชนานิ ภุญฺชิ อสปฺปายานิ จ ขาทนียานิ ขาทิ อสปฺปายานิ จ สายนียานิ สายิ อสปฺปายานิ จ ปานานิ ปิวิ. ตสฺส อสปฺปายานิ เจว โภชนานิ ภุญฺชโต อสปฺปายานิ จ ขาทนียานิ ขาทโต อสปฺปายานิ จ สายนียานิ สายโต อสปฺปายานิ จ ปานานิ ปิวโต ขโร อาพาโธ อุปฺปชฺชิ. โส เตเนว อาพาเธน กาลมกาสิ. ตสฺส ปชาปติ อุชฺฌายติ ขิยฺยติ วิปาเจติ—  “อลชฺชิโน อิเม สมณา สกฺยปุตฺติยา ทุสฺสีลา มุสาวาทิโน. อิเม หิ นาม ธมฺมจาริโน สมจาริโน พฺรหฺมจาริโน สจฺจวาทิโน สีลวนฺโต กลฺยาณธมฺมา ปฏิชานิสฺสนฺติ. นตฺถิ อิเมสํ สามญฺญํ นตฺถิ อิเมสํ พฺรหฺมญฺญํ, นฏฺฐํ อิเมสํ สามญฺญํ นฏฺฐํ อิเมสํ พฺรหฺมญฺญํ, กุโต อิเมสํ สามญฺญํ กุโต อิเมสํ พฺรหฺมญฺญํ, อปคตา อิเม สามญฺญา อปคตา อิเม พฺรหฺมญฺญา. อิเม เม สามิกสฺส มรณวณฺณํ สํวณฺเณสุํ. อิเมหิ เม สามิโก มาริโต”ติ. อญฺเญปิ มนุสฺสา อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “อลชฺชิโน อิเม สมณา สกฺยปุตฺติยา ทุสฺสีลา มุสาวาทิโน. อิเม หิ นาม ธมฺมจาริโน สมจาริโน พฺรหฺมจาริโน สจฺจวาทิโน สีลวนฺโต กลฺยาณธมฺมา ปฏิชานิสฺสนฺติ. นตฺถิ อิเมสํ สามญฺญํ นตฺถิ อิเมสํ พฺรหฺมญฺญํ, นฏฺฐํ อิเมสํ สามญฺญํ นฏฺฐํ อิเมสํ พฺรหฺมญฺญํ, กุโต อิเมสํ สามญฺญํ กุโต อิเมสํ พฺรหฺมญฺญํ, อปคตา อิเม สามญฺญา อปคตา อิเม พฺรหฺมญฺญา. อิเม อุปาสกสฺส มรณวณฺณํ สํวณฺเณสุํ. อิเมหิ อุปาสโก มาริโต”ติ.
 
 
 
@@ -193,7 +193,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="171" book="para">
 
 <Paragraph number="397" book="para">
-<Emphasis>“โย ปน ภิกฺขุ สญฺจิจฺจ มนุสฺสวิคฺคหํ ชีวิตา โวโรเปยฺย สตฺถหารกํ วาสฺส ปริเยเสยฺย มรณวณฺณํ วา สํวณฺเณยฺย มรณาย วา สมาทเปยฺย—  ‘อมฺโภ ปุริส, กึ ตุยฺหิมินา ปาปเกน ทุชฺชีวิเตน, มตํ เต ชีวิตา เสโยฺย’ติ, อิติ จิตฺตมโน จิตฺตสงฺกปฺโป อเนกปริยาเยน มรณวณฺณํ วา สํวณฺเณยฺย, มรณาย วา สมาทเปยฺย, อยมฺปิ ปาราชิโก โหติ อสํวาโส”</Emphasis>ติ. (*3*:<Emphasis>3</Emphasis>)
+<Emphasis>“โย ปน ภิกฺขุ สญฺจิจฺจ มนุสฺสวิคฺคหํ ชีวิตา โวโรเปยฺย สตฺถหารกํ วาสฺส ปริเยเสยฺย มรณวณฺณํ วา สํวณฺเณยฺย มรณาย วา สมาทเปยฺย—  ‘อมฺโภ ปุริส, กิํ ตุยฺหิมินา ปาปเกน ทุชฺชีวิเตน, มตํ เต ชีวิตา เสโยฺย’ติ, อิติ จิตฺตมโน จิตฺตสงฺกปฺโป อเนกปริยาเยน มรณวณฺณํ วา สํวณฺเณยฺย, มรณาย วา สมาทเปยฺย, อยมฺปิ ปาราชิโก โหติ อสํวาโส”</Emphasis>ติ. (*3*:<Emphasis>3</Emphasis>)
 
 
 
@@ -203,7 +203,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="172" book="para">
 
 <Paragraph number="398" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 
 
 
@@ -217,21 +217,21 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="400" book="para">
-<Emphasis>มนุสฺสวิคฺคโห</Emphasis> นาม ยํ มาตุกุจฺฉิสฺมึ ปฐมํ จิตฺตํ อุปฺปนฺนํ ปฐมํ วิญฺญาณํ ปาตุภูตํ, ยาว มรณกาลา เอตฺถนฺตเร เอโส มนุสฺสวิคฺคโห นาม.
+<Emphasis>มนุสฺสวิคฺคโห</Emphasis> นาม ยํ มาตุกุจฺฉิสฺมิํ ปฐมํ จิตฺตํ อุปฺปนฺนํ ปฐมํ วิญฺญาณํ ปาตุภูตํ, ยาว มรณกาลา เอตฺถนฺตเร เอโส มนุสฺสวิคฺคโห นาม.
 
 
 
 </Paragraph>
 
 <Paragraph number="401" book="para">
-<Emphasis>ชีวิตา โวโรเปยฺยา</Emphasis>ติ ชีวิตินฺทฺริยํ อุปจฺฉินฺทติ อุปโรเธติ สนฺตตึ วิโกเปติ.
+<Emphasis>ชีวิตา โวโรเปยฺยา</Emphasis>ติ ชีวิตินฺทฺริยํ อุปจฺฉินฺทติ อุปโรเธติ สนฺตติํ วิโกเปติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="402" book="para">
-<Emphasis>สตฺถหารกํ วาสฺส ปริเยเสยฺยา</Emphasis>ติ อสึ วา สตฺตึ วา เภณฺฑึ วา ลคุฬํ วา ปาสาณํ วา สตฺถํ วา วิสํ วา รชฺชุํ วา.
+<Emphasis>สตฺถหารกํ วาสฺส ปริเยเสยฺยา</Emphasis>ติ อสิํ วา สตฺติํ วา เภณฺฑิํ วา ลคุฬํ วา ปาสาณํ วา สตฺถํ วา วิสํ วา รชฺชุํ วา.
 
 
 
@@ -259,7 +259,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="406" book="para">
-<Emphasis>กึ ตุยฺหิมินา ปาปเกน ทุชฺชีวิเตนา</Emphasis>ติ ปาปกํ นาม ชีวิตํ อฑฺฒานํ ชีวิตํ อุปาทาย ทลิทฺทานํ ชีวิตํ ปาปกํ ลามกํ, สธนานํ ชีวิตํ อุปาทาย อธนานํ ชีวิตํ ปาปกํ, เทวานํ ชีวิตํ อุปาทาย มนุสฺสานํ ชีวิตํ ปาปกํ.
+<Emphasis>กิํ ตุยฺหิมินา ปาปเกน ทุชฺชีวิเตนา</Emphasis>ติ ปาปกํ นาม ชีวิตํ อฑฺฒานํ ชีวิตํ อุปาทาย ทลิทฺทานํ ชีวิตํ ปาปกํ ลามกํ, สธนานํ ชีวิตํ อุปาทาย อธนานํ ชีวิตํ ปาปกํ, เทวานํ ชีวิตํ อุปาทาย มนุสฺสานํ ชีวิตํ ปาปกํ.
 
 
 
@@ -294,7 +294,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="411" book="para">
-<Emphasis>มรณวณฺณํ วา สํวณฺเณยฺยา</Emphasis>ติ ชีวิเต อาทีนวํ ทเสฺสติ, มรเณ วณฺณํ ภณติ—  “อิโต ตฺวํ กาลงฺกโต กายสฺส เภทา ปรํ มรณา สุคตึ สคฺคํ โลกํ อุปปชฺชิสฺสสิ, ตตฺถ ทิพฺเพหิ ปญฺจหิ กามคุเณหิ สมปฺปิโต สมงฺคีภูโต ปริจาเรสฺสสี”ติ.
+<Emphasis>มรณวณฺณํ วา สํวณฺเณยฺยา</Emphasis>ติ ชีวิเต อาทีนวํ ทเสฺสติ, มรเณ วณฺณํ ภณติ—  “อิโต ตฺวํ กาลงฺกโต กายสฺส เภทา ปรํ มรณา สุคติํ สคฺคํ โลกํ อุปปชฺชิสฺสสิ, ตตฺถ ทิพฺเพหิ ปญฺจหิ กามคุเณหิ สมปฺปิโต สมงฺคีภูโต ปริจาเรสฺสสี”ติ.
 
 
 
@@ -322,7 +322,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="415" book="para">
-<Emphasis>อสํวาโส</Emphasis>ติ สํวาโส นาม เอกกมฺมํ เอกุทฺเทโส สมสิกฺขตา—  เอโส สํวาโส นาม. โส เตน สทฺธึ นตฺถิ, เตน วุจฺจติ อสํวาโสติ.
+<Emphasis>อสํวาโส</Emphasis>ติ สํวาโส นาม เอกกมฺมํ เอกุทฺเทโส สมสิกฺขตา—  เอโส สํวาโส นาม. โส เตน สทฺธิํ นตฺถิ, เตน วุจฺจติ อสํวาโสติ.
 
 
 
@@ -474,7 +474,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="435" book="para">
-<Emphasis>โอปาตํ</Emphasis> นาม มนุสฺสํ อุทฺทิสฺส โอปาตํ ขนติ—  “ปปติตฺวา มริสฺสตี”ติ, อาปตฺติ ทุกฺกฏสฺส. ปปติเต ทุกฺขา เวทนา อุปฺปชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส. มรติ, อาปตฺติ ปาราชิกสฺส. อโนทิสฺส โอปาตํ ขนติ—  “โย โกจิ ปปติตฺวา มริสฺสตี”ติ, อาปตฺติ ทุกฺกฏสฺส. มนุโสฺส ตสฺมึ ปปตติ, อาปตฺติ ทุกฺกฏสฺส. ปปติเต ทุกฺขา เวทนา อุปฺปชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส. มรติ, อาปตฺติ ปาราชิกสฺส. ยกฺโข วา เปโต วา ติรจฺฉานคตมนุสฺสวิคฺคโห วา ตสฺมึ ปปตติ, อาปตฺติ ทุกฺกฏสฺส. ปปติเต ทุกฺขา เวทนา อุปฺปชฺชติ, อาปตฺติ ทุกฺกฏสฺส. มรติ, อาปตฺติ ถุลฺลจฺจยสฺส. ติรจฺฉานคโต ตสฺมึ ปปตติ, อาปตฺติ ทุกฺกฏสฺส. ปปติเต ทุกฺขา เวทนา อุปฺปชฺชติ, อาปตฺติ ทุกฺกฏสฺส. มรติ, อาปตฺติ ปาจิตฺติยสฺส.
+<Emphasis>โอปาตํ</Emphasis> นาม มนุสฺสํ อุทฺทิสฺส โอปาตํ ขนติ—  “ปปติตฺวา มริสฺสตี”ติ, อาปตฺติ ทุกฺกฏสฺส. ปปติเต ทุกฺขา เวทนา อุปฺปชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส. มรติ, อาปตฺติ ปาราชิกสฺส. อโนทิสฺส โอปาตํ ขนติ—  “โย โกจิ ปปติตฺวา มริสฺสตี”ติ, อาปตฺติ ทุกฺกฏสฺส. มนุโสฺส ตสฺมิํ ปปตติ, อาปตฺติ ทุกฺกฏสฺส. ปปติเต ทุกฺขา เวทนา อุปฺปชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส. มรติ, อาปตฺติ ปาราชิกสฺส. ยกฺโข วา เปโต วา ติรจฺฉานคตมนุสฺสวิคฺคโห วา ตสฺมิํ ปปตติ, อาปตฺติ ทุกฺกฏสฺส. ปปติเต ทุกฺขา เวทนา อุปฺปชฺชติ, อาปตฺติ ทุกฺกฏสฺส. มรติ, อาปตฺติ ถุลฺลจฺจยสฺส. ติรจฺฉานคโต ตสฺมิํ ปปตติ, อาปตฺติ ทุกฺกฏสฺส. ปปติเต ทุกฺขา เวทนา อุปฺปชฺชติ, อาปตฺติ ทุกฺกฏสฺส. มรติ, อาปตฺติ ปาจิตฺติยสฺส.
 
 
 
@@ -491,14 +491,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="437" book="para">
-<Emphasis>อุปนิกฺขิปนํ</Emphasis> นาม อสึ วา สตฺตึ วา เภณฺฑึ วา ลคุฬํ วา ปาสาณํ วา สตฺถํ วา วิสํ วา รชฺชุํ วา อุปนิกฺขิปติ—  “อิมินา มริสฺสตี”ติ, อาปตฺติ ทุกฺกฏสฺส. “เตน มริสฺสามี”ติ ทุกฺขํ เวทนํ อุปฺปาเทติ, อาปตฺติ ถุลฺลจฺจยสฺส. มรติ, อาปตฺติ ปาราชิกสฺส.
+<Emphasis>อุปนิกฺขิปนํ</Emphasis> นาม อสิํ วา สตฺติํ วา เภณฺฑิํ วา ลคุฬํ วา ปาสาณํ วา สตฺถํ วา วิสํ วา รชฺชุํ วา อุปนิกฺขิปติ—  “อิมินา มริสฺสตี”ติ, อาปตฺติ ทุกฺกฏสฺส. “เตน มริสฺสามี”ติ ทุกฺขํ เวทนํ อุปฺปาเทติ, อาปตฺติ ถุลฺลจฺจยสฺส. มรติ, อาปตฺติ ปาราชิกสฺส.
 
 
 
 </Paragraph>
 
 <Paragraph number="438" book="para">
-<Emphasis>เภสชฺชํ</Emphasis> นาม สปฺปึ วา นวนีตํ วา เตลํ วา มธุํ วา ผาณิตํ วา เทติ—  “อิมํ สายิตฺวา มริสฺสตี”ติ, อาปตฺติ ทุกฺกฏสฺส. ตํ สายิเต ทุกฺขา เวทนา อุปฺปชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส. มรติ, อาปตฺติ ปาราชิกสฺส.
+<Emphasis>เภสชฺชํ</Emphasis> นาม สปฺปิํ วา นวนีตํ วา เตลํ วา มธุํ วา ผาณิตํ วา เทติ—  “อิมํ สายิตฺวา มริสฺสตี”ติ, อาปตฺติ ทุกฺกฏสฺส. ตํ สายิเต ทุกฺขา เวทนา อุปฺปชฺชติ, อาปตฺติ ถุลฺลจฺจยสฺส. มรติ, อาปตฺติ ปาราชิกสฺส.
 
 
 
@@ -567,14 +567,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="447" book="para">
-<Emphasis>สงฺเกตกมฺมํ</Emphasis> นาม สงฺเกตํ กโรติ ปุเรภตฺตํ วา ปจฺฉาภตฺตํ วา รตฺตึ วา ทิวา วา—  “เตน สงฺเกเตน ตํ ชีวิตา โวโรเปหี”ติ, อาปตฺติ ทุกฺกฏสฺส. เตน สงฺเกเตน ตํ ชีวิตา โวโรเปติ, อาปตฺติ อุภินฺนํ ปาราชิกสฺส. ตํ สงฺเกตํ ปุเร วา ปจฺฉา วา ตํ ชีวิตา โวโรเปติ, มูลฏฺฐสฺส อนาปตฺติ, วธกสฺส อาปตฺติ ปาราชิกสฺส.
+<Emphasis>สงฺเกตกมฺมํ</Emphasis> นาม สงฺเกตํ กโรติ ปุเรภตฺตํ วา ปจฺฉาภตฺตํ วา รตฺติํ วา ทิวา วา—  “เตน สงฺเกเตน ตํ ชีวิตา โวโรเปหี”ติ, อาปตฺติ ทุกฺกฏสฺส. เตน สงฺเกเตน ตํ ชีวิตา โวโรเปติ, อาปตฺติ อุภินฺนํ ปาราชิกสฺส. ตํ สงฺเกตํ ปุเร วา ปจฺฉา วา ตํ ชีวิตา โวโรเปติ, มูลฏฺฐสฺส อนาปตฺติ, วธกสฺส อาปตฺติ ปาราชิกสฺส.
 
 
 
 </Paragraph>
 
 <Paragraph number="448" book="para">
-<Emphasis>นิมิตฺตกมฺมํ</Emphasis> นาม นิมิตฺตํ กโรติ—  “อกฺขึ วา นิขณิสฺสามิ ภมุกํ วา อุกฺขิปิสฺสามิ สีสํ วา อุกฺขิปิสฺสามิ, เตน นิมิตฺเตน ตํ ชีวิตา โวโรเปหี”ติ, อาปตฺติ ทุกฺกฏสฺส. เตน นิมิตฺเตน ตํ ชีวิตา โวโรเปติ, อาปตฺติ อุภินฺนํ ปาราชิกสฺส. ตํ นิมิตฺตํ ปุเร วา ปจฺฉา วา ตํ ชีวิตา โวโรเปติ, มูลฏฺฐสฺส อนาปตฺติ, วธกสฺส อาปตฺติ ปาราชิกสฺส.
+<Emphasis>นิมิตฺตกมฺมํ</Emphasis> นาม นิมิตฺตํ กโรติ—  “อกฺขิํ วา นิขณิสฺสามิ ภมุกํ วา อุกฺขิปิสฺสามิ สีสํ วา อุกฺขิปิสฺสามิ, เตน นิมิตฺเตน ตํ ชีวิตา โวโรเปหี”ติ, อาปตฺติ ทุกฺกฏสฺส. เตน นิมิตฺเตน ตํ ชีวิตา โวโรเปติ, อาปตฺติ อุภินฺนํ ปาราชิกสฺส. ตํ นิมิตฺตํ ปุเร วา ปจฺฉา วา ตํ ชีวิตา โวโรเปติ, มูลฏฺฐสฺส อนาปตฺติ, วธกสฺส อาปตฺติ ปาราชิกสฺส.
 
 
 
