--- a/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-3/1-1-3-2.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-3/1-1-3-2.mdx
@@ -18,15 +18,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="180" book="para">
 
 <Paragraph number="457" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ คิลาโน โหติ. ตสฺส ภิกฺขู การุญฺเญน มรณวณฺณํ สํวณฺเณสุํ. โส ภิกฺขุ กาลมกาสิ. เตสํ กุกฺกุจฺจํ อโหสิ “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข มยํ ปาราชิกํ อาปตฺตึ อาปนฺนา”ติ? ภควโต เอตมตฺถํ อาโรเจสุํ. “อาปตฺตึ ตุเมฺห, ภิกฺขเว, อาปนฺนา ปาราชิกนฺ”ติ. (1)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ คิลาโน โหติ. ตสฺส ภิกฺขู การุญฺเญน มรณวณฺณํ สํวณฺเณสุํ. โส ภิกฺขุ กาลมกาสิ. เตสํ กุกฺกุจฺจํ อโหสิ “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข มยํ ปาราชิกํ อาปตฺติํ อาปนฺนา”ติ? ภควโต เอตมตฺถํ อาโรเจสุํ. “อาปตฺติํ ตุเมฺห, ภิกฺขเว, อาปนฺนา ปาราชิกนฺ”ติ. (1)
 </Paragraph>
 
 <Paragraph number="458" book="para">
-เตน โข ปน สมเยน อญฺญตโร ปิณฺฑจาริโก ภิกฺขุ ปีฐเก ปิโลติกาย ปฏิจฺฉนฺนํ ทารกํ นิสีทนฺโต โอตฺถริตฺวา มาเรสิ. ตสฺส กุกฺกุจฺจํ อโหสิ “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ ปาราชิกํ อาปตฺตึ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส. น จ, ภิกฺขเว, อปฺปฏิเวกฺขิตฺวา อาสเน นิสีทิตพฺพํ; โย นิสีเทยฺย, อาปตฺติ ทุกฺกฏสฺสา”ติ. (2)
+เตน โข ปน สมเยน อญฺญตโร ปิณฺฑจาริโก ภิกฺขุ ปีฐเก ปิโลติกาย ปฏิจฺฉนฺนํ ทารกํ นิสีทนฺโต โอตฺถริตฺวา มาเรสิ. ตสฺส กุกฺกุจฺจํ อโหสิ “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ ปาราชิกํ อาปตฺติํ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส. น จ, ภิกฺขเว, อปฺปฏิเวกฺขิตฺวา อาสเน นิสีทิตพฺพํ; โย นิสีเทยฺย, อาปตฺติ ทุกฺกฏสฺสา”ติ. (2)
 </Paragraph>
 
 <Paragraph number="459" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ ภตฺตคฺเค อนฺตรฆเร อาสนํ ปญฺญเปนฺโต มุสเล อุสฺสิเต เอกํ มุสลํ อคฺคเหสิ. ทุติโย มุสโล ปริปติตฺวา อญฺญตรสฺส ทารกสฺส มตฺถเก อวตฺถาสิ. โส กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อสญฺจิจฺจ อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, อสญฺจิจฺจา”ติ. (3)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ ภตฺตคฺเค อนฺตรฆเร อาสนํ ปญฺญเปนฺโต มุสเล อุสฺสิเต เอกํ มุสลํ อคฺคเหสิ. ทุติโย มุสโล ปริปติตฺวา อญฺญตรสฺส ทารกสฺส มตฺถเก อวตฺถาสิ. โส กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อสญฺจิจฺจ อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, อสญฺจิจฺจา”ติ. (3)
 </Paragraph>
 
 <Paragraph number="460" book="para">
@@ -34,11 +34,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="461" book="para">
-เตน โข ปน สมเยน ปิตาปุตฺตา ภิกฺขูสุ ปพฺพชิตา โหนฺติ. กาเล อาโรจิเต ปุตฺโต ปิตรํ เอตทโวจ—  “คจฺฉ, ภนฺเต, สํโฆ ตํ ปติมาเนตี”ติ ปิฏฺฐิยํ คเหตฺวา ปณาเมสิ. โส ปปติตฺวา กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “นาหํ, ภควา, มรณาธิปฺปาโย”ติ. “อนาปตฺติ, ภิกฺขุ, นมรณาธิปฺปายสฺสา”ติ. (5)
+เตน โข ปน สมเยน ปิตาปุตฺตา ภิกฺขูสุ ปพฺพชิตา โหนฺติ. กาเล อาโรจิเต ปุตฺโต ปิตรํ เอตทโวจ—  “คจฺฉ, ภนฺเต, สํโฆ ตํ ปติมาเนตี”ติ ปิฏฺฐิยํ คเหตฺวา ปณาเมสิ. โส ปปติตฺวา กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “นาหํ, ภควา, มรณาธิปฺปาโย”ติ. “อนาปตฺติ, ภิกฺขุ, นมรณาธิปฺปายสฺสา”ติ. (5)
 </Paragraph>
 
 <Paragraph number="462" book="para">
-เตน โข ปน สมเยน ปิตาปุตฺตา ภิกฺขูสุ ปพฺพชิตา โหนฺติ. กาเล อาโรจิเต ปุตฺโต ปิตรํ เอตทโวจ—  “คจฺฉ, ภนฺเต, สํโฆ ตํ ปติมาเนตี”ติ มรณาธิปฺปาโย ปิฏฺฐิยํ คเหตฺวา ปณาเมสิ. โส ปปติตฺวา กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (6)
+เตน โข ปน สมเยน ปิตาปุตฺตา ภิกฺขูสุ ปพฺพชิตา โหนฺติ. กาเล อาโรจิเต ปุตฺโต ปิตรํ เอตทโวจ—  “คจฺฉ, ภนฺเต, สํโฆ ตํ ปติมาเนตี”ติ มรณาธิปฺปาโย ปิฏฺฐิยํ คเหตฺวา ปณาเมสิ. โส ปปติตฺวา กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (6)
 </Paragraph>
 
 <Paragraph number="463" book="para">
@@ -53,7 +53,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="465" book="para">
-เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน ภุญฺชนฺตสฺส มํสํ กณฺเฐ วิลคฺคํ โหติ. อญฺญตโร ภิกฺขุ มรณาธิปฺปาโย ตสฺส ภิกฺขุโน คีวายํ ปหารํ อทาสิ. สโลหิตํ มํสํ ปติ. โส ภิกฺขุ กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (9)
+เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน ภุญฺชนฺตสฺส มํสํ กณฺเฐ วิลคฺคํ โหติ. อญฺญตโร ภิกฺขุ มรณาธิปฺปาโย ตสฺส ภิกฺขุโน คีวายํ ปหารํ อทาสิ. สโลหิตํ มํสํ ปติ. โส ภิกฺขุ กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (9)
 </Paragraph>
 
 <Paragraph number="466" book="para">
@@ -61,11 +61,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="467" book="para">
-เตน โข ปน สมเยน อญฺญตโร ปิณฺฑจาริโก ภิกฺขุ วิสคตํ ปิณฺฑปาตํ ลภิตฺวา ปฏิกฺกมนํ หริตฺวา ภิกฺขูนํ อคฺคการิกํ อทาสิ. เต ภิกฺขู กาลมกํสุ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “นาหํ, ภควา, ชานามี”ติ. “อนาปตฺติ, ภิกฺขุ, อชานนฺตสฺสา”ติ. (11)
+เตน โข ปน สมเยน อญฺญตโร ปิณฺฑจาริโก ภิกฺขุ วิสคตํ ปิณฺฑปาตํ ลภิตฺวา ปฏิกฺกมนํ หริตฺวา ภิกฺขูนํ อคฺคการิกํ อทาสิ. เต ภิกฺขู กาลมกํสุ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “นาหํ, ภควา, ชานามี”ติ. “อนาปตฺติ, ภิกฺขุ, อชานนฺตสฺสา”ติ. (11)
 </Paragraph>
 
 <Paragraph number="468" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ วีมํสาธิปฺปาโย อญฺญตรสฺส ภิกฺขุโน วิสํ อทาสิ. โส ภิกฺขุ กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “วีมํสาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (12)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ วีมํสาธิปฺปาโย อญฺญตรสฺส ภิกฺขุโน วิสํ อทาสิ. โส ภิกฺขุ กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “วีมํสาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (12)
 </Paragraph>
 
 </Division>
@@ -91,23 +91,23 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="183" book="para">
 
 <Paragraph number="473" book="para">
-เตน โข ปน สมเยน อาฬวกา ภิกฺขู นวกมฺมํ กโรนฺติ. อญฺญตโร ภิกฺขุ เหฏฺฐา หุตฺวา วาสึ อุจฺจาเรสิ. อุปริเมน ภิกฺขุนา ทุคฺคหิตา วาสี เหฏฺฐิมสฺส ภิกฺขุโน มตฺถเก อวตฺถาสิ. โส ภิกฺขุ กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, อสญฺจิจฺจา”ติ. (19)
+เตน โข ปน สมเยน อาฬวกา ภิกฺขู นวกมฺมํ กโรนฺติ. อญฺญตโร ภิกฺขุ เหฏฺฐา หุตฺวา วาสิํ อุจฺจาเรสิ. อุปริเมน ภิกฺขุนา ทุคฺคหิตา วาสี เหฏฺฐิมสฺส ภิกฺขุโน มตฺถเก อวตฺถาสิ. โส ภิกฺขุ กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, อสญฺจิจฺจา”ติ. (19)
 </Paragraph>
 
 <Paragraph number="474" book="para">
-เตน โข ปน สมเยน อาฬวกา ภิกฺขู นวกมฺมํ กโรนฺติ. อญฺญตโร ภิกฺขุ เหฏฺฐา หุตฺวา วาสึ อุจฺจาเรสิ. อุปริโม ภิกฺขุ มรณาธิปฺปาโย เหฏฺฐิมสฺส ภิกฺขุโน มตฺถเก วาสึ มุญฺจิ. โส ภิกฺขุ กาลมกาสิ …เป…  โส ภิกฺขุ น กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (20–21)
+เตน โข ปน สมเยน อาฬวกา ภิกฺขู นวกมฺมํ กโรนฺติ. อญฺญตโร ภิกฺขุ เหฏฺฐา หุตฺวา วาสิํ อุจฺจาเรสิ. อุปริโม ภิกฺขุ มรณาธิปฺปาโย เหฏฺฐิมสฺส ภิกฺขุโน มตฺถเก วาสิํ มุญฺจิ. โส ภิกฺขุ กาลมกาสิ …เป…  โส ภิกฺขุ น กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (20–21)
 </Paragraph>
 
 <Paragraph number="475" book="para">
-เตน โข ปน สมเยน อาฬวกา ภิกฺขู นวกมฺมํ กโรนฺติ. อญฺญตโร ภิกฺขุ เหฏฺฐา หุตฺวา โคปานสึ อุจฺจาเรสิ. อุปริเมน ภิกฺขุนา ทุคฺคหิตา โคปานสี เหฏฺฐิมสฺส ภิกฺขุโน มตฺถเก อวตฺถาสิ. โส ภิกฺขุ กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, อสญฺจิจฺจา”ติ. (22)
+เตน โข ปน สมเยน อาฬวกา ภิกฺขู นวกมฺมํ กโรนฺติ. อญฺญตโร ภิกฺขุ เหฏฺฐา หุตฺวา โคปานสิํ อุจฺจาเรสิ. อุปริเมน ภิกฺขุนา ทุคฺคหิตา โคปานสี เหฏฺฐิมสฺส ภิกฺขุโน มตฺถเก อวตฺถาสิ. โส ภิกฺขุ กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, อสญฺจิจฺจา”ติ. (22)
 </Paragraph>
 
 <Paragraph number="476" book="para">
-เตน โข ปน สมเยน อาฬวกา ภิกฺขู นวกมฺมํ กโรนฺติ. อญฺญตโร ภิกฺขุ เหฏฺฐา หุตฺวา โคปานสึ อุจฺจาเรสิ. อุปริโม ภิกฺขุ มรณาธิปฺปาโย เหฏฺฐิมสฺส ภิกฺขุโน มตฺถเก โคปานสึ มุญฺจิ. โส ภิกฺขุ กาลมกาสิ …เป…  โส ภิกฺขุ น กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (23–24)
+เตน โข ปน สมเยน อาฬวกา ภิกฺขู นวกมฺมํ กโรนฺติ. อญฺญตโร ภิกฺขุ เหฏฺฐา หุตฺวา โคปานสิํ อุจฺจาเรสิ. อุปริโม ภิกฺขุ มรณาธิปฺปาโย เหฏฺฐิมสฺส ภิกฺขุโน มตฺถเก โคปานสิํ มุญฺจิ. โส ภิกฺขุ กาลมกาสิ …เป…  โส ภิกฺขุ น กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (23–24)
 </Paragraph>
 
 <Paragraph number="477" book="para">
-เตน โข ปน สมเยน อาฬวกา ภิกฺขู นวกมฺมํ กโรนฺตา อฏฺฏกํ พนฺธนฺติ. อญฺญตโร ภิกฺขุ อญฺญตรํ ภิกฺขุํ เอตทโวจ—  “อาวุโส, อตฺรฏฺฐิโต พนฺธาหี”ติ. โส ตตฺรฏฺฐิโต พนฺธนฺโต ปริปติตฺวา กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “นาหํ, ภควา, มรณาธิปฺปาโย”ติ. “อนาปตฺติ, ภิกฺขุ, นมรณาธิปฺปายสฺสา”ติ. (25)
+เตน โข ปน สมเยน อาฬวกา ภิกฺขู นวกมฺมํ กโรนฺตา อฏฺฏกํ พนฺธนฺติ. อญฺญตโร ภิกฺขุ อญฺญตรํ ภิกฺขุํ เอตทโวจ—  “อาวุโส, อตฺรฏฺฐิโต พนฺธาหี”ติ. โส ตตฺรฏฺฐิโต พนฺธนฺโต ปริปติตฺวา กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “นาหํ, ภควา, มรณาธิปฺปาโย”ติ. “อนาปตฺติ, ภิกฺขุ, นมรณาธิปฺปายสฺสา”ติ. (25)
 </Paragraph>
 
 <Paragraph number="478" book="para">
@@ -127,7 +127,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="482" book="para">
-เตน โข ปน สมเยน ฉพฺพคฺคิยา ภิกฺขู คิชฺฌกูฏํ ปพฺพตํ อภิรุหิตฺวา ทวาย สิลํ ปวิชฺฌึสุ. สา อญฺญตรํ โคปาลกํ โอตฺถริตฺวา มาเรสิ. เตสํ กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขเว, ปาราชิกสฺส. น จ, ภิกฺขเว, ทวาย สิลา ปวิชฺฌิตพฺพา. โย ปวิชฺเฌยฺย, อาปตฺติ ทุกฺกฏสฺสา”ติ. (32)
+เตน โข ปน สมเยน ฉพฺพคฺคิยา ภิกฺขู คิชฺฌกูฏํ ปพฺพตํ อภิรุหิตฺวา ทวาย สิลํ ปวิชฺฌิํสุ. สา อญฺญตรํ โคปาลกํ โอตฺถริตฺวา มาเรสิ. เตสํ กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขเว, ปาราชิกสฺส. น จ, ภิกฺขเว, ทวาย สิลา ปวิชฺฌิตพฺพา. โย ปวิชฺเฌยฺย, อาปตฺติ ทุกฺกฏสฺสา”ติ. (32)
 </Paragraph>
 
 </Division>
@@ -166,11 +166,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="491" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ คิลาโน โหติ. ตํ ภิกฺขู เตเลน อพฺภญฺชึสุ. โส ภิกฺขุ กาลมกาสิ. เตสํ กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขเว, นมรณาธิปฺปายสฺสา”ติ. (45)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ คิลาโน โหติ. ตํ ภิกฺขู เตเลน อพฺภญฺชิํสุ. โส ภิกฺขุ กาลมกาสิ. เตสํ กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขเว, นมรณาธิปฺปายสฺสา”ติ. (45)
 </Paragraph>
 
 <Paragraph number="492" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ คิลาโน โหติ. ตํ ภิกฺขู มรณาธิปฺปายา เตเลน อพฺภญฺชึสุ. โส ภิกฺขุ กาลมกาสิ …เป…  โส ภิกฺขุ น กาลมกาสิ. เตสํ กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขเว, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (46–47)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ คิลาโน โหติ. ตํ ภิกฺขู มรณาธิปฺปายา เตเลน อพฺภญฺชิํสุ. โส ภิกฺขุ กาลมกาสิ …เป…  โส ภิกฺขุ น กาลมกาสิ. เตสํ กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขเว, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (46–47)
 </Paragraph>
 
 </Division>
@@ -212,11 +212,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="186" book="para">
 
 <Paragraph number="501" book="para">
-เตน โข ปน สมเยน อญฺญตรา อิตฺถี ปวุตฺถปติกา ชาเรน คพฺภินี โหติ. สา กุลูปกํ ภิกฺขุํ เอตทโวจ—  “อิงฺฆายฺย, คพฺภปาตนํ ชานาหี”ติ. “สุฏฺฐุ, ภคินี”ติ ตสฺสา คพฺภปาตนํ อทาสิ. ทารโก กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (60)
+เตน โข ปน สมเยน อญฺญตรา อิตฺถี ปวุตฺถปติกา ชาเรน คพฺภินี โหติ. สา กุลูปกํ ภิกฺขุํ เอตทโวจ—  “อิงฺฆายฺย, คพฺภปาตนํ ชานาหี”ติ. “สุฏฺฐุ, ภคินี”ติ ตสฺสา คพฺภปาตนํ อทาสิ. ทารโก กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (60)
 </Paragraph>
 
 <Paragraph number="502" book="para">
-เตน โข ปน สมเยน อญฺญตรสฺส ปุริสสฺส เทฺว ปชาปติโย โหนฺติ—  เอกา วญฺฌา, เอกา วิชายินี. วญฺฌา อิตฺถี กุลูปกํ ภิกฺขุํ เอตทโวจ—  “สเจ สา, ภนฺเต, วิชายิสฺสติ สพฺพสฺส กุฏุมฺพสฺส อิสฺสรา ภวิสฺสติ. อิงฺฆายฺย, ตสฺสา คพฺภปาตนํ ชานาหี”ติ. “สุฏฺฐุ, ภคินี”ติ ตสฺสา คพฺภปาตนํ อทาสิ. ทารโก กาลมกาสิ, มาตา น กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (61)
+เตน โข ปน สมเยน อญฺญตรสฺส ปุริสสฺส เทฺว ปชาปติโย โหนฺติ—  เอกา วญฺฌา, เอกา วิชายินี. วญฺฌา อิตฺถี กุลูปกํ ภิกฺขุํ เอตทโวจ—  “สเจ สา, ภนฺเต, วิชายิสฺสติ สพฺพสฺส กุฏุมฺพสฺส อิสฺสรา ภวิสฺสติ. อิงฺฆายฺย, ตสฺสา คพฺภปาตนํ ชานาหี”ติ. “สุฏฺฐุ, ภคินี”ติ ตสฺสา คพฺภปาตนํ อทาสิ. ทารโก กาลมกาสิ, มาตา น กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (61)
 </Paragraph>
 
 <Paragraph number="503" book="para">
@@ -231,11 +231,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="187" book="para">
 
 <Paragraph number="505" book="para">
-เตน โข ปน สมเยน อญฺญตรา คพฺภินี อิตฺถี กุลูปกํ ภิกฺขุํ เอตทโวจ—  “อิงฺฆายฺย, คพฺภปาตนํ ชานาหี”ติ. “เตน หิ, ภคินิ, มทฺทสฺสู”ติ. สา มทฺทาเปตฺวา คพฺภํ ปาเตสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (65)
+เตน โข ปน สมเยน อญฺญตรา คพฺภินี อิตฺถี กุลูปกํ ภิกฺขุํ เอตทโวจ—  “อิงฺฆายฺย, คพฺภปาตนํ ชานาหี”ติ. “เตน หิ, ภคินิ, มทฺทสฺสู”ติ. สา มทฺทาเปตฺวา คพฺภํ ปาเตสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (65)
 </Paragraph>
 
 <Paragraph number="506" book="para">
-เตน โข ปน สมเยน อญฺญตรา คพฺภินี อิตฺถี กุลูปกํ ภิกฺขุํ เอตทโวจ—  “อิงฺฆายฺย, คพฺภปาตนํ ชานาหี”ติ. “เตน หิ, ภคินิ, ตาเปหี”ติ. สา ตาเปตฺวา คพฺภํ ปาเตสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (66)
+เตน โข ปน สมเยน อญฺญตรา คพฺภินี อิตฺถี กุลูปกํ ภิกฺขุํ เอตทโวจ—  “อิงฺฆายฺย, คพฺภปาตนํ ชานาหี”ติ. “เตน หิ, ภคินิ, ตาเปหี”ติ. สา ตาเปตฺวา คพฺภํ ปาเตสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (66)
 </Paragraph>
 
 <Paragraph number="507" book="para">
@@ -286,7 +286,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="188" book="para">
 
 <Paragraph number="518" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ ตํ มญฺญมาโน ตํ ชีวิตา โวโรเปสิ …เป…  ตํ มญฺญมาโน อญฺญํ ชีวิตา โวโรเปสิ …เป…  อญฺญํ มญฺญมาโน ตํ ชีวิตา โวโรเปสิ …เป…  อญฺญํ มญฺญมาโน อญฺญํ ชีวิตา โวโรเปสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (81–84)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ ตํ มญฺญมาโน ตํ ชีวิตา โวโรเปสิ …เป…  ตํ มญฺญมาโน อญฺญํ ชีวิตา โวโรเปสิ …เป…  อญฺญํ มญฺญมาโน ตํ ชีวิตา โวโรเปสิ …เป…  อญฺญํ มญฺญมาโน อญฺญํ ชีวิตา โวโรเปสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (81–84)
 </Paragraph>
 
 <Paragraph number="519" book="para">
@@ -339,7 +339,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="191" book="para">
 
 <Paragraph number="529" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อาฆาตนํ คนฺตฺวา โจรฆาตํ เอตทโวจ—  “อาวุโส, มายิมํ กิลเมสิ. เอเกน ปหาเรน ชีวิตา โวโรเปหี”ติ. “สุฏฺฐุ, ภนฺเต”ติ เอเกน ปหาเรน ชีวิตา โวโรเปสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (100)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อาฆาตนํ คนฺตฺวา โจรฆาตํ เอตทโวจ—  “อาวุโส, มายิมํ กิลเมสิ. เอเกน ปหาเรน ชีวิตา โวโรเปหี”ติ. “สุฏฺฐุ, ภนฺเต”ติ เอเกน ปหาเรน ชีวิตา โวโรเปสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (100)
 </Paragraph>
 
 <Paragraph number="530" book="para">
@@ -350,11 +350,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="192" book="para">
 
 <Paragraph number="531" book="para">
-เตน โข ปน สมเยน อญฺญตโร ปุริโส ญาติฆเร หตฺถปาทจฺฉินฺโน ญาตเกหิ สมฺปริกิณฺโณ โหติ. อญฺญตโร ภิกฺขุ เต มนุเสฺส เอตทโวจ—  “อาวุโส, อิจฺฉถ อิมสฺส มรณนฺ”ติ? “อาม, ภนฺเต, อิจฺฉามา”ติ. “เตน หิ ตกฺกํ ปาเยถา”ติ. เต ตํ ตกฺกํ ปาเยสุํ. โส กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (102)
+เตน โข ปน สมเยน อญฺญตโร ปุริโส ญาติฆเร หตฺถปาทจฺฉินฺโน ญาตเกหิ สมฺปริกิณฺโณ โหติ. อญฺญตโร ภิกฺขุ เต มนุเสฺส เอตทโวจ—  “อาวุโส, อิจฺฉถ อิมสฺส มรณนฺ”ติ? “อาม, ภนฺเต, อิจฺฉามา”ติ. “เตน หิ ตกฺกํ ปาเยถา”ติ. เต ตํ ตกฺกํ ปาเยสุํ. โส กาลมกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (102)
 </Paragraph>
 
 <Paragraph number="532" book="para">
-เตน โข ปน สมเยน อญฺญตโร ปุริโส กุลฆเร หตฺถปาทจฺฉินฺโน ญาตเกหิ สมฺปริกิณฺโณ โหติ. อญฺญตรา ภิกฺขุนี เต มนุเสฺส เอตทโวจ—  “อาวุโส, อิจฺฉถ อิมสฺส มรณนฺ”ติ? “อามาเยฺย, อิจฺฉามา”ติ. “เตน หิ โลณโสวีรกํ ปาเยถา”ติ. เต ตํ โลณโสวีรกํ ปาเยสุํ. โส กาลมกาสิ. ตสฺสา กุกฺกุจฺจํ อโหสิ …เป… . อถ โข สา ภิกฺขุนี ภิกฺขุนีนํ เอตมตฺถํ อาโรเจสิ. ภิกฺขุนิโย ภิกฺขูนํ เอตมตฺถํ อาโรเจสุํ. ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. “อาปตฺตึ สา, ภิกฺขเว, ภิกฺขุนี อาปนฺนา ปาราชิกนฺ”ติ. (103)
+เตน โข ปน สมเยน อญฺญตโร ปุริโส กุลฆเร หตฺถปาทจฺฉินฺโน ญาตเกหิ สมฺปริกิณฺโณ โหติ. อญฺญตรา ภิกฺขุนี เต มนุเสฺส เอตทโวจ—  “อาวุโส, อิจฺฉถ อิมสฺส มรณนฺ”ติ? “อามาเยฺย, อิจฺฉามา”ติ. “เตน หิ โลณโสวีรกํ ปาเยถา”ติ. เต ตํ โลณโสวีรกํ ปาเยสุํ. โส กาลมกาสิ. ตสฺสา กุกฺกุจฺจํ อโหสิ …เป… . อถ โข สา ภิกฺขุนี ภิกฺขุนีนํ เอตมตฺถํ อาโรเจสิ. ภิกฺขุนิโย ภิกฺขูนํ เอตมตฺถํ อาโรเจสุํ. ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. “อาปตฺติํ สา, ภิกฺขเว, ภิกฺขุนี อาปนฺนา ปาราชิกนฺ”ติ. (103)
 
 </Paragraph>
 </Division>
