--- a/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-4/1-1-4-1.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-4/1-1-4-1.mdx
@@ -66,8 +66,8 @@ _สีสจฺฉินฺโน อหุ โจรฆาตโก._
 <Paragraph number="711" type="verses" book="para">
 _ภิกฺขุ ภิกฺขุนี สิกฺขมานา,_  
 _สามเณโร อถ สามเณริกา;_  
-_กสฺสปสฺส วินยสฺมึ ปพฺพชํ,_  
-_ปาปกมฺมมกรึสุ ตาวเท._  
+_กสฺสปสฺส วินยสฺมิํ ปพฺพชํ,_  
+_ปาปกมฺมมกริํสุ ตาวเท._  
 
 </Paragraph>
 
