--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-1/1-2-1-2.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-1/1-2-1-2.mdx
@@ -18,11 +18,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="263" book="para">
 
 <Paragraph number="945" book="para">
-เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน สุปินนฺเตน อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ สํฆาทิเสสํ อาปตฺตึ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อนาปตฺติ, ภิกฺขุ, สุปินนฺเตนา”ติ. (1)
+เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน สุปินนฺเตน อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ สํฆาทิเสสํ อาปตฺติํ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อนาปตฺติ, ภิกฺขุ, สุปินนฺเตนา”ติ. (1)
 </Paragraph>
 
 <Paragraph number="946" book="para">
-เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน อุจฺจารํ กโรนฺตสฺส อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “นาหํ, ภควา, โมจนาธิปฺปาโย”ติ. “อนาปตฺติ, ภิกฺขุ, นโมจนาธิปฺปายสฺสา”ติ. (2)
+เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน อุจฺจารํ กโรนฺตสฺส อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “นาหํ, ภควา, โมจนาธิปฺปาโย”ติ. “อนาปตฺติ, ภิกฺขุ, นโมจนาธิปฺปายสฺสา”ติ. (2)
 </Paragraph>
 
 <Paragraph number="947" book="para">
@@ -34,11 +34,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="949" book="para">
-เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน อุโณฺหทเกน นฺหายนฺตสฺส อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “นาหํ, ภควา, โมจนาธิปฺปาโย”ติ. “อนาปตฺติ, ภิกฺขุ, นโมจนาธิปฺปายสฺสา”ติ. (5)
+เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน อุโณฺหทเกน นฺหายนฺตสฺส อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “นาหํ, ภควา, โมจนาธิปฺปาโย”ติ. “อนาปตฺติ, ภิกฺขุ, นโมจนาธิปฺปายสฺสา”ติ. (5)
 </Paragraph>
 
 <Paragraph number="950" book="para">
-เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน โมจนาธิปฺปายสฺส อุโณฺหทเกน นฺหายนฺตสฺส อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน สํฆาทิเสสนฺ”ติ. (6)
+เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน โมจนาธิปฺปายสฺส อุโณฺหทเกน นฺหายนฺตสฺส อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน สํฆาทิเสสนฺ”ติ. (6)
 </Paragraph>
 
 <Paragraph number="951" book="para">
@@ -73,19 +73,19 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="958" book="para">
-เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน วตฺถึ คเหตฺวา ปสฺสาวํ กโรนฺตสฺส อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, นโมจนาธิปฺปายสฺสา”ติ. (17)
+เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน วตฺถิํ คเหตฺวา ปสฺสาวํ กโรนฺตสฺส อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, นโมจนาธิปฺปายสฺสา”ติ. (17)
 </Paragraph>
 
 <Paragraph number="959" book="para">
-เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน โมจนาธิปฺปายสฺส วตฺถึ คเหตฺวา ปสฺสาวํ กโรนฺตสฺส อสุจิ มุจฺจิ …เป…  อสุจิ น มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (18–19)
+เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน โมจนาธิปฺปายสฺส วตฺถิํ คเหตฺวา ปสฺสาวํ กโรนฺตสฺส อสุจิ มุจฺจิ …เป…  อสุจิ น มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (18–19)
 </Paragraph>
 
 <Paragraph number="960" book="para">
-เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน ชนฺตาฆเร อุทรวฏฺฏึ ตาเปนฺตสฺส อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, นโมจนาธิปฺปายสฺสา”ติ. (20)
+เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน ชนฺตาฆเร อุทรวฏฺฏิํ ตาเปนฺตสฺส อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, นโมจนาธิปฺปายสฺสา”ติ. (20)
 </Paragraph>
 
 <Paragraph number="961" book="para">
-เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน โมจนาธิปฺปายสฺส ชนฺตาฆเร อุทรวฏฺฏึ ตาเปนฺตสฺส อสุจิ มุจฺจิ …เป…  อสุจิ น มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (21–22)
+เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน โมจนาธิปฺปายสฺส ชนฺตาฆเร อุทรวฏฺฏิํ ตาเปนฺตสฺส อสุจิ มุจฺจิ …เป…  อสุจิ น มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (21–22)
 </Paragraph>
 
 <Paragraph number="962" book="para">
@@ -108,7 +108,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="966" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ โมจนาธิปฺปาโย อญฺญตรํ สามเณรํ เอตทโวจ—  “เอหิ เม ตฺวํ, อาวุโส สามเณร, องฺคชาตํ คณฺหาหี”ติ. โส ตสฺส องฺคชาตํ อคฺคเหสิ. ตเสฺสว อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน สํฆาทิเสสนฺ”ติ. (29)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ โมจนาธิปฺปาโย อญฺญตรํ สามเณรํ เอตทโวจ—  “เอหิ เม ตฺวํ, อาวุโส สามเณร, องฺคชาตํ คณฺหาหี”ติ. โส ตสฺส องฺคชาตํ อคฺคเหสิ. ตเสฺสว อสุจิ มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน สํฆาทิเสสนฺ”ติ. (29)
 </Paragraph>
 
 <Paragraph number="967" book="para">
@@ -127,7 +127,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="970" book="para">
-เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน โมจนาธิปฺปายสฺส อากาเส กฏึ กมฺเปนฺตสฺส อสุจิ มุจฺจิ …เป…  อสุจิ น มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (35–36)
+เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน โมจนาธิปฺปายสฺส อากาเส กฏิํ กมฺเปนฺตสฺส อสุจิ มุจฺจิ …เป…  อสุจิ น มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (35–36)
 </Paragraph>
 
 <Paragraph number="971" book="para">
@@ -217,7 +217,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="991" book="para">
-เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน โมจนาธิปฺปายสฺส องฺคุฏฺเฐน องฺคชาตํ ฆฏฺเฏนฺตสฺส อสุจิ มุจฺจิ …เป…  อสุจิ น มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ สํฆาทิเสสํ อาปตฺตึ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (69–70)
+เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน โมจนาธิปฺปายสฺส องฺคุฏฺเฐน องฺคชาตํ ฆฏฺเฏนฺตสฺส อสุจิ มุจฺจิ …เป…  อสุจิ น มุจฺจิ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ สํฆาทิเสสํ อาปตฺติํ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (69–70)
 
 </Paragraph>
 </Division>
