--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-12.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-12.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="424" book="para">
 
 <Paragraph number="1729" book="para">
-เตน สมเยน พุทฺโธ ภควา โกสมฺพิยํ วิหรติ โฆสิตาราเม. เตน โข ปน สมเยน อายสฺมา ฉนฺโน อนาจารํ อาจรติ. ภิกฺขู เอวมาหํสุ—  “มาวุโส ฉนฺน, เอวรูปํ อกาสิ. เนตํ กปฺปตี”ติ. โส เอวํ วเทติ—  “กึ นุ โข นาม ตุเมฺห, อาวุโส, มํ วตฺตพฺพํ มญฺญถ? อหํ โข นาม ตุเมฺห วเทยฺยํ. อมฺหากํ พุทฺโธ อมฺหากํ ธมฺโม อมฺหากํ อยฺยปุตฺเตน ธมฺโม อภิสมิโต. เสยฺยถาปิ นาม มหาวาโต วายนฺโต ติณกฏฺฐปณฺณสฏํ เอกโต อุสฺสาเรยฺย, เสยฺยถา วา ปน นที ปพฺพเตยฺยา สงฺขเสวาลปณกํ เอกโต อุสฺสาเรยฺย; เอวเมว ตุเมฺห นานานามา นานาโคตฺตา นานาชจฺจา นานากุลา ปพฺพชิตา เอกโต อุสฺสาริตา. กึ นุ โข นาม ตุเมฺห, อาวุโส, มํ วตฺตพฺพํ มญฺญถ? อหํ โข นาม ตุเมฺห วเทยฺยํ. อมฺหากํ พุทฺโธ อมฺหากํ ธมฺโม อมฺหากํ อยฺยปุตฺเตน ธมฺโม อภิสมิโต”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา ฉนฺโน ภิกฺขูหิ สหธมฺมิกํ วุจฺจมาโน อตฺตานํ อวจนียํ กริสฺสตี”ติ.
+เตน สมเยน พุทฺโธ ภควา โกสมฺพิยํ วิหรติ โฆสิตาราเม. เตน โข ปน สมเยน อายสฺมา ฉนฺโน อนาจารํ อาจรติ. ภิกฺขู เอวมาหํสุ—  “มาวุโส ฉนฺน, เอวรูปํ อกาสิ. เนตํ กปฺปตี”ติ. โส เอวํ วเทติ—  “กิํ นุ โข นาม ตุเมฺห, อาวุโส, มํ วตฺตพฺพํ มญฺญถ? อหํ โข นาม ตุเมฺห วเทยฺยํ. อมฺหากํ พุทฺโธ อมฺหากํ ธมฺโม อมฺหากํ อยฺยปุตฺเตน ธมฺโม อภิสมิโต. เสยฺยถาปิ นาม มหาวาโต วายนฺโต ติณกฏฺฐปณฺณสฏํ เอกโต อุสฺสาเรยฺย, เสยฺยถา วา ปน นที ปพฺพเตยฺยา สงฺขเสวาลปณกํ เอกโต อุสฺสาเรยฺย; เอวเมว ตุเมฺห นานานามา นานาโคตฺตา นานาชจฺจา นานากุลา ปพฺพชิตา เอกโต อุสฺสาริตา. กิํ นุ โข นาม ตุเมฺห, อาวุโส, มํ วตฺตพฺพํ มญฺญถ? อหํ โข นาม ตุเมฺห วเทยฺยํ. อมฺหากํ พุทฺโธ อมฺหากํ ธมฺโม อมฺหากํ อยฺยปุตฺเตน ธมฺโม อภิสมิโต”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา ฉนฺโน ภิกฺขูหิ สหธมฺมิกํ วุจฺจมาโน อตฺตานํ อวจนียํ กริสฺสตี”ติ.
 </Paragraph>
 
 <Paragraph number="1730" book="para">
@@ -36,7 +36,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="426" book="para">
 
 <Paragraph number="1732" book="para">
-<Emphasis>ภิกฺขู ปเนว ทุพฺพจชาติโก โหตี</Emphasis>ติ ทุพฺพโจ โหติ โทวจสฺสกรเณหิ ธมฺเมหิ สมนฺนาคโต อกฺขโม อปฺปทกฺขิณคฺคาหี อนุสาสนึ.
+<Emphasis>ภิกฺขู ปเนว ทุพฺพจชาติโก โหตี</Emphasis>ติ ทุพฺพโจ โหติ โทวจสฺสกรเณหิ ธมฺเมหิ สมนฺนาคโต อกฺขโม อปฺปทกฺขิณคฺคาหี อนุสาสนิํ.
 </Paragraph>
 
 <Paragraph number="1733" book="para">
