--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-2.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-2.mdx
@@ -26,7 +26,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="994" book="para">
-อญฺญตโรปิ พฺราหฺมโณ สปชาปติโก เยนายสฺมา อุทายี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายึ เอตทโวจ—  “อิจฺฉาม มยํ โภโต อุทายิสฺส วิหารํ เปกฺขิตุนฺ”ติ. “เตน หิ, พฺราหฺมณ, เปกฺขสฺสู”ติ, อวาปุรณํ อาทาย ฆฏิกํ อุคฺฆาเฏตฺวา กวาฏํ ปณาเมตฺวา วิหารํ ปาวิสิ. โสปิ โข พฺราหฺมโณ อายสฺมโต อุทายิสฺส ปิฏฺฐิโต ปาวิสิ. สาปิ โข พฺราหฺมณี ตสฺส พฺราหฺมณสฺส ปิฏฺฐิโต ปาวิสิ. อถ โข อายสฺมา อุทายี เอกจฺเจ วาตปาเน วิวรนฺโต เอกจฺเจ วาตปาเน ถเกนฺโต คพฺภํ อนุปริคนฺตฺวา ปิฏฺฐิโต อาคนฺตฺวา ตสฺสา พฺราหฺมณิยา องฺคมงฺคานิ ปรามสิ. อถ โข โส พฺราหฺมโณ อายสฺมตา อุทายินา สทฺธึ ปฏิสมฺโมทิตฺวา อคมาสิ. อถ โข โส พฺราหฺมโณ อตฺตมโน อตฺตมนวาจํ นิจฺฉาเรสิ—  “อุฬารา อิเม สมณา สกฺยปุตฺติยา เย อิเม เอวรูเป อรญฺเญ วิหรนฺติ. ภวมฺปิ อุทายี อุฬาโร โย เอวรูเป อรญฺเญ วิหรตี”ติ.
+อญฺญตโรปิ พฺราหฺมโณ สปชาปติโก เยนายสฺมา อุทายี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายิํ เอตทโวจ—  “อิจฺฉาม มยํ โภโต อุทายิสฺส วิหารํ เปกฺขิตุนฺ”ติ. “เตน หิ, พฺราหฺมณ, เปกฺขสฺสู”ติ, อวาปุรณํ อาทาย ฆฏิกํ อุคฺฆาเฏตฺวา กวาฏํ ปณาเมตฺวา วิหารํ ปาวิสิ. โสปิ โข พฺราหฺมโณ อายสฺมโต อุทายิสฺส ปิฏฺฐิโต ปาวิสิ. สาปิ โข พฺราหฺมณี ตสฺส พฺราหฺมณสฺส ปิฏฺฐิโต ปาวิสิ. อถ โข อายสฺมา อุทายี เอกจฺเจ วาตปาเน วิวรนฺโต เอกจฺเจ วาตปาเน ถเกนฺโต คพฺภํ อนุปริคนฺตฺวา ปิฏฺฐิโต อาคนฺตฺวา ตสฺสา พฺราหฺมณิยา องฺคมงฺคานิ ปรามสิ. อถ โข โส พฺราหฺมโณ อายสฺมตา อุทายินา สทฺธิํ ปฏิสมฺโมทิตฺวา อคมาสิ. อถ โข โส พฺราหฺมโณ อตฺตมโน อตฺตมนวาจํ นิจฺฉาเรสิ—  “อุฬารา อิเม สมณา สกฺยปุตฺติยา เย อิเม เอวรูเป อรญฺเญ วิหรนฺติ. ภวมฺปิ อุทายี อุฬาโร โย เอวรูเป อรญฺเญ วิหรตี”ติ.
 
 
 
@@ -40,14 +40,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="996" book="para">
-อโสฺสสุํ โข ภิกฺขุ ตสฺส พฺราหฺมณสฺส อุชฺฌายนฺตสฺส ขิยฺยนฺตสฺส วิปาเจนฺตสฺส. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา อุทายี มาตุคาเมน สทฺธึ กายสํสคฺคํ สมาปชฺชิสฺสตี”ติ.
+อโสฺสสุํ โข ภิกฺขุ ตสฺส พฺราหฺมณสฺส อุชฺฌายนฺตสฺส ขิยฺยนฺตสฺส วิปาเจนฺตสฺส. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา อุทายี มาตุคาเมน สทฺธิํ กายสํสคฺคํ สมาปชฺชิสฺสตี”ติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="997" book="para">
-อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายึ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ อุทายึ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, อุทายิ, มาตุคาเมน สทฺธึ กายสํสคฺคํ สมาปชฺชสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริส, อนนุโลมิกํ อปฺปติรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตฺวํ, โมฆปุริส, มาตุคาเมน สทฺธึ กายสํสคฺคํ สมาปชฺชิสฺสสิ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน วิราคาย ธมฺโม เทสิโต โน สราคาย …เป…  กามปริฬาหานํ วูปสโม อกฺขาโต. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายิํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ อุทายิํ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, อุทายิ, มาตุคาเมน สทฺธิํ กายสํสคฺคํ สมาปชฺชสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริส, อนนุโลมิกํ อปฺปติรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตฺวํ, โมฆปุริส, มาตุคาเมน สทฺธิํ กายสํสคฺคํ สมาปชฺชิสฺสสิ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน วิราคาย ธมฺโม เทสิโต โน สราคาย …เป…  กามปริฬาหานํ วูปสโม อกฺขาโต. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 
 
 
@@ -57,7 +57,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="270" book="para">
 
 <Paragraph number="998" book="para">
-<Emphasis>“โย ปน ภิกฺขุ โอติณฺโณ วิปริณเตน จิตฺเตน มาตุคาเมน สทฺธึ กายสํสคฺคํ สมาปชฺเชยฺย หตฺถคฺคาหํ วา เวณิคฺคาหํ วา อญฺญตรสฺส วา อญฺญตรสฺส วา องฺคสฺส ปรามสนํ, สํฆาทิเสโส”</Emphasis>ติ. (*2*:<Emphasis>6</Emphasis>)
+<Emphasis>“โย ปน ภิกฺขุ โอติณฺโณ วิปริณเตน จิตฺเตน มาตุคาเมน สทฺธิํ กายสํสคฺคํ สมาปชฺเชยฺย หตฺถคฺคาหํ วา เวณิคฺคาหํ วา อญฺญตรสฺส วา อญฺญตรสฺส วา องฺคสฺส ปรามสนํ, สํฆาทิเสโส”</Emphasis>ติ. (*2*:<Emphasis>6</Emphasis>)
 
 
 
@@ -67,7 +67,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="271" book="para">
 
 <Paragraph number="999" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 
 
 
@@ -81,7 +81,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1001" book="para">
-<Emphasis>วิปริณตนฺ</Emphasis>ติ รตฺตมฺปิ จิตฺตํ วิปริณตํ. ทุฏฺฐมฺปิ จิตฺตํ วิปริณตํ. มูฬฺหมฺปิ จิตฺตํ วิปริณตํ. อปิ จ รตฺตํ จิตฺตํ อิมสฺมึ อตฺเถ อธิปฺเปตํ วิปริณตนฺติ.
+<Emphasis>วิปริณตนฺ</Emphasis>ติ รตฺตมฺปิ จิตฺตํ วิปริณตํ. ทุฏฺฐมฺปิ จิตฺตํ วิปริณตํ. มูฬฺหมฺปิ จิตฺตํ วิปริณตํ. อปิ จ รตฺตํ จิตฺตํ อิมสฺมิํ อตฺเถ อธิปฺเปตํ วิปริณตนฺติ.
 
 
 
