--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-2/1-2-2-2.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-2/1-2-2-2.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="281" book="para">
 
 <Paragraph number="1113" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ มาตุยา มาตุเปเมน อามสิ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ สํฆาทิเสสํ อาปตฺตึ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ทุกฺกฏสฺสา”ติ. (1)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ มาตุยา มาตุเปเมน อามสิ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ สํฆาทิเสสํ อาปตฺติํ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ทุกฺกฏสฺสา”ติ. (1)
 </Paragraph>
 
 <Paragraph number="1114" book="para">
@@ -26,7 +26,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1115" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ ปุราณทุติยิกาย กายสํสคฺคํ สมาปชฺชิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน สํฆาทิเสสนฺ”ติ. (4)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ ปุราณทุติยิกาย กายสํสคฺคํ สมาปชฺชิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน สํฆาทิเสสนฺ”ติ. (4)
 </Paragraph>
 
 <Paragraph number="1116" book="para">
@@ -38,7 +38,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1118" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สุตฺติตฺถิยา กายสํสคฺคํ สมาปชฺชิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน สํฆาทิเสสนฺ”ติ. (7)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สุตฺติตฺถิยา กายสํสคฺคํ สมาปชฺชิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน สํฆาทิเสสนฺ”ติ. (7)
 </Paragraph>
 
 <Paragraph number="1119" book="para">
@@ -65,7 +65,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1124" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อิตฺถึ ปฏิปเถ ปสฺสิตฺวา สารตฺโต อํสกูเฏน ปหารํ อทาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน สํฆาทิเสสนฺ”ติ. (13)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อิตฺถิํ ปฏิปเถ ปสฺสิตฺวา สารตฺโต อํสกูเฏน ปหารํ อทาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน สํฆาทิเสสนฺ”ติ. (13)
 </Paragraph>
 
 <Paragraph number="1125" book="para">
@@ -85,15 +85,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1129" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สารตฺโต อิตฺถึ ปตฺเตน ปณาเมสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (18)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สารตฺโต อิตฺถิํ ปตฺเตน ปณาเมสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (18)
 </Paragraph>
 
 <Paragraph number="1130" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อิตฺถิยา วนฺทนฺติยา สารตฺโต ปาทํ อุจฺจาเรสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน สํฆาทิเสสนฺ”ติ. (19)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อิตฺถิยา วนฺทนฺติยา สารตฺโต ปาทํ อุจฺจาเรสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน สํฆาทิเสสนฺ”ติ. (19)
 </Paragraph>
 
 <Paragraph number="1131" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อิตฺถึ คเหสฺสามีติ วายมิตฺวา น ฉุปิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ทุกฺกฏสฺสา”ติ. (20)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อิตฺถิํ คเหสฺสามีติ วายมิตฺวา น ฉุปิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ทุกฺกฏสฺสา”ติ. (20)
 
 </Paragraph>
 </Division>
