--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-3.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-3.mdx
@@ -19,14 +19,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="283" book="para">
 
 <Paragraph number="1133" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา อุทายี อรญฺเญ วิหรติ. ตสฺสายสฺมโต วิหาโร อภิรูโป โหติ ทสฺสนีโย ปาสาทิโก. เตน โข ปน สมเยน สมฺพหุลา อิตฺถิโย อารามํ อาคมํสุ วิหารเปกฺขิกาโย. อถ โข ตา อิตฺถิโย เยนายสฺมา อุทายี เตนุปสงฺกมึสุ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายึ เอตทโวจุํ—  “อิจฺฉาม มยํ, ภนฺเต, อยฺยสฺส วิหารํ เปกฺขิตุนฺ”ติ. อถ โข อายสฺมา อุทายี ตา อิตฺถิโย วิหารํ เปกฺขาเปตฺวา ตาสํ อิตฺถีนํ วจฺจมคฺคํ ปสฺสาวมคฺคํ อาทิสฺส วณฺณมฺปิ ภณติ อวณฺณมฺปิ ภณติ ยาจติปิ อายาจติปิ ปุจฺฉติปิ ปฏิปุจฺฉติปิ อาจิกฺขติปิ อนุสาสติปิ อกฺโกสติปิ. ยา ตา อิตฺถิโย ฉินฺนิกา ธุตฺติกา อหิริกาโย ตา อายสฺมตา อุทายินา สทฺธึ อุหสนฺติปิ อุลฺลปนฺติปิ อุชฺชคฺฆนฺติปิ อุปฺปณฺเฑนฺติปิ. ยา ปน ตา อิตฺถิโย หิริมนา ตา นิกฺขมิตฺวา ภิกฺขู อุชฺฌาเปนฺติ—  “อิทํ, ภนฺเต, นจฺฉนฺนํ นปฺปติรูปํ. สามิเกนปิ มยํ เอวํ วุตฺตา น อิจฺเฉยฺยาม, กึ ปนาเยฺยน อุทายินา”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา อุทายี มาตุคามํ ทุฏฺฐุลฺลาหิ วาจาหิ โอภาสิสฺสตี”ติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา อุทายี อรญฺเญ วิหรติ. ตสฺสายสฺมโต วิหาโร อภิรูโป โหติ ทสฺสนีโย ปาสาทิโก. เตน โข ปน สมเยน สมฺพหุลา อิตฺถิโย อารามํ อาคมํสุ วิหารเปกฺขิกาโย. อถ โข ตา อิตฺถิโย เยนายสฺมา อุทายี เตนุปสงฺกมิํสุ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายิํ เอตทโวจุํ—  “อิจฺฉาม มยํ, ภนฺเต, อยฺยสฺส วิหารํ เปกฺขิตุนฺ”ติ. อถ โข อายสฺมา อุทายี ตา อิตฺถิโย วิหารํ เปกฺขาเปตฺวา ตาสํ อิตฺถีนํ วจฺจมคฺคํ ปสฺสาวมคฺคํ อาทิสฺส วณฺณมฺปิ ภณติ อวณฺณมฺปิ ภณติ ยาจติปิ อายาจติปิ ปุจฺฉติปิ ปฏิปุจฺฉติปิ อาจิกฺขติปิ อนุสาสติปิ อกฺโกสติปิ. ยา ตา อิตฺถิโย ฉินฺนิกา ธุตฺติกา อหิริกาโย ตา อายสฺมตา อุทายินา สทฺธิํ อุหสนฺติปิ อุลฺลปนฺติปิ อุชฺชคฺฆนฺติปิ อุปฺปณฺเฑนฺติปิ. ยา ปน ตา อิตฺถิโย หิริมนา ตา นิกฺขมิตฺวา ภิกฺขู อุชฺฌาเปนฺติ—  “อิทํ, ภนฺเต, นจฺฉนฺนํ นปฺปติรูปํ. สามิเกนปิ มยํ เอวํ วุตฺตา น อิจฺเฉยฺยาม, กิํ ปนาเยฺยน อุทายินา”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา อุทายี มาตุคามํ ทุฏฺฐุลฺลาหิ วาจาหิ โอภาสิสฺสตี”ติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="1134" book="para">
-อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายึ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ อุทายึ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, อุทายิ, มาตุคามํ ทุฏฺฐุลฺลาหิ วาจาหิ โอภาสสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริส, อนนุโลมิกํ อปฺปติรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตฺวํ, โมฆปุริส, มาตุคามํ ทุฏฺฐุลฺลาหิ วาจาหิ โอภาสิสฺสสิ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน วิราคาย ธมฺโม เทสิโต โน สราคาย …เป…  กามปริฬาหานํ วูปสโม อกฺขาโต. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายิํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ อุทายิํ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, อุทายิ, มาตุคามํ ทุฏฺฐุลฺลาหิ วาจาหิ โอภาสสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริส, อนนุโลมิกํ อปฺปติรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตฺวํ, โมฆปุริส, มาตุคามํ ทุฏฺฐุลฺลาหิ วาจาหิ โอภาสิสฺสสิ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน วิราคาย ธมฺโม เทสิโต โน สราคาย …เป…  กามปริฬาหานํ วูปสโม อกฺขาโต. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 
 
 
@@ -36,7 +36,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="284" book="para">
 
 <Paragraph number="1135" book="para">
-<Emphasis>“โย ปน ภิกฺขุ โอติณฺโณ วิปริณเตน จิตฺเตน มาตุคามํ ทุฏฺฐุลฺลาหิ วาจาหิ โอภาเสยฺย ยถา ตํ ยุวา ยุวตึ เมถุนุปสํหิตาหิ, สํฆาทิเสโส”</Emphasis>ติ. (*3*:<Emphasis>7</Emphasis>)
+<Emphasis>“โย ปน ภิกฺขุ โอติณฺโณ วิปริณเตน จิตฺเตน มาตุคามํ ทุฏฺฐุลฺลาหิ วาจาหิ โอภาเสยฺย ยถา ตํ ยุวา ยุวติํ เมถุนุปสํหิตาหิ, สํฆาทิเสโส”</Emphasis>ติ. (*3*:<Emphasis>7</Emphasis>)
 
 
 
@@ -46,7 +46,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="285" book="para">
 
 <Paragraph number="1136" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 
 
 
@@ -60,7 +60,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1138" book="para">
-<Emphasis>วิปริณตนฺ</Emphasis>ติ รตฺตมฺปิ จิตฺตํ วิปริณตํ, ทุฏฺฐมฺปิ จิตฺตํ วิปริณตํ มูฬฺหมฺปิ จิตฺตํ วิปริณตํ. อปิ จ รตฺตํ จิตฺตํ อิมสฺมึ อตฺเถ อธิปฺเปตํ วิปริณตนฺติ.
+<Emphasis>วิปริณตนฺ</Emphasis>ติ รตฺตมฺปิ จิตฺตํ วิปริณตํ, ทุฏฺฐมฺปิ จิตฺตํ วิปริณตํ มูฬฺหมฺปิ จิตฺตํ วิปริณตํ. อปิ จ รตฺตํ จิตฺตํ อิมสฺมิํ อตฺเถ อธิปฺเปตํ วิปริณตนฺติ.
 
 
 
@@ -88,7 +88,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1142" book="para">
-<Emphasis>ยถา ตํ ยุวา ยุวตินฺ</Emphasis>ติ ทหโร ทหรึ, ตรุโณ ตรุณึ, กามโภคี กามโภคินึ.
+<Emphasis>ยถา ตํ ยุวา ยุวตินฺ</Emphasis>ติ ทหโร ทหริํ, ตรุโณ ตรุณิํ, กามโภคี กามโภคินิํ.
 
 
 
