--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-4.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-4.mdx
@@ -19,28 +19,28 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="290" book="para">
 
 <Paragraph number="1180" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา อุทายี สาวตฺถิยํ กุลูปโก โหติ, พหุกานิ กุลานิ อุปสงฺกมติ. เตน โข ปน สมเยน อญฺญตรา อิตฺถี มตปติกา อภิรูปา โหติ ทสฺสนียา ปาสาทิกา. อถ โข อายสฺมา อุทายี ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรมาทาย เยน ตสฺสา อิตฺถิยา นิเวสนํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปญฺญตฺเต อาสเน นิสีทิ. อถ โข สา อิตฺถี เยนายสฺมา อุทายี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายึ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺนํ โข ตํ อิตฺถึ อายสฺมา อุทายี ธมฺมิยา กถาย สนฺทเสฺสสิ สมาทเปสิ สมุตฺเตเชสิ สมฺปหํเสสิ. อถ โข สา อิตฺถี อายสฺมตา อุทายินา ธมฺมิยา กถาย สนฺทสฺสิตา สมาทปิตา สมุตฺเตชิตา สมฺปหํสิตา อายสฺมนฺตํ อุทายึ เอตทโวจ—  “วเทยฺยาถ, ภนฺเต, เยน อตฺโถ. ปฏิพลา มยํ อยฺยสฺส ทาตุํ ยทิทํ จีวรปิณฺฑปาตเสนาสนคิลานปฺปจฺจยเภสชฺชปริกฺขารนฺ”ติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา อุทายี สาวตฺถิยํ กุลูปโก โหติ, พหุกานิ กุลานิ อุปสงฺกมติ. เตน โข ปน สมเยน อญฺญตรา อิตฺถี มตปติกา อภิรูปา โหติ ทสฺสนียา ปาสาทิกา. อถ โข อายสฺมา อุทายี ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรมาทาย เยน ตสฺสา อิตฺถิยา นิเวสนํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปญฺญตฺเต อาสเน นิสีทิ. อถ โข สา อิตฺถี เยนายสฺมา อุทายี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายิํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺนํ โข ตํ อิตฺถิํ อายสฺมา อุทายี ธมฺมิยา กถาย สนฺทเสฺสสิ สมาทเปสิ สมุตฺเตเชสิ สมฺปหํเสสิ. อถ โข สา อิตฺถี อายสฺมตา อุทายินา ธมฺมิยา กถาย สนฺทสฺสิตา สมาทปิตา สมุตฺเตชิตา สมฺปหํสิตา อายสฺมนฺตํ อุทายิํ เอตทโวจ—  “วเทยฺยาถ, ภนฺเต, เยน อตฺโถ. ปฏิพลา มยํ อยฺยสฺส ทาตุํ ยทิทํ จีวรปิณฺฑปาตเสนาสนคิลานปฺปจฺจยเภสชฺชปริกฺขารนฺ”ติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="1181" book="para">
-“น โข เต, ภคินิ, อมฺหากํ ทุลฺลภา ยทิทํ จีวรปิณฺฑปาตเสนาสนคิลานปฺปจฺจยเภสชฺชปริกฺขารา. อปิ จ โย อมฺหากํ ทุลฺลโภ ตํ เทหี”ติ. “กึ, ภนฺเต”ติ? “เมถุนธมฺมนฺ”ติ. “อตฺโถ, ภนฺเต”ติ? “อตฺโถ, ภคินี”ติ. “เอหิ, ภนฺเต”ติ, โอวรกํ ปวิสิตฺวา สาฏกํ นิกฺขิปิตฺวา มญฺจเก อุตฺตานา นิปชฺชิ. อถ โข อายสฺมา อุทายี เยน สา อิตฺถี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา—  “โก อิมํ วสลํ ทุคฺคนฺธํ อามสิสฺสตี”ติ, นิฏฺฐุภิตฺวา ปกฺกามิ.
+“น โข เต, ภคินิ, อมฺหากํ ทุลฺลภา ยทิทํ จีวรปิณฺฑปาตเสนาสนคิลานปฺปจฺจยเภสชฺชปริกฺขารา. อปิ จ โย อมฺหากํ ทุลฺลโภ ตํ เทหี”ติ. “กิํ, ภนฺเต”ติ? “เมถุนธมฺมนฺ”ติ. “อตฺโถ, ภนฺเต”ติ? “อตฺโถ, ภคินี”ติ. “เอหิ, ภนฺเต”ติ, โอวรกํ ปวิสิตฺวา สาฏกํ นิกฺขิปิตฺวา มญฺจเก อุตฺตานา นิปชฺชิ. อถ โข อายสฺมา อุทายี เยน สา อิตฺถี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา—  “โก อิมํ วสลํ ทุคฺคนฺธํ อามสิสฺสตี”ติ, นิฏฺฐุภิตฺวา ปกฺกามิ.
 
 
 
 </Paragraph>
 
 <Paragraph number="1182" book="para">
-อถ โข สา อิตฺถี อุชฺฌายติ ขิยฺยติ วิปาเจติ—  “อลชฺชิโน อิเม สมณา สกฺยปุตฺติยา ทุสฺสีลา มุสาวาทิโน. อิเม หิ นาม ธมฺมจาริโน สมจาริโน พฺรหฺมจาริโน สจฺจวาทิโน สีลวนฺโต กลฺยาณธมฺมา ปฏิชานิสฺสนฺติ. นตฺถิ อิเมสํ สามญฺญํ นตฺถิ อิเมสํ พฺรหฺมญฺญํ, นฏฺฐํ อิเมสํ สามญฺญํ นฏฺฐํ อิเมสํ พฺรหฺมญฺญํ, กุโต อิเมสํ สามญฺญํ กุโต อิเมสํ พฺรหฺมญฺญํ, อปคตา อิเม สามญฺญา อปคตา อิเม พฺรหฺมญฺญา. กถญฺหิ นาม สมโณ อุทายี มํ สามํ เมถุนธมฺมํ ยาจิตฺวา, ‘โก อิมํ วสลํ ทุคฺคนฺธํ อามสิสฺสตี’ติ นิฏฺฐุภิตฺวา ปกฺกมิสฺสติ. กึ เม ปาปกํ กึ เม ทุคฺคนฺธํ, กสฺสาหํ เกน หายามี”ติ?
+อถ โข สา อิตฺถี อุชฺฌายติ ขิยฺยติ วิปาเจติ—  “อลชฺชิโน อิเม สมณา สกฺยปุตฺติยา ทุสฺสีลา มุสาวาทิโน. อิเม หิ นาม ธมฺมจาริโน สมจาริโน พฺรหฺมจาริโน สจฺจวาทิโน สีลวนฺโต กลฺยาณธมฺมา ปฏิชานิสฺสนฺติ. นตฺถิ อิเมสํ สามญฺญํ นตฺถิ อิเมสํ พฺรหฺมญฺญํ, นฏฺฐํ อิเมสํ สามญฺญํ นฏฺฐํ อิเมสํ พฺรหฺมญฺญํ, กุโต อิเมสํ สามญฺญํ กุโต อิเมสํ พฺรหฺมญฺญํ, อปคตา อิเม สามญฺญา อปคตา อิเม พฺรหฺมญฺญา. กถญฺหิ นาม สมโณ อุทายี มํ สามํ เมถุนธมฺมํ ยาจิตฺวา, ‘โก อิมํ วสลํ ทุคฺคนฺธํ อามสิสฺสตี’ติ นิฏฺฐุภิตฺวา ปกฺกมิสฺสติ. กิํ เม ปาปกํ กิํ เม ทุคฺคนฺธํ, กสฺสาหํ เกน หายามี”ติ?
 
 
 
 </Paragraph>
 
 <Paragraph number="1183" book="para">
-อญฺญาปิ อิตฺถิโย อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “อลชฺชิโน อิเม สมณา สกฺยปุตฺติยา ทุสฺสีลา มุสาวาทิโน …เป…  กถญฺหิ นาม สมโณ อุทายี อิมิสฺสา สามํ เมถุนธมฺมํ ยาจิตฺวา, ‘โก อิมํ วสลํ ทุคฺคนฺธํ อามสิสฺสตี’ติ นิฏฺฐุภิตฺวา ปกฺกมิสฺสติ. กึ อิมิสฺสา ปาปกํ กึ อิมิสฺสา ทุคฺคนฺธํ, กสฺสายํ เกน หายตี”ติ?
+อญฺญาปิ อิตฺถิโย อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “อลชฺชิโน อิเม สมณา สกฺยปุตฺติยา ทุสฺสีลา มุสาวาทิโน …เป…  กถญฺหิ นาม สมโณ อุทายี อิมิสฺสา สามํ เมถุนธมฺมํ ยาจิตฺวา, ‘โก อิมํ วสลํ ทุคฺคนฺธํ อามสิสฺสตี’ติ นิฏฺฐุภิตฺวา ปกฺกมิสฺสติ. กิํ อิมิสฺสา ปาปกํ กิํ อิมิสฺสา ทุคฺคนฺธํ, กสฺสายํ เกน หายตี”ติ?
 
 
 
@@ -54,7 +54,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1185" book="para">
-อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายึ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ อุทายึ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, อุทายิ, มาตุคามสฺส สนฺติเก อตฺตกามปาริจริยาย วณฺณํ ภาสสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริส, อนนุโลมิกํ อปฺปติรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตฺวํ, โมฆปุริส, มาตุคามสฺส สนฺติเก อตฺตกามปาริจริยาย วณฺณํ ภาสิสฺสสิ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน วิราคาย ธมฺโม เทสิโต โน สราคาย …เป…  กามปริฬาหานํ วูปสโม อกฺขาโต? เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายิํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ อุทายิํ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, อุทายิ, มาตุคามสฺส สนฺติเก อตฺตกามปาริจริยาย วณฺณํ ภาสสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริส, อนนุโลมิกํ อปฺปติรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตฺวํ, โมฆปุริส, มาตุคามสฺส สนฺติเก อตฺตกามปาริจริยาย วณฺณํ ภาสิสฺสสิ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน วิราคาย ธมฺโม เทสิโต โน สราคาย …เป…  กามปริฬาหานํ วูปสโม อกฺขาโต? เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 
 
 
@@ -64,7 +64,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="291" book="para">
 
 <Paragraph number="1186" book="para">
-<Emphasis>“โย ปน ภิกฺขุ โอติณฺโณ วิปริณเตน จิตฺเตน มาตุคามสฺส สนฺติเก อตฺตกามปาริจริยาย วณฺณํ ภาเสยฺย—  ‘เอตทคฺคํ, ภคินิ, ปาริจริยานํ ยา มาทิสํ สีลวนฺตํ กลฺยาณธมฺมํ พฺรหฺมจารึ เอเตน ธมฺเมน ปริจเรยฺยาติ เมถุนุปสํหิเตน’, สํฆาทิเสโส”</Emphasis>ติ. (*4*:<Emphasis>8</Emphasis>)
+<Emphasis>“โย ปน ภิกฺขุ โอติณฺโณ วิปริณเตน จิตฺเตน มาตุคามสฺส สนฺติเก อตฺตกามปาริจริยาย วณฺณํ ภาเสยฺย—  ‘เอตทคฺคํ, ภคินิ, ปาริจริยานํ ยา มาทิสํ สีลวนฺตํ กลฺยาณธมฺมํ พฺรหฺมจาริํ เอเตน ธมฺเมน ปริจเรยฺยาติ เมถุนุปสํหิเตน’, สํฆาทิเสโส”</Emphasis>ติ. (*4*:<Emphasis>8</Emphasis>)
 
 
 
@@ -74,7 +74,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="292" book="para">
 
 <Paragraph number="1187" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 
 
 
@@ -88,7 +88,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1189" book="para">
-<Emphasis>วิปริณตนฺ</Emphasis>ติ รตฺตมฺปิ จิตฺตํ วิปริณตํ, ทุฏฺฐมฺปิ จิตฺตํ วิปริณตํ, มูฬฺหมฺปิ จิตฺตํ วิปริณตํ. อปิ จ รตฺตํ จิตฺตํ อิมสฺมึ อตฺเถ อธิปฺเปตํ วิปริณตนฺติ.
+<Emphasis>วิปริณตนฺ</Emphasis>ติ รตฺตมฺปิ จิตฺตํ วิปริณตํ, ทุฏฺฐมฺปิ จิตฺตํ วิปริณตํ, มูฬฺหมฺปิ จิตฺตํ วิปริณตํ. อปิ จ รตฺตํ จิตฺตํ อิมสฺมิํ อตฺเถ อธิปฺเปตํ วิปริณตนฺติ.
 
 
 
