--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-4/1-2-4-1.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-4/1-2-4-1.mdx
@@ -18,6 +18,6 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Paragraph number="1211" type="verses" book="para">
 _กถํ วญฺฌา ลเภ ปุตฺตํ,_  
 _ปิยา จ สุภคา สิยํ;_  
-_กึ ทชฺชํ เกนุปฏฺเฐยฺยํ,_  
+_กิํ ทชฺชํ เกนุปฏฺเฐยฺยํ,_  
 _กถํ คจฺเฉยฺยํ สุคฺคตินฺติ._
 </Paragraph>
