--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-5.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-5.mdx
@@ -19,7 +19,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="296" book="para">
 
 <Paragraph number="1220" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา อุทายี สาวตฺถิยํ กุลูปโก โหติ. พหุกานิ กุลานิ อุปสงฺกมติ. ยตฺถ ปสฺสติ กุมารกํ วา อปชาปติกํ, กุมาริกํ วา อปติกํ, กุมารกสฺส มาตาปิตูนํ สนฺติเก กุมาริกาย วณฺณํ ภณติ—  “อมุกสฺส กุลสฺส กุมาริกา อภิรูปา ทสฺสนียา ปาสาทิกา ปณฺฑิตา พฺยตฺตา เมธาวินี ทกฺขา อนลสา. ฉนฺนา สา กุมาริกา อิมสฺส กุมารกสฺสา”ติ. เต เอวํ วทนฺติ—  “เอเต โข, ภนฺเต, อเมฺห น ชานนฺติ—  ‘เก วา อิเม กสฺส วา’ติ. สเจ, ภนฺเต, อโยฺย ทาเปยฺย อาเนยฺยาม มยํ ตํ กุมาริกํ อิมสฺส กุมารกสฺสา”ติ. กุมาริกาย มาตาปิตูนํ สนฺติเก กุมารกสฺส วณฺณํ ภณติ—  “อมุกสฺส กุลสฺส กุมารโก อภิรูโป ทสฺสนีโย ปาสาทิโก ปณฺฑิโต พฺยตฺโต เมธาวี ทกฺโข อนลโส. ฉนฺนายํ กุมาริกา ตสฺส กุมารกสฺสา”ติ. เต เอวํ วทนฺติ—  “เอเต โข, ภนฺเต, อเมฺห น ชานนฺติ—  ‘เก วา อิเม กสฺส วา’ติ, กิสฺมึ วิย กุมาริกาย วตฺตุํ. สเจ, ภนฺเต, อโยฺย ยาจาเปยฺย ทชฺเชยฺยาม มยํ อิมํ กุมาริกํ ตสฺส กุมารกสฺสา”ติ. เอเตเนว อุปาเยน อาวาหานิปิ การาเปติ, วิวาหานิปิ การาเปติ, วาเรยฺยานิปิ การาเปติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา อุทายี สาวตฺถิยํ กุลูปโก โหติ. พหุกานิ กุลานิ อุปสงฺกมติ. ยตฺถ ปสฺสติ กุมารกํ วา อปชาปติกํ, กุมาริกํ วา อปติกํ, กุมารกสฺส มาตาปิตูนํ สนฺติเก กุมาริกาย วณฺณํ ภณติ—  “อมุกสฺส กุลสฺส กุมาริกา อภิรูปา ทสฺสนียา ปาสาทิกา ปณฺฑิตา พฺยตฺตา เมธาวินี ทกฺขา อนลสา. ฉนฺนา สา กุมาริกา อิมสฺส กุมารกสฺสา”ติ. เต เอวํ วทนฺติ—  “เอเต โข, ภนฺเต, อเมฺห น ชานนฺติ—  ‘เก วา อิเม กสฺส วา’ติ. สเจ, ภนฺเต, อโยฺย ทาเปยฺย อาเนยฺยาม มยํ ตํ กุมาริกํ อิมสฺส กุมารกสฺสา”ติ. กุมาริกาย มาตาปิตูนํ สนฺติเก กุมารกสฺส วณฺณํ ภณติ—  “อมุกสฺส กุลสฺส กุมารโก อภิรูโป ทสฺสนีโย ปาสาทิโก ปณฺฑิโต พฺยตฺโต เมธาวี ทกฺโข อนลโส. ฉนฺนายํ กุมาริกา ตสฺส กุมารกสฺสา”ติ. เต เอวํ วทนฺติ—  “เอเต โข, ภนฺเต, อเมฺห น ชานนฺติ—  ‘เก วา อิเม กสฺส วา’ติ, กิสฺมิํ วิย กุมาริกาย วตฺตุํ. สเจ, ภนฺเต, อโยฺย ยาจาเปยฺย ทชฺเชยฺยาม มยํ อิมํ กุมาริกํ ตสฺส กุมารกสฺสา”ติ. เอเตเนว อุปาเยน อาวาหานิปิ การาเปติ, วิวาหานิปิ การาเปติ, วาเรยฺยานิปิ การาเปติ.
 
 
 
@@ -29,49 +29,49 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="297" book="para">
 
 <Paragraph number="1221" book="para">
-เตน โข ปน สมเยน อญฺญตริสฺสา ปุราณคณกิยา ธีตา อภิรูปา โหติ ทสฺสนียา ปาสาทิกา. ติโรคามกา อาชีวกสาวกา อาคนฺตฺวา ตํ คณกึ เอตทโวจุํ—  “เทหาเยฺย, อิมํ กุมาริกํ อมฺหากํ กุมารกสฺสา”ติ. สา เอวมาห—  “อหํ ขฺวโยฺย, ตุเมฺห น ชานามิ—  ‘เก วา อิเม กสฺส วา’ติ. อยญฺจ เม เอกธีติกา, ติโรคาโม จ คนฺตพฺโพ, นาหํ ทสฺสามี”ติ. มนุสฺสา เต อาชีวกสาวเก เอตทโวจุํ—  “กิสฺส ตุเมฺห, อโยฺย, อาคตตฺถา”ติ? “อิธ มยํ, อโยฺย, อมุกํ นาม คณกึ ธีตรํ ยาจิมฺหา อมฺหากํ กุมารกสฺส. สา เอวมาห—  ‘อหํ ขฺวโยฺย, ตุเมฺห น ชานามิ—  เก วา อิเม กสฺส วา’ติ. อยญฺจ เม เอกธีติกา, ติโรคาโม จ คนฺตพฺโพ, นาหํ ทสฺสามี”ติ. “กิสฺส ตุเมฺห, อโยฺย, ตํ คณกึ ธีตรํ ยาจิตฺถ? นนุ อโยฺย อุทายี วตฺตพฺโพ. อโยฺย อุทายี ทาเปสฺสตี”ติ.
+เตน โข ปน สมเยน อญฺญตริสฺสา ปุราณคณกิยา ธีตา อภิรูปา โหติ ทสฺสนียา ปาสาทิกา. ติโรคามกา อาชีวกสาวกา อาคนฺตฺวา ตํ คณกิํ เอตทโวจุํ—  “เทหาเยฺย, อิมํ กุมาริกํ อมฺหากํ กุมารกสฺสา”ติ. สา เอวมาห—  “อหํ ขฺวโยฺย, ตุเมฺห น ชานามิ—  ‘เก วา อิเม กสฺส วา’ติ. อยญฺจ เม เอกธีติกา, ติโรคาโม จ คนฺตพฺโพ, นาหํ ทสฺสามี”ติ. มนุสฺสา เต อาชีวกสาวเก เอตทโวจุํ—  “กิสฺส ตุเมฺห, อโยฺย, อาคตตฺถา”ติ? “อิธ มยํ, อโยฺย, อมุกํ นาม คณกิํ ธีตรํ ยาจิมฺหา อมฺหากํ กุมารกสฺส. สา เอวมาห—  ‘อหํ ขฺวโยฺย, ตุเมฺห น ชานามิ—  เก วา อิเม กสฺส วา’ติ. อยญฺจ เม เอกธีติกา, ติโรคาโม จ คนฺตพฺโพ, นาหํ ทสฺสามี”ติ. “กิสฺส ตุเมฺห, อโยฺย, ตํ คณกิํ ธีตรํ ยาจิตฺถ? นนุ อโยฺย อุทายี วตฺตพฺโพ. อโยฺย อุทายี ทาเปสฺสตี”ติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="1222" book="para">
-อถ โข เต อาชีวกสาวกา เยนายสฺมา อุทายี เตนุปสงฺกมึสุ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายึ เอตทโวจุํ—  “อิธ มยํ, ภนฺเต, อมุกํ นาม คณกึ ธีตรํ ยาจิมฺหา อมฺหากํ กุมารกสฺส. สา เอวมาห—  ‘อหํ ขฺวโยฺย, ตุเมฺห น ชานามิ—  เก วา อิเม กสฺส วาติ. อยญฺจ เม เอกธีติกา, ติโรคาโม จ คนฺตพฺโพ, นาหํ ทสฺสามี’ติ. สาธุ, ภนฺเต, อโยฺย ตํ คณกึ ธีตรํ ทาเปตุ อมฺหากํ กุมารกสฺสา”ติ.
+อถ โข เต อาชีวกสาวกา เยนายสฺมา อุทายี เตนุปสงฺกมิํสุ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายิํ เอตทโวจุํ—  “อิธ มยํ, ภนฺเต, อมุกํ นาม คณกิํ ธีตรํ ยาจิมฺหา อมฺหากํ กุมารกสฺส. สา เอวมาห—  ‘อหํ ขฺวโยฺย, ตุเมฺห น ชานามิ—  เก วา อิเม กสฺส วาติ. อยญฺจ เม เอกธีติกา, ติโรคาโม จ คนฺตพฺโพ, นาหํ ทสฺสามี’ติ. สาธุ, ภนฺเต, อโยฺย ตํ คณกิํ ธีตรํ ทาเปตุ อมฺหากํ กุมารกสฺสา”ติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="1223" book="para">
-อถ โข อายสฺมา อุทายี เยน สา คณกี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ตํ คณกึ เอตทโวจ—  “กิสฺสิเมสํ ธีตรํ น เทสี”ติ? “อหํ ขฺวยฺย, อิเม น ชานามิ—  ‘เก วา อิเม กสฺส วา’ติ. อยญฺจ เม เอกธีติกา, ติโรคาโม จ คนฺตพฺโพ, นาหํ ทสฺสามี”ติ. “เทหิเมสํ. อหํ อิเม ชานามี”ติ. “สเจ, ภนฺเต, อโยฺย ชานาติ, ทสฺสามี”ติ. อถ โข สา คณกี เตสํ อาชีวกสาวกานํ ธีตรํ อทาสิ. อถ โข เต อาชีวกสาวกา ตํ กุมาริกํ เนตฺวา มาสํเยว สุณิสโภเคน ภุญฺชึสุ. ตโต อปเรน ทาสิโภเคน ภุญฺชนฺติ.
+อถ โข อายสฺมา อุทายี เยน สา คณกี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ตํ คณกิํ เอตทโวจ—  “กิสฺสิเมสํ ธีตรํ น เทสี”ติ? “อหํ ขฺวยฺย, อิเม น ชานามิ—  ‘เก วา อิเม กสฺส วา’ติ. อยญฺจ เม เอกธีติกา, ติโรคาโม จ คนฺตพฺโพ, นาหํ ทสฺสามี”ติ. “เทหิเมสํ. อหํ อิเม ชานามี”ติ. “สเจ, ภนฺเต, อโยฺย ชานาติ, ทสฺสามี”ติ. อถ โข สา คณกี เตสํ อาชีวกสาวกานํ ธีตรํ อทาสิ. อถ โข เต อาชีวกสาวกา ตํ กุมาริกํ เนตฺวา มาสํเยว สุณิสโภเคน ภุญฺชิํสุ. ตโต อปเรน ทาสิโภเคน ภุญฺชนฺติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="1224" book="para">
-อถ โข สา กุมาริกา มาตุยา สนฺติเก ทูตํ ปาเหสิ—  “อหญฺหิ ทุคฺคตา ทุกฺขิตา, น สุขํ ลภามิ. มาสํเยว มํ สุณิสโภเคน ภุญฺชึสุ. ตโต อปเรน ทาสิโภเคน ภุญฺชนฺติ. อาคจฺฉตุ เม, มาตา, มํ เนสฺสตู”ติ. อถ โข สา คณกี เยน เต อาชีวกสาวกา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา เต อาชีวกสาวเก เอตทโวจ—  “มาโยฺย, อิมํ กุมาริกํ ทาสิโภเคน ภุญฺชิตฺถ. สุณิสโภเคน อิมํ กุมาริกํ ภุญฺชถา”ติ. เต เอวมาหํสุ—  “นตฺถมฺหากํ ตยา สทฺธึ อาหารูปหาโร, สมเณน สทฺธึ อมฺหากํ อาหารูปหาโร, คจฺฉ ตฺวํ, น มยํ ตํ ชานามา”ติ. อถ โข สา คณกี เตหิ อาชีวกสาวเกหิ อปสาทิตา ปุนเทว สาวตฺถึ ปจฺจาคญฺฉิ.
+อถ โข สา กุมาริกา มาตุยา สนฺติเก ทูตํ ปาเหสิ—  “อหญฺหิ ทุคฺคตา ทุกฺขิตา, น สุขํ ลภามิ. มาสํเยว มํ สุณิสโภเคน ภุญฺชิํสุ. ตโต อปเรน ทาสิโภเคน ภุญฺชนฺติ. อาคจฺฉตุ เม, มาตา, มํ เนสฺสตู”ติ. อถ โข สา คณกี เยน เต อาชีวกสาวกา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา เต อาชีวกสาวเก เอตทโวจ—  “มาโยฺย, อิมํ กุมาริกํ ทาสิโภเคน ภุญฺชิตฺถ. สุณิสโภเคน อิมํ กุมาริกํ ภุญฺชถา”ติ. เต เอวมาหํสุ—  “นตฺถมฺหากํ ตยา สทฺธิํ อาหารูปหาโร, สมเณน สทฺธิํ อมฺหากํ อาหารูปหาโร, คจฺฉ ตฺวํ, น มยํ ตํ ชานามา”ติ. อถ โข สา คณกี เตหิ อาชีวกสาวเกหิ อปสาทิตา ปุนเทว สาวตฺถิํ ปจฺจาคญฺฉิ.
 
 
 
 </Paragraph>
 
 <Paragraph number="1225" book="para">
-ทุติยมฺปิ โข สา กุมาริกา มาตุยา สนฺติเก ทูตํ ปาเหสิ—  “อหญฺหิ ทุคฺคตา ทุกฺขิตา, น สุขํ ลภามิ. มาสํเยว มํ สุณิสโภเคน ภุญฺชึสุ. ตโต อปเรน ทาสิโภเคน ภุญฺชนฺติ. อาคจฺฉตุ เม, มาตา, มํ เนสฺสตู”ติ. อถ โข สา คณกี เยนายสฺมา อุทายี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายึ เอตทโวจ—  “สา กิร, ภนฺเต, กุมาริกา ทุคฺคตา ทุกฺขิตา, น สุขํ ลภติ. มาสํเยว นํ สุณิสโภเคน ภุญฺชึสุ. ตโต อปเรน ทาสิโภเคน ภุญฺชนฺติ. วเทยฺยาถ, ภนฺเต—  ‘มาโยฺย, อิมํ กุมาริกํ ทาสิโภเคน ภุญฺชิตฺถ. สุณิสโภเคน อิมํ กุมาริกํ ภุญฺชถา’”ติ.
+ทุติยมฺปิ โข สา กุมาริกา มาตุยา สนฺติเก ทูตํ ปาเหสิ—  “อหญฺหิ ทุคฺคตา ทุกฺขิตา, น สุขํ ลภามิ. มาสํเยว มํ สุณิสโภเคน ภุญฺชิํสุ. ตโต อปเรน ทาสิโภเคน ภุญฺชนฺติ. อาคจฺฉตุ เม, มาตา, มํ เนสฺสตู”ติ. อถ โข สา คณกี เยนายสฺมา อุทายี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายิํ เอตทโวจ—  “สา กิร, ภนฺเต, กุมาริกา ทุคฺคตา ทุกฺขิตา, น สุขํ ลภติ. มาสํเยว นํ สุณิสโภเคน ภุญฺชิํสุ. ตโต อปเรน ทาสิโภเคน ภุญฺชนฺติ. วเทยฺยาถ, ภนฺเต—  ‘มาโยฺย, อิมํ กุมาริกํ ทาสิโภเคน ภุญฺชิตฺถ. สุณิสโภเคน อิมํ กุมาริกํ ภุญฺชถา’”ติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="1226" book="para">
-อถ โข อายสฺมา อุทายี เยน เต อาชีวกสาวกา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา เต อาชีวกสาวเก เอตทโวจ—  “มาโยฺย, อิมํ กุมาริกํ ทาสิโภเคน ภุชฺชิตฺถ. สุณิสโภเคน อิมํ กุมาริกํ ภุญฺชถา”ติ. เต เอวมาหํสุ—  “นตฺถมฺหากํ ตยา สทฺธึ อาหารูปหาโร, คณกิยา สทฺธึ อมฺหากํ อาหารูปหาโร. สมเณน ภวิตพฺพํ อพฺยาวเฏน. สมโณ อสฺส สุสมโณ, คจฺฉ ตฺวํ, น มยํ ตํ ชานามา”ติ. อถ โข อายสฺมา อุทายี เตหิ อาชีวกสาวเกหิ อปสาทิโต ปุนเทว สาวตฺถึ ปจฺจาคญฺฉิ.
+อถ โข อายสฺมา อุทายี เยน เต อาชีวกสาวกา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา เต อาชีวกสาวเก เอตทโวจ—  “มาโยฺย, อิมํ กุมาริกํ ทาสิโภเคน ภุชฺชิตฺถ. สุณิสโภเคน อิมํ กุมาริกํ ภุญฺชถา”ติ. เต เอวมาหํสุ—  “นตฺถมฺหากํ ตยา สทฺธิํ อาหารูปหาโร, คณกิยา สทฺธิํ อมฺหากํ อาหารูปหาโร. สมเณน ภวิตพฺพํ อพฺยาวเฏน. สมโณ อสฺส สุสมโณ, คจฺฉ ตฺวํ, น มยํ ตํ ชานามา”ติ. อถ โข อายสฺมา อุทายี เตหิ อาชีวกสาวเกหิ อปสาทิโต ปุนเทว สาวตฺถิํ ปจฺจาคญฺฉิ.
 
 
 
 </Paragraph>
 
 <Paragraph number="1227" book="para">
-ตติยมฺปิ โข สา กุมาริกา มาตุยา สนฺติเก ทูตํ ปาเหสิ—  “อหญฺหิ ทุคฺคตา ทุกฺขิตา, น สุขํ ลภามิ. มาสํเยว มํ สุณิสโภเคน ภุญฺชึสุ. ตโต อปเรน ทาสิโภเคน ภุญฺชนฺติ. อาคจฺฉตุ เม, มาตา, มํ เนสฺสตู”ติ. ทุติยมฺปิ โข สา คณกี เยนายสฺมา อุทายี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายึ เอตทโวจ—  “สา กิร, ภนฺเต, กุมาริกา ทุคฺคตา ทุกฺขิตา, น สุขํ ลภติ. มาสํเยว นํ สุณิสโภเคน ภุญฺชึสุ. ตโต อปเรน ทาสิโภเคน ภุญฺชนฺติ. วเทยฺยาถ, ภนฺเต—  ‘มาโยฺย, อิมํ กุมาริกํ ทาสิโภเคน ภุญฺชิตฺถ, สุณิสโภเคน อิมํ กุมาริกํ ภุญฺชถา’”ติ. “ปฐมมฺปาหํ เตหิ อาชีวกสาวเกหิ อปสาทิโต, คจฺฉ ตฺวํ, นาหํ คมิสฺสามี”ติ.
+ตติยมฺปิ โข สา กุมาริกา มาตุยา สนฺติเก ทูตํ ปาเหสิ—  “อหญฺหิ ทุคฺคตา ทุกฺขิตา, น สุขํ ลภามิ. มาสํเยว มํ สุณิสโภเคน ภุญฺชิํสุ. ตโต อปเรน ทาสิโภเคน ภุญฺชนฺติ. อาคจฺฉตุ เม, มาตา, มํ เนสฺสตู”ติ. ทุติยมฺปิ โข สา คณกี เยนายสฺมา อุทายี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายิํ เอตทโวจ—  “สา กิร, ภนฺเต, กุมาริกา ทุคฺคตา ทุกฺขิตา, น สุขํ ลภติ. มาสํเยว นํ สุณิสโภเคน ภุญฺชิํสุ. ตโต อปเรน ทาสิโภเคน ภุญฺชนฺติ. วเทยฺยาถ, ภนฺเต—  ‘มาโยฺย, อิมํ กุมาริกํ ทาสิโภเคน ภุญฺชิตฺถ, สุณิสโภเคน อิมํ กุมาริกํ ภุญฺชถา’”ติ. “ปฐมมฺปาหํ เตหิ อาชีวกสาวเกหิ อปสาทิโต, คจฺฉ ตฺวํ, นาหํ คมิสฺสามี”ติ.
 
 
 
@@ -116,7 +116,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1233" book="para">
-อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายึ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ อุทายึ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, อุทายิ, สญฺจริตฺตํ สมาปชฺชสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา …เป…  กถญฺหิ นาม ตฺวํ, โมฆปุริส, สญฺจริตฺตํ สมาปชฺชิสฺสสิ. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายิํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ อุทายิํ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, อุทายิ, สญฺจริตฺตํ สมาปชฺชสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา …เป…  กถญฺหิ นาม ตฺวํ, โมฆปุริส, สญฺจริตฺตํ สมาปชฺชิสฺสสิ. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 
 
 
@@ -126,7 +126,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="299" book="para">
 
 <Paragraph number="1234" book="para">
-<Emphasis>“โย ปน ภิกฺขุ สญฺจริตฺตํ สมาปชฺเชยฺย, อิตฺถิยา วา ปุริสมตึ ปุริสสฺส วา อิตฺถิมตึ, ชายตฺตเน วา ชารตฺตเน วา, สํฆาทิเสโส”</Emphasis>ติ.
+<Emphasis>“โย ปน ภิกฺขุ สญฺจริตฺตํ สมาปชฺเชยฺย, อิตฺถิยา วา ปุริสมติํ ปุริสสฺส วา อิตฺถิมติํ, ชายตฺตเน วา ชารตฺตเน วา, สํฆาทิเสโส”</Emphasis>ติ.
 
 
 
@@ -150,21 +150,21 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1237" book="para">
-อถ โข โส ทูโต เตสํ ธุตฺตานํ เอตมตฺถํ อาโรเจสิ. เอวํ วุตฺเต, อญฺญตโร ปุริโส เต ธุตฺเต เอตทโวจ—  “กิสฺส ตุเมฺห, อโยฺย, เอตํ เวสึ ยาจิตฺถ? นนุ อโยฺย อุทายี วตฺตพฺโพ. อโยฺย อุทายี อุโยฺยเชสฺสตี”ติ. เอวํ วุตฺเต, อญฺญตโร อุปาสโก ตํ ปุริสํ เอตทโวจ—  “มาโยฺย, เอวํ อวจ. น กปฺปติ สมณานํ สกฺยปุตฺติยานํ เอวรูปํ กาตุํ. นาโยฺย อุทายี เอวํ กริสฺสตี”ติ. เอวํ วุตฺเต, “กริสฺสติ น กริสฺสตี”ติ อพฺภุตมกํสุ.
+อถ โข โส ทูโต เตสํ ธุตฺตานํ เอตมตฺถํ อาโรเจสิ. เอวํ วุตฺเต, อญฺญตโร ปุริโส เต ธุตฺเต เอตทโวจ—  “กิสฺส ตุเมฺห, อโยฺย, เอตํ เวสิํ ยาจิตฺถ? นนุ อโยฺย อุทายี วตฺตพฺโพ. อโยฺย อุทายี อุโยฺยเชสฺสตี”ติ. เอวํ วุตฺเต, อญฺญตโร อุปาสโก ตํ ปุริสํ เอตทโวจ—  “มาโยฺย, เอวํ อวจ. น กปฺปติ สมณานํ สกฺยปุตฺติยานํ เอวรูปํ กาตุํ. นาโยฺย อุทายี เอวํ กริสฺสตี”ติ. เอวํ วุตฺเต, “กริสฺสติ น กริสฺสตี”ติ อพฺภุตมกํสุ.
 
 
 
 </Paragraph>
 
 <Paragraph number="1238" book="para">
-อถ โข เต ธุตฺตา เยนายสฺมา อุทายี เตนุปสงฺกมึสุ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายึ เอตทโวจุํ—  “อิธ มยํ, ภนฺเต, อุยฺยาเน ปริจาเรนฺตา อสุกาย นาม เวสิยา สนฺติเก ทูตํ ปหิณิมฺหา—  ‘อาคจฺฉตุ อุยฺยาเน ปริจาเรสฺสามา’ติ. สา เอวมาห—  ‘อหํ ขฺวโยฺย, ตุเมฺห น ชานามิ—  เก วา อิเม กสฺส วาติ, อหญฺจมฺหิ พหุภณฺฑา พหุปริกฺขารา, พหินครญฺจ คนฺตพฺพํ. นาหํ คมิสฺสามี’ติ. สาธุ, ภนฺเต, อโยฺย ตํ เวสึ อุโยฺยเชตู”ติ.
+อถ โข เต ธุตฺตา เยนายสฺมา อุทายี เตนุปสงฺกมิํสุ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายิํ เอตทโวจุํ—  “อิธ มยํ, ภนฺเต, อุยฺยาเน ปริจาเรนฺตา อสุกาย นาม เวสิยา สนฺติเก ทูตํ ปหิณิมฺหา—  ‘อาคจฺฉตุ อุยฺยาเน ปริจาเรสฺสามา’ติ. สา เอวมาห—  ‘อหํ ขฺวโยฺย, ตุเมฺห น ชานามิ—  เก วา อิเม กสฺส วาติ, อหญฺจมฺหิ พหุภณฺฑา พหุปริกฺขารา, พหินครญฺจ คนฺตพฺพํ. นาหํ คมิสฺสามี’ติ. สาธุ, ภนฺเต, อโยฺย ตํ เวสิํ อุโยฺยเชตู”ติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="1239" book="para">
-อถ โข อายสฺมา อุทายี เยน สา เวสี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ตํ เวสึ เอตทโวจ—  “กิสฺสิเมสํ น คจฺฉสี”ติ? “อหํ ขฺวยฺย, อิเม น ชานามิ—  ‘เก วา อิเม กสฺส วา’ติ. อหญฺจมฺหิ พหุภณฺฑา พหุปริกฺขารา, พหินครญฺจ คนฺตพฺพํ. นาหํ คมิสฺสามี”ติ. “คจฺฉิเมสํ. อหํ อิเม ชานามี”ติ. “สเจ, ภนฺเต, อโยฺย ชานาติ อหํ คมิสฺสามี”ติ. อถ โข เต ธุตฺตา ตํ เวสึ อาทาย อุยฺยานํ อคมํสุ. อถ โข โส อุปาสโก อุชฺฌายติ ขิยฺยติ วิปาเจติ—  “กถญฺหิ นาม อโยฺย อุทายี ตงฺขณิกํ สญฺจริตฺตํ สมาปชฺชิสฺสตี”ติ.
+อถ โข อายสฺมา อุทายี เยน สา เวสี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ตํ เวสิํ เอตทโวจ—  “กิสฺสิเมสํ น คจฺฉสี”ติ? “อหํ ขฺวยฺย, อิเม น ชานามิ—  ‘เก วา อิเม กสฺส วา’ติ. อหญฺจมฺหิ พหุภณฺฑา พหุปริกฺขารา, พหินครญฺจ คนฺตพฺพํ. นาหํ คมิสฺสามี”ติ. “คจฺฉิเมสํ. อหํ อิเม ชานามี”ติ. “สเจ, ภนฺเต, อโยฺย ชานาติ อหํ คมิสฺสามี”ติ. อถ โข เต ธุตฺตา ตํ เวสิํ อาทาย อุยฺยานํ อคมํสุ. อถ โข โส อุปาสโก อุชฺฌายติ ขิยฺยติ วิปาเจติ—  “กถญฺหิ นาม อโยฺย อุทายี ตงฺขณิกํ สญฺจริตฺตํ สมาปชฺชิสฺสตี”ติ.
 
 
 
@@ -178,7 +178,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1241" book="para">
-อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายึ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ …เป…  “สจฺจํ กิร ตฺวํ, อุทายิ, ตงฺขณิกํ สญฺจริตฺตํ สมาปชฺชสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา …เป…  กถญฺหิ นาม ตฺวํ, โมฆปุริส, ตงฺขณิกํ สญฺจริตฺตํ สมาปชฺชิสฺสสิ? เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายิํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ …เป…  “สจฺจํ กิร ตฺวํ, อุทายิ, ตงฺขณิกํ สญฺจริตฺตํ สมาปชฺชสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา …เป…  กถญฺหิ นาม ตฺวํ, โมฆปุริส, ตงฺขณิกํ สญฺจริตฺตํ สมาปชฺชิสฺสสิ? เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 
 
 
@@ -188,7 +188,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="301" book="para">
 
 <Paragraph number="1242" book="para">
-<Emphasis>“โย ปน ภิกฺขุ สญฺจริตฺตํ สมาปชฺเชยฺย, อิตฺถิยา วา ปุริสมตึ ปุริสสฺส วา อิตฺถิมตึ, ชายตฺตเน วา ชารตฺตเน วา, อนฺตมโส ตงฺขณิกายปิ, สํฆาทิเสโส”</Emphasis>ติ. (*5*:<Emphasis>9</Emphasis>)
+<Emphasis>“โย ปน ภิกฺขุ สญฺจริตฺตํ สมาปชฺเชยฺย, อิตฺถิยา วา ปุริสมติํ ปุริสสฺส วา อิตฺถิมติํ, ชายตฺตเน วา ชารตฺตเน วา, อนฺตมโส ตงฺขณิกายปิ, สํฆาทิเสโส”</Emphasis>ติ. (*5*:<Emphasis>9</Emphasis>)
 
 
 
@@ -198,7 +198,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="302" book="para">
 
 <Paragraph number="1243" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 
 
 
@@ -212,14 +212,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1245" book="para">
-<Emphasis>อิตฺถิยา วา ปุริสมตินฺ</Emphasis>ติ ปุริสสฺส มตึ อิตฺถิยา อาโรเจติ.
+<Emphasis>อิตฺถิยา วา ปุริสมตินฺ</Emphasis>ติ ปุริสสฺส มติํ อิตฺถิยา อาโรเจติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="1246" book="para">
-<Emphasis>ปุริสสฺส วา อิตฺถิมตินฺ</Emphasis>ติ อิตฺถิยา มตึ ปุริสสฺส อาโรเจติ.
+<Emphasis>ปุริสสฺส วา อิตฺถิมตินฺ</Emphasis>ติ อิตฺถิยา มติํ ปุริสสฺส อาโรเจติ.
 
 
 
@@ -337,7 +337,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1262" book="para">
-<Emphasis>สปริทณฺฑา</Emphasis> นาม เกหิจิ ทณฺโฑ ฐปิโต โหติ—  โย อิตฺถนฺนามํ อิตฺถึ คจฺฉติ เอตฺตโก ทณฺโฑติ.
+<Emphasis>สปริทณฺฑา</Emphasis> นาม เกหิจิ ทณฺโฑ ฐปิโต โหติ—  โย อิตฺถนฺนามํ อิตฺถิํ คจฺฉติ เอตฺตโก ทณฺโฑติ.
 
 
 
@@ -1547,56 +1547,56 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1398" book="para">
-ปุริโส สมฺพหุเล ภิกฺขู อาณาเปติ—  “คจฺฉถ, ภนฺเต, อิตฺถนฺนามํ อิตฺถึ วีมํสถา”ติ. สพฺเพ ปฏิคฺคณฺหนฺติ สพฺเพ วีมํสนฺติ สพฺเพ ปจฺจาหรนฺติ, อาปตฺติ สพฺเพสํ สํฆาทิเสสสฺส.
+ปุริโส สมฺพหุเล ภิกฺขู อาณาเปติ—  “คจฺฉถ, ภนฺเต, อิตฺถนฺนามํ อิตฺถิํ วีมํสถา”ติ. สพฺเพ ปฏิคฺคณฺหนฺติ สพฺเพ วีมํสนฺติ สพฺเพ ปจฺจาหรนฺติ, อาปตฺติ สพฺเพสํ สํฆาทิเสสสฺส.
 
 
 
 </Paragraph>
 
 <Paragraph number="1399" book="para">
-ปุริโส สมฺพหุเล ภิกฺขู อาณาเปติ—  “คจฺฉถ, ภนฺเต, อิตฺถนฺนามํ อิตฺถึ วีมํสถา”ติ. สพฺเพ ปฏิคฺคณฺหนฺติ สพฺเพ วีมํสนฺติ เอกํ ปจฺจาหราเปนฺติ, อาปตฺติ สพฺเพสํ สํฆาทิเสสสฺส.
+ปุริโส สมฺพหุเล ภิกฺขู อาณาเปติ—  “คจฺฉถ, ภนฺเต, อิตฺถนฺนามํ อิตฺถิํ วีมํสถา”ติ. สพฺเพ ปฏิคฺคณฺหนฺติ สพฺเพ วีมํสนฺติ เอกํ ปจฺจาหราเปนฺติ, อาปตฺติ สพฺเพสํ สํฆาทิเสสสฺส.
 
 
 
 </Paragraph>
 
 <Paragraph number="1400" book="para">
-ปุริโส สมฺพหุเล ภิกฺขู อาณาเปติ—  “คจฺฉถ, ภนฺเต, อิตฺถนฺนามํ อิตฺถึ วีมํสถา”ติ. สพฺเพ ปฏิคฺคณฺหนฺติ เอกํ วีมํสาเปตฺวา สพฺเพ ปจฺจาหรนฺติ, อาปตฺติ สพฺเพสํ สํฆาทิเสสสฺส.
+ปุริโส สมฺพหุเล ภิกฺขู อาณาเปติ—  “คจฺฉถ, ภนฺเต, อิตฺถนฺนามํ อิตฺถิํ วีมํสถา”ติ. สพฺเพ ปฏิคฺคณฺหนฺติ เอกํ วีมํสาเปตฺวา สพฺเพ ปจฺจาหรนฺติ, อาปตฺติ สพฺเพสํ สํฆาทิเสสสฺส.
 
 
 
 </Paragraph>
 
 <Paragraph number="1401" book="para">
-ปุริโส สมฺพหุเล ภิกฺขู อาณาเปติ—  “คจฺฉถ, ภนฺเต, อิตฺถนฺนามํ อิตฺถึ วีมํสถา”ติ. สพฺเพ ปฏิคฺคณฺหนฺติ เอกํ วีมํสาเปตฺวา เอกํ ปจฺจาหราเปนฺติ, อาปตฺติ สพฺเพสํ สํฆาทิเสสสฺส.
+ปุริโส สมฺพหุเล ภิกฺขู อาณาเปติ—  “คจฺฉถ, ภนฺเต, อิตฺถนฺนามํ อิตฺถิํ วีมํสถา”ติ. สพฺเพ ปฏิคฺคณฺหนฺติ เอกํ วีมํสาเปตฺวา เอกํ ปจฺจาหราเปนฺติ, อาปตฺติ สพฺเพสํ สํฆาทิเสสสฺส.
 
 
 
 </Paragraph>
 
 <Paragraph number="1402" book="para">
-ปุริโส ภิกฺขุํ อาณาเปติ—  “คจฺฉ, ภนฺเต, อิตฺถนฺนามํ อิตฺถึ วีมํสา”ติ. ปฏิคฺคณฺหาติ วีมํสติ ปจฺจาหรติ, อาปตฺติ สํฆาทิเสสสฺส.
+ปุริโส ภิกฺขุํ อาณาเปติ—  “คจฺฉ, ภนฺเต, อิตฺถนฺนามํ อิตฺถิํ วีมํสา”ติ. ปฏิคฺคณฺหาติ วีมํสติ ปจฺจาหรติ, อาปตฺติ สํฆาทิเสสสฺส.
 
 
 
 </Paragraph>
 
 <Paragraph number="1403" book="para">
-ปุริโส ภิกฺขุํ อาณาเปติ—  “คจฺฉ, ภนฺเต, อิตฺถนฺนามํ อิตฺถึ วีมํสา”ติ. ปฏิคฺคณฺหาติ วีมํสติ อนฺเตวาสึ ปจฺจาหราเปติ, อาปตฺติ สํฆาทิเสสสฺส.
+ปุริโส ภิกฺขุํ อาณาเปติ—  “คจฺฉ, ภนฺเต, อิตฺถนฺนามํ อิตฺถิํ วีมํสา”ติ. ปฏิคฺคณฺหาติ วีมํสติ อนฺเตวาสิํ ปจฺจาหราเปติ, อาปตฺติ สํฆาทิเสสสฺส.
 
 
 
 </Paragraph>
 
 <Paragraph number="1404" book="para">
-ปุริโส ภิกฺขุํ อาณาเปติ—  “คจฺฉ, ภนฺเต, อิตฺถนฺนามํ อิตฺถึ วีมํสา”ติ. ปฏิคฺคณฺหาติ อนฺเตวาสึ วีมํสาเปตฺวา อตฺตนา ปจฺจาหรติ, อาปตฺติ สํฆาทิเสสสฺส.
+ปุริโส ภิกฺขุํ อาณาเปติ—  “คจฺฉ, ภนฺเต, อิตฺถนฺนามํ อิตฺถิํ วีมํสา”ติ. ปฏิคฺคณฺหาติ อนฺเตวาสิํ วีมํสาเปตฺวา อตฺตนา ปจฺจาหรติ, อาปตฺติ สํฆาทิเสสสฺส.
 
 
 
 </Paragraph>
 
 <Paragraph number="1405" book="para">
-ปุริโส ภิกฺขุํ อาณาเปติ—  “คจฺฉ, ภนฺเต, อิตฺถนฺนามํ อิตฺถึ วิมํสา”ติ. ปฏิคฺคณฺหาติ อนฺเตวาสึ วีมํสาเปติ อนฺเตวาสี วีมํสิตฺวา พหิทฺธา ปจฺจาหรติ, อาปตฺติ อุภินฺนํ ถุลฺลจฺจยสฺส.
+ปุริโส ภิกฺขุํ อาณาเปติ—  “คจฺฉ, ภนฺเต, อิตฺถนฺนามํ อิตฺถิํ วิมํสา”ติ. ปฏิคฺคณฺหาติ อนฺเตวาสิํ วีมํสาเปติ อนฺเตวาสี วีมํสิตฺวา พหิทฺธา ปจฺจาหรติ, อาปตฺติ อุภินฺนํ ถุลฺลจฺจยสฺส.
 
 
 
