--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-5/1-2-5-2.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-5/1-2-5-2.mdx
@@ -18,11 +18,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="341" book="para">
 
 <Paragraph number="1412" book="para">
-เตน โข ปน สมเยน อญฺญตโร ปุริโส อญฺญตรํ ภิกฺขุํ อาณาเปสิ—  “คจฺฉ, ภนฺเต, อิตฺถนฺนามํ อิตฺถึ วีมํสา”ติ. โส คนฺตฺวา มนุเสฺส ปุจฺฉิ—  “กหํ อิตฺถนฺนามา”ติ? “สุตฺตา, ภนฺเต”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ สํฆาทิเสสํ อาปตฺตึ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ—  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ทุกฺกฏสฺสา”ติ. (1)
+เตน โข ปน สมเยน อญฺญตโร ปุริโส อญฺญตรํ ภิกฺขุํ อาณาเปสิ—  “คจฺฉ, ภนฺเต, อิตฺถนฺนามํ อิตฺถิํ วีมํสา”ติ. โส คนฺตฺวา มนุเสฺส ปุจฺฉิ—  “กหํ อิตฺถนฺนามา”ติ? “สุตฺตา, ภนฺเต”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ สํฆาทิเสสํ อาปตฺติํ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ—  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ทุกฺกฏสฺสา”ติ. (1)
 </Paragraph>
 
 <Paragraph number="1413" book="para">
-เตน โข ปน สมเยน อญฺญตโร ปุริโส อญฺญตรํ ภิกฺขุํ อาณาเปสิ—  “คจฺฉ, ภนฺเต, อิตฺถนฺนามํ อิตฺถึ วีมํสา”ติ. โส คนฺตฺวา มนุเสฺส ปุจฺฉิ—  “กหํ อิตฺถนฺนามา”ติ? “มตา, ภนฺเต”ติ …เป…  “นิกฺขนฺตา, ภนฺเต”ติ…  “อนิตฺถี, ภนฺเต”ติ…  “อิตฺถิปณฺฑกา, ภนฺเต”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ทุกฺกฏสฺสา”ติ. (2–5)
+เตน โข ปน สมเยน อญฺญตโร ปุริโส อญฺญตรํ ภิกฺขุํ อาณาเปสิ—  “คจฺฉ, ภนฺเต, อิตฺถนฺนามํ อิตฺถิํ วีมํสา”ติ. โส คนฺตฺวา มนุเสฺส ปุจฺฉิ—  “กหํ อิตฺถนฺนามา”ติ? “มตา, ภนฺเต”ติ …เป…  “นิกฺขนฺตา, ภนฺเต”ติ…  “อนิตฺถี, ภนฺเต”ติ…  “อิตฺถิปณฺฑกา, ภนฺเต”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, สํฆาทิเสสสฺส; อาปตฺติ ทุกฺกฏสฺสา”ติ. (2–5)
 </Paragraph>
 
 <Paragraph number="1414" book="para">
