--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-7.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-7.mdx
@@ -26,14 +26,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1514" book="para">
-อถ โข เต ภิกฺขู อายสฺมนฺตํ ฉนฺนํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ …เป…  “สจฺจํ กิร ตฺวํ, ฉนฺน, เจติยรุกฺขํ เฉทาเปสิ คามปูชิตํ …เป…  รฏฺฐปูชิตนฺ”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา …เป…  กถญฺหิ นาม ตฺวํ, โมฆปุริส, เจติยรุกฺขํ เฉทาเปสฺสสิ คามปูชิตํ นิคมปูชิตํ นครปูชิตํ ชนปทปูชิตํ รฏฺฐปูชิตํ. ชีวสญฺญิโน หิ, โมฆปุริส, มนุสฺสา รุกฺขสฺมึ. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข เต ภิกฺขู อายสฺมนฺตํ ฉนฺนํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ …เป…  “สจฺจํ กิร ตฺวํ, ฉนฺน, เจติยรุกฺขํ เฉทาเปสิ คามปูชิตํ …เป…  รฏฺฐปูชิตนฺ”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา …เป…  กถญฺหิ นาม ตฺวํ, โมฆปุริส, เจติยรุกฺขํ เฉทาเปสฺสสิ คามปูชิตํ นิคมปูชิตํ นครปูชิตํ ชนปทปูชิตํ รฏฺฐปูชิตํ. ชีวสญฺญิโน หิ, โมฆปุริส, มนุสฺสา รุกฺขสฺมิํ. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 </Paragraph>
 
 </Division>
 <Division number="366" book="para">
 
 <Paragraph number="1515" book="para">
-<Emphasis>“มหลฺลกํ ปน ภิกฺขุนา วิหารํ การยมาเนน สสฺสามิกํ อตฺตุทฺเทสํ ภิกฺขู อภิเนตพฺพา วตฺถุเทสนาย. เตหิ ภิกฺขูหิ วตฺถุ เทเสตพฺพํ อนารมฺภํ สปริกฺกมนํ. สารมฺเภ เจ ภิกฺขุ วตฺถุสฺมึ อปริกฺกมเน มหลฺลกํ วิหารํ กาเรยฺย ภิกฺขู วา อนภิเนยฺย วตฺถุเทสนาย, สํฆาทิเสโส”</Emphasis>ติ. (*7*:<Emphasis>11</Emphasis>)
+<Emphasis>“มหลฺลกํ ปน ภิกฺขุนา วิหารํ การยมาเนน สสฺสามิกํ อตฺตุทฺเทสํ ภิกฺขู อภิเนตพฺพา วตฺถุเทสนาย. เตหิ ภิกฺขูหิ วตฺถุ เทเสตพฺพํ อนารมฺภํ สปริกฺกมนํ. สารมฺเภ เจ ภิกฺขุ วตฺถุสฺมิํ อปริกฺกมเน มหลฺลกํ วิหารํ กาเรยฺย ภิกฺขู วา อนภิเนยฺย วตฺถุเทสนาย, สํฆาทิเสโส”</Emphasis>ติ. (*7*:<Emphasis>11</Emphasis>)
 </Paragraph>
 
 </Division>
@@ -60,7 +60,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1521" book="para">
-<Emphasis>ภิกฺขู อภิเนตพฺพา วตฺถุเทสนายา</Emphasis>ติ เตน วิหารการเกน ภิกฺขุนา วิหารวตฺถุํ โสเธตฺวา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อหํ, ภนฺเต, มหลฺลกํ วิหารํ กตฺตุกาโม สสฺสามิกํ อตฺตุทฺเทสํ. โสหํ, ภนฺเต, สํฆํ วิหารวตฺถุโอโลกนํ ยาจามี”ติ. ทุติยมฺปิ ยาจิตพฺพา. ตติยมฺปิ ยาจิตพฺพา. สเจ สพฺโพ สํโฆ อุสฺสหติ วิหารวตฺถุํ โอโลเกตุํ สพฺเพน สํเฆน โอโลเกตพฺพํ. โน เจ สพฺโพ สํโฆ อุสฺสหติ วิหารวตฺถุํ โอโลเกตุํ, เย ตตฺถ โหนฺติ ภิกฺขู พฺยตฺตา ปฏิพลา สารมฺภํ อนารมฺภํ สปริกฺกมนํ อปริกฺกมนํ ชานิตุํ เต ยาจิตฺวา สมฺมนฺนิตพฺพา. “เอวญฺจ ปน, ภิกฺขเว, สมฺมนฺนิตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
+<Emphasis>ภิกฺขู อภิเนตพฺพา วตฺถุเทสนายา</Emphasis>ติ เตน วิหารการเกน ภิกฺขุนา วิหารวตฺถุํ โสเธตฺวา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อหํ, ภนฺเต, มหลฺลกํ วิหารํ กตฺตุกาโม สสฺสามิกํ อตฺตุทฺเทสํ. โสหํ, ภนฺเต, สํฆํ วิหารวตฺถุโอโลกนํ ยาจามี”ติ. ทุติยมฺปิ ยาจิตพฺพา. ตติยมฺปิ ยาจิตพฺพา. สเจ สพฺโพ สํโฆ อุสฺสหติ วิหารวตฺถุํ โอโลเกตุํ สพฺเพน สํเฆน โอโลเกตพฺพํ. โน เจ สพฺโพ สํโฆ อุสฺสหติ วิหารวตฺถุํ โอโลเกตุํ, เย ตตฺถ โหนฺติ ภิกฺขู พฺยตฺตา ปฏิพลา สารมฺภํ อนารมฺภํ สปริกฺกมนํ อปริกฺกมนํ ชานิตุํ เต ยาจิตฺวา สมฺมนฺนิตพฺพา. “เอวญฺจ ปน, ภิกฺขเว, สมฺมนฺนิตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
 </Paragraph>
 
 </Division>
@@ -82,7 +82,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="369" book="para">
 
 <Paragraph number="1525" book="para">
-เตหิ สมฺมเตหิ ภิกฺขูหิ ตตฺถ คนฺตฺวา วิหารวตฺถุ โอโลเกตพฺพํ; สารมฺภํ อนารมฺภํ สปริกฺกมนํ อปริกฺกมนํ ชานิตพฺพํ. สเจ สารมฺภํ โหติ อปริกฺกมนํ, “มายิธ กรี”ติ วตฺตพฺโพ. สเจ อนารมฺภํ โหติ สปริกฺกมนํ, สํฆสฺส อาโรเจตพฺพํ—  “อนารมฺภํ สปริกฺกมนนฺ”ติ. เตน วิหารการเกน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อหํ, ภนฺเต, มหลฺลกํ วิหารํ กตฺตุกาโม สสฺสามิกํ อตฺตุทฺเทสํ. โสหํ, ภนฺเต, สํฆํ วิหารวตฺถุเทสนํ ยาจามี”ติ. ทุติยมฺปิ ยาจิตพฺพา. ตติยมฺปิ ยาจิตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
+เตหิ สมฺมเตหิ ภิกฺขูหิ ตตฺถ คนฺตฺวา วิหารวตฺถุ โอโลเกตพฺพํ; สารมฺภํ อนารมฺภํ สปริกฺกมนํ อปริกฺกมนํ ชานิตพฺพํ. สเจ สารมฺภํ โหติ อปริกฺกมนํ, “มายิธ กรี”ติ วตฺตพฺโพ. สเจ อนารมฺภํ โหติ สปริกฺกมนํ, สํฆสฺส อาโรเจตพฺพํ—  “อนารมฺภํ สปริกฺกมนนฺ”ติ. เตน วิหารการเกน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อหํ, ภนฺเต, มหลฺลกํ วิหารํ กตฺตุกาโม สสฺสามิกํ อตฺตุทฺเทสํ. โสหํ, ภนฺเต, สํฆํ วิหารวตฺถุเทสนํ ยาจามี”ติ. ทุติยมฺปิ ยาจิตพฺพา. ตติยมฺปิ ยาจิตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
 </Paragraph>
 
 </Division>
@@ -132,7 +132,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1536" book="para">
-<Emphasis>ภิกฺขู วา อนภิเนยฺย วตฺถุเทสนายา</Emphasis>ติ ญตฺติทุติเยน กมฺเมน วิหารวตฺถุํ น เทสาเปตฺวา กโรติ วา การาเปติ วา, ปโยเค ทุกฺกฏํ. เอกํ ปิณฺฑํ อนาคเต, อาปตฺติ ถุลฺลจฺจยสฺส. ตสฺมึ ปิณฺเฑ อาคเต, อาปตฺติ สํฆาทิเสสสฺส.
+<Emphasis>ภิกฺขู วา อนภิเนยฺย วตฺถุเทสนายา</Emphasis>ติ ญตฺติทุติเยน กมฺเมน วิหารวตฺถุํ น เทสาเปตฺวา กโรติ วา การาเปติ วา, ปโยเค ทุกฺกฏํ. เอกํ ปิณฺฑํ อนาคเต, อาปตฺติ ถุลฺลจฺจยสฺส. ตสฺมิํ ปิณฺเฑ อาคเต, อาปตฺติ สํฆาทิเสสสฺส.
 </Paragraph>
 
 <Paragraph number="1537" book="para">
