--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-8.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-8.mdx
@@ -18,15 +18,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="380" book="para">
 
 <Paragraph number="1556" book="para">
-เตน สมเยน พุทฺโธ ภควา ราชคเห วิหรติ เวฬุวเน กลนฺทกนิวาเป. เตน โข ปน สมเยน อายสฺมตา ทพฺเพน มลฺลปุตฺเตน ชาติยา สตฺตวเสฺสน อรหตฺตํ สจฺฉิกตํ โหติ. ยํ กิญฺจิ สาวเกน ปตฺตพฺพํ สพฺพํ เตน อนุปฺปตฺตํ โหติ. นตฺถิ จสฺส กิญฺจิ อุตฺตริ กรณียํ, กตสฺส วา ปติจโย. อถ โข อายสฺมโต ทพฺพสฺส มลฺลปุตฺตสฺส รโหคตสฺส ปฏิสลฺลีนสฺส เอวํ เจตโส ปริวิตกฺโก อุทปาทิ—  “มยา โข ชาติยา สตฺตวเสฺสน อรหตฺตํ สจฺฉิกตํ. ยํ กิญฺจิ สาวเกน ปตฺตพฺพํ สพฺพํ มยา อนุปฺปตฺตํ. นตฺถิ จ เม กิญฺจิ อุตฺตริ กรณียํ, กตสฺส วา ปติจโย. กึ นุ โข อหํ สํฆสฺส เวยฺยาวจฺจํ กเรยฺยนฺ”ติ?
+เตน สมเยน พุทฺโธ ภควา ราชคเห วิหรติ เวฬุวเน กลนฺทกนิวาเป. เตน โข ปน สมเยน อายสฺมตา ทพฺเพน มลฺลปุตฺเตน ชาติยา สตฺตวเสฺสน อรหตฺตํ สจฺฉิกตํ โหติ. ยํ กิญฺจิ สาวเกน ปตฺตพฺพํ สพฺพํ เตน อนุปฺปตฺตํ โหติ. นตฺถิ จสฺส กิญฺจิ อุตฺตริ กรณียํ, กตสฺส วา ปติจโย. อถ โข อายสฺมโต ทพฺพสฺส มลฺลปุตฺตสฺส รโหคตสฺส ปฏิสลฺลีนสฺส เอวํ เจตโส ปริวิตกฺโก อุทปาทิ—  “มยา โข ชาติยา สตฺตวเสฺสน อรหตฺตํ สจฺฉิกตํ. ยํ กิญฺจิ สาวเกน ปตฺตพฺพํ สพฺพํ มยา อนุปฺปตฺตํ. นตฺถิ จ เม กิญฺจิ อุตฺตริ กรณียํ, กตสฺส วา ปติจโย. กิํ นุ โข อหํ สํฆสฺส เวยฺยาวจฺจํ กเรยฺยนฺ”ติ?
 </Paragraph>
 
 <Paragraph number="1557" book="para">
-อถ โข อายสฺมโต ทพฺพสฺส มลฺลปุตฺตสฺส เอตทโหสิ—  “ยนฺนูนาหํ สํฆสฺส เสนาสนญฺจ ปญฺญเปยฺยํ ภตฺตานิ จ อุทฺทิเสยฺยนฺ”ติ. อถ โข อายสฺมา ทพฺโพ มลฺลปุตฺโต สายนฺหสมยํ ปฏิสลฺลานา วุฏฺฐิโต เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺโน โข อายสฺมา ทพฺโพ มลฺลปุตฺโต ภควนฺตํ เอตทโวจ—  “อิธ มยฺหํ, ภนฺเต, รโหคตสฺส ปฏิสลฺลีนสฺส เอวํ เจตโส ปริวิตกฺโก อุทปาทิ มยา โข ชาติยา สตฺตวเสฺสน อรหตฺตํ สจฺฉิกตํ, ยํ กิญฺจิ สาวเกน ปตฺตพฺพํ, สพฺพํ มยา อนุปตฺตํ, นตฺถิ จ เม กิญฺจิ อุตฺตริ กรณียํ, กตสฺส วา ปติจโย, กึ นุ โข อหํ สํฆสฺส เวยฺยาวจฺจํ กเรยฺยนฺติ. ตสฺส มยฺหํ, ภนฺเต, เอตทโหสิ—  ‘ยนฺนูนาหํ สํฆสฺส เสนาสนญฺจ ปญฺญเปยฺยํ ภตฺตานิ จ อุทฺทิเสยฺยนฺ’ติ. อิจฺฉามหํ, ภนฺเต, สํฆสฺส เสนาสนญฺจ ปญฺญเปตุํ ภตฺตานิ จ อุทฺทิสิตุนฺ”ติ. “สาธุ สาธุ, ทพฺพ. เตน หิ ตฺวํ, ทพฺพ, สํฆสฺส เสนาสนญฺจ ปญฺญเปหิ ภตฺตานิ จ อุทฺทิสา”ติ. “เอวํ, ภนฺเต”ติ โข อายสฺมา ทพฺโพ มลฺลปุตฺโต ภควโต ปจฺจโสฺสสิ.
+อถ โข อายสฺมโต ทพฺพสฺส มลฺลปุตฺตสฺส เอตทโหสิ—  “ยนฺนูนาหํ สํฆสฺส เสนาสนญฺจ ปญฺญเปยฺยํ ภตฺตานิ จ อุทฺทิเสยฺยนฺ”ติ. อถ โข อายสฺมา ทพฺโพ มลฺลปุตฺโต สายนฺหสมยํ ปฏิสลฺลานา วุฏฺฐิโต เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺโน โข อายสฺมา ทพฺโพ มลฺลปุตฺโต ภควนฺตํ เอตทโวจ—  “อิธ มยฺหํ, ภนฺเต, รโหคตสฺส ปฏิสลฺลีนสฺส เอวํ เจตโส ปริวิตกฺโก อุทปาทิ มยา โข ชาติยา สตฺตวเสฺสน อรหตฺตํ สจฺฉิกตํ, ยํ กิญฺจิ สาวเกน ปตฺตพฺพํ, สพฺพํ มยา อนุปตฺตํ, นตฺถิ จ เม กิญฺจิ อุตฺตริ กรณียํ, กตสฺส วา ปติจโย, กิํ นุ โข อหํ สํฆสฺส เวยฺยาวจฺจํ กเรยฺยนฺติ. ตสฺส มยฺหํ, ภนฺเต, เอตทโหสิ—  ‘ยนฺนูนาหํ สํฆสฺส เสนาสนญฺจ ปญฺญเปยฺยํ ภตฺตานิ จ อุทฺทิเสยฺยนฺ’ติ. อิจฺฉามหํ, ภนฺเต, สํฆสฺส เสนาสนญฺจ ปญฺญเปตุํ ภตฺตานิ จ อุทฺทิสิตุนฺ”ติ. “สาธุ สาธุ, ทพฺพ. เตน หิ ตฺวํ, ทพฺพ, สํฆสฺส เสนาสนญฺจ ปญฺญเปหิ ภตฺตานิ จ อุทฺทิสา”ติ. “เอวํ, ภนฺเต”ติ โข อายสฺมา ทพฺโพ มลฺลปุตฺโต ภควโต ปจฺจโสฺสสิ.
 </Paragraph>
 
 <Paragraph number="1558" book="para">
-อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “เตน หิ, ภิกฺขเว, สํโฆ ทพฺพํ มลฺลปุตฺตํ เสนาสนปญฺญาปกญฺจ ภตฺตุทฺเทสกญฺจ สมฺมนฺนตุ. เอวญฺจ ปน, ภิกฺขเว, สมฺมนฺนิตพฺโพ. ปฐมํ ทพฺโพ มลฺลปุตฺโต ยาจิตพฺโพ. ยาจิตฺวา พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
+อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “เตน หิ, ภิกฺขเว, สํโฆ ทพฺพํ มลฺลปุตฺตํ เสนาสนปญฺญาปกญฺจ ภตฺตุทฺเทสกญฺจ สมฺมนฺนตุ. เอวญฺจ ปน, ภิกฺขเว, สมฺมนฺนิตพฺโพ. ปฐมํ ทพฺโพ มลฺลปุตฺโต ยาจิตพฺโพ. ยาจิตฺวา พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
 </Paragraph>
 
 </Division>
@@ -52,7 +52,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1563" book="para">
-เต อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ อุปสงฺกมิตฺวา เอวํ วทนฺติ—  “อมฺหากํ, อาวุโส ทพฺพ, เสนาสนํ ปญฺญเปหี”ติ. เต อายสฺมา ทพฺโพ มลฺลปุตฺโต เอวํ วเทติ—  “กตฺถายสฺมนฺตา อิจฺฉนฺติ, กตฺถ ปญฺญเปมี”ติ? เต สญฺจิจฺจ ทูเร อปทิสนฺติ—  “อมฺหากํ, อาวุโส ทพฺพ, คิชฺฌกูเฏ ปพฺพเต เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, โจรปปาเต เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, อิสิคิลิปเสฺส กาฬสิลายํ เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, เวภารปเสฺส สตฺตปณฺณิคุหายํ เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, สีตวเน สปฺปโสณฺฑิกปพฺภาเร เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, โคตมกกนฺทรายํ เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, ตินฺทุกกนฺทรายํ เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, ตโปทกนฺทรายํ เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, ตโปทาราเม เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, ชีวกมฺพวเน เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, มทฺทกุจฺฉิสฺมึ มิคทาเย เสนาสนํ ปญฺญเปหี”ติ.
+เต อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ อุปสงฺกมิตฺวา เอวํ วทนฺติ—  “อมฺหากํ, อาวุโส ทพฺพ, เสนาสนํ ปญฺญเปหี”ติ. เต อายสฺมา ทพฺโพ มลฺลปุตฺโต เอวํ วเทติ—  “กตฺถายสฺมนฺตา อิจฺฉนฺติ, กตฺถ ปญฺญเปมี”ติ? เต สญฺจิจฺจ ทูเร อปทิสนฺติ—  “อมฺหากํ, อาวุโส ทพฺพ, คิชฺฌกูเฏ ปพฺพเต เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, โจรปปาเต เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, อิสิคิลิปเสฺส กาฬสิลายํ เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, เวภารปเสฺส สตฺตปณฺณิคุหายํ เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, สีตวเน สปฺปโสณฺฑิกปพฺภาเร เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, โคตมกกนฺทรายํ เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, ตินฺทุกกนฺทรายํ เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, ตโปทกนฺทรายํ เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, ตโปทาราเม เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, ชีวกมฺพวเน เสนาสนํ ปญฺญเปหิ. อมฺหากํ, อาวุโส, มทฺทกุจฺฉิสฺมิํ มิคทาเย เสนาสนํ ปญฺญเปหี”ติ.
 </Paragraph>
 
 <Paragraph number="1564" book="para">
@@ -63,34 +63,34 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="383" book="para">
 
 <Paragraph number="1565" book="para">
-เตน โข ปน สมเยน เมตฺติยภูมชกา ภิกฺขู นวกา เจว โหนฺติ อปฺปปุญฺญา จ. ยานิ สํฆสฺส ลามกานิ เสนาสนานิ ตานิ เตสํ ปาปุณนฺติ ลามกานิ จ ภตฺตานิ. เตน โข ปน สมเยน ราชคเห มนุสฺสา อิจฺฉนฺติ เถรานํ ภิกฺขูนํ อภิสงฺขาริกํ ปิณฺฑปาตํ ทาตุํ สปฺปิมฺปิ เตลมฺปิ อุตฺตริภงฺคมฺปิ. เมตฺติยภูมชกานํ ปน ภิกฺขูนํ ปากติกํ เทนฺติ ยถารนฺธํ กณาชกํ พิลงฺคทุติยํ. เต ปจฺฉาภตฺตํ ปิณฺฑปาตปฏิกฺกนฺตา เถเร ภิกฺขู ปุจฺฉนฺติ—  “ตุมฺหากํ, อาวุโส, ภตฺตคฺเค กึ อโหสิ? ตุมฺหากํ, อาวุโส, ภตฺตคฺเค กึ อโหสี”ติ? เอกจฺเจ เถรา เอวํ วทนฺติ—  “อมฺหากํ, อาวุโส, สปฺปิ อโหสิ เตลํ อโหสิ อุตฺตริภงฺคํ อโหสี”ติ. เมตฺติยภูมชกา ปน ภิกฺขู เอวํ วทนฺติ—  “อมฺหากํ, อาวุโส, น กิญฺจิ อโหสิ, ปากติกํ ยถารนฺธํ กณาชกํ พิลงฺคทุติยนฺ”ติ.
+เตน โข ปน สมเยน เมตฺติยภูมชกา ภิกฺขู นวกา เจว โหนฺติ อปฺปปุญฺญา จ. ยานิ สํฆสฺส ลามกานิ เสนาสนานิ ตานิ เตสํ ปาปุณนฺติ ลามกานิ จ ภตฺตานิ. เตน โข ปน สมเยน ราชคเห มนุสฺสา อิจฺฉนฺติ เถรานํ ภิกฺขูนํ อภิสงฺขาริกํ ปิณฺฑปาตํ ทาตุํ สปฺปิมฺปิ เตลมฺปิ อุตฺตริภงฺคมฺปิ. เมตฺติยภูมชกานํ ปน ภิกฺขูนํ ปากติกํ เทนฺติ ยถารนฺธํ กณาชกํ พิลงฺคทุติยํ. เต ปจฺฉาภตฺตํ ปิณฺฑปาตปฏิกฺกนฺตา เถเร ภิกฺขู ปุจฺฉนฺติ—  “ตุมฺหากํ, อาวุโส, ภตฺตคฺเค กิํ อโหสิ? ตุมฺหากํ, อาวุโส, ภตฺตคฺเค กิํ อโหสี”ติ? เอกจฺเจ เถรา เอวํ วทนฺติ—  “อมฺหากํ, อาวุโส, สปฺปิ อโหสิ เตลํ อโหสิ อุตฺตริภงฺคํ อโหสี”ติ. เมตฺติยภูมชกา ปน ภิกฺขู เอวํ วทนฺติ—  “อมฺหากํ, อาวุโส, น กิญฺจิ อโหสิ, ปากติกํ ยถารนฺธํ กณาชกํ พิลงฺคทุติยนฺ”ติ.
 </Paragraph>
 
 <Paragraph number="1566" book="para">
-เตน โข ปน สมเยน กลฺยาณภตฺติโก คหปติ สํฆสฺส จตุกฺกภตฺตํ เทติ นิจฺจภตฺตํ. โส ภตฺตคฺเค สปุตฺตทาโร อุปติฏฺฐิตฺวา ปริวิสติ. อญฺเญ โอทเนน ปุจฺฉนฺติ, อญฺเญ สูเปน ปุจฺฉนฺติ, อญฺเญ เตเลน ปุจฺฉนฺติ, อญฺเญ อุตฺตริภงฺเคน ปุจฺฉนฺติ. เตน โข ปน สมเยน กลฺยาณภตฺติกสฺส คหปติโน ภตฺตํ สฺวาตนาย เมตฺติยภูมชกานํ ภิกฺขูนํ อุทฺทิฏฺฐํ โหติ. อถ โข กลฺยาณภตฺติโก คหปติ อารามํ อคมาสิ เกนจิเทว กรณีเยน. โส เยนายสฺมา ทพฺโพ มลฺลปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺนํ โข กลฺยาณภตฺติกํ คหปตึ อายสฺมา ทพฺโพ มลฺลปุตฺโต ธมฺมิยา กถาย สนฺทเสฺสสิ สมาทเปสิ สมุตฺเตเชสิ สมฺปหํเสสิ. อถ โข กลฺยาณภตฺติโก คหปติ อายสฺมตา ทพฺเพน มลฺลปุตฺเตน ธมฺมิยา กถาย สนฺทสฺสิโต สมาทปิโต สมุตฺเตชิโต สมฺปหํสิโต อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ เอตทโวจ—  “กสฺส, ภนฺเต, อมฺหากํ ฆเร สฺวาตนาย ภตฺตํ อุทฺทิฏฺฐนฺ”ติ? “เมตฺติยภูมชกานํ โข, คหปติ, ภิกฺขูนํ ตุมฺหากํ ฆเร สฺวาตนาย ภตฺตํ อุทฺทิฏฺฐนฺ”ติ. อถ โข กลฺยาณภตฺติโก คหปติ อนตฺตมโน อโหสิ—  “กถญฺหิ นาม ปาปภิกฺขู อมฺหากํ ฆเร ภุญฺชิสฺสนฺตี”ติ. ฆรํ คนฺตฺวา ทาสึ อาณาเปสิ—  “เย, เช, เสฺว ภตฺติกา อาคจฺฉนฺติ เต โกฏฺฐเก อาสนํ ปญฺญเปตฺวา กณาชเกน พิลงฺคทุติเยน ปริวิสา”ติ. “เอวํ, อยฺยา”ติ โข สา ทาสี กลฺยาณภตฺติกสฺส คหปติโน ปจฺจโสฺสสิ.
+เตน โข ปน สมเยน กลฺยาณภตฺติโก คหปติ สํฆสฺส จตุกฺกภตฺตํ เทติ นิจฺจภตฺตํ. โส ภตฺตคฺเค สปุตฺตทาโร อุปติฏฺฐิตฺวา ปริวิสติ. อญฺเญ โอทเนน ปุจฺฉนฺติ, อญฺเญ สูเปน ปุจฺฉนฺติ, อญฺเญ เตเลน ปุจฺฉนฺติ, อญฺเญ อุตฺตริภงฺเคน ปุจฺฉนฺติ. เตน โข ปน สมเยน กลฺยาณภตฺติกสฺส คหปติโน ภตฺตํ สฺวาตนาย เมตฺติยภูมชกานํ ภิกฺขูนํ อุทฺทิฏฺฐํ โหติ. อถ โข กลฺยาณภตฺติโก คหปติ อารามํ อคมาสิ เกนจิเทว กรณีเยน. โส เยนายสฺมา ทพฺโพ มลฺลปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺนํ โข กลฺยาณภตฺติกํ คหปติํ อายสฺมา ทพฺโพ มลฺลปุตฺโต ธมฺมิยา กถาย สนฺทเสฺสสิ สมาทเปสิ สมุตฺเตเชสิ สมฺปหํเสสิ. อถ โข กลฺยาณภตฺติโก คหปติ อายสฺมตา ทพฺเพน มลฺลปุตฺเตน ธมฺมิยา กถาย สนฺทสฺสิโต สมาทปิโต สมุตฺเตชิโต สมฺปหํสิโต อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ เอตทโวจ—  “กสฺส, ภนฺเต, อมฺหากํ ฆเร สฺวาตนาย ภตฺตํ อุทฺทิฏฺฐนฺ”ติ? “เมตฺติยภูมชกานํ โข, คหปติ, ภิกฺขูนํ ตุมฺหากํ ฆเร สฺวาตนาย ภตฺตํ อุทฺทิฏฺฐนฺ”ติ. อถ โข กลฺยาณภตฺติโก คหปติ อนตฺตมโน อโหสิ—  “กถญฺหิ นาม ปาปภิกฺขู อมฺหากํ ฆเร ภุญฺชิสฺสนฺตี”ติ. ฆรํ คนฺตฺวา ทาสิํ อาณาเปสิ—  “เย, เช, เสฺว ภตฺติกา อาคจฺฉนฺติ เต โกฏฺฐเก อาสนํ ปญฺญเปตฺวา กณาชเกน พิลงฺคทุติเยน ปริวิสา”ติ. “เอวํ, อยฺยา”ติ โข สา ทาสี กลฺยาณภตฺติกสฺส คหปติโน ปจฺจโสฺสสิ.
 </Paragraph>
 
 <Paragraph number="1567" book="para">
-อถ โข เมตฺติยภูมชกา ภิกฺขู—  “หิโยฺย โข, อาวุโส, อมฺหากํ กลฺยาณภตฺติกสฺส คหปติโน ภตฺตํ อุทฺทิฏฺฐํ, เสฺว อเมฺห กลฺยาณภตฺติโก คหปติ สปุตฺตทาโร อุปติฏฺฐิตฺวา ปริวิสิสฺสติ; อญฺเญ โอทเนน ปุจฺฉิสฺสนฺติ, อญฺเญ สูเปน ปุจฺฉิสฺสนฺติ, อญฺเญ เตเลน ปุจฺฉิสฺสนฺติ, อญฺเญ อุตฺตริภงฺเคน ปุจฺฉิสฺสนฺตี”ติ. เต เตเนว โสมนเสฺสน น จิตฺตรูปํ รตฺติยา สุปึสุ.
+อถ โข เมตฺติยภูมชกา ภิกฺขู—  “หิโยฺย โข, อาวุโส, อมฺหากํ กลฺยาณภตฺติกสฺส คหปติโน ภตฺตํ อุทฺทิฏฺฐํ, เสฺว อเมฺห กลฺยาณภตฺติโก คหปติ สปุตฺตทาโร อุปติฏฺฐิตฺวา ปริวิสิสฺสติ; อญฺเญ โอทเนน ปุจฺฉิสฺสนฺติ, อญฺเญ สูเปน ปุจฺฉิสฺสนฺติ, อญฺเญ เตเลน ปุจฺฉิสฺสนฺติ, อญฺเญ อุตฺตริภงฺเคน ปุจฺฉิสฺสนฺตี”ติ. เต เตเนว โสมนเสฺสน น จิตฺตรูปํ รตฺติยา สุปิํสุ.
 </Paragraph>
 
 <Paragraph number="1568" book="para">
-อถ โข เมตฺติยภูมชกา ภิกฺขู ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรํ อาทาย เยน กลฺยาณภตฺติกสฺส คหปติโน นิเวสนํ เตนุปสงฺกมึสุ. อทฺทสา โข สา ทาสี เมตฺติยภูมชเก ภิกฺขู ทูรโตว อาคจฺฉนฺเต. ทิสฺวาน โกฏฺฐเก อาสนํ ปญฺญเปตฺวา เมตฺติยภูมชเก ภิกฺขู เอตทโวจ—  “นิสีทถ, ภนฺเต”ติ. อถ โข เมตฺติยภูมชกานํ ภิกฺขูนํ เอตทโหสิ—  “นิสฺสํสยํ โข น ตาว ภตฺตํ สิทฺธํ ภวิสฺสติ. ยถา มยํ โกฏฺฐเก นิสีเทยฺยามา”ติ. อถ โข สา ทาสี กณาชเกน พิลงฺคทุติเยน อุปคจฺฉิ—  “ภุญฺชถ, ภนฺเต”ติ. “มยํ โข, ภคินิ, นิจฺจภตฺติกา”ติ. “ชานามิ, อยฺยา, นิจฺจภตฺติกาติ. อปิ จาหํ หิโยฺยว คหปตินา อาณตฺตา—  ‘เย, เช, เสฺว ภตฺติกา อาคจฺฉนฺติ เต โกฏฺฐเก อาสนํ ปญฺญเปตฺวา กณาชเกน พิลงฺคทุติเยน ปริวิสา’ติ. ภุญฺชถ, ภนฺเต”ติ. อถ โข เมตฺติยภูมชกา ภิกฺขู—  “หิโยฺย โข, อาวุโส, กลฺยาณภตฺติโก คหปติ อารามํ อคมาสิ ทพฺพสฺส มลฺลปุตฺตสฺส สนฺติเก. นิสฺสํสยํ โข มยํ ทพฺเพน มลฺลปุตฺเตน คหปติโน อนฺตเร ปริภินฺนา”ติ. เต เตเนว โทมนเสฺสน น จิตฺตรูปํ ภุญฺชึสุ. อถ โข เมตฺติยภูมชกา ภิกฺขู ปจฺฉาภตฺตํ ปิณฺฑปาตปฏิกฺกนฺตา อารามํ คนฺตฺวา ปตฺตจีวรํ ปฏิสาเมตฺวา พหารามโกฏฺฐเก สงฺฆาฏิปลฺลตฺถิกาย นิสีทึสุ ตุณฺหีภูตา มงฺกุภูตา ปตฺตกฺขนฺธา อโธมุขา ปชฺฌายนฺตา อปฺปฏิภานา.
+อถ โข เมตฺติยภูมชกา ภิกฺขู ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรํ อาทาย เยน กลฺยาณภตฺติกสฺส คหปติโน นิเวสนํ เตนุปสงฺกมิํสุ. อทฺทสา โข สา ทาสี เมตฺติยภูมชเก ภิกฺขู ทูรโตว อาคจฺฉนฺเต. ทิสฺวาน โกฏฺฐเก อาสนํ ปญฺญเปตฺวา เมตฺติยภูมชเก ภิกฺขู เอตทโวจ—  “นิสีทถ, ภนฺเต”ติ. อถ โข เมตฺติยภูมชกานํ ภิกฺขูนํ เอตทโหสิ—  “นิสฺสํสยํ โข น ตาว ภตฺตํ สิทฺธํ ภวิสฺสติ. ยถา มยํ โกฏฺฐเก นิสีเทยฺยามา”ติ. อถ โข สา ทาสี กณาชเกน พิลงฺคทุติเยน อุปคจฺฉิ—  “ภุญฺชถ, ภนฺเต”ติ. “มยํ โข, ภคินิ, นิจฺจภตฺติกา”ติ. “ชานามิ, อยฺยา, นิจฺจภตฺติกาติ. อปิ จาหํ หิโยฺยว คหปตินา อาณตฺตา—  ‘เย, เช, เสฺว ภตฺติกา อาคจฺฉนฺติ เต โกฏฺฐเก อาสนํ ปญฺญเปตฺวา กณาชเกน พิลงฺคทุติเยน ปริวิสา’ติ. ภุญฺชถ, ภนฺเต”ติ. อถ โข เมตฺติยภูมชกา ภิกฺขู—  “หิโยฺย โข, อาวุโส, กลฺยาณภตฺติโก คหปติ อารามํ อคมาสิ ทพฺพสฺส มลฺลปุตฺตสฺส สนฺติเก. นิสฺสํสยํ โข มยํ ทพฺเพน มลฺลปุตฺเตน คหปติโน อนฺตเร ปริภินฺนา”ติ. เต เตเนว โทมนเสฺสน น จิตฺตรูปํ ภุญฺชิํสุ. อถ โข เมตฺติยภูมชกา ภิกฺขู ปจฺฉาภตฺตํ ปิณฺฑปาตปฏิกฺกนฺตา อารามํ คนฺตฺวา ปตฺตจีวรํ ปฏิสาเมตฺวา พหารามโกฏฺฐเก สงฺฆาฏิปลฺลตฺถิกาย นิสีทิํสุ ตุณฺหีภูตา มงฺกุภูตา ปตฺตกฺขนฺธา อโธมุขา ปชฺฌายนฺตา อปฺปฏิภานา.
 </Paragraph>
 
 <Paragraph number="1569" book="para">
-อถ โข เมตฺติยา ภิกฺขุนี เยน เมตฺติยภูมชกา ภิกฺขู เตนุปสงฺกมิ; อุปสงฺกมิตฺวา เมตฺติยภูมชเก ภิกฺขู เอตทโวจ—  “วนฺทามิ, อยฺยา”ติ. เอวํ วุตฺเต, เมตฺติยภูมชกา ภิกฺขู นาลปึสุ. ทุติยมฺปิ โข …เป…  ตติยมฺปิ โข เมตฺติยา ภิกฺขุนี เมตฺติยภูมชเก ภิกฺขู เอตทโวจ—  “วนฺทามิ, อยฺยา”ติ. ตติยมฺปิ โข เมตฺติยภูมชกา ภิกฺขู นาลปึสุ. “กฺยาหํ อยฺยานํ อปรชฺฌามิ? กิสฺส มํ อยฺยา นาลปนฺตี”ติ? “ตถา หิ ปน ตฺวํ, ภคินิ, อเมฺห ทพฺเพน มลฺลปุตฺเตน วิเหฐียมาเน อชฺฌุเปกฺขสี”ติ? “กฺยาหํ, อยฺยา, กโรมี”ติ? “สเจ โข ตฺวํ, ภคินิ, อิจฺเฉยฺยาสิ อชฺเชว ภควา ทพฺพํ มลฺลปุตฺตํ นาสาเปยฺยา”ติ. “กฺยาหํ, อยฺยา, กโรมิ, กึ มยา สกฺกา กาตุนฺ”ติ? “เอหิ ตฺวํ, ภคินิ, เยน ภควา เตนุปสงฺกม; อุปสงฺกมิตฺวา ภควนฺตํ เอวํ วเทหิ—  ‘อิทํ, ภนฺเต, นจฺฉนฺนํ นปฺปติรูปํ. ยายํ, ภนฺเต, ทิสา อภยา อนีติกา อนุปทฺทวา สายํ ทิสา สภยา สอีติกา เสาปทฺทวา. ยโต นิวาตํ ตโต สวาตํ. อุทกํ มญฺเญ อาทิตฺตํ. อเยฺยนมฺหิ ทพฺเพน มลฺลปุตฺเตน ทูสิตา’”ติ. “เอวํ, อยฺยา”ติ โข เมตฺติยา ภิกฺขุนี เมตฺติยภูมชกานํ ภิกฺขูนํ ปฏิสฺสุตฺวา เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ อฏฺฐาสิ. เอกมนฺตํ ฐิตา โข สา เมตฺติยา ภิกฺขุนี ภควนฺตํ เอตทโวจ—  “อิทํ, ภนฺเต, นจฺฉนฺนํ นปฺปติรูปํ. ยายํ, ภนฺเต, ทิสา อภยา อนีติกา อนุปทฺทวา สายํ ทิสา สภยา สอีติกา เสาปทฺทวา. ยโต นิวาตํ ตโต สวาตํ. อุทกํ มญฺเญ อาทิตฺตํ. อเยฺยนมฺหิ ทพฺเพน มลฺลปุตฺเตน ทูสิตา”ติ.
+อถ โข เมตฺติยา ภิกฺขุนี เยน เมตฺติยภูมชกา ภิกฺขู เตนุปสงฺกมิ; อุปสงฺกมิตฺวา เมตฺติยภูมชเก ภิกฺขู เอตทโวจ—  “วนฺทามิ, อยฺยา”ติ. เอวํ วุตฺเต, เมตฺติยภูมชกา ภิกฺขู นาลปิํสุ. ทุติยมฺปิ โข …เป…  ตติยมฺปิ โข เมตฺติยา ภิกฺขุนี เมตฺติยภูมชเก ภิกฺขู เอตทโวจ—  “วนฺทามิ, อยฺยา”ติ. ตติยมฺปิ โข เมตฺติยภูมชกา ภิกฺขู นาลปิํสุ. “กฺยาหํ อยฺยานํ อปรชฺฌามิ? กิสฺส มํ อยฺยา นาลปนฺตี”ติ? “ตถา หิ ปน ตฺวํ, ภคินิ, อเมฺห ทพฺเพน มลฺลปุตฺเตน วิเหฐียมาเน อชฺฌุเปกฺขสี”ติ? “กฺยาหํ, อยฺยา, กโรมี”ติ? “สเจ โข ตฺวํ, ภคินิ, อิจฺเฉยฺยาสิ อชฺเชว ภควา ทพฺพํ มลฺลปุตฺตํ นาสาเปยฺยา”ติ. “กฺยาหํ, อยฺยา, กโรมิ, กิํ มยา สกฺกา กาตุนฺ”ติ? “เอหิ ตฺวํ, ภคินิ, เยน ภควา เตนุปสงฺกม; อุปสงฺกมิตฺวา ภควนฺตํ เอวํ วเทหิ—  ‘อิทํ, ภนฺเต, นจฺฉนฺนํ นปฺปติรูปํ. ยายํ, ภนฺเต, ทิสา อภยา อนีติกา อนุปทฺทวา สายํ ทิสา สภยา สอีติกา เสาปทฺทวา. ยโต นิวาตํ ตโต สวาตํ. อุทกํ มญฺเญ อาทิตฺตํ. อเยฺยนมฺหิ ทพฺเพน มลฺลปุตฺเตน ทูสิตา’”ติ. “เอวํ, อยฺยา”ติ โข เมตฺติยา ภิกฺขุนี เมตฺติยภูมชกานํ ภิกฺขูนํ ปฏิสฺสุตฺวา เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ อฏฺฐาสิ. เอกมนฺตํ ฐิตา โข สา เมตฺติยา ภิกฺขุนี ภควนฺตํ เอตทโวจ—  “อิทํ, ภนฺเต, นจฺฉนฺนํ นปฺปติรูปํ. ยายํ, ภนฺเต, ทิสา อภยา อนีติกา อนุปทฺทวา สายํ ทิสา สภยา สอีติกา เสาปทฺทวา. ยโต นิวาตํ ตโต สวาตํ. อุทกํ มญฺเญ อาทิตฺตํ. อเยฺยนมฺหิ ทพฺเพน มลฺลปุตฺเตน ทูสิตา”ติ.
 </Paragraph>
 
 </Division>
 <Division number="384" book="para">
 
 <Paragraph number="1570" book="para">
-อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ ปฏิปุจฺฉิ—  “สรสิ ตฺวํ, ทพฺพ, เอวรูปํ กตฺตา ยถายํ ภิกฺขุนี อาหา”ติ? “ยถา มํ, ภนฺเต, ภควา ชานาตี”ติ. ทุติยมฺปิ โข ภควา …เป…  ตติยมฺปิ โข ภควา อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ เอตทโวจ—  “สรสิ ตฺวํ, ทพฺพ, เอวรูปํ กตฺตา ยถายํ ภิกฺขุนี อาหา”ติ? “ยถา มํ, ภนฺเต, ภควา ชานาตี”ติ. “น โข, ทพฺพ, ทพฺพา เอวํ นิพฺเพเฐนฺติ. สเจ ตยา กตํ กตนฺติ วเทหิ, สเจ ตยา อกตํ อกตนฺติ วเทหี”ติ. “ยโต อหํ, ภนฺเต, ชาโต นาภิชานามิ สุปินนฺเตนปิ เมถุนํ ธมฺมํ ปฏิเสวิตา, ปเคว ชาคโร”ติ. อถ โข ภควา ภิกฺขู อามนฺเตสิ—  “เตน หิ, ภิกฺขเว, เมตฺติยํ ภิกฺขุนึ นาเสถ. อิเม จ ภิกฺขู อนุยุญฺชถา”ติ. อิทํ วตฺวา ภควา อุฏฺฐายาสนา วิหารํ ปาวิสิ.
+อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ ปฏิปุจฺฉิ—  “สรสิ ตฺวํ, ทพฺพ, เอวรูปํ กตฺตา ยถายํ ภิกฺขุนี อาหา”ติ? “ยถา มํ, ภนฺเต, ภควา ชานาตี”ติ. ทุติยมฺปิ โข ภควา …เป…  ตติยมฺปิ โข ภควา อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ เอตทโวจ—  “สรสิ ตฺวํ, ทพฺพ, เอวรูปํ กตฺตา ยถายํ ภิกฺขุนี อาหา”ติ? “ยถา มํ, ภนฺเต, ภควา ชานาตี”ติ. “น โข, ทพฺพ, ทพฺพา เอวํ นิพฺเพเฐนฺติ. สเจ ตยา กตํ กตนฺติ วเทหิ, สเจ ตยา อกตํ อกตนฺติ วเทหี”ติ. “ยโต อหํ, ภนฺเต, ชาโต นาภิชานามิ สุปินนฺเตนปิ เมถุนํ ธมฺมํ ปฏิเสวิตา, ปเคว ชาคโร”ติ. อถ โข ภควา ภิกฺขู อามนฺเตสิ—  “เตน หิ, ภิกฺขเว, เมตฺติยํ ภิกฺขุนิํ นาเสถ. อิเม จ ภิกฺขู อนุยุญฺชถา”ติ. อิทํ วตฺวา ภควา อุฏฺฐายาสนา วิหารํ ปาวิสิ.
 </Paragraph>
 
 <Paragraph number="1571" book="para">
-อถ โข เต ภิกฺขู เมตฺติยํ ภิกฺขุนึ นาเสสุํ. อถ โข เมตฺติยภูมชกา ภิกฺขู เต ภิกฺขู เอตทโวจุํ—  “มาวุโส, เมตฺติยํ ภิกฺขุนึ นาเสถ. น สา กิญฺจิ อปรชฺฌติ. อเมฺหหิ สา อุสฺสาหิตา กุปิเตหิ อนตฺตมเนหิ จาวนาธิปฺปาเยหี”ติ. “กึ ปน ตุเมฺห, อาวุโส, อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ อมูลเกน ปาราชิเกน ธมฺเมน อนุทฺธํเสถา”ติ? “เอวมาวุโส”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม เมตฺติยภูมชกา ภิกฺขู อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ อมูลเกน ปาราชิเกน ธมฺเมน อนุทฺธํเสสฺสนฺตี”ติ.
+อถ โข เต ภิกฺขู เมตฺติยํ ภิกฺขุนิํ นาเสสุํ. อถ โข เมตฺติยภูมชกา ภิกฺขู เต ภิกฺขู เอตทโวจุํ—  “มาวุโส, เมตฺติยํ ภิกฺขุนิํ นาเสถ. น สา กิญฺจิ อปรชฺฌติ. อเมฺหหิ สา อุสฺสาหิตา กุปิเตหิ อนตฺตมเนหิ จาวนาธิปฺปาเยหี”ติ. “กิํ ปน ตุเมฺห, อาวุโส, อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ อมูลเกน ปาราชิเกน ธมฺเมน อนุทฺธํเสถา”ติ? “เอวมาวุโส”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม เมตฺติยภูมชกา ภิกฺขู อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ อมูลเกน ปาราชิเกน ธมฺเมน อนุทฺธํเสสฺสนฺตี”ติ.
 </Paragraph>
 
 <Paragraph number="1572" book="para">
@@ -108,7 +108,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="386" book="para">
 
 <Paragraph number="1574" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="1575" book="para">
@@ -140,11 +140,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1582" book="para">
-<Emphasis>ตโต อปเรน สมเยนา</Emphasis>ติ ยสฺมึ ขเณ อนุทฺธํสิโต โหติ ตํ ขณํ ตํ ลยํ ตํ มุหุตฺตํ วีติวตฺเต.
+<Emphasis>ตโต อปเรน สมเยนา</Emphasis>ติ ยสฺมิํ ขเณ อนุทฺธํสิโต โหติ ตํ ขณํ ตํ ลยํ ตํ มุหุตฺตํ วีติวตฺเต.
 </Paragraph>
 
 <Paragraph number="1583" book="para">
-<Emphasis>สมนุคฺคาหียมาโน</Emphasis>ติ เยน วตฺถุนา อนุทฺธํสิโต โหติ ตสฺมึ วตฺถุสฺมึ สมนุคฺคาหียมาโน.
+<Emphasis>สมนุคฺคาหียมาโน</Emphasis>ติ เยน วตฺถุนา อนุทฺธํสิโต โหติ ตสฺมิํ วตฺถุสฺมิํ สมนุคฺคาหียมาโน.
 </Paragraph>
 
 <Paragraph number="1584" book="para">
@@ -167,15 +167,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="387" book="para">
 
 <Paragraph number="1588" book="para">
-อทิฏฺฐสฺส โหติ ปาราชิกํ ธมฺมํ อชฺฌาปชฺชนฺโต. ตญฺเจ โจเทติ—  “ทิฏฺโฐ มยา, ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธึ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
+อทิฏฺฐสฺส โหติ ปาราชิกํ ธมฺมํ อชฺฌาปชฺชนฺโต. ตญฺเจ โจเทติ—  “ทิฏฺโฐ มยา, ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธิํ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
 </Paragraph>
 
 <Paragraph number="1589" book="para">
-อสุตสฺส โหติ—  “ปาราชิกํ ธมฺมํ อชฺฌาปนฺโน”ติ. ตญฺเจ โจเทติ—  “สุโต มยา, ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธึ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
+อสุตสฺส โหติ—  “ปาราชิกํ ธมฺมํ อชฺฌาปนฺโน”ติ. ตญฺเจ โจเทติ—  “สุโต มยา, ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธิํ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
 </Paragraph>
 
 <Paragraph number="1590" book="para">
-อปริสงฺกิตสฺส โหติ—  “ปาราชิกํ ธมฺมํ อชฺฌาปนฺโน”ติ. ตญฺเจ โจเทติ—  “ปริสงฺกิโต มยา, ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธึ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
+อปริสงฺกิตสฺส โหติ—  “ปาราชิกํ ธมฺมํ อชฺฌาปนฺโน”ติ. ตญฺเจ โจเทติ—  “ปริสงฺกิโต มยา, ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธิํ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
 </Paragraph>
 
 <Paragraph number="1591" book="para">
@@ -215,14 +215,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1600" book="para">
-ทิฏฺฐสฺส โหติ ปาราชิกํ ธมฺมํ อชฺฌาปชฺชนฺโต. ทิฏฺเฐ เวมติโก ทิฏฺฐํ โน กปฺเปติ ทิฏฺฐํ นสฺสรติ ทิฏฺฐํ ปมุฏฺโฐ โหติ …เป…  สุเต เวมติโก สุตํ โน กปฺเปติ สุตํ นสฺสรติ สุตํ ปมุฏฺโฐ โหติ …เป…  ปริสงฺกิเต เวมติโก ปริสงฺกิตํ โน กปฺเปติ ปริสงฺกิตํ นสฺสรติ ปริสงฺกิตํ ปมุฏฺโฐ โหติ. ตญฺเจ โจเทติ—  “ปริสงฺกิโต มยา ทิฏฺโฐ จ …เป…  ปริสงฺกิโต มยา สุโต จ …เป…  ปริสงฺกิโต มยา ทิฏฺโฐ จ สุโต จ, ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธึ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
+ทิฏฺฐสฺส โหติ ปาราชิกํ ธมฺมํ อชฺฌาปชฺชนฺโต. ทิฏฺเฐ เวมติโก ทิฏฺฐํ โน กปฺเปติ ทิฏฺฐํ นสฺสรติ ทิฏฺฐํ ปมุฏฺโฐ โหติ …เป…  สุเต เวมติโก สุตํ โน กปฺเปติ สุตํ นสฺสรติ สุตํ ปมุฏฺโฐ โหติ …เป…  ปริสงฺกิเต เวมติโก ปริสงฺกิตํ โน กปฺเปติ ปริสงฺกิตํ นสฺสรติ ปริสงฺกิตํ ปมุฏฺโฐ โหติ. ตญฺเจ โจเทติ—  “ปริสงฺกิโต มยา ทิฏฺโฐ จ …เป…  ปริสงฺกิโต มยา สุโต จ …เป…  ปริสงฺกิโต มยา ทิฏฺโฐ จ สุโต จ, ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธิํ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
 </Paragraph>
 
 </Division>
 <Division number="388" book="para">
 
 <Paragraph number="1601" book="para">
-อทิฏฺฐสฺส โหติ ปาราชิกํ ธมฺมํ อชฺฌาปชฺชนฺโต. ตญฺเจ โจทาเปติ—  “ทิฏฺโฐสิ, ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธึ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
+อทิฏฺฐสฺส โหติ ปาราชิกํ ธมฺมํ อชฺฌาปชฺชนฺโต. ตญฺเจ โจทาเปติ—  “ทิฏฺโฐสิ, ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธิํ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
 </Paragraph>
 
 <Paragraph number="1602" book="para">
@@ -242,7 +242,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1606" book="para">
-ทิฏฺฐสฺส โหติ ปาราชิกํ ธมฺมํ อชฺฌาปชฺชนฺโต. ทิฏฺเฐ เวมติโก ทิฏฺฐํ โน กปฺเปติ ทิฏฺฐํ นสฺสรติ ทิฏฺฐํ ปมุฏฺโฐ โหติ …เป…  สุเต เวมติโก สุตํ โน กปฺเปติ สุตํ นสฺสรติ สุตํ ปมุฏฺโฐ โหติ …เป…  ปริสงฺกิเต เวมติโก ปริสงฺกิตํ โน กปฺเปติ ปริสงฺกิตํ นสฺสรติ ปริสงฺกิตํ ปมุฏฺโฐ โหติ. ตญฺเจ โจทาเปติ—  “ปริสงฺกิโตสิ, ทิฏฺโฐสิ …เป…  ปริสงฺกิตํ ปมุฏฺโฐ โหติ, ตญฺเจ โจทาเปติ—  “ปริสงฺกิโตสิ สุโตสิ …เป…  ปริสงฺกิตํ ปมุฏฺโฐ โหติ, ตญฺเจ โจทาเปติ—  “ปริสงฺกิโตสิ, ทิฏฺโฐสิ, สุโตสิ, ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธึ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
+ทิฏฺฐสฺส โหติ ปาราชิกํ ธมฺมํ อชฺฌาปชฺชนฺโต. ทิฏฺเฐ เวมติโก ทิฏฺฐํ โน กปฺเปติ ทิฏฺฐํ นสฺสรติ ทิฏฺฐํ ปมุฏฺโฐ โหติ …เป…  สุเต เวมติโก สุตํ โน กปฺเปติ สุตํ นสฺสรติ สุตํ ปมุฏฺโฐ โหติ …เป…  ปริสงฺกิเต เวมติโก ปริสงฺกิตํ โน กปฺเปติ ปริสงฺกิตํ นสฺสรติ ปริสงฺกิตํ ปมุฏฺโฐ โหติ. ตญฺเจ โจทาเปติ—  “ปริสงฺกิโตสิ, ทิฏฺโฐสิ …เป…  ปริสงฺกิตํ ปมุฏฺโฐ โหติ, ตญฺเจ โจทาเปติ—  “ปริสงฺกิโตสิ สุโตสิ …เป…  ปริสงฺกิตํ ปมุฏฺโฐ โหติ, ตญฺเจ โจทาเปติ—  “ปริสงฺกิโตสิ, ทิฏฺโฐสิ, สุโตสิ, ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธิํ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
 </Paragraph>
 
 </Division>
