--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-9.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-9.mdx
@@ -18,15 +18,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="391" book="para">
 
 <Paragraph number="1626" book="para">
-เตน สมเยน พุทฺโธ ภควา ราชคเห วิหรติ เวฬุวเน กลนฺทกนิวาเป. เตน โข ปน สมเยน เมตฺติยภูมชกา ภิกฺขู คิชฺฌกูฏา ปพฺพตา โอโรหนฺตา อทฺทสํสุ ฉคลกํ อชิกาย วิปฺปฏิปชฺชนฺตํ. ทิสฺวาน เอวมาหํสุ—  “หนฺท มยํ, อาวุโส, อิมํ ฉคลกํ ทพฺพํ มลฺลปุตฺตํ นาม กโรม. อิมํ อชิกํ เมตฺติยํ นาม ภิกฺขุนึ กโรม. เอวํ มยํ โวหริสฺสาม. ปุพฺเพ มยํ, อาวุโส, ทพฺพํ มลฺลปุตฺตํ สุเตน อโวจุมฺหา. อิทานิ ปน อเมฺหหิ สามํ ทิฏฺโฐ เมตฺติยาย ภิกฺขุนิยา วิปฺปฏิปชฺชนฺโต”ติ. เต ตํ ฉคลกํ ทพฺพํ มลฺลปุตฺตํ นาม อกํสุ. ตํ อชิกํ เมตฺติยํ นาม ภิกฺขุนึ อกํสุ. เต ภิกฺขูนํ อาโรเจสุํ—  “ปุพฺเพ มยํ, อาวุโส, ทพฺพํ มลฺลปุตฺตํ สุเตน อโวจุมฺหา. อิทานิ ปน อเมฺหหิ สามํ ทิฏฺโฐ เมตฺติยาย ภิกฺขุนิยา วิปฺปฏิปชฺชนฺโต”ติ. ภิกฺขู เอวมาหํสุ—  “มาวุโส, เอวํ อวจุตฺถ. นายสฺมา ทพฺโพ มลฺลปุตฺโต เอวํ กริสฺสตี”ติ.
+เตน สมเยน พุทฺโธ ภควา ราชคเห วิหรติ เวฬุวเน กลนฺทกนิวาเป. เตน โข ปน สมเยน เมตฺติยภูมชกา ภิกฺขู คิชฺฌกูฏา ปพฺพตา โอโรหนฺตา อทฺทสํสุ ฉคลกํ อชิกาย วิปฺปฏิปชฺชนฺตํ. ทิสฺวาน เอวมาหํสุ—  “หนฺท มยํ, อาวุโส, อิมํ ฉคลกํ ทพฺพํ มลฺลปุตฺตํ นาม กโรม. อิมํ อชิกํ เมตฺติยํ นาม ภิกฺขุนิํ กโรม. เอวํ มยํ โวหริสฺสาม. ปุพฺเพ มยํ, อาวุโส, ทพฺพํ มลฺลปุตฺตํ สุเตน อโวจุมฺหา. อิทานิ ปน อเมฺหหิ สามํ ทิฏฺโฐ เมตฺติยาย ภิกฺขุนิยา วิปฺปฏิปชฺชนฺโต”ติ. เต ตํ ฉคลกํ ทพฺพํ มลฺลปุตฺตํ นาม อกํสุ. ตํ อชิกํ เมตฺติยํ นาม ภิกฺขุนิํ อกํสุ. เต ภิกฺขูนํ อาโรเจสุํ—  “ปุพฺเพ มยํ, อาวุโส, ทพฺพํ มลฺลปุตฺตํ สุเตน อโวจุมฺหา. อิทานิ ปน อเมฺหหิ สามํ ทิฏฺโฐ เมตฺติยาย ภิกฺขุนิยา วิปฺปฏิปชฺชนฺโต”ติ. ภิกฺขู เอวมาหํสุ—  “มาวุโส, เอวํ อวจุตฺถ. นายสฺมา ทพฺโพ มลฺลปุตฺโต เอวํ กริสฺสตี”ติ.
 </Paragraph>
 
 <Paragraph number="1627" book="para">
-อถ โข เต ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ ปฏิปุจฺฉิ—  “สรสิ ตฺวํ, ทพฺพ, เอวรูปํ กตฺตา ยถยิเม ภิกฺขู อาหํสู”ติ? “ยถา มํ, ภนฺเต, ภควา ชานาตี”ติ. ทุติยมฺปิ โข ภควา …เป…  ตติยมฺปิ โข ภควา อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ เอตทโวจ—  “สรสิ ตฺวํ, ทพฺพ, เอวรูปํ กตฺตา ยถยิเม ภิกฺขู อาหํสู”ติ? “ยถา มํ, ภนฺเต, ภควา ชานาตี”ติ. “น โข, ทพฺพ, ทพฺพา เอวํ นิพฺเพเฐนฺติ. สเจ ตยา กตํ กตนฺติ วเทหิ, สเจ ตยา อกตํ อกตนฺติ วเทหี”ติ. “ยโต อหํ, ภนฺเต, ชาโต นาภิชานามิ สุปินนฺเตนปิ เมถุนธมฺมํ ปฏิเสวิตา, ปเคว ชาคโร”ติ. อถ โข ภควา ภิกฺขู อามนฺเตสิ—  “เตน หิ, ภิกฺขเว, อิเม ภิกฺขู อนุยุญฺชถา”ติ. อิทํ วตฺวา ภควา อุฏฺฐายาสนา วิหารํ ปาวิสิ.
+อถ โข เต ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ ปฏิปุจฺฉิ—  “สรสิ ตฺวํ, ทพฺพ, เอวรูปํ กตฺตา ยถยิเม ภิกฺขู อาหํสู”ติ? “ยถา มํ, ภนฺเต, ภควา ชานาตี”ติ. ทุติยมฺปิ โข ภควา …เป…  ตติยมฺปิ โข ภควา อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ เอตทโวจ—  “สรสิ ตฺวํ, ทพฺพ, เอวรูปํ กตฺตา ยถยิเม ภิกฺขู อาหํสู”ติ? “ยถา มํ, ภนฺเต, ภควา ชานาตี”ติ. “น โข, ทพฺพ, ทพฺพา เอวํ นิพฺเพเฐนฺติ. สเจ ตยา กตํ กตนฺติ วเทหิ, สเจ ตยา อกตํ อกตนฺติ วเทหี”ติ. “ยโต อหํ, ภนฺเต, ชาโต นาภิชานามิ สุปินนฺเตนปิ เมถุนธมฺมํ ปฏิเสวิตา, ปเคว ชาคโร”ติ. อถ โข ภควา ภิกฺขู อามนฺเตสิ—  “เตน หิ, ภิกฺขเว, อิเม ภิกฺขู อนุยุญฺชถา”ติ. อิทํ วตฺวา ภควา อุฏฺฐายาสนา วิหารํ ปาวิสิ.
 </Paragraph>
 
 <Paragraph number="1628" book="para">
-อถ โข เต ภิกฺขู เมตฺติยภูมชเก ภิกฺขู อนุยุญฺชึสุ. เต ภิกฺขูหิ อนุยุญฺชียมานา ภิกฺขูนํ เอตมตฺถํ อาโรเจสุํ—  “กึ ปน ตุเมฺห, อาวุโส, อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ อญฺญภาคิยสฺส อธิกรณสฺส กิญฺจิ เทสํ เลสมตฺตํ อุปาทาย ปาราชิเกน ธมฺเมน อนุทฺธํเสถา”ติ? “เอวมาวุโส”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม เมตฺติยภูมชกา ภิกฺขู อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ อญฺญภาคิยสฺส อธิกรณสฺส กิญฺจิ เทสํ เลสมตฺตํ อุปาทาย ปาราชิเกน ธมฺเมน อนุทฺธํเสสฺสนฺตี”ติ.
+อถ โข เต ภิกฺขู เมตฺติยภูมชเก ภิกฺขู อนุยุญฺชิํสุ. เต ภิกฺขูหิ อนุยุญฺชียมานา ภิกฺขูนํ เอตมตฺถํ อาโรเจสุํ—  “กิํ ปน ตุเมฺห, อาวุโส, อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ อญฺญภาคิยสฺส อธิกรณสฺส กิญฺจิ เทสํ เลสมตฺตํ อุปาทาย ปาราชิเกน ธมฺเมน อนุทฺธํเสถา”ติ? “เอวมาวุโส”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม เมตฺติยภูมชกา ภิกฺขู อายสฺมนฺตํ ทพฺพํ มลฺลปุตฺตํ อญฺญภาคิยสฺส อธิกรณสฺส กิญฺจิ เทสํ เลสมตฺตํ อุปาทาย ปาราชิเกน ธมฺเมน อนุทฺธํเสสฺสนฺตี”ติ.
 </Paragraph>
 
 <Paragraph number="1629" book="para">
@@ -44,7 +44,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="393" book="para">
 
 <Paragraph number="1631" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="1632" book="para">
@@ -90,7 +90,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="395" book="para">
 
 <Paragraph number="1641" book="para">
-<Emphasis>ชาติเลโส</Emphasis> นาม ขตฺติโย ทิฏฺโฐ โหติ ปาราชิกํ ธมฺมํ อชฺฌาปชฺชนฺโต. อญฺญํ ขตฺติยํ ปสฺสิตฺวา โจเทติ—  “ขตฺติโย มยา ทิฏฺโฐ. ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธึ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
+<Emphasis>ชาติเลโส</Emphasis> นาม ขตฺติโย ทิฏฺโฐ โหติ ปาราชิกํ ธมฺมํ อชฺฌาปชฺชนฺโต. อญฺญํ ขตฺติยํ ปสฺสิตฺวา โจเทติ—  “ขตฺติโย มยา ทิฏฺโฐ. ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธิํ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
 </Paragraph>
 
 <Paragraph number="1642" book="para">
@@ -122,7 +122,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="399" book="para">
 
 <Paragraph number="1646" book="para">
-<Emphasis>อาปตฺติเลโส</Emphasis> นาม ลหุกํ อาปตฺตึ อาปชฺชนฺโต ทิฏฺโฐ โหติ. ตญฺเจ ปาราชิเกน โจเทติ—  “อสฺสมโณสิ, อสกฺยปุตฺติโยสิ …เป…  อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
+<Emphasis>อาปตฺติเลโส</Emphasis> นาม ลหุกํ อาปตฺติํ อาปชฺชนฺโต ทิฏฺโฐ โหติ. ตญฺเจ ปาราชิเกน โจเทติ—  “อสฺสมโณสิ, อสกฺยปุตฺติโยสิ …เป…  อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
 </Paragraph>
 
 </Division>
@@ -157,7 +157,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="404" book="para">
 
 <Paragraph number="1651" book="para">
-<Emphasis>เสนาสนเลโส</Emphasis> นาม อิตฺถนฺนามเสนาสนวาสิโก ทิฏฺโฐ โหติ ปาราชิกํ ธมฺมํ อชฺฌาปชฺชนฺโต. อญฺญํ อิตฺถนฺนามเสนาสนวาสิกํ ปสฺสิตฺวา โจเทติ—  “อิตฺถนฺนามเสนาสนวาสิโก มยา ทิฏฺโฐ. ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธึ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
+<Emphasis>เสนาสนเลโส</Emphasis> นาม อิตฺถนฺนามเสนาสนวาสิโก ทิฏฺโฐ โหติ ปาราชิกํ ธมฺมํ อชฺฌาปชฺชนฺโต. อญฺญํ อิตฺถนฺนามเสนาสนวาสิกํ ปสฺสิตฺวา โจเทติ—  “อิตฺถนฺนามเสนาสนวาสิโก มยา ทิฏฺโฐ. ปาราชิกํ ธมฺมํ อชฺฌาปนฺโนสิ, อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธิํ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
 </Paragraph>
 
 </Division>
@@ -176,11 +176,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1655" book="para">
-<Emphasis>ตโต อปเรน สมเยนา</Emphasis>ติ ยสฺมึ ขเณ อนุทฺธํสิโต โหติ, ตํ ขณํ ตํ ลยํ ตํ มุหุตฺตํ วีติวตฺเต.
+<Emphasis>ตโต อปเรน สมเยนา</Emphasis>ติ ยสฺมิํ ขเณ อนุทฺธํสิโต โหติ, ตํ ขณํ ตํ ลยํ ตํ มุหุตฺตํ วีติวตฺเต.
 </Paragraph>
 
 <Paragraph number="1656" book="para">
-<Emphasis>สมนุคฺคาหียมาโน</Emphasis>ติ เยน วตฺถุนา อนุทฺธํสิโต โหติ ตสฺมึ วตฺถุสฺมึ สมนุคฺคาหียมาโน.
+<Emphasis>สมนุคฺคาหียมาโน</Emphasis>ติ เยน วตฺถุนา อนุทฺธํสิโต โหติ ตสฺมิํ วตฺถุสฺมิํ สมนุคฺคาหียมาโน.
 </Paragraph>
 
 <Paragraph number="1657" book="para">
@@ -207,7 +207,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="406" book="para">
 
 <Paragraph number="1662" book="para">
-ภิกฺขุ สํฆาทิเสสํ อชฺฌาปชฺชนฺโต ทิฏฺโฐ โหติ, สํฆาทิเสเส สํฆาทิเสสทิฏฺฐิ โหติ. ตญฺเจ ปาราชิเกน โจเทติ—  “อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธึ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, เอวมฺปิ อาปตฺตญฺญภาคิยํ โหติ เลโส จ อุปาทินฺโน, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
+ภิกฺขุ สํฆาทิเสสํ อชฺฌาปชฺชนฺโต ทิฏฺโฐ โหติ, สํฆาทิเสเส สํฆาทิเสสทิฏฺฐิ โหติ. ตญฺเจ ปาราชิเกน โจเทติ—  “อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธิํ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, เอวมฺปิ อาปตฺตญฺญภาคิยํ โหติ เลโส จ อุปาทินฺโน, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
 </Paragraph>
 
 <Paragraph number="1663" book="para">
@@ -219,7 +219,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1665" book="para">
-ภิกฺขุ ปาจิตฺติยํ …เป…  ปาฏิเทสนียํ…  ทุกฺกฏํ…  ทุพฺภาสิตํ อชฺฌาปชฺชนฺโต ทิฏฺโฐ โหติ, ทุพฺภาสิเต ทุพฺภาสิตทิฏฺฐิ โหติ …เป…  ทุพฺภาสิเต สํฆาทิเสสทิฏฺฐิ โหติ…  ถุลฺลจฺจยทิฏฺฐิ โหติ…  ปาจิตฺติยทิฏฺฐิ โหติ…  ปาฏิเทสนียทิฏฺฐิ โหติ…  ทุกฺกฏทิฏฺฐิ โหติ. ตญฺเจ ปาราชิเกน โจเทติ—  “อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธึ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, เอวมฺปิ อาปตฺตญฺญภาคิยํ โหติ เลโส จ อุปาทินฺโน, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
+ภิกฺขุ ปาจิตฺติยํ …เป…  ปาฏิเทสนียํ…  ทุกฺกฏํ…  ทุพฺภาสิตํ อชฺฌาปชฺชนฺโต ทิฏฺโฐ โหติ, ทุพฺภาสิเต ทุพฺภาสิตทิฏฺฐิ โหติ …เป…  ทุพฺภาสิเต สํฆาทิเสสทิฏฺฐิ โหติ…  ถุลฺลจฺจยทิฏฺฐิ โหติ…  ปาจิตฺติยทิฏฺฐิ โหติ…  ปาฏิเทสนียทิฏฺฐิ โหติ…  ทุกฺกฏทิฏฺฐิ โหติ. ตญฺเจ ปาราชิเกน โจเทติ—  “อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธิํ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, เอวมฺปิ อาปตฺตญฺญภาคิยํ โหติ เลโส จ อุปาทินฺโน, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
 
 </Paragraph>
 </Division>
@@ -245,7 +245,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1670" book="para">
-ภิกฺขุ ปาจิตฺติยํ …เป…  ปาฏิเทสนียํ…  ทุกฺกฏํ…  ทุพฺภาสิตํ อชฺฌาปชฺชนฺโต ทิฏฺโฐ โหติ ทุพฺภาสิเต ทุพฺภาสิตทิฏฺฐิ โหติ …เป…  ทุพฺภาสิเต สํฆาทิเสสทิฏฺฐิ โหติ…  ถุลฺลจฺจยทิฏฺฐิ โหติ…  ปาจิตฺติยทิฏฺฐิ โหติ…  ปาฏิเทสนียทิฏฺฐิ โหติ…  ทุกฺกฏทิฏฺฐิ โหติ. ตญฺเจ ปาราชิเกน โจทาเปติ—  “อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธึ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, เอวมฺปิ อาปตฺตญฺญภาคิยํ โหติ เลโส จ อุปาทินฺโน, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
+ภิกฺขุ ปาจิตฺติยํ …เป…  ปาฏิเทสนียํ…  ทุกฺกฏํ…  ทุพฺภาสิตํ อชฺฌาปชฺชนฺโต ทิฏฺโฐ โหติ ทุพฺภาสิเต ทุพฺภาสิตทิฏฺฐิ โหติ …เป…  ทุพฺภาสิเต สํฆาทิเสสทิฏฺฐิ โหติ…  ถุลฺลจฺจยทิฏฺฐิ โหติ…  ปาจิตฺติยทิฏฺฐิ โหติ…  ปาฏิเทสนียทิฏฺฐิ โหติ…  ทุกฺกฏทิฏฺฐิ โหติ. ตญฺเจ ปาราชิเกน โจทาเปติ—  “อสฺสมโณสิ, อสกฺยปุตฺติโยสิ, นตฺถิ ตยา สทฺธิํ อุโปสโถ วา ปวารณา วา สํฆกมฺมํ วา”ติ, เอวมฺปิ อาปตฺตญฺญภาคิยํ โหติ เลโส จ อุปาทินฺโน, อาปตฺติ วาจาย, วาจาย สํฆาทิเสสสฺส.
 </Paragraph>
 
 </Division>
