--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-10.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-10.mdx
@@ -96,7 +96,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2088" book="para">
-ทุติยมฺปิ วตฺตพฺโพ. ตติยมฺปิ วตฺตพฺโพ. สเจ อภินิปฺผาเทติ, อิจฺเจตํ กุสลํ; โน เจ อภินิปฺผาเทติ, ตตฺถ คนฺตฺวา ตุณฺหีภูเตน อุทฺทิสฺส ฐาตพฺพํ. น อาสเน นิสีทิตพฺพํ. น อามิสํ ปฏิคฺคเหตพฺพํ. น ธมฺโม ภาสิตพฺโพ. “กึ การณา อาคโตสี”ติ ปุจฺฉิยมาโน “ชานาหิ, อาวุโส”ติ วตฺตพฺโพ. สเจ อาสเน วา นิสีทติ, อามิสํ วา ปฏิคฺคณฺหาติ, ธมฺมํ วา ภาสติ, ฐานํ ภญฺชติ.
+ทุติยมฺปิ วตฺตพฺโพ. ตติยมฺปิ วตฺตพฺโพ. สเจ อภินิปฺผาเทติ, อิจฺเจตํ กุสลํ; โน เจ อภินิปฺผาเทติ, ตตฺถ คนฺตฺวา ตุณฺหีภูเตน อุทฺทิสฺส ฐาตพฺพํ. น อาสเน นิสีทิตพฺพํ. น อามิสํ ปฏิคฺคเหตพฺพํ. น ธมฺโม ภาสิตพฺโพ. “กิํ การณา อาคโตสี”ติ ปุจฺฉิยมาโน “ชานาหิ, อาวุโส”ติ วตฺตพฺโพ. สเจ อาสเน วา นิสีทติ, อามิสํ วา ปฏิคฺคณฺหาติ, ธมฺมํ วา ภาสติ, ฐานํ ภญฺชติ.
 </Paragraph>
 
 <Paragraph number="2089" book="para">
