--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-3.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-3.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="497" book="para">
 
 <Paragraph number="1921" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน อกาลจีวรํ อุปฺปนฺนํ โหติ. ตสฺส ตํ จีวรํ กยิรมานํ นปฺปโหติ. อถ โข โส ภิกฺขุ ตํ จีวรํ อุสฺสาเปตฺวา ปุนปฺปุนํ วิมชฺชติ. อทฺทสา โข ภควา เสนาสนจาริกํ อาหิณฺฑนฺโต ตํ ภิกฺขุํ ตํ จีวรํ อุสฺสาเปตฺวา ปุนปฺปุนํ วิมชฺชนฺตํ. ทิสฺวาน เยน โส ภิกฺขุ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ตํ ภิกฺขุํ เอตทโวจ—  “กิสฺส ตฺวํ, ภิกฺขุ, อิมํ จีวรํ อุสฺสาเปตฺวา ปุนปฺปุนํ วิมชฺชสี”ติ? “อิทํ เม, ภนฺเต, อกาลจีวรํ อุปฺปนฺนํ. กยิรมานํ นปฺปโหติ. เตนาหํ อิมํ จีวรํ อุสฺสาเปตฺวา ปุนปฺปุนํ วิมชฺชามี”ติ. “อตฺถิ ปน เต, ภิกฺขุ, จีวรปจฺจาสา”ติ? “อตฺถิ, ภควา”ติ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา, ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, อกาลจีวรํ ปฏิคฺคเหตฺวา จีวรปจฺจาสา นิกฺขิปิตุนฺ”ติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน อกาลจีวรํ อุปฺปนฺนํ โหติ. ตสฺส ตํ จีวรํ กยิรมานํ นปฺปโหติ. อถ โข โส ภิกฺขุ ตํ จีวรํ อุสฺสาเปตฺวา ปุนปฺปุนํ วิมชฺชติ. อทฺทสา โข ภควา เสนาสนจาริกํ อาหิณฺฑนฺโต ตํ ภิกฺขุํ ตํ จีวรํ อุสฺสาเปตฺวา ปุนปฺปุนํ วิมชฺชนฺตํ. ทิสฺวาน เยน โส ภิกฺขุ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ตํ ภิกฺขุํ เอตทโวจ—  “กิสฺส ตฺวํ, ภิกฺขุ, อิมํ จีวรํ อุสฺสาเปตฺวา ปุนปฺปุนํ วิมชฺชสี”ติ? “อิทํ เม, ภนฺเต, อกาลจีวรํ อุปฺปนฺนํ. กยิรมานํ นปฺปโหติ. เตนาหํ อิมํ จีวรํ อุสฺสาเปตฺวา ปุนปฺปุนํ วิมชฺชามี”ติ. “อตฺถิ ปน เต, ภิกฺขุ, จีวรปจฺจาสา”ติ? “อตฺถิ, ภควา”ติ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา, ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, อกาลจีวรํ ปฏิคฺคเหตฺวา จีวรปจฺจาสา นิกฺขิปิตุนฺ”ติ.
 </Paragraph>
 
 </Division>
@@ -36,7 +36,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="499" book="para">
 
 <Paragraph number="1924" book="para">
-<Emphasis>“นิฏฺฐิตจีวรสฺมึ ภิกฺขุนา อุพฺภตสฺมึ กถิเน ภิกฺขุโน ปเนว อกาลจีวรํ อุปฺปชฺเชยฺย, อากงฺขมาเนน ภิกฺขุนา ปฏิคฺคเหตพฺพํ. ปฏิคฺคเหตฺวา ขิปฺปเมว กาเรตพฺพํ. โน จสฺส ปาริปูริ, มาสปรมํ เตน ภิกฺขุนา ตํ จีวรํ นิกฺขิปิตพฺพํ อูนสฺส ปาริปูริยา สติยา ปจฺจาสาย. ตโต เจ อุตฺตริ นิกฺขิเปยฺย, สติยาปิ ปจฺจาสาย, นิสฺสคฺคิยํ ปาจิตฺติยนฺ”</Emphasis>ติ. (*3*:<Emphasis>22</Emphasis>)
+<Emphasis>“นิฏฺฐิตจีวรสฺมิํ ภิกฺขุนา อุพฺภตสฺมิํ กถิเน ภิกฺขุโน ปเนว อกาลจีวรํ อุปฺปชฺเชยฺย, อากงฺขมาเนน ภิกฺขุนา ปฏิคฺคเหตพฺพํ. ปฏิคฺคเหตฺวา ขิปฺปเมว กาเรตพฺพํ. โน จสฺส ปาริปูริ, มาสปรมํ เตน ภิกฺขุนา ตํ จีวรํ นิกฺขิปิตพฺพํ อูนสฺส ปาริปูริยา สติยา ปจฺจาสาย. ตโต เจ อุตฺตริ นิกฺขิเปยฺย, สติยาปิ ปจฺจาสาย, นิสฺสคฺคิยํ ปาจิตฺติยนฺ”</Emphasis>ติ. (*3*:<Emphasis>22</Emphasis>)
 </Paragraph>
 
 </Division>
@@ -47,7 +47,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1926" book="para">
-<Emphasis>อุพฺภตสฺมึ กถิเน</Emphasis>ติ อฏฺฐนฺนํ มาติกานํ อญฺญตราย มาติกาย อุพฺภตํ โหติ, สํเฆน วา อนฺตรา อุพฺภตํ โหติ.
+<Emphasis>อุพฺภตสฺมิํ กถิเน</Emphasis>ติ อฏฺฐนฺนํ มาติกานํ อญฺญตราย มาติกาย อุพฺภตํ โหติ, สํเฆน วา อนฺตรา อุพฺภตํ โหติ.
 </Paragraph>
 
 <Paragraph number="1927" book="para">
@@ -83,7 +83,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1935" book="para">
-<Emphasis>ตโต เจ อุตฺตริ นิกฺขิเปยฺย สติยาปิ ปจฺจาสายา</Emphasis>ติ ตทหุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, ทสาหา กาเรตพฺพํ. ทฺวีหุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, ทสาหา กาเรตพฺพํ. ตีหุปฺปนฺเน มูลจีวเร …เป…  จตูหุปฺปนฺเน…  ปญฺจาหุปฺปนฺเน…  ฉาหุปฺปนฺเน…  สตฺตาหุปฺปนฺเน…  อฏฺฐาหุปฺปนฺเน…  นวาหุปฺปนฺเน…  ทสาหุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, ทสาหา กาเรตพฺพํ. เอกาทเส อุปฺปนฺเน …เป…  ทฺวาทเส อุปฺปนฺเน…  เตรเส อุปฺปนฺเน…  จุทฺทเส อุปฺปนฺเน…  ปนฺนรเส อุปฺปนฺเน…  โสฬเส อุปฺปนฺเน…  สตฺตรเส อุปฺปนฺเน…  อฏฺฐารเส อุปฺปนฺเน…  เอกูนวีเส อุปฺปนฺเน…  วีเส อุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, ทสาหา กาเรตพฺพํ. เอกวีเส อุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, นวาหา กาเรตพฺพํ. ทฺวาวีเส อุปฺปนฺเน …เป…  เตวีเส อุปฺปนฺเน…  จตุวีเส อุปฺปนฺเน…  ปญฺจวีเส อุปฺปนฺเน…  ฉพฺพีเส อุปฺปนฺเน…  สตฺตวีเส อุปฺปนฺเน…  อฏฺฐวีเส อุปฺปนฺเน…  เอกูนตึเส อุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, เอกาหํ กาเรตพฺพํ…  ตึเส อุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, ตทเหว อธิฏฺฐาตพฺพํ วิกปฺเปตพฺพํ วิสฺสชฺเชตพฺพํ. โน เจ อธิฏฺเฐยฺย วา วิกปฺเปยฺย วา วิสฺสชฺเชยฺย วา, เอกตึเส อรุณุคฺคมเน นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ …เป…  อิทํ เม, ภนฺเต, อกาลจีวรํ มาสาติกฺกนฺตํ นิสฺสคฺคิยํ, อิมาหํ สํฆสฺส นิสฺสชฺชามีติ …เป…  ทเทยฺยาติ …เป…  ทเทยฺยุนฺติ …เป…  อายสฺมโต ทมฺมีติ.
+<Emphasis>ตโต เจ อุตฺตริ นิกฺขิเปยฺย สติยาปิ ปจฺจาสายา</Emphasis>ติ ตทหุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, ทสาหา กาเรตพฺพํ. ทฺวีหุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, ทสาหา กาเรตพฺพํ. ตีหุปฺปนฺเน มูลจีวเร …เป…  จตูหุปฺปนฺเน…  ปญฺจาหุปฺปนฺเน…  ฉาหุปฺปนฺเน…  สตฺตาหุปฺปนฺเน…  อฏฺฐาหุปฺปนฺเน…  นวาหุปฺปนฺเน…  ทสาหุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, ทสาหา กาเรตพฺพํ. เอกาทเส อุปฺปนฺเน …เป…  ทฺวาทเส อุปฺปนฺเน…  เตรเส อุปฺปนฺเน…  จุทฺทเส อุปฺปนฺเน…  ปนฺนรเส อุปฺปนฺเน…  โสฬเส อุปฺปนฺเน…  สตฺตรเส อุปฺปนฺเน…  อฏฺฐารเส อุปฺปนฺเน…  เอกูนวีเส อุปฺปนฺเน…  วีเส อุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, ทสาหา กาเรตพฺพํ. เอกวีเส อุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, นวาหา กาเรตพฺพํ. ทฺวาวีเส อุปฺปนฺเน …เป…  เตวีเส อุปฺปนฺเน…  จตุวีเส อุปฺปนฺเน…  ปญฺจวีเส อุปฺปนฺเน…  ฉพฺพีเส อุปฺปนฺเน…  สตฺตวีเส อุปฺปนฺเน…  อฏฺฐวีเส อุปฺปนฺเน…  เอกูนติํเส อุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, เอกาหํ กาเรตพฺพํ…  ติํเส อุปฺปนฺเน มูลจีวเร ปจฺจาสาจีวรํ อุปฺปชฺชติ, ตทเหว อธิฏฺฐาตพฺพํ วิกปฺเปตพฺพํ วิสฺสชฺเชตพฺพํ. โน เจ อธิฏฺเฐยฺย วา วิกปฺเปยฺย วา วิสฺสชฺเชยฺย วา, เอกติํเส อรุณุคฺคมเน นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ …เป…  อิทํ เม, ภนฺเต, อกาลจีวรํ มาสาติกฺกนฺตํ นิสฺสคฺคิยํ, อิมาหํ สํฆสฺส นิสฺสชฺชามีติ …เป…  ทเทยฺยาติ …เป…  ทเทยฺยุนฺติ …เป…  อายสฺมโต ทมฺมีติ.
 </Paragraph>
 
 <Paragraph number="1936" book="para">
