--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-4.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-4.mdx
@@ -22,11 +22,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1942" book="para">
-อถ โข อายสฺมา อุทายี ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรมาทาย เยน สา ภิกฺขุนี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ตสฺสา ภิกฺขุนิยา ปุรโต องฺคชาตํ วิวริตฺวา อาสเน นิสีทิ. สาปิ โข ภิกฺขุนี อายสฺมโต อุทายิสฺส ปุรโต องฺคชาตํ วิวริตฺวา อาสเน นิสีทิ. อถ โข อายสฺมา อุทายี สารตฺโต ตสฺสา ภิกฺขุนิยา องฺคชาตํ อุปนิชฺฌายิ. ตสฺส อสุจิ มุจฺจิ. อถ โข อายสฺมา อุทายี ตํ ภิกฺขุนึ เอตทโวจ—  “คจฺฉ, ภคินิ, อุทกํ อาหร, อนฺตรวาสกํ โธวิสฺสามี”ติ. “อาหรยฺย, อหเมว โธวิสฺสามี”ติ ตํ อสุจึ เอกเทสํ มุเขน อคฺคเหสิ เอกเทสํ องฺคชาเต ปกฺขิปิ. สา เตน คพฺภํ คณฺหิ. ภิกฺขุนิโย เอวมาหํสุ—  “อพฺรหฺมจารินี อยํ ภิกฺขุนี, คพฺภินี”ติ. “นาหํ, อเยฺย, อพฺรหฺมจารินี”ติ ภิกฺขุนีนํ เอตมตฺถํ อาโรเจสิ. ภิกฺขุนิโย อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อโยฺย อุทายี ภิกฺขุนิยา ปุราณจีวรํ โธวาเปสฺสตี”ติ. อถ โข ตา ภิกฺขุนิโย ภิกฺขูนํ เอตมตฺถํ อาโรเจสุํ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา อุทายี ภิกฺขุนิยา ปุราณจีวรํ โธวาเปสฺสตี”ติ.
+อถ โข อายสฺมา อุทายี ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรมาทาย เยน สา ภิกฺขุนี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ตสฺสา ภิกฺขุนิยา ปุรโต องฺคชาตํ วิวริตฺวา อาสเน นิสีทิ. สาปิ โข ภิกฺขุนี อายสฺมโต อุทายิสฺส ปุรโต องฺคชาตํ วิวริตฺวา อาสเน นิสีทิ. อถ โข อายสฺมา อุทายี สารตฺโต ตสฺสา ภิกฺขุนิยา องฺคชาตํ อุปนิชฺฌายิ. ตสฺส อสุจิ มุจฺจิ. อถ โข อายสฺมา อุทายี ตํ ภิกฺขุนิํ เอตทโวจ—  “คจฺฉ, ภคินิ, อุทกํ อาหร, อนฺตรวาสกํ โธวิสฺสามี”ติ. “อาหรยฺย, อหเมว โธวิสฺสามี”ติ ตํ อสุจิํ เอกเทสํ มุเขน อคฺคเหสิ เอกเทสํ องฺคชาเต ปกฺขิปิ. สา เตน คพฺภํ คณฺหิ. ภิกฺขุนิโย เอวมาหํสุ—  “อพฺรหฺมจารินี อยํ ภิกฺขุนี, คพฺภินี”ติ. “นาหํ, อเยฺย, อพฺรหฺมจารินี”ติ ภิกฺขุนีนํ เอตมตฺถํ อาโรเจสิ. ภิกฺขุนิโย อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อโยฺย อุทายี ภิกฺขุนิยา ปุราณจีวรํ โธวาเปสฺสตี”ติ. อถ โข ตา ภิกฺขุนิโย ภิกฺขูนํ เอตมตฺถํ อาโรเจสุํ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา อุทายี ภิกฺขุนิยา ปุราณจีวรํ โธวาเปสฺสตี”ติ.
 </Paragraph>
 
 <Paragraph number="1943" book="para">
-อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายึ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ …เป…  “สจฺจํ กิร ตฺวํ, อุทายิ, ภิกฺขุนิยา ปุราณจีวรํ โธวาเปสี”ติ? “สจฺจํ, ภควา”ติ. “ญาติกา เต, อุทายิ, อญฺญาติกา”ติ? “อญฺญาติกา, ภควา”ติ. “อญฺญาตโก, โมฆปุริส, อญฺญาติกาย น ชานาติ ปติรูปํ วา อปฺปติรูปํ วา ปาสาทิกํ วา อปาสาทิกํ วา. ตตฺถ นาม ตฺวํ, โมฆปุริส, อญฺญาติกาย ภิกฺขุนิยา ปุราณจีวรํ โธวาเปสฺสสิ. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายิํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ …เป…  “สจฺจํ กิร ตฺวํ, อุทายิ, ภิกฺขุนิยา ปุราณจีวรํ โธวาเปสี”ติ? “สจฺจํ, ภควา”ติ. “ญาติกา เต, อุทายิ, อญฺญาติกา”ติ? “อญฺญาติกา, ภควา”ติ. “อญฺญาตโก, โมฆปุริส, อญฺญาติกาย น ชานาติ ปติรูปํ วา อปฺปติรูปํ วา ปาสาทิกํ วา อปาสาทิกํ วา. ตตฺถ นาม ตฺวํ, โมฆปุริส, อญฺญาติกาย ภิกฺขุนิยา ปุราณจีวรํ โธวาเปสฺสสิ. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 </Paragraph>
 
 </Division>
@@ -40,7 +40,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="505" book="para">
 
 <Paragraph number="1945" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="1946" book="para">
@@ -52,11 +52,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1948" book="para">
-<Emphasis>ปุราณจีวรํ</Emphasis> นาม สกึ นิวตฺถมฺปิ สกึ ปารุตมฺปิ.
+<Emphasis>ปุราณจีวรํ</Emphasis> นาม สกิํ นิวตฺถมฺปิ สกิํ ปารุตมฺปิ.
 </Paragraph>
 
 <Paragraph number="1949" book="para">
-<Emphasis>โธวาติ อาณาเปติ</Emphasis>, อาปตฺติ ทุกฺกฏสฺส. โธตํ นิสฺสคฺคิยํ โหติ. <Emphasis>รชาติ อาณาเปติ</Emphasis>, อาปตฺติ ทุกฺกฏสฺส. รตฺตํ นิสฺสคฺคิยํ โหติ. <Emphasis>อาโกเฏหีติ อาณาเปติ</Emphasis>, อาปตฺติ ทุกฺกฏสฺส. สกึ ปาณิปฺปหารํ วา มุคฺครปฺปหารํ วา ทินฺเน นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ …เป…  อิทํ เม, ภนฺเต, ปุราณจีวรํ อญฺญาติกาย ภิกฺขุนิยา โธวาปิตํ นิสฺสคฺคิยํ. อิมาหํ สํฆสฺส นิสฺสชฺชามีติ …เป…  ทเทยฺยาติ …เป…  ทเทยฺยุนฺติ …เป…  อายสฺมโต ทมฺมีติ.
+<Emphasis>โธวาติ อาณาเปติ</Emphasis>, อาปตฺติ ทุกฺกฏสฺส. โธตํ นิสฺสคฺคิยํ โหติ. <Emphasis>รชาติ อาณาเปติ</Emphasis>, อาปตฺติ ทุกฺกฏสฺส. รตฺตํ นิสฺสคฺคิยํ โหติ. <Emphasis>อาโกเฏหีติ อาณาเปติ</Emphasis>, อาปตฺติ ทุกฺกฏสฺส. สกิํ ปาณิปฺปหารํ วา มุคฺครปฺปหารํ วา ทินฺเน นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ …เป…  อิทํ เม, ภนฺเต, ปุราณจีวรํ อญฺญาติกาย ภิกฺขุนิยา โธวาปิตํ นิสฺสคฺคิยํ. อิมาหํ สํฆสฺส นิสฺสชฺชามีติ …เป…  ทเทยฺยาติ …เป…  ทเทยฺยุนฺติ …เป…  อายสฺมโต ทมฺมีติ.
 </Paragraph>
 
 </Division>
