--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-6.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-6.mdx
@@ -18,15 +18,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="515" book="para">
 
 <Paragraph number="1974" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา อุปนนฺโท สกฺยปุตฺโต ปฏฺโฏ โหติ ธมฺมึ กถํ กาตุํ. อถ โข อญฺญตโร เสฏฺฐิปุตฺโต เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺนํ โข ตํ เสฏฺฐิปุตฺตํ อายสฺมา อุปนนฺโท สกฺยปุตฺโต ธมฺมิยา กถาย สนฺทเสฺสสิ สมาทเปสิ สมุตฺเตเชสิ สมฺปหํเสสิ. อถ โข โส เสฏฺฐิปุตฺโต อายสฺมตา อุปนนฺเทน สกฺยปุตฺเตน ธมฺมิยา กถาย สนฺทสฺสิโต สมาทปิโต สมุตฺเตชิโต สมฺปหํสิโต อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ เอตทโวจ—  “วเทยฺยาถ, ภนฺเต, เยน อตฺโถ. ปฏิพลา มยํ อยฺยสฺส ทาตุํ ยทิทํ จีวรปิณฺฑปาตเสนาสนคิลานปฺปจฺจยเภสชฺชปริกฺขารนฺ”ติ. “สเจ เม ตฺวํ, อาวุโส, ทาตุกาโมสิ, อิโต เอกํ สาฏกํ เทหี”ติ. “อมฺหากํ โข, ภนฺเต, กุลปุตฺตานํ กิสฺมึ วิย เอกสาฏกํ คนฺตุํ. อาคเมหิ, ภนฺเต, ยาว ฆรํ คจฺฉามิ. ฆรํ คโต อิโต วา เอกํ สาฏกํ ปหิณิสฺสามิ อิโต วา สุนฺทรตรนฺ”ติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา อุปนนฺโท สกฺยปุตฺโต ปฏฺโฏ โหติ ธมฺมิํ กถํ กาตุํ. อถ โข อญฺญตโร เสฏฺฐิปุตฺโต เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺนํ โข ตํ เสฏฺฐิปุตฺตํ อายสฺมา อุปนนฺโท สกฺยปุตฺโต ธมฺมิยา กถาย สนฺทเสฺสสิ สมาทเปสิ สมุตฺเตเชสิ สมฺปหํเสสิ. อถ โข โส เสฏฺฐิปุตฺโต อายสฺมตา อุปนนฺเทน สกฺยปุตฺเตน ธมฺมิยา กถาย สนฺทสฺสิโต สมาทปิโต สมุตฺเตชิโต สมฺปหํสิโต อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ เอตทโวจ—  “วเทยฺยาถ, ภนฺเต, เยน อตฺโถ. ปฏิพลา มยํ อยฺยสฺส ทาตุํ ยทิทํ จีวรปิณฺฑปาตเสนาสนคิลานปฺปจฺจยเภสชฺชปริกฺขารนฺ”ติ. “สเจ เม ตฺวํ, อาวุโส, ทาตุกาโมสิ, อิโต เอกํ สาฏกํ เทหี”ติ. “อมฺหากํ โข, ภนฺเต, กุลปุตฺตานํ กิสฺมิํ วิย เอกสาฏกํ คนฺตุํ. อาคเมหิ, ภนฺเต, ยาว ฆรํ คจฺฉามิ. ฆรํ คโต อิโต วา เอกํ สาฏกํ ปหิณิสฺสามิ อิโต วา สุนฺทรตรนฺ”ติ.
 </Paragraph>
 
 <Paragraph number="1975" book="para">
-ทุติยมฺปิ โข อายสฺมา อุปนนฺโท สกฺยปุตฺโต ตํ เสฏฺฐิปุตฺตํ เอตทโวจ—  “สเจ เม ตฺวํ, อาวุโส, ทาตุกาโมสิ อิโต เอกํ สาฏกํ เทหี”ติ. อมฺหากํ โข ภนฺเต กุลปุตฺตานํ กิสฺมึ วิย เอกสาฏกํ คนฺตุํ, อาคเมหิ, ภนฺเต ยาว ฆรํ คจฺฉามิ, ฆรํ คโต อิโต วา เอกํ สาฏกํ ปหิณิสฺสามิ อิโต วา สุนฺทรตรนฺติ.
+ทุติยมฺปิ โข อายสฺมา อุปนนฺโท สกฺยปุตฺโต ตํ เสฏฺฐิปุตฺตํ เอตทโวจ—  “สเจ เม ตฺวํ, อาวุโส, ทาตุกาโมสิ อิโต เอกํ สาฏกํ เทหี”ติ. อมฺหากํ โข ภนฺเต กุลปุตฺตานํ กิสฺมิํ วิย เอกสาฏกํ คนฺตุํ, อาคเมหิ, ภนฺเต ยาว ฆรํ คจฺฉามิ, ฆรํ คโต อิโต วา เอกํ สาฏกํ ปหิณิสฺสามิ อิโต วา สุนฺทรตรนฺติ.
 </Paragraph>
 
 <Paragraph number="1976" book="para">
-ตติยมฺปิ โข อายสฺมา อุปนนฺโท สกฺยปุตฺโต ตํ เสฏฺฐิปุตฺตํ เอตทโวจ—  “สเจ เม ตฺวํ, อาวุโส, ทาตุกาโมสิ, อิโต เอกํ สาฏกํ เทหี”ติ. อมฺหากํ โข, ภนฺเต, กุลปุตฺตานํ กิสฺมึ วิย เอกสาฏกํ คนฺตุํ, อาคเมหิ, ภนฺเต ยาว ฆรํ คจฺฉามิ, ฆรํ คโต อิโต วา เอกํ สาฏกํ ปหิณิสฺสามิ อิโต วา สุนฺทรตรนฺติ. “กึ ปน ตยา, อาวุโส, อทาตุกาเมน ปวาริเตน ยํ ตฺวํ ปวาเรตฺวา น เทสี”ติ.
+ตติยมฺปิ โข อายสฺมา อุปนนฺโท สกฺยปุตฺโต ตํ เสฏฺฐิปุตฺตํ เอตทโวจ—  “สเจ เม ตฺวํ, อาวุโส, ทาตุกาโมสิ, อิโต เอกํ สาฏกํ เทหี”ติ. อมฺหากํ โข, ภนฺเต, กุลปุตฺตานํ กิสฺมิํ วิย เอกสาฏกํ คนฺตุํ, อาคเมหิ, ภนฺเต ยาว ฆรํ คจฺฉามิ, ฆรํ คโต อิโต วา เอกํ สาฏกํ ปหิณิสฺสามิ อิโต วา สุนฺทรตรนฺติ. “กิํ ปน ตยา, อาวุโส, อทาตุกาเมน ปวาริเตน ยํ ตฺวํ ปวาเรตฺวา น เทสี”ติ.
 </Paragraph>
 
 <Paragraph number="1977" book="para">
@@ -45,7 +45,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="516" book="para">
 
 <Paragraph number="1980" book="para">
-<Emphasis>“โย ปน ภิกฺขุ อญฺญาตกํ คหปตึ วา คหปตานึ วา จีวรํ วิญฺญาเปยฺย, นิสฺสคฺคิยํ ปาจิตฺติยนฺ”</Emphasis>ติ.
+<Emphasis>“โย ปน ภิกฺขุ อญฺญาตกํ คหปติํ วา คหปตานิํ วา จีวรํ วิญฺญาเปยฺย, นิสฺสคฺคิยํ ปาจิตฺติยนฺ”</Emphasis>ติ.
 </Paragraph>
 
 <Paragraph number="1981" book="para">
@@ -56,25 +56,25 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="517" book="para">
 
 <Paragraph number="1982" book="para">
-เตน โข ปน สมเยน สมฺพหุลา ภิกฺขู สาเกตา สาวตฺถึ อทฺธานมคฺคปฺปฏิปนฺนา โหนฺติ. อนฺตรามคฺเค โจรา นิกฺขมิตฺวา เต ภิกฺขู อจฺฉินฺทึสุ. อถ โข เต ภิกฺขู—  “ภควตา ปฏิกฺขิตฺตํ อญฺญาตกํ คหปตึ วา คหปตานึ วา จีวรํ วิญฺญาเปตุนฺ”ติ, กุกฺกุจฺจายนฺตา น วิญฺญาเปสุํ. ยถานคฺคาว สาวตฺถึ คนฺตฺวา ภิกฺขู อภิวาเทนฺติ. ภิกฺขู เอวมาหํสุ—  “สุนฺทรา โข อิเม, อาวุโส, อาชีวกา เย อิเม ภิกฺขูสุ อภิวาเทนฺตี”ติ. เต เอวมาหํสุ—  “น มยํ, อาวุโส, อาชีวกา, ภิกฺขู มยนฺ”ติ. ภิกฺขู อายสฺมนฺตํ อุปาลึ เอตทโวจุํ—  “อิงฺฆาวุโส อุปาลิ, อิเม อนุยุญฺชาหี”ติ. อถ โข อายสฺมตา อุปาลินา อนุยุญฺชิยมานา เต ภิกฺขู เอตมตฺถํ อาโรเจสุํ. อถ โข อายสฺมา อุปาลิ เต ภิกฺขู อนุยุญฺชิตฺวา ภิกฺขู เอตทโวจ—  “ภิกฺขู อิเม, อาวุโส. เทถ เนสํ จีวรานี”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม ภิกฺขู นคฺคา อาคจฺฉิสฺสนฺติ. นนุ นาม ติเณน วา ปณฺเณน วา ปฏิจฺฉาเทตฺวา อาคนฺตพฺพนฺ”ติ.
+เตน โข ปน สมเยน สมฺพหุลา ภิกฺขู สาเกตา สาวตฺถิํ อทฺธานมคฺคปฺปฏิปนฺนา โหนฺติ. อนฺตรามคฺเค โจรา นิกฺขมิตฺวา เต ภิกฺขู อจฺฉินฺทิํสุ. อถ โข เต ภิกฺขู—  “ภควตา ปฏิกฺขิตฺตํ อญฺญาตกํ คหปติํ วา คหปตานิํ วา จีวรํ วิญฺญาเปตุนฺ”ติ, กุกฺกุจฺจายนฺตา น วิญฺญาเปสุํ. ยถานคฺคาว สาวตฺถิํ คนฺตฺวา ภิกฺขู อภิวาเทนฺติ. ภิกฺขู เอวมาหํสุ—  “สุนฺทรา โข อิเม, อาวุโส, อาชีวกา เย อิเม ภิกฺขูสุ อภิวาเทนฺตี”ติ. เต เอวมาหํสุ—  “น มยํ, อาวุโส, อาชีวกา, ภิกฺขู มยนฺ”ติ. ภิกฺขู อายสฺมนฺตํ อุปาลิํ เอตทโวจุํ—  “อิงฺฆาวุโส อุปาลิ, อิเม อนุยุญฺชาหี”ติ. อถ โข อายสฺมตา อุปาลินา อนุยุญฺชิยมานา เต ภิกฺขู เอตมตฺถํ อาโรเจสุํ. อถ โข อายสฺมา อุปาลิ เต ภิกฺขู อนุยุญฺชิตฺวา ภิกฺขู เอตทโวจ—  “ภิกฺขู อิเม, อาวุโส. เทถ เนสํ จีวรานี”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม ภิกฺขู นคฺคา อาคจฺฉิสฺสนฺติ. นนุ นาม ติเณน วา ปณฺเณน วา ปฏิจฺฉาเทตฺวา อาคนฺตพฺพนฺ”ติ.
 </Paragraph>
 
 <Paragraph number="1983" book="para">
-อถ โข เต ภิกฺขู เต อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, อจฺฉินฺนจีวรสฺส วา นฏฺฐจีวรสฺส วา อญฺญาตกํ คหปตึ วา คหปตานึ วา จีวรํ วิญฺญาเปตุํ. ยํ อาวาสํ ปฐมํ อุปคจฺฉติ, สเจ ตตฺถ โหติ สํฆสฺส วิหารจีวรํ วา อุตฺตรตฺถรณํ วา ภูมตฺถรณํ วา ภิสิจฺฉวิ วา, ตํ คเหตฺวา ปารุปิตุํ ‘ลภิตฺวา โอทหิสฺสามี’ติ. โน เจ โหติ สํฆสฺส วิหารจีวรํ วา อุตฺตรตฺถรณํ วา ภูมตฺถรณํ วา ภิสิจฺฉวิ วา ติเณน วา ปณฺเณน วา ปฏิจฺฉาเทตฺวา อาคนฺตพฺพํ; น เตฺวว นคฺเคน อาคนฺตพฺพํ. โย อาคจฺเฉยฺย, อาปตฺติ ทุกฺกฏสฺส. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข เต ภิกฺขู เต อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, อจฺฉินฺนจีวรสฺส วา นฏฺฐจีวรสฺส วา อญฺญาตกํ คหปติํ วา คหปตานิํ วา จีวรํ วิญฺญาเปตุํ. ยํ อาวาสํ ปฐมํ อุปคจฺฉติ, สเจ ตตฺถ โหติ สํฆสฺส วิหารจีวรํ วา อุตฺตรตฺถรณํ วา ภูมตฺถรณํ วา ภิสิจฺฉวิ วา, ตํ คเหตฺวา ปารุปิตุํ ‘ลภิตฺวา โอทหิสฺสามี’ติ. โน เจ โหติ สํฆสฺส วิหารจีวรํ วา อุตฺตรตฺถรณํ วา ภูมตฺถรณํ วา ภิสิจฺฉวิ วา ติเณน วา ปณฺเณน วา ปฏิจฺฉาเทตฺวา อาคนฺตพฺพํ; น เตฺวว นคฺเคน อาคนฺตพฺพํ. โย อาคจฺเฉยฺย, อาปตฺติ ทุกฺกฏสฺส. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 </Paragraph>
 
 </Division>
 <Division number="518" book="para">
 
 <Paragraph number="1984" book="para">
-<Emphasis>“โย ปน ภิกฺขุ อญฺญาตกํ คหปตึ วา คหปตานึ วา จีวรํ วิญฺญาเปยฺย, อญฺญตฺร สมยา, นิสฺสคฺคิยํ ปาจิตฺติยํ. ตตฺถายํ สมโย—  อจฺฉินฺนจีวโร วา โหติ ภิกฺขุ นฏฺฐจีวโร วา. อยํ ตตฺถ สมโย”</Emphasis>ติ. (*6*:<Emphasis>25</Emphasis>)
+<Emphasis>“โย ปน ภิกฺขุ อญฺญาตกํ คหปติํ วา คหปตานิํ วา จีวรํ วิญฺญาเปยฺย, อญฺญตฺร สมยา, นิสฺสคฺคิยํ ปาจิตฺติยํ. ตตฺถายํ สมโย—  อจฺฉินฺนจีวโร วา โหติ ภิกฺขุ นฏฺฐจีวโร วา. อยํ ตตฺถ สมโย”</Emphasis>ติ. (*6*:<Emphasis>25</Emphasis>)
 </Paragraph>
 
 </Division>
 <Division number="519" book="para">
 
 <Paragraph number="1985" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="1986" book="para">
