--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-7.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-7.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="522" book="para">
 
 <Paragraph number="1998" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน ฉพฺพคฺคิยา ภิกฺขู อจฺฉินฺนจีวรเก ภิกฺขู อุปสงฺกมิตฺวา เอวํ วทนฺติ—  “ภควตา, อาวุโส, อนุญฺญาตํ—  ‘อจฺฉินฺนจีวรสฺส วา นฏฺฐจีวรสฺส วา อญฺญาตกํ คหปตึ วา คหปตานึ วา จีวรํ วิญฺญาเปตุํ’; วิญฺญาเปถ, อาวุโส, จีวรนฺ”ติ. “อลํ, อาวุโส, ลทฺธํ อเมฺหหิ จีวรนฺ”ติ. “มยํ อายสฺมนฺตานํ วิญฺญาเปมา”ติ. “วิญฺญาเปถ, อาวุโส”ติ. อถ โข ฉพฺพคฺคิยา ภิกฺขู คหปติเก อุปสงฺกมิตฺวา เอตทโวจุํ—  “อจฺฉินฺนจีวรกา, อาวุโส, ภิกฺขู อาคตา. เทถ เนสํ จีวรานี”ติ, พหุํ จีวรํ วิญฺญาเปสุํ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน ฉพฺพคฺคิยา ภิกฺขู อจฺฉินฺนจีวรเก ภิกฺขู อุปสงฺกมิตฺวา เอวํ วทนฺติ—  “ภควตา, อาวุโส, อนุญฺญาตํ—  ‘อจฺฉินฺนจีวรสฺส วา นฏฺฐจีวรสฺส วา อญฺญาตกํ คหปติํ วา คหปตานิํ วา จีวรํ วิญฺญาเปตุํ’; วิญฺญาเปถ, อาวุโส, จีวรนฺ”ติ. “อลํ, อาวุโส, ลทฺธํ อเมฺหหิ จีวรนฺ”ติ. “มยํ อายสฺมนฺตานํ วิญฺญาเปมา”ติ. “วิญฺญาเปถ, อาวุโส”ติ. อถ โข ฉพฺพคฺคิยา ภิกฺขู คหปติเก อุปสงฺกมิตฺวา เอตทโวจุํ—  “อจฺฉินฺนจีวรกา, อาวุโส, ภิกฺขู อาคตา. เทถ เนสํ จีวรานี”ติ, พหุํ จีวรํ วิญฺญาเปสุํ.
 </Paragraph>
 
 <Paragraph number="1999" book="para">
