--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-9.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-9.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="532" book="para">
 
 <Paragraph number="2041" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อญฺญตโร ปุริโส อญฺญตรํ ปุริสํ เอตทโวจ—  “อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี”ติ. โสปิ เอวมาห—  “อหมฺปิ อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี”ติ. อโสฺสสิ โข อญฺญตโร ปิณฺฑจาริโก ภิกฺขุ เตสํ ปุริสานํ อิมํ กถาสลฺลาปํ. อถ โข โส ภิกฺขุ เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ เอตทโวจ—  “มหาปุญฺโญสิ ตฺวํ, อาวุโส อุปนนฺท. อมุกสฺมึ โอกาเส อญฺญตโร ปุริโส อญฺญตรํ ปุริสํ เอตทโวจ—  ‘อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี’ติ. โสปิ เอวมาห—  ‘อหมฺปิ อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี’”ติ. “อตฺถาวุโส, มํ เต อุปฏฺฐากา”ติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อญฺญตโร ปุริโส อญฺญตรํ ปุริสํ เอตทโวจ—  “อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี”ติ. โสปิ เอวมาห—  “อหมฺปิ อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี”ติ. อโสฺสสิ โข อญฺญตโร ปิณฺฑจาริโก ภิกฺขุ เตสํ ปุริสานํ อิมํ กถาสลฺลาปํ. อถ โข โส ภิกฺขุ เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ เอตทโวจ—  “มหาปุญฺโญสิ ตฺวํ, อาวุโส อุปนนฺท. อมุกสฺมิํ โอกาเส อญฺญตโร ปุริโส อญฺญตรํ ปุริสํ เอตทโวจ—  ‘อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี’ติ. โสปิ เอวมาห—  ‘อหมฺปิ อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี’”ติ. “อตฺถาวุโส, มํ เต อุปฏฺฐากา”ติ.
 </Paragraph>
 
 <Paragraph number="2042" book="para">
