--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-1.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-1.mdx
@@ -40,7 +40,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="544" book="para">
 
 <Paragraph number="2102" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="2103" book="para">
@@ -66,7 +66,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="546" book="para">
 
 <Paragraph number="2107" book="para">
-อนาปตฺติ—  วิตานํ วา ภูมตฺถรณํ วา สาณิปาการํ วา ภิสึ วา พิพฺโพหนํ วา กโรติ, อุมฺมตฺตกสฺส, อาทิกมฺมิกสฺสาติ.
+อนาปตฺติ—  วิตานํ วา ภูมตฺถรณํ วา สาณิปาการํ วา ภิสิํ วา พิพฺโพหนํ วา กโรติ, อุมฺมตฺตกสฺส, อาทิกมฺมิกสฺสาติ.
 
 </Paragraph>
 </Division>
