--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-10.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-10.mdx
@@ -18,19 +18,19 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="593" book="para">
 
 <Paragraph number="2238" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา อุปนนฺโท สกฺยปุตฺโต ปฏฺโฏ โหติ จีวรกมฺมํ กาตุํ. โส ปฏปิโลติกานํ สงฺฆาฏึ กริตฺวา สุรตฺตํ สุปริกมฺมกตํ กตฺวา ปารุปิ. อถ โข อญฺญตโร ปริพฺพาชโก มหคฺฆํ ปฏํ ปารุปิตฺวา เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ เอตทโวจ—  “สุนฺทรา โข ตฺยายํ, อาวุโส, สงฺฆาฏิ; เทหิ เม ปเฏนา”ติ. “ชานาหิ, อาวุโส”ติ. “อามาวุโส, ชานามี”ติ. “หนฺทาวุโส”ติ, อทาสิ. อถ โข โส ปริพฺพาชโก ตํ สงฺฆาฏึ ปารุปิตฺวา ปริพฺพาชการามํ อคมาสิ. ปริพฺพาชกา ตํ ปริพฺพาชกํ เอตทโวจุํ—  “สุนฺทรา โข ตฺยายํ, อาวุโส, สงฺฆาฏิ; กุโต ตยา ลทฺธา”ติ? “เตน เม, อาวุโส, ปเฏน ปริวตฺติตา”ติ. “กติหิปิ ตฺยายํ, อาวุโส, สงฺฆาฏิ ภวิสฺสติ, โสเยว เต ปโฏ วโร”ติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา อุปนนฺโท สกฺยปุตฺโต ปฏฺโฏ โหติ จีวรกมฺมํ กาตุํ. โส ปฏปิโลติกานํ สงฺฆาฏิํ กริตฺวา สุรตฺตํ สุปริกมฺมกตํ กตฺวา ปารุปิ. อถ โข อญฺญตโร ปริพฺพาชโก มหคฺฆํ ปฏํ ปารุปิตฺวา เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ เอตทโวจ—  “สุนฺทรา โข ตฺยายํ, อาวุโส, สงฺฆาฏิ; เทหิ เม ปเฏนา”ติ. “ชานาหิ, อาวุโส”ติ. “อามาวุโส, ชานามี”ติ. “หนฺทาวุโส”ติ, อทาสิ. อถ โข โส ปริพฺพาชโก ตํ สงฺฆาฏิํ ปารุปิตฺวา ปริพฺพาชการามํ อคมาสิ. ปริพฺพาชกา ตํ ปริพฺพาชกํ เอตทโวจุํ—  “สุนฺทรา โข ตฺยายํ, อาวุโส, สงฺฆาฏิ; กุโต ตยา ลทฺธา”ติ? “เตน เม, อาวุโส, ปเฏน ปริวตฺติตา”ติ. “กติหิปิ ตฺยายํ, อาวุโส, สงฺฆาฏิ ภวิสฺสติ, โสเยว เต ปโฏ วโร”ติ.
 </Paragraph>
 
 <Paragraph number="2239" book="para">
-อถ โข โส ปริพฺพาชโก—  “สจฺจํ โข ปริพฺพาชกา อาหํสุ—  ‘กติหิปิ มฺยายํ สงฺฆาฏิ ภวิสฺสติ. โสเยว เม ปโฏ วโร’”ติ เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ เอตทโวจ—  “หนฺท เต, อาวุโส, สงฺฆาฏิ; เทหิ เม ปฏนฺ”ติ. “นนุ ตฺวํ, อาวุโส, มยา วุตฺโต—  ‘ชานาหิ, อาวุโส’ติ. นาหํ ทสฺสามี”ติ. อถ โข โส ปริพฺพาชโก อุชฺฌายติ ขิยฺยติ วิปาเจติ—  “คิหีปิ นํ คิหิสฺส วิปฺปฏิสาริสฺส เทนฺติ, กึ ปน ปพฺพชิโต ปพฺพชิตสฺส น ทสฺสตี”ติ.
+อถ โข โส ปริพฺพาชโก—  “สจฺจํ โข ปริพฺพาชกา อาหํสุ—  ‘กติหิปิ มฺยายํ สงฺฆาฏิ ภวิสฺสติ. โสเยว เม ปโฏ วโร’”ติ เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ เอตทโวจ—  “หนฺท เต, อาวุโส, สงฺฆาฏิ; เทหิ เม ปฏนฺ”ติ. “นนุ ตฺวํ, อาวุโส, มยา วุตฺโต—  ‘ชานาหิ, อาวุโส’ติ. นาหํ ทสฺสามี”ติ. อถ โข โส ปริพฺพาชโก อุชฺฌายติ ขิยฺยติ วิปาเจติ—  “คิหีปิ นํ คิหิสฺส วิปฺปฏิสาริสฺส เทนฺติ, กิํ ปน ปพฺพชิโต ปพฺพชิตสฺส น ทสฺสตี”ติ.
 </Paragraph>
 
 <Paragraph number="2240" book="para">
-อโสฺสสุํ โข ภิกฺขู ตสฺส ปริพฺพาชกสฺส อุชฺฌายนฺตสฺส ขิยฺยนฺตสฺส วิปาเจนฺตสฺส. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา อุปนนฺโท สกฺยปุตฺโต ปริพฺพาชเกน สทฺธึ กยวิกฺกยํ สมาปชฺชิสฺสตี”ติ.
+อโสฺสสุํ โข ภิกฺขู ตสฺส ปริพฺพาชกสฺส อุชฺฌายนฺตสฺส ขิยฺยนฺตสฺส วิปาเจนฺตสฺส. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา อุปนนฺโท สกฺยปุตฺโต ปริพฺพาชเกน สทฺธิํ กยวิกฺกยํ สมาปชฺชิสฺสตี”ติ.
 </Paragraph>
 
 <Paragraph number="2241" book="para">
-อถ โข เต ภิกฺขู อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ …เป…  “สจฺจํ กิร ตฺวํ, อุปนนฺท, ปริพฺพาชเกน สทฺธึ กยวิกฺกยํ สมาปชฺชสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา …เป…  กถญฺหิ นาม ตฺวํ, โมฆปุริส, ปริพฺพาชเกน สทฺธึ กยวิกฺกยํ สมาปชฺชิสฺสสิ. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข เต ภิกฺขู อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ …เป…  “สจฺจํ กิร ตฺวํ, อุปนนฺท, ปริพฺพาชเกน สทฺธิํ กยวิกฺกยํ สมาปชฺชสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา …เป…  กถญฺหิ นาม ตฺวํ, โมฆปุริส, ปริพฺพาชเกน สทฺธิํ กยวิกฺกยํ สมาปชฺชิสฺสสิ. เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 </Paragraph>
 
 </Division>
@@ -44,7 +44,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="595" book="para">
 
 <Paragraph number="2243" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="2244" book="para">
@@ -52,7 +52,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2245" book="para">
-<Emphasis>กยวิกฺกยํ สมาปชฺเชยฺยา</Emphasis>ติ อิมินา อิมํ เทหิ, อิมินา อิมํ อาหร, อิมินา อิมํ ปริวตฺเตหิ, อิมินา อิมํ เจตาเปหีติ. อชฺฌาจรติ, อาปตฺติ ทุกฺกฏสฺส. ยโต กยิตญฺจ โหติ วิกฺกยิตญฺจ อตฺตโน ภณฺฑํ ปรหตฺถคตํ ปรภณฺฑํ อตฺตโน หตฺถคตํ, นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ …เป…  “อหํ, ภนฺเต, นานปฺปการกํ กยวิกฺกยํ สมาปชฺชึ. อิทํ เม นิสฺสคฺคิยํ. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ …เป…  ทเทยฺยาติ …เป…  ทเทยฺยุนฺติ …เป…  อายสฺมโต ทมฺมีติ.
+<Emphasis>กยวิกฺกยํ สมาปชฺเชยฺยา</Emphasis>ติ อิมินา อิมํ เทหิ, อิมินา อิมํ อาหร, อิมินา อิมํ ปริวตฺเตหิ, อิมินา อิมํ เจตาเปหีติ. อชฺฌาจรติ, อาปตฺติ ทุกฺกฏสฺส. ยโต กยิตญฺจ โหติ วิกฺกยิตญฺจ อตฺตโน ภณฺฑํ ปรหตฺถคตํ ปรภณฺฑํ อตฺตโน หตฺถคตํ, นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ …เป…  “อหํ, ภนฺเต, นานปฺปการกํ กยวิกฺกยํ สมาปชฺชิํ. อิทํ เม นิสฺสคฺคิยํ. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ …เป…  ทเทยฺยาติ …เป…  ทเทยฺยุนฺติ …เป…  อายสฺมโต ทมฺมีติ.
 </Paragraph>
 
 </Division>
