--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-6.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-6.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="571" book="para">
 
 <Paragraph number="2176" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน โกสเลสุ ชนปเท สาวตฺถึ คจฺฉนฺตสฺส อนฺตรามคฺเค เอฬกโลมานิ อุปฺปชฺชึสุ. อถ โข โส ภิกฺขุ ตานิ เอฬกโลมานิ อุตฺตราสงฺเคน ภณฺฑิกํ พนฺธิตฺวา อคมาสิ. มนุสฺสา ตํ ภิกฺขุํ ปสฺสิตฺวา อุปฺปณฺเฑสุํ—  “กิตฺตเกน เต, ภนฺเต, กีตานิ? กิตฺตโก อุทโย ภวิสฺสตี”ติ? โส ภิกฺขุ เตหิ มนุเสฺสหิ อุปฺปณฺฑิยมาโน มงฺกุ อโหสิ. อถ โข โส ภิกฺขุ สาวตฺถึ คนฺตฺวา ตานิ เอฬกโลมานิ ฐิตโกว อาสุมฺภิ. ภิกฺขู ตํ ภิกฺขุํ เอตทโวจุํ—  “กิสฺส ตฺวํ, อาวุโส, อิมานิ เอฬกโลมานิ ฐิตโกว อาสุมฺภสี”ติ? “ตถา หิ ปนาหํ, อาวุโส, อิเมสํ เอฬกโลมานํ การณา มนุเสฺสหิ อุปฺปณฺฑิโต”ติ. “กีว ทูรโต ปน ตฺวํ, อาวุโส, อิมานิ เอฬกโลมานิ อาหรี”ติ? “อติเรกติโยชนํ, อาวุโส”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม ภิกฺขุ อติเรกติโยชนํ เอฬกโลมานิ อาหริสฺสตี”ติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อญฺญตรสฺส ภิกฺขุโน โกสเลสุ ชนปเท สาวตฺถิํ คจฺฉนฺตสฺส อนฺตรามคฺเค เอฬกโลมานิ อุปฺปชฺชิํสุ. อถ โข โส ภิกฺขุ ตานิ เอฬกโลมานิ อุตฺตราสงฺเคน ภณฺฑิกํ พนฺธิตฺวา อคมาสิ. มนุสฺสา ตํ ภิกฺขุํ ปสฺสิตฺวา อุปฺปณฺเฑสุํ—  “กิตฺตเกน เต, ภนฺเต, กีตานิ? กิตฺตโก อุทโย ภวิสฺสตี”ติ? โส ภิกฺขุ เตหิ มนุเสฺสหิ อุปฺปณฺฑิยมาโน มงฺกุ อโหสิ. อถ โข โส ภิกฺขุ สาวตฺถิํ คนฺตฺวา ตานิ เอฬกโลมานิ ฐิตโกว อาสุมฺภิ. ภิกฺขู ตํ ภิกฺขุํ เอตทโวจุํ—  “กิสฺส ตฺวํ, อาวุโส, อิมานิ เอฬกโลมานิ ฐิตโกว อาสุมฺภสี”ติ? “ตถา หิ ปนาหํ, อาวุโส, อิเมสํ เอฬกโลมานํ การณา มนุเสฺสหิ อุปฺปณฺฑิโต”ติ. “กีว ทูรโต ปน ตฺวํ, อาวุโส, อิมานิ เอฬกโลมานิ อาหรี”ติ? “อติเรกติโยชนํ, อาวุโส”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม ภิกฺขุ อติเรกติโยชนํ เอฬกโลมานิ อาหริสฺสตี”ติ.
 </Paragraph>
 
 <Paragraph number="2177" book="para">
