--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-7.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-7.mdx
@@ -18,15 +18,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="576" book="para">
 
 <Paragraph number="2189" book="para">
-เตน สมเยน พุทฺโธ ภควา สกฺเกสุ วิหรติ กปิลวตฺถุสฺมึ นิโคฺรธาราเม. เตน โข ปน สมเยน ฉพฺพคฺคิยา ภิกฺขู ภิกฺขุนีหิ เอฬกโลมานิ โธวาเปนฺติปิ รชาเปนฺติปิ วิชฏาเปนฺติปิ. ภิกฺขุนิโย เอฬกโลมานิ โธวนฺติโย รชนฺติโย วิชเฏนฺติโย ริญฺจนฺติ อุทฺเทสํ ปริปุจฺฉํ อธิสีลํ อธิจิตฺตํ อธิปญฺญํ. อถ โข มหาปชาปติ โคตมี เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ อฏฺฐาสิ. เอกมนฺตํ ฐิตํ โข มหาปชาปตึ โคตมึ ภควา เอตทโวจ—  “กจฺจิ, โคตมิ, ภิกฺขุนิโย อปฺปมตฺตา อาตาปินิโย ปหิตตฺตา วิหรนฺตี”ติ? “กุโต, ภนฺเต, ภิกฺขุนีนํ อปฺปมาโท. อยฺยา ฉพฺพคฺคิยา ภิกฺขุนีหิ เอฬกโลมานิ โธวาเปนฺติปิ รชาเปนฺติปิ วิชฏาเปนฺติปิ. ภิกฺขุนิโย เอฬกโลมานิ โธวนฺติโย รชนฺติโย วิชเฏนฺติโย ริญฺจนฺติ อุทฺเทสํ ปริปุจฺฉํ อธิสีลํ อธิจิตฺตํ อธิปญฺญนฺ”ติ.
+เตน สมเยน พุทฺโธ ภควา สกฺเกสุ วิหรติ กปิลวตฺถุสฺมิํ นิโคฺรธาราเม. เตน โข ปน สมเยน ฉพฺพคฺคิยา ภิกฺขู ภิกฺขุนีหิ เอฬกโลมานิ โธวาเปนฺติปิ รชาเปนฺติปิ วิชฏาเปนฺติปิ. ภิกฺขุนิโย เอฬกโลมานิ โธวนฺติโย รชนฺติโย วิชเฏนฺติโย ริญฺจนฺติ อุทฺเทสํ ปริปุจฺฉํ อธิสีลํ อธิจิตฺตํ อธิปญฺญํ. อถ โข มหาปชาปติ โคตมี เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ อฏฺฐาสิ. เอกมนฺตํ ฐิตํ โข มหาปชาปติํ โคตมิํ ภควา เอตทโวจ—  “กจฺจิ, โคตมิ, ภิกฺขุนิโย อปฺปมตฺตา อาตาปินิโย ปหิตตฺตา วิหรนฺตี”ติ? “กุโต, ภนฺเต, ภิกฺขุนีนํ อปฺปมาโท. อยฺยา ฉพฺพคฺคิยา ภิกฺขุนีหิ เอฬกโลมานิ โธวาเปนฺติปิ รชาเปนฺติปิ วิชฏาเปนฺติปิ. ภิกฺขุนิโย เอฬกโลมานิ โธวนฺติโย รชนฺติโย วิชเฏนฺติโย ริญฺจนฺติ อุทฺเทสํ ปริปุจฺฉํ อธิสีลํ อธิจิตฺตํ อธิปญฺญนฺ”ติ.
 </Paragraph>
 
 <Paragraph number="2190" book="para">
-อถ โข ภควา มหาปชาปตึ โคตมึ ธมฺมิยา กถาย สนฺทเสฺสสิ สมาทเปสิ สมุตฺเตเชสิ สมฺปหํเสสิ. อถ โข มหาปชาปติ โคตมี ภควตา ธมฺมิยา กถาย สนฺทสฺสิตา สมาทปิตา สมุตฺเตชิตา สมฺปหํสิตา ภควนฺตํ อภิวาเทตฺวา ปทกฺขิณํ กตฺวา ปกฺกามิ.
+อถ โข ภควา มหาปชาปติํ โคตมิํ ธมฺมิยา กถาย สนฺทเสฺสสิ สมาทเปสิ สมุตฺเตเชสิ สมฺปหํเสสิ. อถ โข มหาปชาปติ โคตมี ภควตา ธมฺมิยา กถาย สนฺทสฺสิตา สมาทปิตา สมุตฺเตชิตา สมฺปหํสิตา ภควนฺตํ อภิวาเทตฺวา ปทกฺขิณํ กตฺวา ปกฺกามิ.
 </Paragraph>
 
 <Paragraph number="2191" book="para">
-อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา ฉพฺพคฺคิเย ภิกฺขู ปฏิปุจฺฉิ—  “สจฺจํ กิร ตุเมฺห, ภิกฺขเว, ภิกฺขุนีหิ เอฬกโลมานิ โธวาเปถปิ รชาเปถปิ วิชฏาเปถปี”ติ? “สจฺจํ, ภควา”ติ. “ญาติกาโย ตุมฺหากํ, ภิกฺขเว, อญฺญาติกาโย”ติ? “อญฺญาติกาโย, ภควา”ติ. “อญฺญาตกา, โมฆปุริสา, อญฺญาติกานํ น ชานนฺติ ปติรูปํ วา อปฺปติรูปํ วา ปาสาทิกํ วา อปาสาทิกํ วา. ตตฺถ นาม ตุเมฺห, โมฆปุริสา, อญฺญาติกาหิ ภิกฺขุนีหิ เอฬกโลมานิ โธวาเปสฺสถปิ รชาเปสฺสถปิ วิชฏาเปสฺสถปิ. เนตํ, โมฆปุริสา, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา ฉพฺพคฺคิเย ภิกฺขู ปฏิปุจฺฉิ—  “สจฺจํ กิร ตุเมฺห, ภิกฺขเว, ภิกฺขุนีหิ เอฬกโลมานิ โธวาเปถปิ รชาเปถปิ วิชฏาเปถปี”ติ? “สจฺจํ, ภควา”ติ. “ญาติกาโย ตุมฺหากํ, ภิกฺขเว, อญฺญาติกาโย”ติ? “อญฺญาติกาโย, ภควา”ติ. “อญฺญาตกา, โมฆปุริสา, อญฺญาติกานํ น ชานนฺติ ปติรูปํ วา อปฺปติรูปํ วา ปาสาทิกํ วา อปาสาทิกํ วา. ตตฺถ นาม ตุเมฺห, โมฆปุริสา, อญฺญาติกาหิ ภิกฺขุนีหิ เอฬกโลมานิ โธวาเปสฺสถปิ รชาเปสฺสถปิ วิชฏาเปสฺสถปิ. เนตํ, โมฆปุริสา, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 </Paragraph>
 
 </Division>
@@ -40,7 +40,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="578" book="para">
 
 <Paragraph number="2193" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="2194" book="para">
