--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-8.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-8.mdx
@@ -18,11 +18,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="582" book="para">
 
 <Paragraph number="2203" book="para">
-เตน สมเยน พุทฺโธ ภควา ราชคเห วิหรติ เวฬุวเน กลนฺทกนิวาเป. เตน โข ปน สมเยน อายสฺมา อุปนนฺโท สกฺยปุตฺโต อญฺญตรสฺส กุลสฺส กุลูปโก โหติ นิจฺจภตฺติโก. ยํ ตสฺมึ กุเล อุปฺปชฺชติ ขาทนียํ วา โภชนียํ วา ตโต อายสฺมโต อุปนนฺทสฺส สกฺยปุตฺตสฺส ปฏิวิโส ฐปิยฺยติ. เตน โข ปน สมเยน สายํ ตสฺมึ กุเล มํสํ อุปฺปนฺนํ โหติ. ตโต อายสฺมโต อุปนนฺทสฺส สกฺยปุตฺตสฺส ปฏิวิโส ฐปิโต โหติ. ตสฺส กุลสฺส ทารโก รตฺติยา ปจฺจูสสมยํ ปจฺจุฏฺฐาย โรทติ—  “มํสํ เม เทถา”ติ. อถ โข โส ปุริโส ปชาปตึ เอตทโวจ—  “อยฺยสฺส ปฏิวิสํ ทารกสฺส เทหิ. อญฺญํ เจตาเปตฺวา อยฺยสฺส ทสฺสามา”ติ.
+เตน สมเยน พุทฺโธ ภควา ราชคเห วิหรติ เวฬุวเน กลนฺทกนิวาเป. เตน โข ปน สมเยน อายสฺมา อุปนนฺโท สกฺยปุตฺโต อญฺญตรสฺส กุลสฺส กุลูปโก โหติ นิจฺจภตฺติโก. ยํ ตสฺมิํ กุเล อุปฺปชฺชติ ขาทนียํ วา โภชนียํ วา ตโต อายสฺมโต อุปนนฺทสฺส สกฺยปุตฺตสฺส ปฏิวิโส ฐปิยฺยติ. เตน โข ปน สมเยน สายํ ตสฺมิํ กุเล มํสํ อุปฺปนฺนํ โหติ. ตโต อายสฺมโต อุปนนฺทสฺส สกฺยปุตฺตสฺส ปฏิวิโส ฐปิโต โหติ. ตสฺส กุลสฺส ทารโก รตฺติยา ปจฺจูสสมยํ ปจฺจุฏฺฐาย โรทติ—  “มํสํ เม เทถา”ติ. อถ โข โส ปุริโส ปชาปติํ เอตทโวจ—  “อยฺยสฺส ปฏิวิสํ ทารกสฺส เทหิ. อญฺญํ เจตาเปตฺวา อยฺยสฺส ทสฺสามา”ติ.
 </Paragraph>
 
 <Paragraph number="2204" book="para">
-อถ โข อายสฺมา อุปนนฺโท สกฺยปุตฺโต ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรํ อาทาย เยน ตํ กุลํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปญฺญตฺเต อาสเน นิสีทิ. อถ โข โส ปุริโส เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺโน โข โส ปุริโส อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ เอตทโวจ—  “หิโยฺย โข, ภนฺเต, สายํ มํสํ อุปฺปนฺนํ อโหสิ. ตโต อยฺยสฺส ปฏิวิโส ฐปิโต. อยํ, ภนฺเต, ทารโก รตฺติยา ปจฺจูสสมยํ ปจฺจุฏฺฐาย โรทติ—  ‘มํสํ เม เทถา’ติ. อยฺยสฺส ปฏิวิโส ทารกสฺส ทินฺโน. กหาปเณน, ภนฺเต, กึ อาหริยฺยตู”ติ? “ปริจฺจตฺโต เม, อาวุโส, กหาปโณ”ติ? “อาม, ภนฺเต, ปริจฺจตฺโต”ติ. “ตญฺเญว เม, อาวุโส, กหาปณํ เทหี”ติ.
+อถ โข อายสฺมา อุปนนฺโท สกฺยปุตฺโต ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรํ อาทาย เยน ตํ กุลํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปญฺญตฺเต อาสเน นิสีทิ. อถ โข โส ปุริโส เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺโน โข โส ปุริโส อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ เอตทโวจ—  “หิโยฺย โข, ภนฺเต, สายํ มํสํ อุปฺปนฺนํ อโหสิ. ตโต อยฺยสฺส ปฏิวิโส ฐปิโต. อยํ, ภนฺเต, ทารโก รตฺติยา ปจฺจูสสมยํ ปจฺจุฏฺฐาย โรทติ—  ‘มํสํ เม เทถา’ติ. อยฺยสฺส ปฏิวิโส ทารกสฺส ทินฺโน. กหาปเณน, ภนฺเต, กิํ อาหริยฺยตู”ติ? “ปริจฺจตฺโต เม, อาวุโส, กหาปโณ”ติ? “อาม, ภนฺเต, ปริจฺจตฺโต”ติ. “ตญฺเญว เม, อาวุโส, กหาปณํ เทหี”ติ.
 </Paragraph>
 
 <Paragraph number="2205" book="para">
@@ -44,7 +44,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="584" book="para">
 
 <Paragraph number="2208" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="2209" book="para">
@@ -64,7 +64,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2213" book="para">
-<Emphasis>อุปนิกฺขิตฺตํ วา สาทิเยยฺยา</Emphasis>ติ อิทํ อยฺยสฺส โหตูติ อุปนิกฺขิตฺตํ สาทิยติ, นิสฺสคฺคิยํ โหติ. สํฆมชฺเฌ นิสฺสชฺชิตพฺพํ. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ—  เตน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อหํ, ภนฺเต, รูปิยํ ปฏิคฺคเหสึ. อิทํ เม นิสฺสคฺคิยํ. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา. สเจ ตตฺถ อาคจฺฉติ อารามิโก วา อุปาสโก วา โส วตฺตพฺโพ—  “อาวุโส, อิมํ ชานาหี”ติ. สเจ โส ภณติ—  “อิมินา กึ อาหริยฺยตู”ติ, น วตฺตพฺโพ—  “อิมํ วา อิมํ วา อาหรา”ติ. กปฺปิยํ อาจิกฺขิตพฺพํ—  สปฺปิ วา เตลํ วา มธุ วา ผาณิตํ วา. สเจ โส เตน ปริวตฺเตตฺวา กปฺปิยํ อาหรติ รูปิยปฺปฏิคฺคาหกํ ฐเปตฺวา สพฺเพเหว ปริภุญฺชิตพฺพํ. เอวญฺเจตํ ลเภถ, อิจฺเจตํ กุสลํ; โน เจ ลเภถ, โส วตฺตพฺโพ—  “อาวุโส, อิมํ ฉฑฺเฑหี”ติ. สเจ โส ฉฑฺเฑติ, อิจฺเจตํ กุสลํ; โน เจ ฉฑฺเฑติ, ปญฺจหงฺเคหิ สมนฺนาคโต ภิกฺขุ รูปิยฉฑฺฑโก สมฺมนฺนิตพฺโพ—  โย น ฉนฺทาคตึ คจฺเฉยฺย, น โทสาคตึ คจฺเฉยฺย, น โมหาคตึ คจฺเฉยฺย, น ภยาคตึ คจฺเฉยฺย, ฉฑฺฑิตาฉฑฺฑิตญฺจ ชาเนยฺย. “เอวญฺจ ปน, ภิกฺขเว, สมฺมนฺนิตพฺโพ. ปฐมํ ภิกฺขุ ยาจิตพฺโพ. ยาจิตฺวา พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
+<Emphasis>อุปนิกฺขิตฺตํ วา สาทิเยยฺยา</Emphasis>ติ อิทํ อยฺยสฺส โหตูติ อุปนิกฺขิตฺตํ สาทิยติ, นิสฺสคฺคิยํ โหติ. สํฆมชฺเฌ นิสฺสชฺชิตพฺพํ. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ—  เตน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อหํ, ภนฺเต, รูปิยํ ปฏิคฺคเหสิํ. อิทํ เม นิสฺสคฺคิยํ. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา. สเจ ตตฺถ อาคจฺฉติ อารามิโก วา อุปาสโก วา โส วตฺตพฺโพ—  “อาวุโส, อิมํ ชานาหี”ติ. สเจ โส ภณติ—  “อิมินา กิํ อาหริยฺยตู”ติ, น วตฺตพฺโพ—  “อิมํ วา อิมํ วา อาหรา”ติ. กปฺปิยํ อาจิกฺขิตพฺพํ—  สปฺปิ วา เตลํ วา มธุ วา ผาณิตํ วา. สเจ โส เตน ปริวตฺเตตฺวา กปฺปิยํ อาหรติ รูปิยปฺปฏิคฺคาหกํ ฐเปตฺวา สพฺเพเหว ปริภุญฺชิตพฺพํ. เอวญฺเจตํ ลเภถ, อิจฺเจตํ กุสลํ; โน เจ ลเภถ, โส วตฺตพฺโพ—  “อาวุโส, อิมํ ฉฑฺเฑหี”ติ. สเจ โส ฉฑฺเฑติ, อิจฺเจตํ กุสลํ; โน เจ ฉฑฺเฑติ, ปญฺจหงฺเคหิ สมนฺนาคโต ภิกฺขุ รูปิยฉฑฺฑโก สมฺมนฺนิตพฺโพ—  โย น ฉนฺทาคติํ คจฺเฉยฺย, น โทสาคติํ คจฺเฉยฺย, น โมหาคติํ คจฺเฉยฺย, น ภยาคติํ คจฺเฉยฺย, ฉฑฺฑิตาฉฑฺฑิตญฺจ ชาเนยฺย. “เอวญฺจ ปน, ภิกฺขเว, สมฺมนฺนิตพฺโพ. ปฐมํ ภิกฺขุ ยาจิตพฺโพ. ยาจิตฺวา พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
 </Paragraph>
 
 </Division>
