--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-1.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-1.mdx
@@ -44,7 +44,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="600" book="para">
 
 <Paragraph number="2257" book="para">
-เตน โข ปน สมเยน อายสฺมโต อานนฺทสฺส อติเรกปตฺโต อุปฺปนฺโน โหติ. อายสฺมา จ อานนฺโท ตํ ปตฺตํ อายสฺมโต สาริปุตฺตสฺส ทาตุกาโม โหติ. อายสฺมา จ สาริปุตฺโต สาเกเต วิหรติ. อถ โข อายสฺมโต อานนฺทสฺส เอตทโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ—  ‘น อติเรกปตฺโต ธาเรตพฺโพ’ติ. อยญฺจ เม อติเรกปตฺโต อุปฺปนฺโน. อหญฺจิมํ ปตฺตํ อายสฺมโต สาริปุตฺตสฺส ทาตุกาโม. อายสฺมา จ สาริปุตฺโต สาเกเต วิหรติ. กถํ นุ โข มยา ปฏิปชฺชิตพฺพนฺ”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “กีวจิรํ ปนานนฺท, สาริปุตฺโต อาคจฺฉิสฺสตี”ติ? “นวมํ วา, ภควา, ทิวสํ ทสมํ วา”ติ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, ทสาหปรมํ อติเรกปตฺตํ ธาเรตุํ. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+เตน โข ปน สมเยน อายสฺมโต อานนฺทสฺส อติเรกปตฺโต อุปฺปนฺโน โหติ. อายสฺมา จ อานนฺโท ตํ ปตฺตํ อายสฺมโต สาริปุตฺตสฺส ทาตุกาโม โหติ. อายสฺมา จ สาริปุตฺโต สาเกเต วิหรติ. อถ โข อายสฺมโต อานนฺทสฺส เอตทโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ—  ‘น อติเรกปตฺโต ธาเรตพฺโพ’ติ. อยญฺจ เม อติเรกปตฺโต อุปฺปนฺโน. อหญฺจิมํ ปตฺตํ อายสฺมโต สาริปุตฺตสฺส ทาตุกาโม. อายสฺมา จ สาริปุตฺโต สาเกเต วิหรติ. กถํ นุ โข มยา ปฏิปชฺชิตพฺพนฺ”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “กีวจิรํ ปนานนฺท, สาริปุตฺโต อาคจฺฉิสฺสตี”ติ? “นวมํ วา, ภควา, ทิวสํ ทสมํ วา”ติ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, ทสาหปรมํ อติเรกปตฺตํ ธาเรตุํ. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 </Paragraph>
 
 </Division>
@@ -74,7 +74,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2263" book="para">
-<Emphasis>ตํ อติกฺกามยโต นิสฺสคฺคิโย โหตี</Emphasis>ติ เอกาทเส อรุณุคฺคมเน นิสฺสคฺคิโย โหติ. นิสฺสชฺชิตพฺโพ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺโพ. เตน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อยํ เม, ภนฺเต, ปตฺโต ทสาหาติกฺกนฺโต นิสฺสคฺคิโย. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา, นิสฺสฏฺฐปตฺโต ทาตพฺโพ—
+<Emphasis>ตํ อติกฺกามยโต นิสฺสคฺคิโย โหตี</Emphasis>ติ เอกาทเส อรุณุคฺคมเน นิสฺสคฺคิโย โหติ. นิสฺสชฺชิตพฺโพ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺโพ. เตน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อยํ เม, ภนฺเต, ปตฺโต ทสาหาติกฺกนฺโต นิสฺสคฺคิโย. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา, นิสฺสฏฺฐปตฺโต ทาตพฺโพ—
 </Paragraph>
 
 </Division>
@@ -88,7 +88,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="604" book="para">
 
 <Paragraph number="2265" book="para">
-เตน ภิกฺขุนา สมฺพหุเล ภิกฺขู อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺสุ วจนียา—  “อยํ เม, ภนฺเต, ปตฺโต ทสาหาติกฺกนฺโต นิสฺสคฺคิโย. อิมาหํ อายสฺมนฺตานํ นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา, นิสฺสฏฺฐปตฺโต ทาตพฺโพ—
+เตน ภิกฺขุนา สมฺพหุเล ภิกฺขู อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺสุ วจนียา—  “อยํ เม, ภนฺเต, ปตฺโต ทสาหาติกฺกนฺโต นิสฺสคฺคิโย. อิมาหํ อายสฺมนฺตานํ นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา, นิสฺสฏฺฐปตฺโต ทาตพฺโพ—
 </Paragraph>
 
 </Division>
@@ -102,7 +102,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="606" book="para">
 
 <Paragraph number="2267" book="para">
-เตน ภิกฺขุนา เอกํ ภิกฺขุํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อยํ เม, อาวุโส, ปตฺโต ทสาหาติกฺกนฺโต นิสฺสคฺคิโย. อิมาหํ อายสฺมโต นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. เตน ภิกฺขุนา อาปตฺติ ปฏิคฺคเหตพฺพา, นิสฺสฏฺฐปตฺโต ทาตพฺโพ—  “อิมํ ปตฺตํ อายสฺมโต ทมฺมี”ติ.
+เตน ภิกฺขุนา เอกํ ภิกฺขุํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อยํ เม, อาวุโส, ปตฺโต ทสาหาติกฺกนฺโต นิสฺสคฺคิโย. อิมาหํ อายสฺมโต นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. เตน ภิกฺขุนา อาปตฺติ ปฏิคฺคเหตพฺพา, นิสฺสฏฺฐปตฺโต ทาตพฺโพ—  “อิมํ ปตฺตํ อายสฺมโต ทมฺมี”ติ.
 </Paragraph>
 
 </Division>
