--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-10.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-10.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="657" book="para">
 
 <Paragraph number="2421" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน สาวตฺถิยํ อญฺญตรสฺส ปูคสฺส สํฆสฺส สจีวรภตฺตํ ปฏิยตฺตํ โหติ—  “โภเชตฺวา จีวเรน อจฺฉาเทสฺสามา”ติ. อถ โข ฉพฺพคฺคิยา ภิกฺขู เยน โส ปูโค เตนุปสงฺกมึสุ; อุปสงฺกมิตฺวา ตํ ปูคํ เอตทโวจุํ—  “เทถาวุโส, อมฺหากํ อิมานิ จีวรานี”ติ. “น มยํ, ภนฺเต, ทสฺสาม. อมฺหากํ สํฆสฺส อนุวสฺสํ สจีวรภิกฺขา ปญฺญตฺตา”ติ. “พหู, อาวุโส, สํฆสฺส ทายกา, พหู สํฆสฺส ภตฺตา. มยํ ตุเมฺห นิสฺสาย ตุเมฺห สมฺปสฺสนฺตา อิธ วิหราม. ตุเมฺห เจ อมฺหากํ น ทสฺสถ, อถ โก จรหิ อมฺหากํ ทสฺสติ? เทถาวุโส, อมฺหากํ อิมานิ จีวรานี”ติ. อถ โข โส ปูโค ฉพฺพคฺคิเยหิ ภิกฺขูหิ นิปฺปีฬิยมาโน ยถาปฏิยตฺตํ จีวรํ ฉพฺพคฺคิยานํ ภิกฺขูนํ ทตฺวา สํฆํ ภตฺเตน ปริวิสิ. เย เต ภิกฺขู ชานนฺติ สํฆสฺส สจีวรภตฺตํ ปฏิยตฺตํ, น จ ชานนฺติ ฉพฺพคฺคิยานํ ภิกฺขูนํ ทินฺนนฺติ, เต เอวมาหํสุ—  “โอโณเชถาวุโส, สํฆสฺส จีวรนฺ”ติ. “นตฺถิ, ภนฺเต. ยถาปฏิยตฺตํ จีวรํ อยฺยา ฉพฺพคฺคิยา อตฺตโน ปริณาเมสุนฺ”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม ฉพฺพคฺคิยา ภิกฺขู ชานํ สํฆิกํ ลาภํ ปริณตํ อตฺตโน ปริณาเมสฺสนฺตี”ติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน สาวตฺถิยํ อญฺญตรสฺส ปูคสฺส สํฆสฺส สจีวรภตฺตํ ปฏิยตฺตํ โหติ—  “โภเชตฺวา จีวเรน อจฺฉาเทสฺสามา”ติ. อถ โข ฉพฺพคฺคิยา ภิกฺขู เยน โส ปูโค เตนุปสงฺกมิํสุ; อุปสงฺกมิตฺวา ตํ ปูคํ เอตทโวจุํ—  “เทถาวุโส, อมฺหากํ อิมานิ จีวรานี”ติ. “น มยํ, ภนฺเต, ทสฺสาม. อมฺหากํ สํฆสฺส อนุวสฺสํ สจีวรภิกฺขา ปญฺญตฺตา”ติ. “พหู, อาวุโส, สํฆสฺส ทายกา, พหู สํฆสฺส ภตฺตา. มยํ ตุเมฺห นิสฺสาย ตุเมฺห สมฺปสฺสนฺตา อิธ วิหราม. ตุเมฺห เจ อมฺหากํ น ทสฺสถ, อถ โก จรหิ อมฺหากํ ทสฺสติ? เทถาวุโส, อมฺหากํ อิมานิ จีวรานี”ติ. อถ โข โส ปูโค ฉพฺพคฺคิเยหิ ภิกฺขูหิ นิปฺปีฬิยมาโน ยถาปฏิยตฺตํ จีวรํ ฉพฺพคฺคิยานํ ภิกฺขูนํ ทตฺวา สํฆํ ภตฺเตน ปริวิสิ. เย เต ภิกฺขู ชานนฺติ สํฆสฺส สจีวรภตฺตํ ปฏิยตฺตํ, น จ ชานนฺติ ฉพฺพคฺคิยานํ ภิกฺขูนํ ทินฺนนฺติ, เต เอวมาหํสุ—  “โอโณเชถาวุโส, สํฆสฺส จีวรนฺ”ติ. “นตฺถิ, ภนฺเต. ยถาปฏิยตฺตํ จีวรํ อยฺยา ฉพฺพคฺคิยา อตฺตโน ปริณาเมสุนฺ”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม ฉพฺพคฺคิยา ภิกฺขู ชานํ สํฆิกํ ลาภํ ปริณตํ อตฺตโน ปริณาเมสฺสนฺตี”ติ.
 </Paragraph>
 
 <Paragraph number="2422" book="para">
@@ -36,7 +36,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="659" book="para">
 
 <Paragraph number="2424" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="2425" book="para">
@@ -106,7 +106,7 @@ _สาสงฺกํ สํฆิเกน จาติ._
 <Division number="662" book="para">
 
 <Paragraph number="2436" book="para">
-“อุทฺทิฏฺฐา โข, อายสฺมนฺโต, ตึส นิสฺสคฺคิยา ปาจิตฺติยา ธมฺมา. ตตฺถายสฺมนฺเต ปุจฺฉามิ—  ‘กจฺจิตฺถ ปริสุทฺธา’? ทุติยมฺปิ ปุจฺฉามิ—  ‘กจฺจิตฺถ ปริสุทฺธา’? ตติยมฺปิ ปุจฺฉามิ—  ‘กจฺจิตฺถ ปริสุทฺธา’? ปริสุทฺเธตฺถายสฺมนฺโต, ตสฺมา ตุณฺหี, เอวเมตํ ธารยามี”ติ.
+“อุทฺทิฏฺฐา โข, อายสฺมนฺโต, ติํส นิสฺสคฺคิยา ปาจิตฺติยา ธมฺมา. ตตฺถายสฺมนฺเต ปุจฺฉามิ—  ‘กจฺจิตฺถ ปริสุทฺธา’? ทุติยมฺปิ ปุจฺฉามิ—  ‘กจฺจิตฺถ ปริสุทฺธา’? ตติยมฺปิ ปุจฺฉามิ—  ‘กจฺจิตฺถ ปริสุทฺธา’? ปริสุทฺเธตฺถายสฺมนฺโต, ตสฺมา ตุณฺหี, เอวเมตํ ธารยามี”ติ.
 
 </Paragraph>
 </Division>
