--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-2.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-2.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="609" book="para">
 
 <Paragraph number="2273" book="para">
-เตน สมเยน พุทฺโธ ภควา สกฺเกสุ วิหรติ กปิลวตฺถุสฺมึ นิโคฺรธาราเม. เตน โข ปน สมเยน อญฺญตเรน กุมฺภกาเรน ภิกฺขู ปวาริตา โหนฺติ—  “เยสํ อยฺยานํ ปตฺเตน อตฺโถ อหํ ปตฺเตนา”ติ. เตน โข ปน สมเยน ภิกฺขู น มตฺตํ ชานิตฺวา พหู ปตฺเต วิญฺญาเปนฺติ. เยสํ ขุทฺทกา ปตฺตา เต มหนฺเต ปตฺเต วิญฺญาเปนฺติ. เยสํ มหนฺตา ปตฺตา เต ขุทฺทเก ปตฺเต วิญฺญาเปนฺติ. อถ โข โส กุมฺภกาโร ภิกฺขูนํ พหู ปตฺเต กโรนฺโต น สกฺโกติ อญฺญํ วิกฺกายิกํ ภณฺฑํ กาตุํ, อตฺตนาปิ น ยาเปติ, ปุตฺตทาราปิสฺส กิลมนฺติ. มนุสฺสา อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม สมณา สกฺยปุตฺติยา น มตฺตํ ชานิตฺวา พหู ปตฺเต วิญฺญาเปสฺสนฺติ. อยํ อิเมสํ พหู ปตฺเต กโรนฺโต น สกฺโกติ อญฺญํ วิกฺกายิกํ ภณฺฑํ กาตุํ, อตฺตนาปิ น ยาเปติ, ปุตฺตทาราปิสฺส กิลมนฺตี”ติ.
+เตน สมเยน พุทฺโธ ภควา สกฺเกสุ วิหรติ กปิลวตฺถุสฺมิํ นิโคฺรธาราเม. เตน โข ปน สมเยน อญฺญตเรน กุมฺภกาเรน ภิกฺขู ปวาริตา โหนฺติ—  “เยสํ อยฺยานํ ปตฺเตน อตฺโถ อหํ ปตฺเตนา”ติ. เตน โข ปน สมเยน ภิกฺขู น มตฺตํ ชานิตฺวา พหู ปตฺเต วิญฺญาเปนฺติ. เยสํ ขุทฺทกา ปตฺตา เต มหนฺเต ปตฺเต วิญฺญาเปนฺติ. เยสํ มหนฺตา ปตฺตา เต ขุทฺทเก ปตฺเต วิญฺญาเปนฺติ. อถ โข โส กุมฺภกาโร ภิกฺขูนํ พหู ปตฺเต กโรนฺโต น สกฺโกติ อญฺญํ วิกฺกายิกํ ภณฺฑํ กาตุํ, อตฺตนาปิ น ยาเปติ, ปุตฺตทาราปิสฺส กิลมนฺติ. มนุสฺสา อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม สมณา สกฺยปุตฺติยา น มตฺตํ ชานิตฺวา พหู ปตฺเต วิญฺญาเปสฺสนฺติ. อยํ อิเมสํ พหู ปตฺเต กโรนฺโต น สกฺโกติ อญฺญํ วิกฺกายิกํ ภณฺฑํ กาตุํ, อตฺตนาปิ น ยาเปติ, ปุตฺตทาราปิสฺส กิลมนฺตี”ติ.
 </Paragraph>
 
 <Paragraph number="2274" book="para">
@@ -26,7 +26,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2275" book="para">
-อถ โข เต ภิกฺขู เต อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ …เป…  สจฺจํ กิร, ภิกฺขเว, ภิกฺขู น มตฺตํ ชานิตฺวา พหู ปตฺเต วิญฺญาเปนฺตีติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา …เป…  กถญฺหิ นาม เต, ภิกฺขเว, โมฆปุริสา น มตฺตํ ชานิตฺวา พหู ปตฺเต วิญฺญาเปสฺสนฺติ. เนตํ, ภิกฺขเว, อปฺปสนฺนานํ วา ปสาทาย …เป…  วิครหิตฺวา ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “น, ภิกฺขเว, ปตฺโต วิญฺญาเปตพฺโพ. โย วิญฺญาเปยฺย, อาปตฺติ ทุกฺกฏสฺสา”ติ.
+อถ โข เต ภิกฺขู เต อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ …เป…  สจฺจํ กิร, ภิกฺขเว, ภิกฺขู น มตฺตํ ชานิตฺวา พหู ปตฺเต วิญฺญาเปนฺตีติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา …เป…  กถญฺหิ นาม เต, ภิกฺขเว, โมฆปุริสา น มตฺตํ ชานิตฺวา พหู ปตฺเต วิญฺญาเปสฺสนฺติ. เนตํ, ภิกฺขเว, อปฺปสนฺนานํ วา ปสาทาย …เป…  วิครหิตฺวา ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “น, ภิกฺขเว, ปตฺโต วิญฺญาเปตพฺโพ. โย วิญฺญาเปยฺย, อาปตฺติ ทุกฺกฏสฺสา”ติ.
 </Paragraph>
 
 </Division>
@@ -37,7 +37,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2277" book="para">
-อโสฺสสุํ โข ภิกฺขู เตสํ มนุสฺสานํ อุชฺฌายนฺตานํ ขิยฺยนฺตานํ วิปาเจนฺตานํ. อถ โข เต ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, นฏฺฐปตฺตสฺส วา ภินฺนปตฺตสฺส วา ปตฺตํ วิญฺญาเปตุนฺ”ติ.
+อโสฺสสุํ โข ภิกฺขู เตสํ มนุสฺสานํ อุชฺฌายนฺตานํ ขิยฺยนฺตานํ วิปาเจนฺตานํ. อถ โข เต ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, นฏฺฐปตฺตสฺส วา ภินฺนปตฺตสฺส วา ปตฺตํ วิญฺญาเปตุนฺ”ติ.
 </Paragraph>
 
 </Division>
@@ -66,15 +66,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="613" book="para">
 
 <Paragraph number="2282" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="2283" book="para">
-<Emphasis>อูนปญฺจพนฺธโน</Emphasis> นาม ปตฺโต อพนฺธโน วา เอกพนฺธโน วา ทฺวิพนฺธโน วา ติพนฺธโน วา จตุพนฺธโน วา. อพนฺธโนกาโส นาม ปตฺโต ยสฺส ทฺวงฺคุลา ราชิ น โหติ. พนฺธโนกาโส นาม ปตฺโต ยสฺส ทฺวงฺคุลา ราชิ โหติ. <Emphasis>นโว</Emphasis> นาม ปตฺโต วิญฺญตฺตึ อุปาทาย วุจฺจติ.
+<Emphasis>อูนปญฺจพนฺธโน</Emphasis> นาม ปตฺโต อพนฺธโน วา เอกพนฺธโน วา ทฺวิพนฺธโน วา ติพนฺธโน วา จตุพนฺธโน วา. อพนฺธโนกาโส นาม ปตฺโต ยสฺส ทฺวงฺคุลา ราชิ น โหติ. พนฺธโนกาโส นาม ปตฺโต ยสฺส ทฺวงฺคุลา ราชิ โหติ. <Emphasis>นโว</Emphasis> นาม ปตฺโต วิญฺญตฺติํ อุปาทาย วุจฺจติ.
 </Paragraph>
 
 <Paragraph number="2284" book="para">
-<Emphasis>เจตาเปยฺยา</Emphasis>ติ วิญฺญาเปติ, ปโยเค ทุกฺกฏํ. ปฏิลาเภน นิสฺสคฺคิโย โหติ. สํฆมชฺเฌ นิสฺสชฺชิตพฺโพ. สพฺเพเหว อธิฏฺฐิตปตฺตํ คเหตฺวา สนฺนิปติตพฺพํ. น ลามโก ปตฺโต อธิฏฺฐาตพฺโพ—  “มหคฺฆํ ปตฺตํ คเหสฺสามี”ติ. สเจ ลามกํ ปตฺตํ อธิฏฺเฐติ—  “มหคฺฆํ ปตฺตํ คเหสฺสามี”ติ, อาปตฺติ ทุกฺกฏสฺส. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺโพ. เตน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อยํ เม, ภนฺเต, ปตฺโต อูนปญฺจพนฺธเนน ปตฺเตน เจตาปิโต นิสฺสคฺคิโย. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา. ปญฺจหงฺเคหิ สมนฺนาคโต ภิกฺขุ ปตฺตคฺคาหาปโก สมฺมนฺนิตพฺโพ—  โย น ฉนฺทาคตึ คจฺเฉยฺย, น โทสาคตึ คจฺเฉยฺย, น โมหาคตึ คจฺเฉยฺย, น ภยาคตึ คจฺเฉยฺย, คาหิตาคาหิตญฺจ ชาเนยฺย. “เอวญฺจ ปน, ภิกฺขเว, สมฺมนฺนิตพฺโพ. ปฐมํ ภิกฺขุ ยาจิตพฺโพ. ยาจิตฺวา พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
+<Emphasis>เจตาเปยฺยา</Emphasis>ติ วิญฺญาเปติ, ปโยเค ทุกฺกฏํ. ปฏิลาเภน นิสฺสคฺคิโย โหติ. สํฆมชฺเฌ นิสฺสชฺชิตพฺโพ. สพฺเพเหว อธิฏฺฐิตปตฺตํ คเหตฺวา สนฺนิปติตพฺพํ. น ลามโก ปตฺโต อธิฏฺฐาตพฺโพ—  “มหคฺฆํ ปตฺตํ คเหสฺสามี”ติ. สเจ ลามกํ ปตฺตํ อธิฏฺเฐติ—  “มหคฺฆํ ปตฺตํ คเหสฺสามี”ติ, อาปตฺติ ทุกฺกฏสฺส. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺโพ. เตน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อยํ เม, ภนฺเต, ปตฺโต อูนปญฺจพนฺธเนน ปตฺเตน เจตาปิโต นิสฺสคฺคิโย. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา. ปญฺจหงฺเคหิ สมนฺนาคโต ภิกฺขุ ปตฺตคฺคาหาปโก สมฺมนฺนิตพฺโพ—  โย น ฉนฺทาคติํ คจฺเฉยฺย, น โทสาคติํ คจฺเฉยฺย, น โมหาคติํ คจฺเฉยฺย, น ภยาคติํ คจฺเฉยฺย, คาหิตาคาหิตญฺจ ชาเนยฺย. “เอวญฺจ ปน, ภิกฺขเว, สมฺมนฺนิตพฺโพ. ปฐมํ ภิกฺขุ ยาจิตพฺโพ. ยาจิตฺวา พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
 </Paragraph>
 
 </Division>
