--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-5.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-5.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="631" book="para">
 
 <Paragraph number="2336" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา อุปนนฺโท สกฺยปุตฺโต ภาตุโน สทฺธิวิหาริกํ ภิกฺขุํ เอตทโวจ—  “เอหาวุโส, ชนปทจาริกํ ปกฺกมิสฺสามา”ติ. “นาหํ, ภนฺเต, คมิสฺสามิ; ทุพฺพลจีวโรมฺหี”ติ. “เอหาวุโส, อหํ เต จีวรํ ทสฺสามี”ติ ตสฺส จีวรํ อทาสิ. อโสฺสสิ โข โส ภิกฺขุ—  “ภควา กิร ชนปทจาริกํ ปกฺกมิสฺสตี”ติ. อถ โข ตสฺส ภิกฺขุโน เอตทโหสิ—  “น ทานาหํ อายสฺมตา อุปนนฺเทน สกฺยปุตฺเตน สทฺธึ ชนปทจาริกํ ปกฺกมิสฺสามิ, ภควตา สทฺธึ ชนปทจาริกํ ปกฺกมิสฺสามี”ติ. อถ โข อายสฺมา อุปนนฺโท สกฺยปุตฺโต ตํ ภิกฺขุํ เอตทโวจ—  “เอหิ ทานิ, อาวุโส, ชนปทจาริกํ ปกฺกมิสฺสามา”ติ. “นาหํ, ภนฺเต, ตยา สทฺธึ ชนปทจาริกํ ปกฺกมิสฺสามิ, ภควตา สทฺธึ ชนปทจาริกํ ปกฺกมิสฺสามี”ติ. “ยมฺปิ ตฺยาหํ, อาวุโส, จีวรํ อทาสึ, มยา สทฺธึ ชนปทจาริกํ ปกฺกมิสฺสตี”ติ, กุปิโต อนตฺตมโน อจฺฉินฺทิ. อถ โข โส ภิกฺขุ ภิกฺขูนํ เอตมตฺถํ อาโรเจสิ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา อุปนนฺโท สกฺยปุตฺโต ภิกฺขุสฺส สามํ จีวรํ ทตฺวา กุปิโต อนตฺตมโน อจฺฉินฺทิสฺสตี”ติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา อุปนนฺโท สกฺยปุตฺโต ภาตุโน สทฺธิวิหาริกํ ภิกฺขุํ เอตทโวจ—  “เอหาวุโส, ชนปทจาริกํ ปกฺกมิสฺสามา”ติ. “นาหํ, ภนฺเต, คมิสฺสามิ; ทุพฺพลจีวโรมฺหี”ติ. “เอหาวุโส, อหํ เต จีวรํ ทสฺสามี”ติ ตสฺส จีวรํ อทาสิ. อโสฺสสิ โข โส ภิกฺขุ—  “ภควา กิร ชนปทจาริกํ ปกฺกมิสฺสตี”ติ. อถ โข ตสฺส ภิกฺขุโน เอตทโหสิ—  “น ทานาหํ อายสฺมตา อุปนนฺเทน สกฺยปุตฺเตน สทฺธิํ ชนปทจาริกํ ปกฺกมิสฺสามิ, ภควตา สทฺธิํ ชนปทจาริกํ ปกฺกมิสฺสามี”ติ. อถ โข อายสฺมา อุปนนฺโท สกฺยปุตฺโต ตํ ภิกฺขุํ เอตทโวจ—  “เอหิ ทานิ, อาวุโส, ชนปทจาริกํ ปกฺกมิสฺสามา”ติ. “นาหํ, ภนฺเต, ตยา สทฺธิํ ชนปทจาริกํ ปกฺกมิสฺสามิ, ภควตา สทฺธิํ ชนปทจาริกํ ปกฺกมิสฺสามี”ติ. “ยมฺปิ ตฺยาหํ, อาวุโส, จีวรํ อทาสิํ, มยา สทฺธิํ ชนปทจาริกํ ปกฺกมิสฺสตี”ติ, กุปิโต อนตฺตมโน อจฺฉินฺทิ. อถ โข โส ภิกฺขุ ภิกฺขูนํ เอตมตฺถํ อาโรเจสิ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา อุปนนฺโท สกฺยปุตฺโต ภิกฺขุสฺส สามํ จีวรํ ทตฺวา กุปิโต อนตฺตมโน อจฺฉินฺทิสฺสตี”ติ.
 </Paragraph>
 
 <Paragraph number="2337" book="para">
@@ -36,7 +36,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="633" book="para">
 
 <Paragraph number="2339" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="2340" book="para">
@@ -60,7 +60,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2345" book="para">
-<Emphasis>อจฺฉินฺทาเปยฺยา</Emphasis>ติ อญฺญํ อาณาเปติ, อาปตฺติ ทุกฺกฏสฺส. สกึ อาณตฺโต พหุกมฺปิ อจฺฉินฺทติ, นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ …เป…  “อิทํ เม, ภนฺเต, จีวรํ ภิกฺขุสฺส สามํ ทตฺวา อจฺฉินฺนํ นิสฺสคฺคิยํ อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ …เป…  ทเทยฺยาติ …เป…  ทเทยฺยุนฺติ …เป…  อายสฺมโต ทมฺมีติ.
+<Emphasis>อจฺฉินฺทาเปยฺยา</Emphasis>ติ อญฺญํ อาณาเปติ, อาปตฺติ ทุกฺกฏสฺส. สกิํ อาณตฺโต พหุกมฺปิ อจฺฉินฺทติ, นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ …เป…  “อิทํ เม, ภนฺเต, จีวรํ ภิกฺขุสฺส สามํ ทตฺวา อจฺฉินฺนํ นิสฺสคฺคิยํ อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ …เป…  ทเทยฺยาติ …เป…  ทเทยฺยุนฺติ …เป…  อายสฺมโต ทมฺมีติ.
 </Paragraph>
 
 </Division>
