--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-7.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-7.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="641" book="para">
 
 <Paragraph number="2362" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อญฺญตโร ปุริโส ปวาสํ คจฺฉนฺโต ปชาปตึ เอตทโวจ—  “สุตฺตํ ธารยิตฺวา อมุกสฺส ตนฺตวายสฺส เทหิ, จีวรํ วายาเปตฺวา นิกฺขิป, อาคโต อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี”ติ. อโสฺสสิ โข อญฺญตโร ปิณฺฑจาริโก ภิกฺขุ ตสฺส ปุริสสฺส อิมํ วาจํ ภาสมานสฺส. อถ โข โส ภิกฺขุ เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ เอตทโวจ—  “มหาปุญฺโญสิ ตฺวํ, อาวุโส อุปนนฺท, อมุกสฺมึ โอกาเส อญฺญตโร ปุริโส ปวาสํ คจฺฉนฺโต ปชาปตึ เอตทโวจ—  ‘สุตฺตํ ธารยิตฺวา อมุกสฺส ตนฺตวายสฺส เทหิ, จีวรํ วายาเปตฺวา นิกฺขิป, อาคโต อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี’”ติ. “อตฺถาวุโส, มํ โส อุปฏฺฐาโก”ติ. โสปิ โข ตนฺตวาโย อายสฺมโต อุปนนฺทสฺส สกฺยปุตฺตสฺส อุปฏฺฐาโก โหติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อญฺญตโร ปุริโส ปวาสํ คจฺฉนฺโต ปชาปติํ เอตทโวจ—  “สุตฺตํ ธารยิตฺวา อมุกสฺส ตนฺตวายสฺส เทหิ, จีวรํ วายาเปตฺวา นิกฺขิป, อาคโต อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี”ติ. อโสฺสสิ โข อญฺญตโร ปิณฺฑจาริโก ภิกฺขุ ตสฺส ปุริสสฺส อิมํ วาจํ ภาสมานสฺส. อถ โข โส ภิกฺขุ เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ เอตทโวจ—  “มหาปุญฺโญสิ ตฺวํ, อาวุโส อุปนนฺท, อมุกสฺมิํ โอกาเส อญฺญตโร ปุริโส ปวาสํ คจฺฉนฺโต ปชาปติํ เอตทโวจ—  ‘สุตฺตํ ธารยิตฺวา อมุกสฺส ตนฺตวายสฺส เทหิ, จีวรํ วายาเปตฺวา นิกฺขิป, อาคโต อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี’”ติ. “อตฺถาวุโส, มํ โส อุปฏฺฐาโก”ติ. โสปิ โข ตนฺตวาโย อายสฺมโต อุปนนฺทสฺส สกฺยปุตฺตสฺส อุปฏฺฐาโก โหติ.
 </Paragraph>
 
 <Paragraph number="2363" book="para">
@@ -26,7 +26,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2364" book="para">
-อถ โข โส ตนฺตวาโย ยถาภตํ สุตฺตํ ตนฺเต อุปเนตฺวา เยน สา อิตฺถี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ตํ อิตฺถึ เอตทโวจ—  “สุตฺเตน, อเยฺย, อตฺโถ”ติ. “นนุ ตฺวํ อโยฺย มยา วุตฺโต—  ‘อิมินา สุตฺเตน จีวรํ วินาหี’”ติ. “สจฺจาหํ, อเยฺย, ตยา วุตฺโต—  ‘อิมินา สุตฺเตน จีวรํ วินาหี’ติ. อปิ จ มํ อโยฺย อุปนนฺโท เอวมาห—  ‘อิงฺฆ ตฺวํ, อาวุโส, อายตญฺจ กโรหิ วิตฺถตญฺจ อปฺปิตญฺจ, น เตน สุตฺเตน ปฏิพทฺธํ ภวิสฺสตี’”ติ. อถ โข สา อิตฺถี ยตฺตกํเยว สุตฺตํ ปฐมํ อทาสิ ตตฺตกํ ปจฺฉา อทาสิ. อโสฺสสิ โข อายสฺมา อุปนนฺโท สกฺยปุตฺโต—  “โส กิร ปุริโส ปวาสโต อาคโต”ติ. อถ โข อายสฺมา อุปนนฺโท สกฺยปุตฺโต เยน ตสฺส ปุริสสฺส นิเวสนํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปญฺญตฺเต อาสเน นิสีทิ. อถ โข โส ปุริโส เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺโน โข โส ปุริโส ปชาปตึ เอตทโวจ—  “วีตํ ตํ จีวรนฺ”ติ? “อามายฺย, วีตํ ตํ จีวรนฺ”ติ. “อาหร, อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี”ติ. อถ โข สา อิตฺถี ตํ จีวรํ นีหริตฺวา สามิกสฺส ทตฺวา เอตมตฺถํ อาโรเจสิ. อถ โข โส ปุริโส อายสฺมโต อุปนนฺทสฺส สกฺยปุตฺตสฺส จีวรํ ทตฺวา อุชฺฌายติ ขิยฺยติ วิปาเจติ—  “มหิจฺฉา อิเม สมณา สกฺยปุตฺติยา อสนฺตุฏฺฐา. นยิเม สุกรา จีวเรน อจฺฉาเทตุํ. กถญฺหิ นาม อโยฺย อุปนนฺโท มยา ปุพฺเพ อปฺปวาริโต ตนฺตวาเย อุปสงฺกมิตฺวา จีวเร วิกปฺปํ อาปชฺชิสฺสตี”ติ.
+อถ โข โส ตนฺตวาโย ยถาภตํ สุตฺตํ ตนฺเต อุปเนตฺวา เยน สา อิตฺถี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ตํ อิตฺถิํ เอตทโวจ—  “สุตฺเตน, อเยฺย, อตฺโถ”ติ. “นนุ ตฺวํ อโยฺย มยา วุตฺโต—  ‘อิมินา สุตฺเตน จีวรํ วินาหี’”ติ. “สจฺจาหํ, อเยฺย, ตยา วุตฺโต—  ‘อิมินา สุตฺเตน จีวรํ วินาหี’ติ. อปิ จ มํ อโยฺย อุปนนฺโท เอวมาห—  ‘อิงฺฆ ตฺวํ, อาวุโส, อายตญฺจ กโรหิ วิตฺถตญฺจ อปฺปิตญฺจ, น เตน สุตฺเตน ปฏิพทฺธํ ภวิสฺสตี’”ติ. อถ โข สา อิตฺถี ยตฺตกํเยว สุตฺตํ ปฐมํ อทาสิ ตตฺตกํ ปจฺฉา อทาสิ. อโสฺสสิ โข อายสฺมา อุปนนฺโท สกฺยปุตฺโต—  “โส กิร ปุริโส ปวาสโต อาคโต”ติ. อถ โข อายสฺมา อุปนนฺโท สกฺยปุตฺโต เยน ตสฺส ปุริสสฺส นิเวสนํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปญฺญตฺเต อาสเน นิสีทิ. อถ โข โส ปุริโส เยนายสฺมา อุปนนฺโท สกฺยปุตฺโต เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุปนนฺทํ สกฺยปุตฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺโน โข โส ปุริโส ปชาปติํ เอตทโวจ—  “วีตํ ตํ จีวรนฺ”ติ? “อามายฺย, วีตํ ตํ จีวรนฺ”ติ. “อาหร, อยฺยํ อุปนนฺทํ จีวเรน อจฺฉาเทสฺสามี”ติ. อถ โข สา อิตฺถี ตํ จีวรํ นีหริตฺวา สามิกสฺส ทตฺวา เอตมตฺถํ อาโรเจสิ. อถ โข โส ปุริโส อายสฺมโต อุปนนฺทสฺส สกฺยปุตฺตสฺส จีวรํ ทตฺวา อุชฺฌายติ ขิยฺยติ วิปาเจติ—  “มหิจฺฉา อิเม สมณา สกฺยปุตฺติยา อสนฺตุฏฺฐา. นยิเม สุกรา จีวเรน อจฺฉาเทตุํ. กถญฺหิ นาม อโยฺย อุปนนฺโท มยา ปุพฺเพ อปฺปวาริโต ตนฺตวาเย อุปสงฺกมิตฺวา จีวเร วิกปฺปํ อาปชฺชิสฺสตี”ติ.
 </Paragraph>
 
 <Paragraph number="2365" book="para">
