--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-8.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-8.mdx
@@ -22,7 +22,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2386" book="para">
-อโสฺสสุํ โข ภิกฺขู ตสฺส มหามตฺตสฺส อุชฺฌายนฺตสฺส ขิยฺยนฺตสฺส วิปาเจนฺตสฺส. อถ โข เต ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, อจฺเจกจีวรํ ปฏิคฺคเหตฺวา นิกฺขิปิตุนฺ”ติ.
+อโสฺสสุํ โข ภิกฺขู ตสฺส มหามตฺตสฺส อุชฺฌายนฺตสฺส ขิยฺยนฺตสฺส วิปาเจนฺตสฺส. อถ โข เต ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, อจฺเจกจีวรํ ปฏิคฺคเหตฺวา นิกฺขิปิตุนฺ”ติ.
 </Paragraph>
 
 </Division>
