--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-9.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-9.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="652" book="para">
 
 <Paragraph number="2400" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน ภิกฺขู วุตฺถวสฺสา อารญฺญเกสุ เสนาสเนสุ วิหรนฺติ. กตฺติกโจรกา ภิกฺขู—  “ลทฺธลาภา”ติ ปริปาเตนฺติ. ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, อารญฺญเกสุ เสนาสเนสุ วิหรนฺเตน ติณฺณํ จีวรานํ อญฺญตรํ จีวรํ อนฺตรฆเร นิกฺขิปิตุนฺ”ติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน ภิกฺขู วุตฺถวสฺสา อารญฺญเกสุ เสนาสเนสุ วิหรนฺติ. กตฺติกโจรกา ภิกฺขู—  “ลทฺธลาภา”ติ ปริปาเตนฺติ. ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, อารญฺญเกสุ เสนาสเนสุ วิหรนฺเตน ติณฺณํ จีวรานํ อญฺญตรํ จีวรํ อนฺตรฆเร นิกฺขิปิตุนฺ”ติ.
 </Paragraph>
 
 <Paragraph number="2401" book="para">
@@ -68,7 +68,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2411" book="para">
-<Emphasis>ติณฺณํ จีวรานํ อญฺญตรํ จีวรนฺ</Emphasis>ติ สงฺฆาฏึ วา อุตฺตราสงฺคํ วา อนฺตรวาสกํ วา.
+<Emphasis>ติณฺณํ จีวรานํ อญฺญตรํ จีวรนฺ</Emphasis>ติ สงฺฆาฏิํ วา อุตฺตราสงฺคํ วา อนฺตรวาสกํ วา.
 </Paragraph>
 
 <Paragraph number="2412" book="para">
@@ -84,7 +84,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2415" book="para">
-<Emphasis>อญฺญตฺร ภิกฺขุสมฺมุติยา</Emphasis>ติ ฐเปตฺวา ภิกฺขุสมฺมุตึ.
+<Emphasis>อญฺญตฺร ภิกฺขุสมฺมุติยา</Emphasis>ติ ฐเปตฺวา ภิกฺขุสมฺมุติํ.
 </Paragraph>
 
 <Paragraph number="2416" book="para">
