--- a/src/content/docs/thai/tipitaka/vi/para/1/veranjakanda.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/veranjakanda.mdx
@@ -18,14 +18,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="1" book="para">
 
 <Paragraph number="2" book="para">
-เตน สมเยน พุทฺโธ ภควา เวรญฺชายํ วิหรติ นเฬรุปุจิมนฺทมูเล มหตา ภิกฺขุสํเฆน สทฺธึ ปญฺจมตฺเตหิ ภิกฺขุสเตหิ. อโสฺสสิ โข เวรญฺโช พฺราหฺมโณ—  “สมโณ ขลุ โภ โคตโม สกฺยปุตฺโต สกฺยกุลา ปพฺพชิโต เวรญฺชายํ วิหรติ นเฬรุปุจิมนฺทมูเล มหตา ภิกฺขุสํเฆน สทฺธึ ปญฺจมตฺเตหิ ภิกฺขุสเตหิ. ตํ โข ปน ภวนฺตํ โคตมํ เอวํ กลฺยาโณ กิตฺติสทฺโท อพฺภุคฺคโต—  ‘อิติปิ โส ภควา อรหํ สมฺมาสมฺพุทฺโธ วิชฺชาจรณสมฺปนฺโน สุคโต โลกวิทู อนุตฺตโร ปุริสทมฺมสารถิ สตฺถา เทวมนุสฺสานํ พุทฺโธ ภควา’, โส อิมํ โลกํ สเทวกํ สมารกํ สพฺรหฺมกํ สสฺสมณพฺราหฺมณึ ปชํ สเทวมนุสฺสํ สยํ อภิญฺญา สจฺฉิกตฺวา ปเวเทติ, โส ธมฺมํ เทเสติ อาทิกลฺยาณํ มชฺเฌกลฺยาณํ ปริโยสานกลฺยาณํ สาตฺถํ สพฺยญฺชนํ; เกวลปริปุณฺณํ ปริสุทฺธํ พฺรหฺมจริยํ ปกาเสติ; สาธุ โข ปน ตถารูปานํ อรหตํ ทสฺสนํ โหตี”ติ.
+เตน สมเยน พุทฺโธ ภควา เวรญฺชายํ วิหรติ นเฬรุปุจิมนฺทมูเล มหตา ภิกฺขุสํเฆน สทฺธิํ ปญฺจมตฺเตหิ ภิกฺขุสเตหิ. อโสฺสสิ โข เวรญฺโช พฺราหฺมโณ—  “สมโณ ขลุ โภ โคตโม สกฺยปุตฺโต สกฺยกุลา ปพฺพชิโต เวรญฺชายํ วิหรติ นเฬรุปุจิมนฺทมูเล มหตา ภิกฺขุสํเฆน สทฺธิํ ปญฺจมตฺเตหิ ภิกฺขุสเตหิ. ตํ โข ปน ภวนฺตํ โคตมํ เอวํ กลฺยาโณ กิตฺติสทฺโท อพฺภุคฺคโต—  ‘อิติปิ โส ภควา อรหํ สมฺมาสมฺพุทฺโธ วิชฺชาจรณสมฺปนฺโน สุคโต โลกวิทู อนุตฺตโร ปุริสทมฺมสารถิ สตฺถา เทวมนุสฺสานํ พุทฺโธ ภควา’, โส อิมํ โลกํ สเทวกํ สมารกํ สพฺรหฺมกํ สสฺสมณพฺราหฺมณิํ ปชํ สเทวมนุสฺสํ สยํ อภิญฺญา สจฺฉิกตฺวา ปเวเทติ, โส ธมฺมํ เทเสติ อาทิกลฺยาณํ มชฺเฌกลฺยาณํ ปริโยสานกลฺยาณํ สาตฺถํ สพฺยญฺชนํ; เกวลปริปุณฺณํ ปริสุทฺธํ พฺรหฺมจริยํ ปกาเสติ; สาธุ โข ปน ตถารูปานํ อรหตํ ทสฺสนํ โหตี”ติ.
 </Paragraph>
 
 </Division>
 <Division number="2" book="para">
 
 <Paragraph number="3" book="para">
-อถ โข เวรญฺโช พฺราหฺมโณ เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควตา สทฺธึ สมฺโมทิ. สมฺโมทนียํ กถํ สารณียํ วีติสาเรตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺโน โข เวรญฺโช พฺราหฺมโณ ภควนฺตํ เอตทโวจ—  “สุตํ เมตํ, โภ โคตม—  ‘น สมโณ โคตโม พฺราหฺมเณ ชิณฺเณ วุฑฺเฒ มหลฺลเก อทฺธคเต วโยอนุปฺปตฺเต อภิวาเทติ วา ปจฺจุฏฺเฐติ วา อาสเนน วา นิมนฺเตตี’ติ. ตยิทํ, โภ โคตม, ตเถว? น หิ ภวํ โคตโม พฺราหฺมเณ ชิณฺเณ วุฑฺเฒ มหลฺลเก อทฺธคเต วโยอนุปฺปตฺเต อภิวาเทติ วา ปจฺจุฏฺเฐติ วา อาสเนน วา นิมนฺเตติ? ตยิทํ, โภ โคตม, น สมฺปนฺนเมวา”ติ.
+อถ โข เวรญฺโช พฺราหฺมโณ เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควตา สทฺธิํ สมฺโมทิ. สมฺโมทนียํ กถํ สารณียํ วีติสาเรตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺโน โข เวรญฺโช พฺราหฺมโณ ภควนฺตํ เอตทโวจ—  “สุตํ เมตํ, โภ โคตม—  ‘น สมโณ โคตโม พฺราหฺมเณ ชิณฺเณ วุฑฺเฒ มหลฺลเก อทฺธคเต วโยอนุปฺปตฺเต อภิวาเทติ วา ปจฺจุฏฺเฐติ วา อาสเนน วา นิมนฺเตตี’ติ. ตยิทํ, โภ โคตม, ตเถว? น หิ ภวํ โคตโม พฺราหฺมเณ ชิณฺเณ วุฑฺเฒ มหลฺลเก อทฺธคเต วโยอนุปฺปตฺเต อภิวาเทติ วา ปจฺจุฏฺเฐติ วา อาสเนน วา นิมนฺเตติ? ตยิทํ, โภ โคตม, น สมฺปนฺนเมวา”ติ.
 </Paragraph>
 
 <Paragraph number="4" book="para">
@@ -36,14 +36,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="3" book="para">
 
 <Paragraph number="5" book="para">
-“อรสรูโป ภวํ โคตโม”ติ? “อตฺถิ เขฺวส, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘อรสรูโป สมโณ โคตโม’ติ. เย เต, พฺราหฺมณ, รูปรสา สทฺทรสา คนฺธรสา รสรสา โผฏฺฐพฺพรสา, เต ตถาคตสฺส ปหีนา อุจฺฉินฺนมูลา ตาลาวตฺถุกตา อนภาวํกตา อายตึ อนุปฺปาทธมฺมา. อยํ โข, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘อรสรูโป สมโณ โคตโม’ติ, โน จ โข ยํ ตฺวํ สนฺธาย วเทสี”ติ.
+“อรสรูโป ภวํ โคตโม”ติ? “อตฺถิ เขฺวส, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘อรสรูโป สมโณ โคตโม’ติ. เย เต, พฺราหฺมณ, รูปรสา สทฺทรสา คนฺธรสา รสรสา โผฏฺฐพฺพรสา, เต ตถาคตสฺส ปหีนา อุจฺฉินฺนมูลา ตาลาวตฺถุกตา อนภาวํกตา อายติํ อนุปฺปาทธมฺมา. อยํ โข, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘อรสรูโป สมโณ โคตโม’ติ, โน จ โข ยํ ตฺวํ สนฺธาย วเทสี”ติ.
 </Paragraph>
 
 </Division>
 <Division number="4" book="para">
 
 <Paragraph number="6" book="para">
-“นิพฺโภโค ภวํ โคตโม”ติ? “อตฺถิ เขฺวส, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘นิพฺโภโค สมโณ โคตโม’ติ. เย เต, พฺราหฺมณ, รูปโภคา สทฺทโภคา คนฺธโภคา รสโภคา โผฏฺฐพฺพโภคา, เต ตถาคตสฺส ปหีนา อุจฺฉินฺนมูลา ตาลาวตฺถุกตา อนภาวํกตา อายตึ อนุปฺปาทธมฺมา. อยํ โข, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘นิพฺโภโค สมโณ โคตโม’ติ, โน จ โข ยํ ตฺวํ สนฺธาย วเทสี”ติ.
+“นิพฺโภโค ภวํ โคตโม”ติ? “อตฺถิ เขฺวส, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘นิพฺโภโค สมโณ โคตโม’ติ. เย เต, พฺราหฺมณ, รูปโภคา สทฺทโภคา คนฺธโภคา รสโภคา โผฏฺฐพฺพโภคา, เต ตถาคตสฺส ปหีนา อุจฺฉินฺนมูลา ตาลาวตฺถุกตา อนภาวํกตา อายติํ อนุปฺปาทธมฺมา. อยํ โข, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘นิพฺโภโค สมโณ โคตโม’ติ, โน จ โข ยํ ตฺวํ สนฺธาย วเทสี”ติ.
 </Paragraph>
 
 </Division>
@@ -78,53 +78,53 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="9" book="para">
 
 <Paragraph number="11" book="para">
-“ตปสฺสี ภวํ โคตโม”ติ? “อตฺถิ เขฺวส, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘ตปสฺสี สมโณ โคตโม’ติ. ตปนียาหํ, พฺราหฺมณ, ปาปเก อกุสเล ธมฺเม วทามิ, กายทุจฺจริตํ วจีทุจฺจริตํ มโนทุจฺจริตํ. ยสฺส โข, พฺราหฺมณ, ตปนียา ปาปกา อกุสลา ธมฺมา ปหีนา อุจฺฉินฺนมูลา ตาลาวตฺถุกตา อนภาวํกตา อายตึ อนุปฺปาทธมฺมา ตมหํ ตปสฺสีติ วทามิ. ตถาคตสฺส โข, พฺราหฺมณ, ตปนียา ปาปกา อกุสลา ธมฺมา ปหีนา อุจฺฉินฺนมูลา ตาลาวตฺถุกตา อนภาวํกตา อายตึ อนุปฺปาทธมฺมา. อยํ โข, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘ตปสฺสี สมโณ โคตโม’ติ, โน จ โข ยํ ตฺวํ สนฺธาย วเทสี”ติ.
+“ตปสฺสี ภวํ โคตโม”ติ? “อตฺถิ เขฺวส, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘ตปสฺสี สมโณ โคตโม’ติ. ตปนียาหํ, พฺราหฺมณ, ปาปเก อกุสเล ธมฺเม วทามิ, กายทุจฺจริตํ วจีทุจฺจริตํ มโนทุจฺจริตํ. ยสฺส โข, พฺราหฺมณ, ตปนียา ปาปกา อกุสลา ธมฺมา ปหีนา อุจฺฉินฺนมูลา ตาลาวตฺถุกตา อนภาวํกตา อายติํ อนุปฺปาทธมฺมา ตมหํ ตปสฺสีติ วทามิ. ตถาคตสฺส โข, พฺราหฺมณ, ตปนียา ปาปกา อกุสลา ธมฺมา ปหีนา อุจฺฉินฺนมูลา ตาลาวตฺถุกตา อนภาวํกตา อายติํ อนุปฺปาทธมฺมา. อยํ โข, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘ตปสฺสี สมโณ โคตโม’ติ, โน จ โข ยํ ตฺวํ สนฺธาย วเทสี”ติ.
 </Paragraph>
 
 </Division>
 <Division number="10" book="para">
 
 <Paragraph number="12" book="para">
-“อปคพฺโภ ภวํ โคตโม”ติ? “อตฺถิ เขฺวส, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘อปคพฺโภ สมโณ โคตโม’ติ. ยสฺส โข, พฺราหฺมณ, อายตึ คพฺภเสยฺยา ปุนพฺภวาภินิพฺพตฺติ ปหีนา อุจฺฉินฺนมูลา ตาลาวตฺถุกตา อนภาวํกตา อายตึ อนุปฺปาทธมฺมา ตมหํ อปคพฺโภติ วทามิ. ตถาคตสฺส โข, พฺราหฺมณ, อายตึ คพฺภเสยฺยา ปุนพฺภวาภินิพฺพตฺติ ปหีนา อุจฺฉินฺนมูลา ตาลาวตฺถุกตา อนภาวํกตา อายตึ อนุปฺปาทธมฺมา. อยํ โข, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘อปคพฺโภ สมโณ โคตโม’ติ, โน จ โข ยํ ตฺวํ สนฺธาย วเทสิ.
+“อปคพฺโภ ภวํ โคตโม”ติ? “อตฺถิ เขฺวส, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘อปคพฺโภ สมโณ โคตโม’ติ. ยสฺส โข, พฺราหฺมณ, อายติํ คพฺภเสยฺยา ปุนพฺภวาภินิพฺพตฺติ ปหีนา อุจฺฉินฺนมูลา ตาลาวตฺถุกตา อนภาวํกตา อายติํ อนุปฺปาทธมฺมา ตมหํ อปคพฺโภติ วทามิ. ตถาคตสฺส โข, พฺราหฺมณ, อายติํ คพฺภเสยฺยา ปุนพฺภวาภินิพฺพตฺติ ปหีนา อุจฺฉินฺนมูลา ตาลาวตฺถุกตา อนภาวํกตา อายติํ อนุปฺปาทธมฺมา. อยํ โข, พฺราหฺมณ, ปริยาโย เยน มํ ปริยาเยน สมฺมา วทมาโน วเทยฺย—  ‘อปคพฺโภ สมโณ โคตโม’ติ, โน จ โข ยํ ตฺวํ สนฺธาย วเทสิ.
 </Paragraph>
 
 </Division>
 <Division number="11" book="para">
 
 <Paragraph number="13" book="para">
-เสยฺยถาปิ, พฺราหฺมณ, กุกฺกุฏิยา อณฺฑานิ อฏฺฐ วา ทส วา ทฺวาทส วา. ตานสฺสุ กุกฺกุฏิยา สมฺมา อธิสยิตานิ สมฺมา ปริเสทิตานิ สมฺมา ปริภาวิตานิ. โย นุ โข เตสํ กุกฺกุฏจฺฉาปกานํ ปฐมตรํ ปาทนขสิขาย วา มุขตุณฺฑเกน วา อณฺฑโกสํ ปทาเลตฺวา โสตฺถินา อภินิพฺภิชฺเชยฺย, กินฺติ สฺวาสฺส วจนีโย—  ‘เชฏฺโฐ วา กนิฏฺโฐ วา’”ติ? “เชฏฺโฐติสฺส, โภ โคตม, วจนีโย. โส หิ เนสํ เชฏฺโฐ โหตี”ติ. “เอวเมว โข อหํ, พฺราหฺมณ, อวิชฺชาคตาย ปชาย อณฺฑภูตาย ปริโยนทฺธาย อวิชฺชณฺฑโกสํ ปทาเลตฺวา เอโกว โลเก อนุตฺตรํ สมฺมาสมฺโพธึ อภิสมฺพุทฺโธ. สฺวาหํ, พฺราหฺมณ, เชฏฺโฐ เสฏฺโฐ โลกสฺส.
+เสยฺยถาปิ, พฺราหฺมณ, กุกฺกุฏิยา อณฺฑานิ อฏฺฐ วา ทส วา ทฺวาทส วา. ตานสฺสุ กุกฺกุฏิยา สมฺมา อธิสยิตานิ สมฺมา ปริเสทิตานิ สมฺมา ปริภาวิตานิ. โย นุ โข เตสํ กุกฺกุฏจฺฉาปกานํ ปฐมตรํ ปาทนขสิขาย วา มุขตุณฺฑเกน วา อณฺฑโกสํ ปทาเลตฺวา โสตฺถินา อภินิพฺภิชฺเชยฺย, กินฺติ สฺวาสฺส วจนีโย—  ‘เชฏฺโฐ วา กนิฏฺโฐ วา’”ติ? “เชฏฺโฐติสฺส, โภ โคตม, วจนีโย. โส หิ เนสํ เชฏฺโฐ โหตี”ติ. “เอวเมว โข อหํ, พฺราหฺมณ, อวิชฺชาคตาย ปชาย อณฺฑภูตาย ปริโยนทฺธาย อวิชฺชณฺฑโกสํ ปทาเลตฺวา เอโกว โลเก อนุตฺตรํ สมฺมาสมฺโพธิํ อภิสมฺพุทฺโธ. สฺวาหํ, พฺราหฺมณ, เชฏฺโฐ เสฏฺโฐ โลกสฺส.
 </Paragraph>
 
 <Paragraph number="14" book="para">
-อารทฺธํ โข ปน เม, พฺราหฺมณ, วีริยํ อโหสิ อสลฺลีนํ, อุปฏฺฐิตา สติ อสมฺมุฏฺฐา, ปสฺสทฺโธ กาโย อสารทฺโธ, สมาหิตํ จิตฺตํ เอกคฺคํ. โส โข อหํ, พฺราหฺมณ, วิวิจฺเจว กาเมหิ วิวิจฺจ อกุสเลหิ ธมฺเมหิ สวิตกฺกํ สวิจารํ วิเวกชํ ปีติสุขํ ปฐมํ ฌานํ อุปสมฺปชฺช วิหาสึ. วิตกฺกวิจารานํ วูปสมา อชฺฌตฺตํ สมฺปสาทนํ เจตโส เอโกทิภาวํ อวิตกฺกํ อวิจารํ สมาธิชํ ปีติสุขํ ทุติยํ ฌานํ อุปสมฺปชฺช วิหาสึ. ปีติยา จ วิราคา อุเปกฺขโก จ วิหาสึ สโต จ สมฺปชาโน, สุขญฺจ กาเยน ปฏิสํเวเทสึ, ยํ ตํ อริยา อาจิกฺขนฺติ—  ‘อุเปกฺขโก สติมา สุขวิหารี’ติ ตติยํ ฌานํ อุปสมฺปชฺช วิหาสึ. สุขสฺส จ ปหานา ทุกฺขสฺส จ ปหานา ปุพฺเพว โสมนสฺสโทมนสฺสานํ อตฺถงฺคมา อทุกฺขมสุขํ อุเปกฺขาสติปาริสุทฺธึ จตุตฺถํ ฌานํ อุปสมฺปชฺช วิหาสึ.
+อารทฺธํ โข ปน เม, พฺราหฺมณ, วีริยํ อโหสิ อสลฺลีนํ, อุปฏฺฐิตา สติ อสมฺมุฏฺฐา, ปสฺสทฺโธ กาโย อสารทฺโธ, สมาหิตํ จิตฺตํ เอกคฺคํ. โส โข อหํ, พฺราหฺมณ, วิวิจฺเจว กาเมหิ วิวิจฺจ อกุสเลหิ ธมฺเมหิ สวิตกฺกํ สวิจารํ วิเวกชํ ปีติสุขํ ปฐมํ ฌานํ อุปสมฺปชฺช วิหาสิํ. วิตกฺกวิจารานํ วูปสมา อชฺฌตฺตํ สมฺปสาทนํ เจตโส เอโกทิภาวํ อวิตกฺกํ อวิจารํ สมาธิชํ ปีติสุขํ ทุติยํ ฌานํ อุปสมฺปชฺช วิหาสิํ. ปีติยา จ วิราคา อุเปกฺขโก จ วิหาสิํ สโต จ สมฺปชาโน, สุขญฺจ กาเยน ปฏิสํเวเทสิํ, ยํ ตํ อริยา อาจิกฺขนฺติ—  ‘อุเปกฺขโก สติมา สุขวิหารี’ติ ตติยํ ฌานํ อุปสมฺปชฺช วิหาสิํ. สุขสฺส จ ปหานา ทุกฺขสฺส จ ปหานา ปุพฺเพว โสมนสฺสโทมนสฺสานํ อตฺถงฺคมา อทุกฺขมสุขํ อุเปกฺขาสติปาริสุทฺธิํ จตุตฺถํ ฌานํ อุปสมฺปชฺช วิหาสิํ.
 </Paragraph>
 
 </Division>
 <Division number="12" book="para">
 
 <Paragraph number="15" book="para">
-โส เอวํ สมาหิเต จิตฺเต ปริสุทฺเธ ปริโยทาเต อนงฺคเณ วิคตูปกฺกิเลเส มุทุภูเต กมฺมนิเย ฐิเต อาเนญฺชปฺปตฺเต ปุพฺเพนิวาสานุสฺสติญาณาย จิตฺตํ อภินินฺนาเมสึ. โส อเนกวิหิตํ ปุพฺเพนิวาสํ อนุสฺสรามิ, เสยฺยถิทํ—  เอกมฺปิ ชาตึ เทฺวปิ ชาติโย ติโสฺสปิ ชาติโย จตโสฺสปิ ชาติโย ปญฺจปิ ชาติโย ทสปิ ชาติโย วีสมฺปิ ชาติโย ตึสมฺปิ ชาติโย จตฺตาลีสมฺปิ ชาติโย ปญฺญาสมฺปิ ชาติโย ชาติสตมฺปิ, ชาติสหสฺสมฺปิ ชาติสตสหสฺสมฺปิ, อเนเกปิ สํวฏฺฏกปฺเป อเนเกปิ วิวฏฺฏกปฺเป อเนเกปิ สํวฏฺฏวิวฏฺฏกปฺเป—  ‘อมุตฺราสึ เอวํนาโม เอวํโคตฺโต เอวํวณฺโณ เอวมาหาโร เอวํสุขทุกฺขปฺปฏิสํเวที เอวมายุปริยนฺโต; โส ตโต จุโต อมุตฺร อุทปาทึ; ตตฺราปาสึ เอวํนาโม เอวํโคตฺโต เอวํวณฺโณ เอวมาหาโร เอวํสุขทุกฺขปฺปฏิสํเวที เอวมายุปริยนฺโต; โส ตโต จุโต อิธูปปนฺโน’ติ. อิติ สาการํ เสาทฺเทสํ อเนกวิหิตํ ปุพฺเพนิวาสํ อนุสฺสรามิ. อยํ โข เม, พฺราหฺมณ, รตฺติยา ปฐเม ยาเม ปฐมา วิชฺชา อธิคตา, อวิชฺชา วิหตา, วิชฺชา อุปฺปนฺนา, ตโม วิหโต, อาโลโก อุปฺปนฺโน—  ยถา ตํ อปฺปมตฺตสฺส อาตาปิโน ปหิตตฺตสฺส วิหรโต. อยํ โข เม, พฺราหฺมณ, ปฐมาภินิพฺภิทา อโหสิ กุกฺกุฏจฺฉาปกเสฺสว อณฺฑโกสมฺหา.
+โส เอวํ สมาหิเต จิตฺเต ปริสุทฺเธ ปริโยทาเต อนงฺคเณ วิคตูปกฺกิเลเส มุทุภูเต กมฺมนิเย ฐิเต อาเนญฺชปฺปตฺเต ปุพฺเพนิวาสานุสฺสติญาณาย จิตฺตํ อภินินฺนาเมสิํ. โส อเนกวิหิตํ ปุพฺเพนิวาสํ อนุสฺสรามิ, เสยฺยถิทํ—  เอกมฺปิ ชาติํ เทฺวปิ ชาติโย ติโสฺสปิ ชาติโย จตโสฺสปิ ชาติโย ปญฺจปิ ชาติโย ทสปิ ชาติโย วีสมฺปิ ชาติโย ติํสมฺปิ ชาติโย จตฺตาลีสมฺปิ ชาติโย ปญฺญาสมฺปิ ชาติโย ชาติสตมฺปิ, ชาติสหสฺสมฺปิ ชาติสตสหสฺสมฺปิ, อเนเกปิ สํวฏฺฏกปฺเป อเนเกปิ วิวฏฺฏกปฺเป อเนเกปิ สํวฏฺฏวิวฏฺฏกปฺเป—  ‘อมุตฺราสิํ เอวํนาโม เอวํโคตฺโต เอวํวณฺโณ เอวมาหาโร เอวํสุขทุกฺขปฺปฏิสํเวที เอวมายุปริยนฺโต; โส ตโต จุโต อมุตฺร อุทปาทิํ; ตตฺราปาสิํ เอวํนาโม เอวํโคตฺโต เอวํวณฺโณ เอวมาหาโร เอวํสุขทุกฺขปฺปฏิสํเวที เอวมายุปริยนฺโต; โส ตโต จุโต อิธูปปนฺโน’ติ. อิติ สาการํ เสาทฺเทสํ อเนกวิหิตํ ปุพฺเพนิวาสํ อนุสฺสรามิ. อยํ โข เม, พฺราหฺมณ, รตฺติยา ปฐเม ยาเม ปฐมา วิชฺชา อธิคตา, อวิชฺชา วิหตา, วิชฺชา อุปฺปนฺนา, ตโม วิหโต, อาโลโก อุปฺปนฺโน—  ยถา ตํ อปฺปมตฺตสฺส อาตาปิโน ปหิตตฺตสฺส วิหรโต. อยํ โข เม, พฺราหฺมณ, ปฐมาภินิพฺภิทา อโหสิ กุกฺกุฏจฺฉาปกเสฺสว อณฺฑโกสมฺหา.
 </Paragraph>
 
 </Division>
 <Division number="13" book="para">
 
 <Paragraph number="16" book="para">
-โส เอวํ สมาหิเต จิตฺเต ปริสุทฺเธ ปริโยทาเต อนงฺคเณ วิคตูปกฺกิเลเส มุทุภูเต กมฺมนิเย ฐิเต อาเนญฺชปฺปตฺเต สตฺตานํ จุตูปปาตญาณาย จิตฺตํ อภินินฺนาเมสึ. โส ทิพฺเพน จกฺขุนา วิสุทฺเธน อติกฺกนฺตมานุสเกน สตฺเต ปสฺสามิ จวมาเน อุปปชฺชมาเน หีเน ปณีเต สุวณฺเณ ทุพฺพณฺเณ สุคเต ทุคฺคเต, ยถากมฺมูปเค สตฺเต ปชานามิ—  ‘อิเม วต โภนฺโต สตฺตา กายทุจฺจริเตน สมนฺนาคตา วจีทุจฺจริเตน สมนฺนาคตา มโนทุจฺจริเตน สมนฺนาคตา อริยานํ อุปวาทกา มิจฺฉาทิฏฺฐิกา มิจฺฉาทิฏฺฐิกมฺมสมาทานา; เต กายสฺส เภทา ปรํ มรณา อปายํ ทุคฺคตึ วินิปาตํ นิรยํ อุปปนฺนา. อิเม วา ปน โภนฺโต สตฺตา กายสุจริเตน สมนฺนาคตา วจีสุจริเตน สมนฺนาคตา มโนสุจริเตน สมนฺนาคตา อริยานํ อนุปวาทกา สมฺมาทิฏฺฐิกา สมฺมาทิฏฺฐิกมฺมสมาทานา; เต กายสฺส เภทา ปรํ มรณา สุคตึ สคฺคํ โลกํ อุปปนฺนา’ติ. อิติ ทิพฺเพน จกฺขุนา วิสุทฺเธน อติกฺกนฺตมานุสเกน สตฺเต ปสฺสามิ จวมาเน อุปปชฺชมาเน หีเน ปณีเต สุวณฺเณ ทุพฺพณฺเณ สุคเต ทุคฺคเต, ยถากมฺมูปเค สตฺเต ปชานามิ. อยํ โข เม, พฺราหฺมณ, รตฺติยา มชฺฌิเม ยาเม ทุติยา วิชฺชา อธิคตา, อวิชฺชา วิหตา, วิชฺชา อุปฺปนฺนา, ตโม วิหโต, อาโลโก อุปฺปนฺโน—  ยถา ตํ อปฺปมตฺตสฺส อาตาปิโน ปหิตตฺตสฺส วิหรโต. อยํ โข เม, พฺราหฺมณ, ทุติยาภินิพฺภิทา อโหสิ กุกฺกุฏจฺฉาปกเสฺสว อณฺฑโกสมฺหา.
+โส เอวํ สมาหิเต จิตฺเต ปริสุทฺเธ ปริโยทาเต อนงฺคเณ วิคตูปกฺกิเลเส มุทุภูเต กมฺมนิเย ฐิเต อาเนญฺชปฺปตฺเต สตฺตานํ จุตูปปาตญาณาย จิตฺตํ อภินินฺนาเมสิํ. โส ทิพฺเพน จกฺขุนา วิสุทฺเธน อติกฺกนฺตมานุสเกน สตฺเต ปสฺสามิ จวมาเน อุปปชฺชมาเน หีเน ปณีเต สุวณฺเณ ทุพฺพณฺเณ สุคเต ทุคฺคเต, ยถากมฺมูปเค สตฺเต ปชานามิ—  ‘อิเม วต โภนฺโต สตฺตา กายทุจฺจริเตน สมนฺนาคตา วจีทุจฺจริเตน สมนฺนาคตา มโนทุจฺจริเตน สมนฺนาคตา อริยานํ อุปวาทกา มิจฺฉาทิฏฺฐิกา มิจฺฉาทิฏฺฐิกมฺมสมาทานา; เต กายสฺส เภทา ปรํ มรณา อปายํ ทุคฺคติํ วินิปาตํ นิรยํ อุปปนฺนา. อิเม วา ปน โภนฺโต สตฺตา กายสุจริเตน สมนฺนาคตา วจีสุจริเตน สมนฺนาคตา มโนสุจริเตน สมนฺนาคตา อริยานํ อนุปวาทกา สมฺมาทิฏฺฐิกา สมฺมาทิฏฺฐิกมฺมสมาทานา; เต กายสฺส เภทา ปรํ มรณา สุคติํ สคฺคํ โลกํ อุปปนฺนา’ติ. อิติ ทิพฺเพน จกฺขุนา วิสุทฺเธน อติกฺกนฺตมานุสเกน สตฺเต ปสฺสามิ จวมาเน อุปปชฺชมาเน หีเน ปณีเต สุวณฺเณ ทุพฺพณฺเณ สุคเต ทุคฺคเต, ยถากมฺมูปเค สตฺเต ปชานามิ. อยํ โข เม, พฺราหฺมณ, รตฺติยา มชฺฌิเม ยาเม ทุติยา วิชฺชา อธิคตา, อวิชฺชา วิหตา, วิชฺชา อุปฺปนฺนา, ตโม วิหโต, อาโลโก อุปฺปนฺโน—  ยถา ตํ อปฺปมตฺตสฺส อาตาปิโน ปหิตตฺตสฺส วิหรโต. อยํ โข เม, พฺราหฺมณ, ทุติยาภินิพฺภิทา อโหสิ กุกฺกุฏจฺฉาปกเสฺสว อณฺฑโกสมฺหา.
 </Paragraph>
 
 </Division>
 <Division number="14" book="para">
 
 <Paragraph number="17" book="para">
-โส เอวํ สมาหิเต จิตฺเต ปริสุทฺเธ ปริโยทาเต อนงฺคเณ วิคตูปกฺกิเลเส มุทุภูเต กมฺมนิเย ฐิเต อาเนญฺชปฺปตฺเต อาสวานํ ขยญาณาย จิตฺตํ อภินินฺนาเมสึ. โส ‘อิทํ ทุกฺขนฺ’ติ ยถาภูตํ อพฺภญฺญาสึ, ‘อยํ ทุกฺขสมุทโย’ติ ยถาภูตํ อพฺภญฺญาสึ, ‘อยํ ทุกฺขนิโรโธ’ติ ยถาภูตํ อพฺภญฺญาสึ, ‘อยํ ทุกฺขนิโรธคามินี ปฏิปทา’ติ ยถาภูตํ อพฺภญฺญาสึ; ‘อิเม อาสวา’ติ ยถาภูตํ อพฺภญฺญาสึ, ‘อยํ อาสวสมุทโย’ติ ยถาภูตํ อพฺภญฺญาสึ, ‘อยํ อาสวนิโรโธ’ติ ยถาภูตํ อพฺภญฺญาสึ, ‘อยํ อาสวนิโรธคามินี ปฏิปทา’ติ ยถาภูตํ อพฺภญฺญาสึ. ตสฺส เม เอวํ ชานโต เอวํ ปสฺสโต กามาสวาปิ จิตฺตํ วิมุจฺจิตฺถ ภวาสวาปิ จิตฺตํ วิมุจฺจิตฺถ อวิชฺชาสวาปิ จิตฺตํ วิมุจฺจิตฺถ. วิมุตฺตสฺมึ วิมุตฺตมิติ ญาณํ อโหสิ. ‘ขีณา ชาติ, วุสิตํ พฺรหฺมจริยํ, กตํ กรณียํ, นาปรํ อิตฺถตฺตายา’ติ อพฺภญฺญาสึ. อยํ โข เม, พฺราหฺมณ, รตฺติยา ปจฺฉิเม ยาเม ตติยา วิชฺชา อธิคตา, อวิชฺชา วิหตา, วิชฺชา อุปฺปนฺนา, ตโม วิหโต, อาโลโก อุปฺปนฺโน—  ยถา ตํ อปฺปมตฺตสฺส อาตาปิโน ปหิตตฺตสฺส วิหรโต. อยํ โข เม, พฺราหฺมณ, ตติยาภินิพฺภิทา อโหสิ—  กุกฺกุฏจฺฉาปกเสฺสว อณฺฑโกสมฺหา”ติ.
+โส เอวํ สมาหิเต จิตฺเต ปริสุทฺเธ ปริโยทาเต อนงฺคเณ วิคตูปกฺกิเลเส มุทุภูเต กมฺมนิเย ฐิเต อาเนญฺชปฺปตฺเต อาสวานํ ขยญาณาย จิตฺตํ อภินินฺนาเมสิํ. โส ‘อิทํ ทุกฺขนฺ’ติ ยถาภูตํ อพฺภญฺญาสิํ, ‘อยํ ทุกฺขสมุทโย’ติ ยถาภูตํ อพฺภญฺญาสิํ, ‘อยํ ทุกฺขนิโรโธ’ติ ยถาภูตํ อพฺภญฺญาสิํ, ‘อยํ ทุกฺขนิโรธคามินี ปฏิปทา’ติ ยถาภูตํ อพฺภญฺญาสิํ; ‘อิเม อาสวา’ติ ยถาภูตํ อพฺภญฺญาสิํ, ‘อยํ อาสวสมุทโย’ติ ยถาภูตํ อพฺภญฺญาสิํ, ‘อยํ อาสวนิโรโธ’ติ ยถาภูตํ อพฺภญฺญาสิํ, ‘อยํ อาสวนิโรธคามินี ปฏิปทา’ติ ยถาภูตํ อพฺภญฺญาสิํ. ตสฺส เม เอวํ ชานโต เอวํ ปสฺสโต กามาสวาปิ จิตฺตํ วิมุจฺจิตฺถ ภวาสวาปิ จิตฺตํ วิมุจฺจิตฺถ อวิชฺชาสวาปิ จิตฺตํ วิมุจฺจิตฺถ. วิมุตฺตสฺมิํ วิมุตฺตมิติ ญาณํ อโหสิ. ‘ขีณา ชาติ, วุสิตํ พฺรหฺมจริยํ, กตํ กรณียํ, นาปรํ อิตฺถตฺตายา’ติ อพฺภญฺญาสิํ. อยํ โข เม, พฺราหฺมณ, รตฺติยา ปจฺฉิเม ยาเม ตติยา วิชฺชา อธิคตา, อวิชฺชา วิหตา, วิชฺชา อุปฺปนฺนา, ตโม วิหโต, อาโลโก อุปฺปนฺโน—  ยถา ตํ อปฺปมตฺตสฺส อาตาปิโน ปหิตตฺตสฺส วิหรโต. อยํ โข เม, พฺราหฺมณ, ตติยาภินิพฺภิทา อโหสิ—  กุกฺกุฏจฺฉาปกเสฺสว อณฺฑโกสมฺหา”ติ.
 </Paragraph>
 
 </Division>
 <Division number="15" book="para">
 
 <Paragraph number="18" book="para">
-เอวํ วุตฺเต, เวรญฺโช พฺราหฺมโณ ภควนฺตํ เอตทโวจ—  “เชฏฺโฐ ภวํ โคตโม, เสฏฺโฐ ภวํ โคตโม. อภิกฺกนฺตํ, โภ โคตม, อภิกฺกนฺตํ, โภ โคตม. เสยฺยถาปิ, โภ โคตม, นิกฺกุชฺชิตํ วา อุกฺกุชฺเชยฺย, ปฏิจฺฉนฺนํ วา วิวเรยฺย, มูฬฺหสฺส วา มคฺคํ อาจิกฺเขยฺย, อนฺธกาเร วา เตลปชฺโชตํ ธาเรยฺย—  ‘จกฺขุมนฺโต รูปานิ ทกฺขนฺตี’ติ; เอวเมวํ โภตา โคตเมน อเนกปริยาเยน ธมฺโม ปกาสิโต. เอสาหํ ภวนฺตํ โคตมํ สรณํ คจฺฉามิ ธมฺมญฺจ ภิกฺขุสํฆญฺจ. อุปาสกํ มํ ภวํ โคตโม ธาเรตุ อชฺชตคฺเค ปาณุเปตํ สรณํ คตํ. อธิวาเสตุ จ เม ภวํ โคตโม เวรญฺชายํ วสฺสาวาสํ สทฺธึ ภิกฺขุสํเฆนา”ติ. อธิวาเสสิ ภควา ตุณฺหีภาเวน. อถ โข เวรญฺโช พฺราหฺมโณ ภควโต อธิวาสนํ วิทิตฺวา อุฏฺฐายาสนา ภควนฺตํ อภิวาเทตฺวา ปทกฺขิณํ กตฺวา ปกฺกามิ.
+เอวํ วุตฺเต, เวรญฺโช พฺราหฺมโณ ภควนฺตํ เอตทโวจ—  “เชฏฺโฐ ภวํ โคตโม, เสฏฺโฐ ภวํ โคตโม. อภิกฺกนฺตํ, โภ โคตม, อภิกฺกนฺตํ, โภ โคตม. เสยฺยถาปิ, โภ โคตม, นิกฺกุชฺชิตํ วา อุกฺกุชฺเชยฺย, ปฏิจฺฉนฺนํ วา วิวเรยฺย, มูฬฺหสฺส วา มคฺคํ อาจิกฺเขยฺย, อนฺธกาเร วา เตลปชฺโชตํ ธาเรยฺย—  ‘จกฺขุมนฺโต รูปานิ ทกฺขนฺตี’ติ; เอวเมวํ โภตา โคตเมน อเนกปริยาเยน ธมฺโม ปกาสิโต. เอสาหํ ภวนฺตํ โคตมํ สรณํ คจฺฉามิ ธมฺมญฺจ ภิกฺขุสํฆญฺจ. อุปาสกํ มํ ภวํ โคตโม ธาเรตุ อชฺชตคฺเค ปาณุเปตํ สรณํ คตํ. อธิวาเสตุ จ เม ภวํ โคตโม เวรญฺชายํ วสฺสาวาสํ สทฺธิํ ภิกฺขุสํเฆนา”ติ. อธิวาเสสิ ภควา ตุณฺหีภาเวน. อถ โข เวรญฺโช พฺราหฺมโณ ภควโต อธิวาสนํ วิทิตฺวา อุฏฺฐายาสนา ภควนฺตํ อภิวาเทตฺวา ปทกฺขิณํ กตฺวา ปกฺกามิ.
 </Paragraph>
 
 </Division>
@@ -139,14 +139,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="21" book="para">
-อถ โข ภควา อายสฺมนฺตํ อานนฺทํ อามนฺเตสิ—  “กึ นุ โข โส, อานนฺท, อุทุกฺขลสทฺโท”ติ? อถ โข อายสฺมา อานนฺโท ภควโต เอตมตฺถํ อาโรเจสิ. “สาธุ สาธุ, อานนฺท. ตุเมฺหหิ, อานนฺท, สปฺปุริเสหิ วิชิตํ. ปจฺฉิมา ชนตา สาลิมํโสทนํ อติมญฺญิสฺสตี”ติ.
+อถ โข ภควา อายสฺมนฺตํ อานนฺทํ อามนฺเตสิ—  “กิํ นุ โข โส, อานนฺท, อุทุกฺขลสทฺโท”ติ? อถ โข อายสฺมา อานนฺโท ภควโต เอตมตฺถํ อาโรเจสิ. “สาธุ สาธุ, อานนฺท. ตุเมฺหหิ, อานนฺท, สปฺปุริเสหิ วิชิตํ. ปจฺฉิมา ชนตา สาลิมํโสทนํ อติมญฺญิสฺสตี”ติ.
 </Paragraph>
 
 </Division>
 <Division number="17" book="para">
 
 <Paragraph number="22" book="para">
-อถ โข อายสฺมา มหาโมคฺคลฺลาโน เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺโน โข อายสฺมา มหาโมคฺคลฺลาโน ภควนฺตํ เอตทโวจ—  “เอตรหิ, ภนฺเต, เวรญฺชา ทุพฺภิกฺขา ทฺวีหิติกา เสตฏฺฐิกา สลากาวุตฺตา. น สุกรา อุญฺเฉน ปคฺคเหน ยาเปตุํ. อิมิสฺสา, ภนฺเต, มหาปถวิยา เหฏฺฐิมตลํ สมฺปนฺนํ—  เสยฺยถาปิ ขุทฺทมธุํ อนีลกํ; เอวมสฺสาทํ. สาธาหํ, ภนฺเต, ปถวึ ปริวตฺเตยฺยํ. ภิกฺขู ปปฺปฏโกชํ ปริภุญฺชิสฺสนฺตี”ติ. “เย ปน เต, โมคฺคลฺลาน, ปถวินิสฺสิตา ปาณา เต กถํ กริสฺสสี”ติ? “เอกาหํ, ภนฺเต, ปาณึ อภินิมฺมินิสฺสามิ—  เสยฺยถาปิ มหาปถวี. เย ปถวินิสฺสิตา ปาณา เต ตตฺถ สงฺกาเมสฺสามิ. เอเกน หตฺเถน ปถวึ ปริวตฺเตสฺสามี”ติ. “อลํ, โมคฺคลฺลาน, มา เต รุจฺจิ ปถวึ ปริวตฺเตตุํ. วิปลฺลาสมฺปิ สตฺตา ปฏิลเภยฺยุนฺ”ติ. “สาธุ, ภนฺเต, สพฺโพ ภิกฺขุสํโฆ อุตฺตรกุรุํ ปิณฺฑาย คจฺเฉยฺยา”ติ. “อลํ, โมคฺคลฺลาน, มา เต รุจฺจิ สพฺพสฺส ภิกฺขุสํฆสฺส อุตฺตรกุรุํ ปิณฺฑาย คมนนฺ”ติ.
+อถ โข อายสฺมา มหาโมคฺคลฺลาโน เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺโน โข อายสฺมา มหาโมคฺคลฺลาโน ภควนฺตํ เอตทโวจ—  “เอตรหิ, ภนฺเต, เวรญฺชา ทุพฺภิกฺขา ทฺวีหิติกา เสตฏฺฐิกา สลากาวุตฺตา. น สุกรา อุญฺเฉน ปคฺคเหน ยาเปตุํ. อิมิสฺสา, ภนฺเต, มหาปถวิยา เหฏฺฐิมตลํ สมฺปนฺนํ—  เสยฺยถาปิ ขุทฺทมธุํ อนีลกํ; เอวมสฺสาทํ. สาธาหํ, ภนฺเต, ปถวิํ ปริวตฺเตยฺยํ. ภิกฺขู ปปฺปฏโกชํ ปริภุญฺชิสฺสนฺตี”ติ. “เย ปน เต, โมคฺคลฺลาน, ปถวินิสฺสิตา ปาณา เต กถํ กริสฺสสี”ติ? “เอกาหํ, ภนฺเต, ปาณิํ อภินิมฺมินิสฺสามิ—  เสยฺยถาปิ มหาปถวี. เย ปถวินิสฺสิตา ปาณา เต ตตฺถ สงฺกาเมสฺสามิ. เอเกน หตฺเถน ปถวิํ ปริวตฺเตสฺสามี”ติ. “อลํ, โมคฺคลฺลาน, มา เต รุจฺจิ ปถวิํ ปริวตฺเตตุํ. วิปลฺลาสมฺปิ สตฺตา ปฏิลเภยฺยุนฺ”ติ. “สาธุ, ภนฺเต, สพฺโพ ภิกฺขุสํโฆ อุตฺตรกุรุํ ปิณฺฑาย คจฺเฉยฺยา”ติ. “อลํ, โมคฺคลฺลาน, มา เต รุจฺจิ สพฺพสฺส ภิกฺขุสํฆสฺส อุตฺตรกุรุํ ปิณฺฑาย คมนนฺ”ติ.
 </Paragraph>
 
 </Division>
@@ -172,7 +172,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="27" book="para">
-อกิลาสุโน จ เต ภควนฺโต อเหสุํ สาวเก เจตสา เจโต ปริจฺจ โอวทิตุํ. ภูตปุพฺพํ, สาริปุตฺต, เวสฺสภู ภควา อรหํ สมฺมาสมฺพุทฺโธ อญฺญตรสฺมึ ภึสนเก วนสณฺเฑ สหสฺสํ ภิกฺขุสํฆํ เจตสา เจโต ปริจฺจ โอวทติ อนุสาสติ—  ‘เอวํ วิตกฺเกถ, มา เอวํ วิตกฺกยิตฺถ; เอวํ มนสิกโรถ, มา เอวํ มนสากตฺถ; อิทํ ปชหถ, อิทํ อุปสมฺปชฺช วิหรถา’ติ. อถ โข, สาริปุตฺต, ตสฺส ภิกฺขุสหสฺสสฺส เวสฺสภุนา ภควตา อรหตา สมฺมาสมฺพุทฺเธน เอวํ โอวทิยมานานํ เอวํ อนุสาสิยมานานํ อนุปาทาย อาสเวหิ จิตฺตานิ วิมุจฺจึสุ. ตตฺร สุทํ, สาริปุตฺต, ภึสนกสฺส วนสณฺฑสฺส ภึสนกตสฺมึ โหติ—  โย โกจิ อวีตราโค ตํ วนสณฺฑํ ปวิสติ, เยภุเยฺยน โลมานิ หํสนฺติ. อยํ โข, สาริปุตฺต, เหตุ อยํ ปจฺจโย เยน ภควโต จ วิปสฺสิสฺส ภควโต จ สิขิสฺส ภควโต จ เวสฺสภุสฺส พฺรหฺมจริยํ น จิรฏฺฐิติกํ อโหสี”ติ.
+อกิลาสุโน จ เต ภควนฺโต อเหสุํ สาวเก เจตสา เจโต ปริจฺจ โอวทิตุํ. ภูตปุพฺพํ, สาริปุตฺต, เวสฺสภู ภควา อรหํ สมฺมาสมฺพุทฺโธ อญฺญตรสฺมิํ ภิํสนเก วนสณฺเฑ สหสฺสํ ภิกฺขุสํฆํ เจตสา เจโต ปริจฺจ โอวทติ อนุสาสติ—  ‘เอวํ วิตกฺเกถ, มา เอวํ วิตกฺกยิตฺถ; เอวํ มนสิกโรถ, มา เอวํ มนสากตฺถ; อิทํ ปชหถ, อิทํ อุปสมฺปชฺช วิหรถา’ติ. อถ โข, สาริปุตฺต, ตสฺส ภิกฺขุสหสฺสสฺส เวสฺสภุนา ภควตา อรหตา สมฺมาสมฺพุทฺเธน เอวํ โอวทิยมานานํ เอวํ อนุสาสิยมานานํ อนุปาทาย อาสเวหิ จิตฺตานิ วิมุจฺจิํสุ. ตตฺร สุทํ, สาริปุตฺต, ภิํสนกสฺส วนสณฺฑสฺส ภิํสนกตสฺมิํ โหติ—  โย โกจิ อวีตราโค ตํ วนสณฺฑํ ปวิสติ, เยภุเยฺยน โลมานิ หํสนฺติ. อยํ โข, สาริปุตฺต, เหตุ อยํ ปจฺจโย เยน ภควโต จ วิปสฺสิสฺส ภควโต จ สิขิสฺส ภควโต จ เวสฺสภุสฺส พฺรหฺมจริยํ น จิรฏฺฐิติกํ อโหสี”ติ.
 </Paragraph>
 
 </Division>
@@ -186,7 +186,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="21" book="para">
 
 <Paragraph number="29" book="para">
-อถ โข อายสฺมา สาริปุตฺโต อุฏฺฐายาสนา เอกํสํ อุตฺตราสงฺคํ กริตฺวา เยน ภควา เตนญฺชลึ ปณาเมตฺวา ภควนฺตํ เอตทโวจ—  “เอตสฺส, ภควา, กาโล. เอตสฺส, สุคต, กาโล. ยํ ภควา สาวกานํ สิกฺขาปทํ ปญฺญเปยฺย, อุทฺทิเสยฺย ปาติโมกฺขํ, ยถยิทํ พฺรหฺมจริยํ อทฺธนิยํ อสฺส จิรฏฺฐิติกนฺ”ติ. “อาคเมหิ ตฺวํ, สาริปุตฺต. อาคเมหิ ตฺวํ, สาริปุตฺต. ตถาคโตว ตตฺถ กาลํ ชานิสฺสติ. น ตาว, สาริปุตฺต, สตฺถา สาวกานํ สิกฺขาปทํ ปญฺญเปติ อุทฺทิสติ ปาติโมกฺขํ ยาว น อิเธกจฺเจ อาสวฏฺฐานียา ธมฺมา สํเฆ ปาตุภวนฺติ. ยโต จ โข, สาริปุตฺต, อิเธกจฺเจ อาสวฏฺฐานียา ธมฺมา สํเฆ ปาตุภวนฺติ, อถ สตฺถา สาวกานํ สิกฺขาปทํ ปญฺญเปติ อุทฺทิสติ ปาติโมกฺขํ เตสํเยว อาสวฏฺฐานียานํ ธมฺมานํ ปฏิฆาตาย.
+อถ โข อายสฺมา สาริปุตฺโต อุฏฺฐายาสนา เอกํสํ อุตฺตราสงฺคํ กริตฺวา เยน ภควา เตนญฺชลิํ ปณาเมตฺวา ภควนฺตํ เอตทโวจ—  “เอตสฺส, ภควา, กาโล. เอตสฺส, สุคต, กาโล. ยํ ภควา สาวกานํ สิกฺขาปทํ ปญฺญเปยฺย, อุทฺทิเสยฺย ปาติโมกฺขํ, ยถยิทํ พฺรหฺมจริยํ อทฺธนิยํ อสฺส จิรฏฺฐิติกนฺ”ติ. “อาคเมหิ ตฺวํ, สาริปุตฺต. อาคเมหิ ตฺวํ, สาริปุตฺต. ตถาคโตว ตตฺถ กาลํ ชานิสฺสติ. น ตาว, สาริปุตฺต, สตฺถา สาวกานํ สิกฺขาปทํ ปญฺญเปติ อุทฺทิสติ ปาติโมกฺขํ ยาว น อิเธกจฺเจ อาสวฏฺฐานียา ธมฺมา สํเฆ ปาตุภวนฺติ. ยโต จ โข, สาริปุตฺต, อิเธกจฺเจ อาสวฏฺฐานียา ธมฺมา สํเฆ ปาตุภวนฺติ, อถ สตฺถา สาวกานํ สิกฺขาปทํ ปญฺญเปติ อุทฺทิสติ ปาติโมกฺขํ เตสํเยว อาสวฏฺฐานียานํ ธมฺมานํ ปฏิฆาตาย.
 </Paragraph>
 
 <Paragraph number="30" book="para">
@@ -217,7 +217,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="36" book="para">
-อถ โข ภควา นิวาเสตฺวา ปตฺตจีวรมาทาย อายสฺมตา อานนฺเทน ปจฺฉาสมเณน เยน เวรญฺชสฺส พฺราหฺมณสฺส นิเวสนํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปญฺญตฺเต อาสเน นิสีทิ. อถ โข เวรญฺโช พฺราหฺมโณ เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺนํ โข เวรญฺชํ พฺราหฺมณํ ภควา เอตทโวจ—  “นิมนฺติตมฺห ตยา, พฺราหฺมณ, วสฺสํวุฏฺฐา, อปโลเกม ตํ, อิจฺฉาม มยํ ชนปทจาริกํ ปกฺกมิตุนฺ”ติ. “สจฺจํ, โภ โคตม, นิมนฺติตตฺถ มยา วสฺสํวุฏฺฐา; อปิ จ โย เทยฺยธมฺโม โส น ทินฺโน. ตญฺจ โข โน อสนฺตํ, โนปิ อทาตุกมฺยตา, ตํ กุเตตฺถ ลพฺภา พหุกิจฺจา ฆราวาสา พหุกรณียา. อธิวาเสตุ เม ภวํ โคตโม สฺวาตนาย ภตฺตํ สทฺธึ ภิกฺขุสํเฆนา”ติ. อธิวาเสสิ ภควา ตุณฺหีภาเวน. อถ โข ภควา เวรญฺชํ พฺราหฺมณํ ธมฺมิยา กถาย สนฺทเสฺสตฺวา สมาทเปตฺวา สมุตฺเตเชตฺวา สมฺปหํเสตฺวา อุฏฺฐายาสนา ปกฺกามิ.
+อถ โข ภควา นิวาเสตฺวา ปตฺตจีวรมาทาย อายสฺมตา อานนฺเทน ปจฺฉาสมเณน เยน เวรญฺชสฺส พฺราหฺมณสฺส นิเวสนํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปญฺญตฺเต อาสเน นิสีทิ. อถ โข เวรญฺโช พฺราหฺมโณ เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. เอกมนฺตํ นิสินฺนํ โข เวรญฺชํ พฺราหฺมณํ ภควา เอตทโวจ—  “นิมนฺติตมฺห ตยา, พฺราหฺมณ, วสฺสํวุฏฺฐา, อปโลเกม ตํ, อิจฺฉาม มยํ ชนปทจาริกํ ปกฺกมิตุนฺ”ติ. “สจฺจํ, โภ โคตม, นิมนฺติตตฺถ มยา วสฺสํวุฏฺฐา; อปิ จ โย เทยฺยธมฺโม โส น ทินฺโน. ตญฺจ โข โน อสนฺตํ, โนปิ อทาตุกมฺยตา, ตํ กุเตตฺถ ลพฺภา พหุกิจฺจา ฆราวาสา พหุกรณียา. อธิวาเสตุ เม ภวํ โคตโม สฺวาตนาย ภตฺตํ สทฺธิํ ภิกฺขุสํเฆนา”ติ. อธิวาเสสิ ภควา ตุณฺหีภาเวน. อถ โข ภควา เวรญฺชํ พฺราหฺมณํ ธมฺมิยา กถาย สนฺทเสฺสตฺวา สมาทเปตฺวา สมุตฺเตเชตฺวา สมฺปหํเสตฺวา อุฏฺฐายาสนา ปกฺกามิ.
 </Paragraph>
 
 <Paragraph number="37" book="para">
@@ -228,11 +228,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="23" book="para">
 
 <Paragraph number="38" book="para">
-อถ โข ภควา ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรมาทาย เยน เวรญฺชสฺส พฺราหฺมณสฺส นิเวสนํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปญฺญตฺเต อาสเน นิสีทิ สทฺธึ ภิกฺขุสํเฆน. อถ โข เวรญฺโช พฺราหฺมโณ พุทฺธปฺปมุขํ ภิกฺขุสํฆํ ปณีเตน ขาทนีเยน โภชนีเยน สหตฺถา สนฺตปฺเปตฺวา สมฺปวาเรตฺวา ภควนฺตํ ภุตฺตาวึ โอนีตปตฺตปาณึ ติจีวเรน อจฺฉาเทสิ, เอกเมกญฺจ ภิกฺขุํ เอกเมเกน ทุสฺสยุเคน อจฺฉาเทสิ. อถ โข ภควา เวรญฺชํ พฺราหฺมณํ ธมฺมิยา กถาย สนฺทเสฺสตฺวา สมาทเปตฺวา สมุตฺเตเชตฺวา สมฺปหํเสตฺวา อุฏฺฐายาสนา ปกฺกามิ.
+อถ โข ภควา ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรมาทาย เยน เวรญฺชสฺส พฺราหฺมณสฺส นิเวสนํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปญฺญตฺเต อาสเน นิสีทิ สทฺธิํ ภิกฺขุสํเฆน. อถ โข เวรญฺโช พฺราหฺมโณ พุทฺธปฺปมุขํ ภิกฺขุสํฆํ ปณีเตน ขาทนีเยน โภชนีเยน สหตฺถา สนฺตปฺเปตฺวา สมฺปวาเรตฺวา ภควนฺตํ ภุตฺตาวิํ โอนีตปตฺตปาณิํ ติจีวเรน อจฺฉาเทสิ, เอกเมกญฺจ ภิกฺขุํ เอกเมเกน ทุสฺสยุเคน อจฺฉาเทสิ. อถ โข ภควา เวรญฺชํ พฺราหฺมณํ ธมฺมิยา กถาย สนฺทเสฺสตฺวา สมาทเปตฺวา สมุตฺเตเชตฺวา สมฺปหํเสตฺวา อุฏฺฐายาสนา ปกฺกามิ.
 </Paragraph>
 
 <Paragraph number="39" book="para">
-อถ โข ภควา เวรญฺชายํ ยถาภิรนฺตํ วิหริตฺวา อนุปคมฺม โสเรยฺยํ สงฺกสฺสํ กณฺณกุชฺชํ เยน ปยาคปติฏฺฐานํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปยาคปติฏฺฐาเน คงฺคํ นทึ อุตฺตริตฺวา เยน พาราณสี ตทวสริ. อถ โข ภควา พาราณสิยํ ยถาภิรนฺตํ วิหริตฺวา เยน เวสาลี เตน จาริกํ ปกฺกามิ. อนุปุพฺเพน จาริกํ จรมาโน เยน เวสาลี ตทวสริ. ตตฺร สุทํ ภควา เวสาลิยํ วิหรติ มหาวเน กูฏาคารสาลายนฺติ.
+อถ โข ภควา เวรญฺชายํ ยถาภิรนฺตํ วิหริตฺวา อนุปคมฺม โสเรยฺยํ สงฺกสฺสํ กณฺณกุชฺชํ เยน ปยาคปติฏฺฐานํ เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ปยาคปติฏฺฐาเน คงฺคํ นทิํ อุตฺตริตฺวา เยน พาราณสี ตทวสริ. อถ โข ภควา พาราณสิยํ ยถาภิรนฺตํ วิหริตฺวา เยน เวสาลี เตน จาริกํ ปกฺกามิ. อนุปุพฺเพน จาริกํ จรมาโน เยน เวสาลี ตทวสริ. ตตฺร สุทํ ภควา เวสาลิยํ วิหรติ มหาวเน กูฏาคารสาลายนฺติ.
 
 </Paragraph>
 </Division>
