--- a/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-1/1-1-1-5.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-1/1-1-1-5.mdx
@@ -18,23 +18,23 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="67" book="para">
 
 <Paragraph number="145" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ มกฺกฏิยา เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ ปาราชิกํ อาปตฺตึ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (1)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ มกฺกฏิยา เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ ปาราชิกํ อาปตฺติํ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (1)
 </Paragraph>
 
 <Paragraph number="146" book="para">
-เตน โข ปน สมเยน สมฺพหุลา เวสาลิกา วชฺชิปุตฺตกา ภิกฺขู สิกฺขํ อปจฺจกฺขาย ทุพฺพลฺยํ อนาวิกตฺวา เมถุนํ ธมฺมํ ปฏิเสวึสุ. เตสํ กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข มยํ ปาราชิกํ อาปตฺตึ อาปนฺนา”ติ? ภควโต เอตมตฺถํ อาโรเจสุํ. “อาปตฺตึ ตุเมฺห, ภิกฺขเว, อาปนฺนา ปาราชิกนฺ”ติ. (2)
+เตน โข ปน สมเยน สมฺพหุลา เวสาลิกา วชฺชิปุตฺตกา ภิกฺขู สิกฺขํ อปจฺจกฺขาย ทุพฺพลฺยํ อนาวิกตฺวา เมถุนํ ธมฺมํ ปฏิเสวิํสุ. เตสํ กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข มยํ ปาราชิกํ อาปตฺติํ อาปนฺนา”ติ? ภควโต เอตมตฺถํ อาโรเจสุํ. “อาปตฺติํ ตุเมฺห, ภิกฺขเว, อาปนฺนา ปาราชิกนฺ”ติ. (2)
 </Paragraph>
 
 <Paragraph number="147" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ—  “เอวํ เม อนาปตฺติ ภวิสฺสตี”ติ—  คิหิลิงฺเคน เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ ปาราชิกํ อาปตฺตึ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (3)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ—  “เอวํ เม อนาปตฺติ ภวิสฺสตี”ติ—  คิหิลิงฺเคน เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ, กจฺจิ นุ โข อหํ ปาราชิกํ อาปตฺติํ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (3)
 </Paragraph>
 
 <Paragraph number="148" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ—  “เอวํ เม อนาปตฺติ ภวิสฺสตี”ติ—  นคฺโค หุตฺวา เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (4)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ—  “เอวํ เม อนาปตฺติ ภวิสฺสตี”ติ—  นคฺโค หุตฺวา เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (4)
 </Paragraph>
 
 <Paragraph number="149" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ—  “เอวํ เม อนาปตฺติ ภวิสฺสตี”ติ—  กุสจีรํ นิวาเสตฺวา…  วากจีรํ นิวาเสตฺวา…  ผลกจีรํ นิวาเสตฺวา…  เกสกมฺพลํ นิวาเสตฺวา…  วาลกมฺพลํ นิวาเสตฺวา…  อุลูกปกฺขิกํ นิวาเสตฺวา…  อชินกฺขิปํ นิวาเสตฺวา เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (5–11)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ—  “เอวํ เม อนาปตฺติ ภวิสฺสตี”ติ—  กุสจีรํ นิวาเสตฺวา…  วากจีรํ นิวาเสตฺวา…  ผลกจีรํ นิวาเสตฺวา…  เกสกมฺพลํ นิวาเสตฺวา…  วาลกมฺพลํ นิวาเสตฺวา…  อุลูกปกฺขิกํ นิวาเสตฺวา…  อชินกฺขิปํ นิวาเสตฺวา เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (5–11)
 </Paragraph>
 
 <Paragraph number="150" book="para">
@@ -45,7 +45,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="68" book="para">
 
 <Paragraph number="151" book="para">
-เตน โข ปน สมเยน อญฺญตโร มาณวโก อุปฺปลวณฺณาย ภิกฺขุนิยา ปฏิพทฺธจิตฺโต โหติ. อถ โข โส มาณวโก อุปฺปลวณฺณาย ภิกฺขุนิยา คามํ ปิณฺฑาย ปวิฏฺฐาย กุฏิกํ ปวิสิตฺวา นิลีโน อจฺฉิ. อุปฺปลวณฺณา ภิกฺขุนี ปจฺฉาภตฺตํ ปิณฺฑปาตปฏิกฺกนฺตา ปาเท ปกฺขาเลตฺวา กุฏิกํ ปวิสิตฺวา มญฺจเก นิสีทิ. อถ โข โส มาณวโก อุปฺปลวณฺณํ ภิกฺขุนึ อุคฺคเหตฺวา ทูเสสิ. อุปฺปลวณฺณา ภิกฺขุนี ภิกฺขุนีนํ เอตมตฺถํ อาโรเจสิ. ภิกฺขุนิโย ภิกฺขูนํ เอตมตฺถํ อาโรเจสุํ. ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. “อนาปตฺติ, ภิกฺขเว, อสาทิยนฺติยา”ติ. (13)
+เตน โข ปน สมเยน อญฺญตโร มาณวโก อุปฺปลวณฺณาย ภิกฺขุนิยา ปฏิพทฺธจิตฺโต โหติ. อถ โข โส มาณวโก อุปฺปลวณฺณาย ภิกฺขุนิยา คามํ ปิณฺฑาย ปวิฏฺฐาย กุฏิกํ ปวิสิตฺวา นิลีโน อจฺฉิ. อุปฺปลวณฺณา ภิกฺขุนี ปจฺฉาภตฺตํ ปิณฺฑปาตปฏิกฺกนฺตา ปาเท ปกฺขาเลตฺวา กุฏิกํ ปวิสิตฺวา มญฺจเก นิสีทิ. อถ โข โส มาณวโก อุปฺปลวณฺณํ ภิกฺขุนิํ อุคฺคเหตฺวา ทูเสสิ. อุปฺปลวณฺณา ภิกฺขุนี ภิกฺขุนีนํ เอตมตฺถํ อาโรเจสิ. ภิกฺขุนิโย ภิกฺขูนํ เอตมตฺถํ อาโรเจสุํ. ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. “อนาปตฺติ, ภิกฺขเว, อสาทิยนฺติยา”ติ. (13)
 </Paragraph>
 
 </Division>
@@ -63,30 +63,30 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="70" book="para">
 
 <Paragraph number="154" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ—  “เอวํ เม อนาปตฺติ ภวิสฺสตี”ติ—  มาตุยา เมถุนํ ธมฺมํ ปฏิเสวิ…  ธีตุยา เมถุนํ ธมฺมํ ปฏิเสวิ…  ภคินิยา เมถุนํ ธมฺมํ ปฏิเสวิ…  ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (16–18)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ—  “เอวํ เม อนาปตฺติ ภวิสฺสตี”ติ—  มาตุยา เมถุนํ ธมฺมํ ปฏิเสวิ…  ธีตุยา เมถุนํ ธมฺมํ ปฏิเสวิ…  ภคินิยา เมถุนํ ธมฺมํ ปฏิเสวิ…  ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (16–18)
 </Paragraph>
 
 <Paragraph number="155" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ ปุราณทุติยิกาย เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (19)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ ปุราณทุติยิกาย เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (19)
 </Paragraph>
 
 </Division>
 <Division number="71" book="para">
 
 <Paragraph number="156" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ มุทุปิฏฺฐิโก โหติ. โส อนภิรติยา ปีฬิโต อตฺตโน องฺคชาตํ มุเขน อคฺคเหสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (20)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ มุทุปิฏฺฐิโก โหติ. โส อนภิรติยา ปีฬิโต อตฺตโน องฺคชาตํ มุเขน อคฺคเหสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (20)
 </Paragraph>
 
 <Paragraph number="157" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ ลมฺพี โหติ. โส อนภิรติยา ปีฬิโต อตฺตโน องฺคชาตํ อตฺตโน วจฺจมคฺคํ ปเวเสสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (21)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ ลมฺพี โหติ. โส อนภิรติยา ปีฬิโต อตฺตโน องฺคชาตํ อตฺตโน วจฺจมคฺคํ ปเวเสสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (21)
 </Paragraph>
 
 <Paragraph number="158" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ มตสรีรํ ปสฺสิ. ตสฺมิญฺจ สรีเร องฺคชาตสามนฺตา วโณ โหติ. โส—  “เอวํ เม อนาปตฺติ ภวิสฺสตี”ติ—  องฺคชาเต องฺคชาตํ ปเวเสตฺวา วเณน นีหริ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (22)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ มตสรีรํ ปสฺสิ. ตสฺมิญฺจ สรีเร องฺคชาตสามนฺตา วโณ โหติ. โส—  “เอวํ เม อนาปตฺติ ภวิสฺสตี”ติ—  องฺคชาเต องฺคชาตํ ปเวเสตฺวา วเณน นีหริ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (22)
 </Paragraph>
 
 <Paragraph number="159" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ มตสรีรํ ปสฺสิ. ตสฺมิญฺจ สรีเร องฺคชาตสามนฺตา วโณ โหติ. โส—  “เอวํ เม อนาปตฺติ ภวิสฺสตี”ติ—  วเณ องฺคชาตํ ปเวเสตฺวา องฺคชาเตน นีหริ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (23)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ มตสรีรํ ปสฺสิ. ตสฺมิญฺจ สรีเร องฺคชาตสามนฺตา วโณ โหติ. โส—  “เอวํ เม อนาปตฺติ ภวิสฺสตี”ติ—  วเณ องฺคชาตํ ปเวเสตฺวา องฺคชาเตน นีหริ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (23)
 </Paragraph>
 
 <Paragraph number="160" book="para">
@@ -105,34 +105,34 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="163" book="para">
-เตน โข ปน สมเยน อญฺญตรา อิตฺถี ภิกฺขุํ ปสฺสิตฺวา เอตทโวจ—  “เอหิ, ภนฺเต, เมถุนํ ธมฺมํ ปฏิเสวา”ติ. “อลํ, ภคินิ, เนตํ กปฺปตี”ติ. “เอหิ, ภนฺเต, อหํ วายมิสฺสามิ, ตฺวํ มา วายมิ, เอวํ เต อนาปตฺติ ภวิสฺสตี”ติ. โส ภิกฺขุ ตถา อกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (27)
+เตน โข ปน สมเยน อญฺญตรา อิตฺถี ภิกฺขุํ ปสฺสิตฺวา เอตทโวจ—  “เอหิ, ภนฺเต, เมถุนํ ธมฺมํ ปฏิเสวา”ติ. “อลํ, ภคินิ, เนตํ กปฺปตี”ติ. “เอหิ, ภนฺเต, อหํ วายมิสฺสามิ, ตฺวํ มา วายมิ, เอวํ เต อนาปตฺติ ภวิสฺสตี”ติ. โส ภิกฺขุ ตถา อกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (27)
 </Paragraph>
 
 <Paragraph number="164" book="para">
-เตน โข ปน สมเยน อญฺญตรา อิตฺถี ภิกฺขุํ ปสฺสิตฺวา เอตทโวจ—  “เอหิ, ภนฺเต, เมถุนํ ธมฺมํ ปฏิเสวา”ติ. “อลํ, ภคินิ, เนตํ กปฺปตี”ติ. “เอหิ, ภนฺเต, ตฺวํ วายม, อหํ น วายมิสฺสามิ, เอวํ เต อนาปตฺติ ภวิสฺสตี”ติ. โส ภิกฺขุ ตถา อกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (28)
+เตน โข ปน สมเยน อญฺญตรา อิตฺถี ภิกฺขุํ ปสฺสิตฺวา เอตทโวจ—  “เอหิ, ภนฺเต, เมถุนํ ธมฺมํ ปฏิเสวา”ติ. “อลํ, ภคินิ, เนตํ กปฺปตี”ติ. “เอหิ, ภนฺเต, ตฺวํ วายม, อหํ น วายมิสฺสามิ, เอวํ เต อนาปตฺติ ภวิสฺสตี”ติ. โส ภิกฺขุ ตถา อกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (28)
 </Paragraph>
 
 <Paragraph number="165" book="para">
-เตน โข ปน สมเยน อญฺญตรา อิตฺถี ภิกฺขุํ ปสฺสิตฺวา เอตทโวจ—  “เอหิ, ภนฺเต, เมถุนํ ธมฺมํ ปฏิเสวา”ติ. “อลํ, ภคินิ, เนตํ กปฺปตี”ติ. “เอหิ, ภนฺเต, อพฺภนฺตรํ ฆฏฺเฏตฺวา พหิ โมเจหิ …เป…  พหิ ฆฏฺเฏตฺวา อพฺภนฺตรํ โมเจหิ, เอวํ เต อนาปตฺติ ภวิสฺสตี”ติ. โส ภิกฺขุ ตถา อกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (29–30)
+เตน โข ปน สมเยน อญฺญตรา อิตฺถี ภิกฺขุํ ปสฺสิตฺวา เอตทโวจ—  “เอหิ, ภนฺเต, เมถุนํ ธมฺมํ ปฏิเสวา”ติ. “อลํ, ภคินิ, เนตํ กปฺปตี”ติ. “เอหิ, ภนฺเต, อพฺภนฺตรํ ฆฏฺเฏตฺวา พหิ โมเจหิ …เป…  พหิ ฆฏฺเฏตฺวา อพฺภนฺตรํ โมเจหิ, เอวํ เต อนาปตฺติ ภวิสฺสตี”ติ. โส ภิกฺขุ ตถา อกาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (29–30)
 </Paragraph>
 
 </Division>
 <Division number="73" book="para">
 
 <Paragraph number="166" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สิวถิกํ คนฺตฺวา อกฺขายิตํ สรีรํ ปสฺสิตฺวา ตสฺมึ เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (31)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สิวถิกํ คนฺตฺวา อกฺขายิตํ สรีรํ ปสฺสิตฺวา ตสฺมิํ เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (31)
 </Paragraph>
 
 <Paragraph number="167" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สิวถิกํ คนฺตฺวา เยภุเยฺยน อกฺขายิตํ สรีรํ ปสฺสิตฺวา ตสฺมึ เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (32)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สิวถิกํ คนฺตฺวา เยภุเยฺยน อกฺขายิตํ สรีรํ ปสฺสิตฺวา ตสฺมิํ เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (32)
 </Paragraph>
 
 <Paragraph number="168" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สิวถิกํ คนฺตฺวา เยภุเยฺยน ขายิตํ สรีรํ ปสฺสิตฺวา ตสฺมึ เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส. อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (33)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สิวถิกํ คนฺตฺวา เยภุเยฺยน ขายิตํ สรีรํ ปสฺสิตฺวา ตสฺมิํ เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส. อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (33)
 </Paragraph>
 
 <Paragraph number="169" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สิวถิกํ คนฺตฺวา ฉินฺนสีสํ ปสฺสิตฺวา วฏฺฏกเต มุเข ฉุปนฺตํ องฺคชาตํ ปเวเสสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (34)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สิวถิกํ คนฺตฺวา ฉินฺนสีสํ ปสฺสิตฺวา วฏฺฏกเต มุเข ฉุปนฺตํ องฺคชาตํ ปเวเสสิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (34)
 </Paragraph>
 
 <Paragraph number="170" book="para">
@@ -144,7 +144,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="172" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ นาคิยา เมถุนํ ธมฺมํ ปฏิเสวิ…  ยกฺขินิยา เมถุนํ ธมฺมํ ปฏิเสวิ…  เปติยา เมถุนํ ธมฺมํ ปฏิเสวิ…  ปณฺฑกสฺส เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (37–40)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ นาคิยา เมถุนํ ธมฺมํ ปฏิเสวิ…  ยกฺขินิยา เมถุนํ ธมฺมํ ปฏิเสวิ…  เปติยา เมถุนํ ธมฺมํ ปฏิเสวิ…  ปณฺฑกสฺส เมถุนํ ธมฺมํ ปฏิเสวิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (37–40)
 </Paragraph>
 
 <Paragraph number="173" book="para">
@@ -163,18 +163,18 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="176" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สาวตฺถิยา อนฺธวเน ทิวาวิหารคโต นิปนฺโน โหติ. อญฺญตรา โคปาลิกา ปสฺสิตฺวา องฺคชาเต อภินิสีทิ. โส ภิกฺขุ ปเวสนํ สาทิยิ, ปวิฏฺฐํ สาทิยิ, ฐิตํ สาทิยิ, อุทฺธรณํ สาทิยิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (44)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สาวตฺถิยา อนฺธวเน ทิวาวิหารคโต นิปนฺโน โหติ. อญฺญตรา โคปาลิกา ปสฺสิตฺวา องฺคชาเต อภินิสีทิ. โส ภิกฺขุ ปเวสนํ สาทิยิ, ปวิฏฺฐํ สาทิยิ, ฐิตํ สาทิยิ, อุทฺธรณํ สาทิยิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (44)
 </Paragraph>
 
 <Paragraph number="177" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สาวตฺถิยา อนฺธวเน ทิวาวิหารคโต นิปนฺโน โหติ. อญฺญตรา อชปาลิกา ปสฺสิตฺวา…  อญฺญตรา กฏฺฐหาริกา ปสฺสิตฺวา…  อญฺญตรา โคมยหาริกา ปสฺสิตฺวา องฺคชาเต อภินิสีทิ. โส ภิกฺขุ ปเวสนํ สาทิยิ, ปวิฏฺฐํ สาทิยิ, ฐิตํ สาทิยิ, อุทฺธรณํ สาทิยิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (45–47)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ สาวตฺถิยา อนฺธวเน ทิวาวิหารคโต นิปนฺโน โหติ. อญฺญตรา อชปาลิกา ปสฺสิตฺวา…  อญฺญตรา กฏฺฐหาริกา ปสฺสิตฺวา…  อญฺญตรา โคมยหาริกา ปสฺสิตฺวา องฺคชาเต อภินิสีทิ. โส ภิกฺขุ ปเวสนํ สาทิยิ, ปวิฏฺฐํ สาทิยิ, ฐิตํ สาทิยิ, อุทฺธรณํ สาทิยิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (45–47)
 </Paragraph>
 
 </Division>
 <Division number="75" book="para">
 
 <Paragraph number="178" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ เวสาลิยํ มหาวเน ทิวาวิหารคโต นิปนฺโน โหติ. อญฺญตรา อิตฺถี ปสฺสิตฺวา องฺคชาเต อภินิสีทิตฺวา ยาวทตฺถํ กตฺวา สามนฺตา หสมานา ฐิตา โหติ. โส ภิกฺขุ ปฏิพุชฺฌิตฺวา ตํ อิตฺถึ เอตทโวจ—  “ตุยฺหิทํ กมฺมนฺ”ติ? “อาม, มยฺหํ กมฺมนฺ”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “สาทิยิ ตฺวํ, ภิกฺขู”ติ? “นาหํ, ภควา, ชานามี”ติ. “อนาปตฺติ, ภิกฺขุ, อชานนฺตสฺสา”ติ. (48)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ เวสาลิยํ มหาวเน ทิวาวิหารคโต นิปนฺโน โหติ. อญฺญตรา อิตฺถี ปสฺสิตฺวา องฺคชาเต อภินิสีทิตฺวา ยาวทตฺถํ กตฺวา สามนฺตา หสมานา ฐิตา โหติ. โส ภิกฺขุ ปฏิพุชฺฌิตฺวา ตํ อิตฺถิํ เอตทโวจ—  “ตุยฺหิทํ กมฺมนฺ”ติ? “อาม, มยฺหํ กมฺมนฺ”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “สาทิยิ ตฺวํ, ภิกฺขู”ติ? “นาหํ, ภควา, ชานามี”ติ. “อนาปตฺติ, ภิกฺขุ, อชานนฺตสฺสา”ติ. (48)
 </Paragraph>
 
 </Division>
@@ -192,14 +192,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="77" book="para">
 
 <Paragraph number="181" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ เวสาลิยํ มหาวเน กูฏาคารสาลายํ ทิวาวิหารคโต ทฺวารํ วิวริตฺวา นิปนฺโน โหติ. ตสฺส องฺคมงฺคานิ วาตูปตฺถทฺธานิ โหนฺติ. เตน โข ปน สมเยน สมฺพหุลา อิตฺถิโย คนฺธญฺจ มาลญฺจ อาทาย อารามํ อาคมํสุ วิหารเปกฺขิกาโย. อถ โข ตา อิตฺถิโย ตํ ภิกฺขุํ ปสฺสิตฺวา องฺคชาเต อภินิสีทิตฺวา ยาวทตฺถํ กตฺวา, ปุริสูสโภ วตายนฺติ วตฺวา คนฺธญฺจ มาลญฺจ อาโรเปตฺวา ปกฺกมึสุ. ภิกฺขู กิลินฺนํ ปสฺสิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. “ปญฺจหิ, ภิกฺขเว, อากาเรหิ องฺคชาตํ กมฺมนิยํ โหติ—  ราเคน, วจฺเจน, ปสฺสาเวน, วาเตน, อุจฺจาลิงฺคปาณกทฏฺเฐน. อิเมหิ โข, ภิกฺขเว, ปญฺจหากาเรหิ องฺคชาตํ กมฺมนิยํ โหติ. อฏฺฐานเมตํ, ภิกฺขเว, อนวกาโส, ยํ ตสฺส ภิกฺขุโน ราเคน องฺคชาตํ กมฺมนิยํ อสฺส. อรหํ โส, ภิกฺขเว, ภิกฺขุ. อนาปตฺติ, ภิกฺขเว, ตสฺส ภิกฺขุโน. อนุชานามิ, ภิกฺขเว, ทิวา ปฏิสลฺลียนฺเตน ทฺวารํ สํวริตฺวา ปฏิสลฺลียิตุนฺ”ติ. (51)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ เวสาลิยํ มหาวเน กูฏาคารสาลายํ ทิวาวิหารคโต ทฺวารํ วิวริตฺวา นิปนฺโน โหติ. ตสฺส องฺคมงฺคานิ วาตูปตฺถทฺธานิ โหนฺติ. เตน โข ปน สมเยน สมฺพหุลา อิตฺถิโย คนฺธญฺจ มาลญฺจ อาทาย อารามํ อาคมํสุ วิหารเปกฺขิกาโย. อถ โข ตา อิตฺถิโย ตํ ภิกฺขุํ ปสฺสิตฺวา องฺคชาเต อภินิสีทิตฺวา ยาวทตฺถํ กตฺวา, ปุริสูสโภ วตายนฺติ วตฺวา คนฺธญฺจ มาลญฺจ อาโรเปตฺวา ปกฺกมิํสุ. ภิกฺขู กิลินฺนํ ปสฺสิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. “ปญฺจหิ, ภิกฺขเว, อากาเรหิ องฺคชาตํ กมฺมนิยํ โหติ—  ราเคน, วจฺเจน, ปสฺสาเวน, วาเตน, อุจฺจาลิงฺคปาณกทฏฺเฐน. อิเมหิ โข, ภิกฺขเว, ปญฺจหากาเรหิ องฺคชาตํ กมฺมนิยํ โหติ. อฏฺฐานเมตํ, ภิกฺขเว, อนวกาโส, ยํ ตสฺส ภิกฺขุโน ราเคน องฺคชาตํ กมฺมนิยํ อสฺส. อรหํ โส, ภิกฺขเว, ภิกฺขุ. อนาปตฺติ, ภิกฺขเว, ตสฺส ภิกฺขุโน. อนุชานามิ, ภิกฺขเว, ทิวา ปฏิสลฺลียนฺเตน ทฺวารํ สํวริตฺวา ปฏิสลฺลียิตุนฺ”ติ. (51)
 </Paragraph>
 
 </Division>
 <Division number="78" book="para">
 
 <Paragraph number="182" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภารุกจฺฉโก ภิกฺขุ สุปินนฺเต ปุราณทุติยิกาย เมถุนํ ธมฺมํ ปฏิเสวิตฺวา—  “อสฺสมโณ อหํ, วิพฺภมิสฺสามี”ติ, ภารุกจฺฉํ คจฺฉนฺโต อนฺตรามคฺเค อายสฺมนฺตํ อุปาลึ ปสฺสิตฺวา เอตมตฺถํ อาโรเจสิ. อายสฺมา อุปาลิ เอวมาห—  “อนาปตฺติ, อาวุโส, สุปินนฺเตนา”ติ. (52)
+เตน โข ปน สมเยน อญฺญตโร ภารุกจฺฉโก ภิกฺขุ สุปินนฺเต ปุราณทุติยิกาย เมถุนํ ธมฺมํ ปฏิเสวิตฺวา—  “อสฺสมโณ อหํ, วิพฺภมิสฺสามี”ติ, ภารุกจฺฉํ คจฺฉนฺโต อนฺตรามคฺเค อายสฺมนฺตํ อุปาลิํ ปสฺสิตฺวา เอตมตฺถํ อาโรเจสิ. อายสฺมา อุปาลิ เอวมาห—  “อนาปตฺติ, อาวุโส, สุปินนฺเตนา”ติ. (52)
 </Paragraph>
 
 <Paragraph number="183" book="para">
@@ -217,7 +217,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="80" book="para">
 
 <Paragraph number="185" book="para">
-เตน โข ปน สมเยน เวสาลิยํ ลิจฺฉวิกุมารกา ภิกฺขุํ คเหตฺวา ภิกฺขุนิยา วิปฺปฏิปาเทสุํ…  สิกฺขมานาย วิปฺปฏิปาเทสุํ…  สามเณริยา วิปฺปฏิปาเทสุํ. อุโภ สาทิยึสุ. อุโภ นาเสตพฺพา. อุโภ น สาทิยึสุ. อุภินฺนํ อนาปตฺติ. (71–76)
+เตน โข ปน สมเยน เวสาลิยํ ลิจฺฉวิกุมารกา ภิกฺขุํ คเหตฺวา ภิกฺขุนิยา วิปฺปฏิปาเทสุํ…  สิกฺขมานาย วิปฺปฏิปาเทสุํ…  สามเณริยา วิปฺปฏิปาเทสุํ. อุโภ สาทิยิํสุ. อุโภ นาเสตพฺพา. อุโภ น สาทิยิํสุ. อุภินฺนํ อนาปตฺติ. (71–76)
 </Paragraph>
 
 </Division>
@@ -228,7 +228,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="187" book="para">
-เตน โข ปน สมเยน เวสาลิยํ ลิจฺฉวิกุมารกา ภิกฺขู คเหตฺวา อญฺญมญฺญํ วิปฺปฏิปาเทสุํ. อุโภ สาทิยึสุ. อุโภ นาเสตพฺพา. อุโภ น สาทิยึสุ. อุภินฺนํ อนาปตฺติ. (83–84)
+เตน โข ปน สมเยน เวสาลิยํ ลิจฺฉวิกุมารกา ภิกฺขู คเหตฺวา อญฺญมญฺญํ วิปฺปฏิปาเทสุํ. อุโภ สาทิยิํสุ. อุโภ นาเสตพฺพา. อุโภ น สาทิยิํสุ. อุภินฺนํ อนาปตฺติ. (83–84)
 </Paragraph>
 
 </Division>
@@ -242,7 +242,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="83" book="para">
 
 <Paragraph number="189" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อรญฺเญ วิหรติ. มิคโปตโก ตสฺส ปสฺสาวฏฺฐานํ อาคนฺตฺวา ปสฺสาวํ ปิวนฺโต มุเขน องฺคชาตํ อคฺคเหสิ. โส ภิกฺขุ สาทิยิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (86)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อรญฺเญ วิหรติ. มิคโปตโก ตสฺส ปสฺสาวฏฺฐานํ อาคนฺตฺวา ปสฺสาวํ ปิวนฺโต มุเขน องฺคชาตํ อคฺคเหสิ. โส ภิกฺขุ สาทิยิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (86)
 
 </Paragraph>
 </Division>
