--- a/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-4/1-1-4-2.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-1/1-1-4/1-1-4-2.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="223" book="para">
 
 <Paragraph number="713" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อธิมาเนน อญฺญํ พฺยากาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ. กจฺจิ นุ โข อหํ ปาราชิกํ อาปตฺตึ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อนาปตฺติ, ภิกฺขุ, อธิมาเนนา”ติ. (1)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อธิมาเนน อญฺญํ พฺยากาสิ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ. กจฺจิ นุ โข อหํ ปาราชิกํ อาปตฺติํ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “อนาปตฺติ, ภิกฺขุ, อธิมาเนนา”ติ. (1)
 </Paragraph>
 
 <Paragraph number="714" book="para">
@@ -30,11 +30,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="716" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรํ ภิกฺขุํ เอตทโวจ—  “เย, อาวุโส, อมฺหากํ อุปชฺฌายสฺส สทฺธิวิหาริกา สพฺเพว อรหนฺโต”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (4)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรํ ภิกฺขุํ เอตทโวจ—  “เย, อาวุโส, อมฺหากํ อุปชฺฌายสฺส สทฺธิวิหาริกา สพฺเพว อรหนฺโต”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (4)
 </Paragraph>
 
 <Paragraph number="717" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรํ ภิกฺขุํ เอตทโวจ—  “เย, อาวุโส, อมฺหากํ อุปชฺฌายสฺส อนฺเตวาสิกา สพฺเพว มหิทฺธิกา มหานุภาวา”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (5)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรํ ภิกฺขุํ เอตทโวจ—  “เย, อาวุโส, อมฺหากํ อุปชฺฌายสฺส อนฺเตวาสิกา สพฺเพว มหิทฺธิกา มหานุภาวา”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (5)
 </Paragraph>
 
 <Paragraph number="718" book="para">
@@ -42,7 +42,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="719" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรสฺส ภิกฺขุโน อุตฺตริมนุสฺสธมฺมํ อุลฺลปติ. โสปิ เอวมาห—  “มยฺหมฺปิ, อาวุโส, สํโยชนา ปหีนา”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (10)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรสฺส ภิกฺขุโน อุตฺตริมนุสฺสธมฺมํ อุลฺลปติ. โสปิ เอวมาห—  “มยฺหมฺปิ, อาวุโส, สํโยชนา ปหีนา”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (10)
 </Paragraph>
 
 </Division>
@@ -57,18 +57,18 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="722" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรํ อุปาสกํ เอตทโวจ—  “โย, อาวุโส, ตุยฺหํ วิหาเร วสติ โส ภิกฺขุ อรหา”ติ. โส จ ตสฺส วิหาเร วสติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (13)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรํ อุปาสกํ เอตทโวจ—  “โย, อาวุโส, ตุยฺหํ วิหาเร วสติ โส ภิกฺขุ อรหา”ติ. โส จ ตสฺส วิหาเร วสติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (13)
 </Paragraph>
 
 <Paragraph number="723" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรํ อุปาสกํ เอตทโวจ—  “ยํ ตฺวํ, อาวุโส, อุปฏฺเฐสิ จีวรปิณฺฑปาตเสนาสนคิลานปฺปจฺจยเภสชฺชปริกฺขาเรน โส ภิกฺขุ อรหา”ติ. โส จ ตํ อุปฏฺเฐติ จีวรปิณฺฑปาตเสนาสนคิลานปฺปจฺจยเภสชฺชปริกฺขาเรน. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (14)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรํ อุปาสกํ เอตทโวจ—  “ยํ ตฺวํ, อาวุโส, อุปฏฺเฐสิ จีวรปิณฺฑปาตเสนาสนคิลานปฺปจฺจยเภสชฺชปริกฺขาเรน โส ภิกฺขุ อรหา”ติ. โส จ ตํ อุปฏฺเฐติ จีวรปิณฺฑปาตเสนาสนคิลานปฺปจฺจยเภสชฺชปริกฺขาเรน. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (14)
 </Paragraph>
 
 </Division>
 <Division number="225" book="para">
 
 <Paragraph number="724" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ คิลาโน โหติ. ตํ ภิกฺขู เอตทโวจุํ—  “อตฺถายสฺมโต อุตฺตริมนุสฺสธมฺโม”ติ? “นาวุโส, ทุกฺกรํ อญฺญํ พฺยากาตุนฺ”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “เย โข เต ภควโต สาวกา เต เอวํ วเทยฺยุํ. อหญฺจมฺหิ น ภควโต สาวโก. กจฺจิ นุ โข อหํ ปาราชิกํ อาปตฺตึ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อนุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, อนุลฺลปนาธิปฺปายสฺสา”ติ. (15)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ คิลาโน โหติ. ตํ ภิกฺขู เอตทโวจุํ—  “อตฺถายสฺมโต อุตฺตริมนุสฺสธมฺโม”ติ? “นาวุโส, ทุกฺกรํ อญฺญํ พฺยากาตุนฺ”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ—  “เย โข เต ภควโต สาวกา เต เอวํ วเทยฺยุํ. อหญฺจมฺหิ น ภควโต สาวโก. กจฺจิ นุ โข อหํ ปาราชิกํ อาปตฺติํ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อนุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, อนุลฺลปนาธิปฺปายสฺสา”ติ. (15)
 </Paragraph>
 
 <Paragraph number="725" book="para">
@@ -100,7 +100,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="732" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ คิลาโน โหติ. ตํ ภิกฺขู เอตทโวจุํ—  “กจฺจาวุโส, ขมนียํ, กจฺจิ ยาปนียนฺ”ติ? “นาวุโส, สกฺกา ปุถุชฺชเนน อธิวาเสตุนฺ”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (23)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ คิลาโน โหติ. ตํ ภิกฺขู เอตทโวจุํ—  “กจฺจาวุโส, ขมนียํ, กจฺจิ ยาปนียนฺ”ติ? “นาวุโส, สกฺกา ปุถุชฺชเนน อธิวาเสตุนฺ”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, ปาราชิกสฺส; อาปตฺติ ถุลฺลจฺจยสฺสา”ติ. (23)
 </Paragraph>
 
 </Division>
@@ -115,15 +115,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="735" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรสฺส ภิกฺขุโน อุตฺตริมนุสฺสธมฺมํ อุลฺลปติ. โสปิ เอวมาห—  “มยฺหมฺปิ, อาวุโส, อาสวา ปหีนา”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (29)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรสฺส ภิกฺขุโน อุตฺตริมนุสฺสธมฺมํ อุลฺลปติ. โสปิ เอวมาห—  “มยฺหมฺปิ, อาวุโส, อาสวา ปหีนา”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (29)
 </Paragraph>
 
 <Paragraph number="736" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรสฺส ภิกฺขุโน อุตฺตริมนุสฺสธมฺมํ อุลฺลปติ. โสปิ เอวมาห—  “มยฺหมฺปิ, อาวุโส, เอเต ธมฺมา สํวิชฺชนฺตี”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (30)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรสฺส ภิกฺขุโน อุตฺตริมนุสฺสธมฺมํ อุลฺลปติ. โสปิ เอวมาห—  “มยฺหมฺปิ, อาวุโส, เอเต ธมฺมา สํวิชฺชนฺตี”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (30)
 </Paragraph>
 
 <Paragraph number="737" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรสฺส ภิกฺขุโน อุตฺตริมนุสฺสธมฺมํ อุลฺลปติ. โสปิ เอวมาห—  “อหมฺปาวุโส, เตสุ ธมฺเมสุ สนฺทิสฺสามี”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (31)
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ อญฺญตรสฺส ภิกฺขุโน อุตฺตริมนุสฺสธมฺมํ อุลฺลปติ. โสปิ เอวมาห—  “อหมฺปาวุโส, เตสุ ธมฺเมสุ สนฺทิสฺสามี”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (31)
 </Paragraph>
 
 <Paragraph number="738" book="para">
@@ -138,11 +138,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="740" book="para">
-เตน โข ปน สมเยน อญฺญตรํ ภิกฺขุํ ญาตกา เอตทโวจุํ—  “อภิรมสิ, ภนฺเต”ติ? “อภิรโต อหํ, อาวุโส, ปรมาย อภิรติยา”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ. “เย โข เต ภควโต สาวกา เต เอวํ วเทยฺยุํ. อหญฺจมฺหิ น ภควโต สาวโก. กจฺจิ นุ โข อหํ ปาราชิกํ อาปตฺตึ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “กึจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อนุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, อนุลฺลปนาธิปฺปายสฺสา”ติ. (34)
+เตน โข ปน สมเยน อญฺญตรํ ภิกฺขุํ ญาตกา เอตทโวจุํ—  “อภิรมสิ, ภนฺเต”ติ? “อภิรโต อหํ, อาวุโส, ปรมาย อภิรติยา”ติ. ตสฺส กุกฺกุจฺจํ อโหสิ. “เย โข เต ภควโต สาวกา เต เอวํ วเทยฺยุํ. อหญฺจมฺหิ น ภควโต สาวโก. กจฺจิ นุ โข อหํ ปาราชิกํ อาปตฺติํ อาปนฺโน”ติ? ภควโต เอตมตฺถํ อาโรเจสิ. “กิํจิตฺโต ตฺวํ, ภิกฺขู”ติ? “อนุลฺลปนาธิปฺปาโย อหํ, ภควา”ติ. “อนาปตฺติ, ภิกฺขุ, อนุลฺลปนาธิปฺปายสฺสา”ติ. (34)
 </Paragraph>
 
 <Paragraph number="741" book="para">
-เตน โข ปน สมเยน สมฺพหุลา ภิกฺขู กติกํ กตฺวา อญฺญตรสฺมึ อาวาเส วสฺสํ อุปคจฺฉึสุ—  “โย อิมมฺหา อาวาสา ปฐมํ ปกฺกมิสฺสติ ตํ มยํ อรหาติ ชานิสฺสามา”ติ. อญฺญตโร ภิกฺขุ—  “มํ อรหาติ ชานนฺตู”ติ, ตมฺหา อาวาสา ปฐมํ ปกฺกามิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺตึ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (35)
+เตน โข ปน สมเยน สมฺพหุลา ภิกฺขู กติกํ กตฺวา อญฺญตรสฺมิํ อาวาเส วสฺสํ อุปคจฺฉิํสุ—  “โย อิมมฺหา อาวาสา ปฐมํ ปกฺกมิสฺสติ ตํ มยํ อรหาติ ชานิสฺสามา”ติ. อญฺญตโร ภิกฺขุ—  “มํ อรหาติ ชานนฺตู”ติ, ตมฺหา อาวาสา ปฐมํ ปกฺกามิ. ตสฺส กุกฺกุจฺจํ อโหสิ …เป…  “อาปตฺติํ ตฺวํ, ภิกฺขุ, อาปนฺโน ปาราชิกนฺ”ติ. (35)
 </Paragraph>
 
 </Division>
@@ -153,81 +153,81 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="743" book="para">
-อถ โข อายสฺมา มหาโมคฺคลฺลาโน คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อญฺญตรสฺมึ ปเทเส สิตํ ปาตฺวากาสิ. อถ โข อายสฺมา ลกฺขโณ อายสฺมนฺตํ มหาโมคฺคลฺลานํ เอตทโวจ—  “โก นุ โข, อาวุโส โมคฺคลฺลาน, เหตุ โก ปจฺจโย สิตสฺส ปาตุกมฺมายา”ติ? “อกาโล โข, อาวุโส ลกฺขณ, เอตสฺส ปญฺหสฺส. ภควโต มํ สนฺติเก เอตํ ปญฺหํ ปุจฺฉา”ติ.
+อถ โข อายสฺมา มหาโมคฺคลฺลาโน คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อญฺญตรสฺมิํ ปเทเส สิตํ ปาตฺวากาสิ. อถ โข อายสฺมา ลกฺขโณ อายสฺมนฺตํ มหาโมคฺคลฺลานํ เอตทโวจ—  “โก นุ โข, อาวุโส โมคฺคลฺลาน, เหตุ โก ปจฺจโย สิตสฺส ปาตุกมฺมายา”ติ? “อกาโล โข, อาวุโส ลกฺขณ, เอตสฺส ปญฺหสฺส. ภควโต มํ สนฺติเก เอตํ ปญฺหํ ปุจฺฉา”ติ.
 </Paragraph>
 
 <Paragraph number="744" book="para">
-อถ โข อายสฺมา จ ลกฺขโณ อายสฺมา จ มหาโมคฺคลฺลาโน ราชคเห ปิณฺฑาย จริตฺวา ปจฺฉาภตฺตํ ปิณฺฑปาตปฏิกฺกนฺตา เยน ภควา เตนุปสงฺกมึสุ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทึสุ. เอกมนฺตํ นิสินฺโน โข อายสฺมา ลกฺขโณ อายสฺมนฺตํ มหาโมคฺคลฺลานํ เอตทโวจ—  “อิธายสฺมา มหาโมคฺคลฺลาโน คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อญฺญตรสฺมึ ปเทเส สิตํ ปาตฺวากาสิ. โก นุ โข, อาวุโส โมคฺคลฺลาน, เหตุ โก ปจฺจโย สิตสฺส ปาตุกมฺมายา”ติ? “อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ อฏฺฐิกสงฺขลิกํ เวหาสํ คจฺฉนฺตึ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา ผาสุฬนฺตริกาหิ วิตุเฑนฺติ. สา สุทํ อฏฺฏสฺสรํ กโรติ. ตสฺส มยฺหํ, อาวุโส, เอตทโหสิ—  ‘อจฺฉริยํ วต โภ, อพฺภุตํ วต โภ, เอวรูโปปิ นาม สตฺโต ภวิสฺสติ. เอวรูโปปิ นาม ยกฺโข ภวิสฺสติ. เอวรูโปปิ นาม อตฺตภาวปฺปฏิลาโภ ภวิสฺสตี’”ติ. ภิกฺขู อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “อุตฺตริมนุสฺสธมฺมํ อายสฺมา มหาโมคฺคลฺลาโน อุลฺลปตี”ติ.
+อถ โข อายสฺมา จ ลกฺขโณ อายสฺมา จ มหาโมคฺคลฺลาโน ราชคเห ปิณฺฑาย จริตฺวา ปจฺฉาภตฺตํ ปิณฺฑปาตปฏิกฺกนฺตา เยน ภควา เตนุปสงฺกมิํสุ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิํสุ. เอกมนฺตํ นิสินฺโน โข อายสฺมา ลกฺขโณ อายสฺมนฺตํ มหาโมคฺคลฺลานํ เอตทโวจ—  “อิธายสฺมา มหาโมคฺคลฺลาโน คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อญฺญตรสฺมิํ ปเทเส สิตํ ปาตฺวากาสิ. โก นุ โข, อาวุโส โมคฺคลฺลาน, เหตุ โก ปจฺจโย สิตสฺส ปาตุกมฺมายา”ติ? “อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ อฏฺฐิกสงฺขลิกํ เวหาสํ คจฺฉนฺติํ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา ผาสุฬนฺตริกาหิ วิตุเฑนฺติ. สา สุทํ อฏฺฏสฺสรํ กโรติ. ตสฺส มยฺหํ, อาวุโส, เอตทโหสิ—  ‘อจฺฉริยํ วต โภ, อพฺภุตํ วต โภ, เอวรูโปปิ นาม สตฺโต ภวิสฺสติ. เอวรูโปปิ นาม ยกฺโข ภวิสฺสติ. เอวรูโปปิ นาม อตฺตภาวปฺปฏิลาโภ ภวิสฺสตี’”ติ. ภิกฺขู อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “อุตฺตริมนุสฺสธมฺมํ อายสฺมา มหาโมคฺคลฺลาโน อุลฺลปตี”ติ.
 </Paragraph>
 
 <Paragraph number="745" book="para">
-อถ โข ภควา ภิกฺขู อามนฺเตสิ—  “จกฺขุภูตา วต, ภิกฺขเว, สาวกา วิหรนฺติ. ญาณภูตา วต, ภิกฺขเว, สาวกา วิหรนฺติ. ยตฺร หิ นาม สาวโก เอวรูปํ ญสฺสติ วา ทกฺขติ วา สกฺขึ วา กริสฺสติ. ปุพฺเพว เม โส, ภิกฺขเว, สตฺโต ทิฏฺโฐ อโหสิ. อปิ จาหํ น พฺยากาสึ. อหญฺเจตํ พฺยากเรยฺยํ ปเร จ เม น สทฺทเหยฺยุํ. เย เม น สทฺทเหยฺยุํ เตสํ ตํ อสฺส ทีฆรตฺตํ อหิตาย ทุกฺขาย. เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห โคฆาตโก อโหสิ. โส ตสฺส กมฺมสฺส วิปาเกน พหูนิ วสฺสานิ พหูนิ วสฺสสตานิ พหูนิ วสฺสสหสฺสานิ พหูนิ วสฺสสตสหสฺสานิ นิรเย ปจฺจิตฺวา ตเสฺสว กมฺมสฺส วิปากาวเสเสน เอวรูปํ อตฺตภาวปฺปฏิลาภํ ปฏิสํเวเทติ. สจฺจํ, ภิกฺขเว, โมคฺคลฺลาโน อาห. อนาปตฺติ, ภิกฺขเว, โมคฺคลฺลานสฺสา”ติ. (36)
+อถ โข ภควา ภิกฺขู อามนฺเตสิ—  “จกฺขุภูตา วต, ภิกฺขเว, สาวกา วิหรนฺติ. ญาณภูตา วต, ภิกฺขเว, สาวกา วิหรนฺติ. ยตฺร หิ นาม สาวโก เอวรูปํ ญสฺสติ วา ทกฺขติ วา สกฺขิํ วา กริสฺสติ. ปุพฺเพว เม โส, ภิกฺขเว, สตฺโต ทิฏฺโฐ อโหสิ. อปิ จาหํ น พฺยากาสิํ. อหญฺเจตํ พฺยากเรยฺยํ ปเร จ เม น สทฺทเหยฺยุํ. เย เม น สทฺทเหยฺยุํ เตสํ ตํ อสฺส ทีฆรตฺตํ อหิตาย ทุกฺขาย. เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห โคฆาตโก อโหสิ. โส ตสฺส กมฺมสฺส วิปาเกน พหูนิ วสฺสานิ พหูนิ วสฺสสตานิ พหูนิ วสฺสสหสฺสานิ พหูนิ วสฺสสตสหสฺสานิ นิรเย ปจฺจิตฺวา ตเสฺสว กมฺมสฺส วิปากาวเสเสน เอวรูปํ อตฺตภาวปฺปฏิลาภํ ปฏิสํเวเทติ. สจฺจํ, ภิกฺขเว, โมคฺคลฺลาโน อาห. อนาปตฺติ, ภิกฺขเว, โมคฺคลฺลานสฺสา”ติ. (36)
 </Paragraph>
 
 </Division>
 <Division number="229" book="para">
 
 <Paragraph number="746" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ มํสเปสึ เวหาสํ คจฺฉนฺตึ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. สา สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห โคฆาตโก อโหสิ …เป… . (37)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ มํสเปสิํ เวหาสํ คจฺฉนฺติํ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. สา สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห โคฆาตโก อโหสิ …เป… . (37)
 </Paragraph>
 
 <Paragraph number="747" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ มํสปิณฺฑํ เวหาสํ คจฺฉนฺตํ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห สากุณิโก อโหสิ …เป… . (38)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ มํสปิณฺฑํ เวหาสํ คจฺฉนฺตํ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห สากุณิโก อโหสิ …เป… . (38)
 </Paragraph>
 
 <Paragraph number="748" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ นิจฺฉวึ ปุริสํ เวหาสํ คจฺฉนฺตํ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห โอรพฺภิโก อโหสิ …เป… . (39)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ นิจฺฉวิํ ปุริสํ เวหาสํ คจฺฉนฺตํ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห โอรพฺภิโก อโหสิ …เป… . (39)
 </Paragraph>
 
 <Paragraph number="749" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ อสิโลมํ ปุริสํ เวหาสํ คจฺฉนฺตํ. ตสฺส เต อสี อุปฺปติตฺวา อุปฺปติตฺวา ตเสฺสว กาเย นิปตนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห สูกริโก อโหสิ …เป… . (40)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ อสิโลมํ ปุริสํ เวหาสํ คจฺฉนฺตํ. ตสฺส เต อสี อุปฺปติตฺวา อุปฺปติตฺวา ตเสฺสว กาเย นิปตนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห สูกริโก อโหสิ …เป… . (40)
 </Paragraph>
 
 <Paragraph number="750" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ สตฺติโลมํ ปุริสํ เวหาสํ คจฺฉนฺตํ. ตสฺส ตา สตฺติโย อุปฺปติตฺวา อุปฺปติตฺวา ตเสฺสว กาเย นิปตนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห มาควิโก อโหสิ …เป… . (41)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ สตฺติโลมํ ปุริสํ เวหาสํ คจฺฉนฺตํ. ตสฺส ตา สตฺติโย อุปฺปติตฺวา อุปฺปติตฺวา ตเสฺสว กาเย นิปตนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห มาควิโก อโหสิ …เป… . (41)
 </Paragraph>
 
 <Paragraph number="751" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ อุสุโลมํ ปุริสํ เวหาสํ คจฺฉนฺตํ. ตสฺส เต อุสู อุปฺปติตฺวา อุปฺปติตฺวา ตเสฺสว กาเย นิปตนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห การณิโก อโหสิ …เป… . (42)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ อุสุโลมํ ปุริสํ เวหาสํ คจฺฉนฺตํ. ตสฺส เต อุสู อุปฺปติตฺวา อุปฺปติตฺวา ตเสฺสว กาเย นิปตนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห การณิโก อโหสิ …เป… . (42)
 </Paragraph>
 
 <Paragraph number="752" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ สูจิโลมํ ปุริสํ เวหาสํ คจฺฉนฺตํ. ตสฺส ตา สูจิโย อุปฺปติตฺวา อุปฺปติตฺวา ตเสฺสว กาเย นิปตนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห สารถิโก อโหสิ …เป… . (43)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ สูจิโลมํ ปุริสํ เวหาสํ คจฺฉนฺตํ. ตสฺส ตา สูจิโย อุปฺปติตฺวา อุปฺปติตฺวา ตเสฺสว กาเย นิปตนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห สารถิโก อโหสิ …เป… . (43)
 </Paragraph>
 
 <Paragraph number="753" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ สูจิโลมํ ปุริสํ เวหาสํ คจฺฉนฺตํ. ตสฺส ตา สูจิโย สีเส ปวิสิตฺวา มุขโต นิกฺขมนฺติ; มุเข ปวิสิตฺวา อุรโต นิกฺขมนฺติ; อุเร ปวิสิตฺวา อุทรโต นิกฺขมนฺติ; อุทเร ปวิสิตฺวา อูรูหิ นิกฺขมนฺติ; อูรูสุ ปวิสิตฺวา ชงฺฆาหิ นิกฺขมนฺติ; ชงฺฆาสุ ปวิสิตฺวา ปาเทหิ นิกฺขมนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห สูจโก อโหสิ …เป… . (44)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ สูจิโลมํ ปุริสํ เวหาสํ คจฺฉนฺตํ. ตสฺส ตา สูจิโย สีเส ปวิสิตฺวา มุขโต นิกฺขมนฺติ; มุเข ปวิสิตฺวา อุรโต นิกฺขมนฺติ; อุเร ปวิสิตฺวา อุทรโต นิกฺขมนฺติ; อุทเร ปวิสิตฺวา อูรูหิ นิกฺขมนฺติ; อูรูสุ ปวิสิตฺวา ชงฺฆาหิ นิกฺขมนฺติ; ชงฺฆาสุ ปวิสิตฺวา ปาเทหิ นิกฺขมนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห สูจโก อโหสิ …เป… . (44)
 </Paragraph>
 
 <Paragraph number="754" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ กุมฺภณฺฑํ ปุริสํ เวหาสํ คจฺฉนฺตํ. โส คจฺฉนฺโตปิ เตว อณฺเฑ ขนฺเธ อาโรเปตฺวา คจฺฉติ, นิสีทนฺโตปิ เตเสฺวว อณฺเฑสุ นิสีทติ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห คามกูโฏ อโหสิ …เป… . (45)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ กุมฺภณฺฑํ ปุริสํ เวหาสํ คจฺฉนฺตํ. โส คจฺฉนฺโตปิ เตว อณฺเฑ ขนฺเธ อาโรเปตฺวา คจฺฉติ, นิสีทนฺโตปิ เตเสฺวว อณฺเฑสุ นิสีทติ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห คามกูโฏ อโหสิ …เป… . (45)
 </Paragraph>
 
 <Paragraph number="755" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ ปุริสํ คูถกูเป สสีสกํ นิมุคฺคํ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห ปารทาริโก อโหสิ …เป… . (46)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ ปุริสํ คูถกูเป สสีสกํ นิมุคฺคํ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห ปารทาริโก อโหสิ …เป… . (46)
 </Paragraph>
 
 <Paragraph number="756" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ ปุริสํ คูถกูเป สสีสกํ นิมุคฺคํ อุโภหิ หตฺเถหิ คูถํ ขาทนฺตํ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห ทุฏฺฐพฺราหฺมโณ อโหสิ. โส กสฺสปสฺส สมฺมาสมฺพุทฺธสฺส ปาวจเน ภิกฺขุสํฆํ ภตฺเตน นิมนฺเตตฺวา โทณิโย คูถสฺส ปูราเปตฺวา กาลํ อาโรจาเปตฺวา เอตทโวจ—  ‘อโต, โภนฺโต, ยาวทตฺถํ ภุญฺชนฺตุ เจว หรนฺตุ จา’”ติ …เป… . (47)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ ปุริสํ คูถกูเป สสีสกํ นิมุคฺคํ อุโภหิ หตฺเถหิ คูถํ ขาทนฺตํ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห ทุฏฺฐพฺราหฺมโณ อโหสิ. โส กสฺสปสฺส สมฺมาสมฺพุทฺธสฺส ปาวจเน ภิกฺขุสํฆํ ภตฺเตน นิมนฺเตตฺวา โทณิโย คูถสฺส ปูราเปตฺวา กาลํ อาโรจาเปตฺวา เอตทโวจ—  ‘อโต, โภนฺโต, ยาวทตฺถํ ภุญฺชนฺตุ เจว หรนฺตุ จา’”ติ …เป… . (47)
 </Paragraph>
 
 </Division>
 <Division number="230" book="para">
 
 <Paragraph number="757" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ นิจฺฉวึ อิตฺถึ เวหาสํ คจฺฉนฺตึ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. สา สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอสา, ภิกฺขเว, อิตฺถี อิมสฺมึเยว ราชคเห อติจารินี อโหสิ …เป… . (48)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ นิจฺฉวิํ อิตฺถิํ เวหาสํ คจฺฉนฺติํ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. สา สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอสา, ภิกฺขเว, อิตฺถี อิมสฺมิํเยว ราชคเห อติจารินี อโหสิ …เป… . (48)
 </Paragraph>
 
 <Paragraph number="758" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ อิตฺถึ ทุคฺคนฺธํ มงฺคุลึ เวหาสํ คจฺฉนฺตึ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. สา สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอสา, ภิกฺขเว, อิตฺถี อิมสฺมึเยว ราชคเห อิกฺขณิกา อโหสิ …เป… . (49)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ อิตฺถิํ ทุคฺคนฺธํ มงฺคุลิํ เวหาสํ คจฺฉนฺติํ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. สา สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอสา, ภิกฺขเว, อิตฺถี อิมสฺมิํเยว ราชคเห อิกฺขณิกา อโหสิ …เป… . (49)
 </Paragraph>
 
 <Paragraph number="759" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ อิตฺถึ อุปฺปกฺกํ โอกิลินึ โอกิรินึ เวหาสํ คจฺฉนฺตึ. สา สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอสา, ภิกฺขเว, อิตฺถี กาลิงฺคสฺส รญฺโญ อคฺคมเหสี อโหสิ. สา อิสฺสาปกตา สปตฺตึ องฺคารกฏาเหน โอกิริ …เป… . (50)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ อิตฺถิํ อุปฺปกฺกํ โอกิลินิํ โอกิรินิํ เวหาสํ คจฺฉนฺติํ. สา สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอสา, ภิกฺขเว, อิตฺถี กาลิงฺคสฺส รญฺโญ อคฺคมเหสี อโหสิ. สา อิสฺสาปกตา สปตฺติํ องฺคารกฏาเหน โอกิริ …เป… . (50)
 </Paragraph>
 
 <Paragraph number="760" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ อสีสกํ กพนฺธํ เวหาสํ คจฺฉนฺตํ. ตสฺส อุเร อกฺขีนิ เจว โหนฺติ มุขญฺจ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมึเยว ราชคเห หาริโก นาม โจรฆาตโก อโหสิ …เป… . (51)
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ อสีสกํ กพนฺธํ เวหาสํ คจฺฉนฺตํ. ตสฺส อุเร อกฺขีนิ เจว โหนฺติ มุขญฺจ. ตเมนํ คิชฺฌาปิ กากาปิ กุลลาปิ อนุปติตฺวา อนุปติตฺวา วิตจฺเฉนฺติ วิภชฺเชนฺติ. โส สุทํ อฏฺฏสฺสรํ กโรติ …เป…  เอโส, ภิกฺขเว, สตฺโต อิมสฺมิํเยว ราชคเห หาริโก นาม โจรฆาตโก อโหสิ …เป… . (51)
 </Paragraph>
 
 <Paragraph number="761" book="para">
@@ -235,11 +235,11 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="762" book="para">
-“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ ภิกฺขุนึ…  อทฺทสํ สิกฺขมานํ…  อทฺทสํ สามเณรํ…  อทฺทสํ สามเณรึ เวหาสํ คจฺฉนฺตึ. ตสฺสา สงฺฆาฏิปิ อาทิตฺตา สมฺปชฺชลิตา สโชติภูตา, ปตฺโตปิ อาทิตฺโต สมฺปชฺชลิโต สโชติภูโต, กายพนฺธนมฺปิ อาทิตฺตํ สมฺปชฺชลิตํ สโชติภูตํ, กาโยปิ อาทิตฺโต สมฺปชฺชลิโต สโชติภูโต. สา สุทํ อฏฺฏสฺสรํ กโรติ. ตสฺส มยฺหํ, อาวุโส, เอตทโหสิ—  ‘อจฺฉริยํ วต โภ, อพฺภุตํ วต โภ, เอวรูโปปิ นาม สตฺโต ภวิสฺสติ. เอวรูโปปิ นาม ยกฺโข ภวิสฺสติ. เอวรูโปปิ นาม อตฺตภาวปฺปฏิลาโภ ภวิสฺสตี’”ติ. ภิกฺขู อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “อุตฺตริมนุสฺสธมฺมํ อายสฺมา มหาโมคฺคลฺลาโน อุลฺลปตี”ติ.
+“อิธาหํ, อาวุโส, คิชฺฌกูฏา ปพฺพตา โอโรหนฺโต อทฺทสํ ภิกฺขุนิํ…  อทฺทสํ สิกฺขมานํ…  อทฺทสํ สามเณรํ…  อทฺทสํ สามเณริํ เวหาสํ คจฺฉนฺติํ. ตสฺสา สงฺฆาฏิปิ อาทิตฺตา สมฺปชฺชลิตา สโชติภูตา, ปตฺโตปิ อาทิตฺโต สมฺปชฺชลิโต สโชติภูโต, กายพนฺธนมฺปิ อาทิตฺตํ สมฺปชฺชลิตํ สโชติภูตํ, กาโยปิ อาทิตฺโต สมฺปชฺชลิโต สโชติภูโต. สา สุทํ อฏฺฏสฺสรํ กโรติ. ตสฺส มยฺหํ, อาวุโส, เอตทโหสิ—  ‘อจฺฉริยํ วต โภ, อพฺภุตํ วต โภ, เอวรูโปปิ นาม สตฺโต ภวิสฺสติ. เอวรูโปปิ นาม ยกฺโข ภวิสฺสติ. เอวรูโปปิ นาม อตฺตภาวปฺปฏิลาโภ ภวิสฺสตี’”ติ. ภิกฺขู อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “อุตฺตริมนุสฺสธมฺมํ อายสฺมา มหาโมคฺคลฺลาโน อุลฺลปตี”ติ.
 </Paragraph>
 
 <Paragraph number="763" book="para">
-อถ โข ภควา ภิกฺขู อามนฺเตสิ—  “จกฺขุภูตา วต, ภิกฺขเว, สาวกา วิหรนฺติ. ญาณภูตา วต, ภิกฺขเว, สาวกา วิหรนฺติ. ยตฺร หิ นาม สาวโก เอวรูปํ ญสฺสติ วา ทกฺขติ วา สกฺขึ วา กริสฺสติ. ปุพฺเพว เม สา, ภิกฺขเว, สามเณรี ทิฏฺฐา อโหสิ. อปิ จาหํ น พฺยากาสึ. อหญฺเจตํ พฺยากเรยฺยํ ปเร จ เม น สทฺทเหยฺยุํ. เย เม น สทฺทเหยฺยุํ เตสํ ตํ อสฺส ทีฆรตฺตํ อหิตาย ทุกฺขาย. เอสา, ภิกฺขเว, สามเณรี กสฺสปสฺส สมฺมาสมฺพุทฺธสฺส ปาวจเน ปาปสามเณรี อโหสิ. สา ตสฺส กมฺมสฺส วิปาเกน พหูนิ วสฺสานิ พหูนิ วสฺสสตานิ พหูนิ วสฺสสหสฺสานิ พหูนิ วสฺสสตสหสฺสานิ นิรเย ปจฺจิตฺวา ตเสฺสว กมฺมสฺส วิปากาวเสเสน เอวรูปํ อตฺตภาวปฺปฏิลาภํ ปฏิสํเวเทติ. สจฺจํ, ภิกฺขเว, โมคฺคลฺลาโน อาห. อนาปตฺติ, ภิกฺขเว, โมคฺคลฺลานสฺสา”ติ. (53–56)
+อถ โข ภควา ภิกฺขู อามนฺเตสิ—  “จกฺขุภูตา วต, ภิกฺขเว, สาวกา วิหรนฺติ. ญาณภูตา วต, ภิกฺขเว, สาวกา วิหรนฺติ. ยตฺร หิ นาม สาวโก เอวรูปํ ญสฺสติ วา ทกฺขติ วา สกฺขิํ วา กริสฺสติ. ปุพฺเพว เม สา, ภิกฺขเว, สามเณรี ทิฏฺฐา อโหสิ. อปิ จาหํ น พฺยากาสิํ. อหญฺเจตํ พฺยากเรยฺยํ ปเร จ เม น สทฺทเหยฺยุํ. เย เม น สทฺทเหยฺยุํ เตสํ ตํ อสฺส ทีฆรตฺตํ อหิตาย ทุกฺขาย. เอสา, ภิกฺขเว, สามเณรี กสฺสปสฺส สมฺมาสมฺพุทฺธสฺส ปาวจเน ปาปสามเณรี อโหสิ. สา ตสฺส กมฺมสฺส วิปาเกน พหูนิ วสฺสานิ พหูนิ วสฺสสตานิ พหูนิ วสฺสสหสฺสานิ พหูนิ วสฺสสตสหสฺสานิ นิรเย ปจฺจิตฺวา ตเสฺสว กมฺมสฺส วิปากาวเสเสน เอวรูปํ อตฺตภาวปฺปฏิลาภํ ปฏิสํเวเทติ. สจฺจํ, ภิกฺขเว, โมคฺคลฺลาโน อาห. อนาปตฺติ, ภิกฺขเว, โมคฺคลฺลานสฺสา”ติ. (53–56)
 </Paragraph>
 
 </Division>
@@ -250,14 +250,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="765" book="para">
-เตน โข ปน สมเยน ราชา มาคโธ เสนิโย พิมฺพิสาโร ลิจฺฉวีหิ สทฺธึ สงฺคาเมนฺโต ปภคฺโค อโหสิ. อถ ราชา ปจฺฉา เสนํ สงฺกฑฺฒิตฺวา ลิจฺฉวโย ปราเชสิ. สงฺคาเม จ นนฺที จรติ—  “รญฺญา ลิจฺฉวี ปภคฺคา”ติ. อถ โข อายสฺมา มหาโมคฺคลฺลาโน ภิกฺขู อามนฺเตสิ—  “ราชา, อาวุโส, ลิจฺฉวีหิ ปภคฺโค”ติ. ภิกฺขู อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา มหาโมคฺคลฺลาโน เอวํ วกฺขติ—  ‘ราชา, อาวุโส, ลิจฺฉวีหิ ปภคฺโค’ติ. สงฺคาเม จ นนฺที จรติ—  ‘รญฺญา ลิจฺฉวี ปภคฺคา’ติ. อุตฺตริมนุสฺสธมฺมํ อายสฺมา มหาโมคฺคลฺลาโน อุลฺลปตี”ติ. ภควโต เอตมตฺถํ อาโรเจสุํ. “ปฐมํ, ภิกฺขเว, ราชา ลิจฺฉวีหิ ปภคฺโค. อถ ราชา ปจฺฉา เสนํ สงฺกฑฺฒิตฺวา ลิจฺฉวโย ปราเชสิ. สจฺจํ, ภิกฺขเว, โมคฺคลฺลาโน อาห. อนาปตฺติ, ภิกฺขเว, โมคฺคลฺลานสฺสา”ติ. (58)
+เตน โข ปน สมเยน ราชา มาคโธ เสนิโย พิมฺพิสาโร ลิจฺฉวีหิ สทฺธิํ สงฺคาเมนฺโต ปภคฺโค อโหสิ. อถ ราชา ปจฺฉา เสนํ สงฺกฑฺฒิตฺวา ลิจฺฉวโย ปราเชสิ. สงฺคาเม จ นนฺที จรติ—  “รญฺญา ลิจฺฉวี ปภคฺคา”ติ. อถ โข อายสฺมา มหาโมคฺคลฺลาโน ภิกฺขู อามนฺเตสิ—  “ราชา, อาวุโส, ลิจฺฉวีหิ ปภคฺโค”ติ. ภิกฺขู อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา มหาโมคฺคลฺลาโน เอวํ วกฺขติ—  ‘ราชา, อาวุโส, ลิจฺฉวีหิ ปภคฺโค’ติ. สงฺคาเม จ นนฺที จรติ—  ‘รญฺญา ลิจฺฉวี ปภคฺคา’ติ. อุตฺตริมนุสฺสธมฺมํ อายสฺมา มหาโมคฺคลฺลาโน อุลฺลปตี”ติ. ภควโต เอตมตฺถํ อาโรเจสุํ. “ปฐมํ, ภิกฺขเว, ราชา ลิจฺฉวีหิ ปภคฺโค. อถ ราชา ปจฺฉา เสนํ สงฺกฑฺฒิตฺวา ลิจฺฉวโย ปราเชสิ. สจฺจํ, ภิกฺขเว, โมคฺคลฺลาโน อาห. อนาปตฺติ, ภิกฺขเว, โมคฺคลฺลานสฺสา”ติ. (58)
 </Paragraph>
 
 </Division>
 <Division number="232" book="para">
 
 <Paragraph number="766" book="para">
-อถ โข อายสฺมา มหาโมคฺคลฺลาโน ภิกฺขู อามนฺเตสิ—  “อิธาหํ, อาวุโส, สปฺปินิกาย นทิยา ตีเร อาเนญฺชํ สมาธึ สมาปนฺโน นาคานํ โอคยฺห อุตฺตรนฺตานํ โกญฺจํ กโรนฺตานํ สทฺทํ อโสฺสสินฺ”ติ. ภิกฺขู อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา มหาโมคฺคลฺลาโน อาเนญฺชํ สมาธึ สมาปนฺโน สทฺทํ โสสฺสติ. อุตฺตริมนุสฺสธมฺมํ อายสฺมา มหาโมคฺคลฺลาโน อุลฺลปตี”ติ. ภควโต เอตมตฺถํ อาโรเจสุํ. “อตฺเถโส, ภิกฺขเว, สมาธิ โส จ โข อปริสุทฺโธ. สจฺจํ, ภิกฺขเว, โมคฺคลฺลาโน อาห. อนาปตฺติ, ภิกฺขเว, โมคฺคลฺลานสฺสา”ติ. (59)
+อถ โข อายสฺมา มหาโมคฺคลฺลาโน ภิกฺขู อามนฺเตสิ—  “อิธาหํ, อาวุโส, สปฺปินิกาย นทิยา ตีเร อาเนญฺชํ สมาธิํ สมาปนฺโน นาคานํ โอคยฺห อุตฺตรนฺตานํ โกญฺจํ กโรนฺตานํ สทฺทํ อโสฺสสินฺ”ติ. ภิกฺขู อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา มหาโมคฺคลฺลาโน อาเนญฺชํ สมาธิํ สมาปนฺโน สทฺทํ โสสฺสติ. อุตฺตริมนุสฺสธมฺมํ อายสฺมา มหาโมคฺคลฺลาโน อุลฺลปตี”ติ. ภควโต เอตมตฺถํ อาโรเจสุํ. “อตฺเถโส, ภิกฺขเว, สมาธิ โส จ โข อปริสุทฺโธ. สจฺจํ, ภิกฺขเว, โมคฺคลฺลาโน อาห. อนาปตฺติ, ภิกฺขเว, โมคฺคลฺลานสฺสา”ติ. (59)
 </Paragraph>
 
 <Paragraph number="767" book="para">
@@ -275,7 +275,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="233" book="para">
 
 <Paragraph number="769" book="para">
-อุทฺทิฏฺฐา โข อายสฺมนฺโต จตฺตาโร ปาราชิกา ธมฺมา, เยสํ ภิกฺขุ อญฺญตรํ วา อญฺญตรํ วา อาปชฺชิตฺวา น ลภติ ภิกฺขูหิ สทฺธึ สํวาสํ, ยถา ปุเร ตถา ปจฺฉา, ปาราชิโก โหติ อสํวาโส. ตตฺถายสฺมนฺเต ปุจฺฉามิ—  “กจฺจิตฺถ ปริสุทฺธา”? ทุติยมฺปิ ปุจฺฉามิ—  “กจฺจิตฺถ ปริสุทฺธา”? ตติยมฺปิ ปุจฺฉามิ—  “กจฺจิตฺถ ปริสุทฺธา”? ปริสุทฺเธตฺถายสฺมนฺโต, ตสฺมา ตุณฺหี, เอวเมตํ ธารยามีติ.
+อุทฺทิฏฺฐา โข อายสฺมนฺโต จตฺตาโร ปาราชิกา ธมฺมา, เยสํ ภิกฺขุ อญฺญตรํ วา อญฺญตรํ วา อาปชฺชิตฺวา น ลภติ ภิกฺขูหิ สทฺธิํ สํวาสํ, ยถา ปุเร ตถา ปจฺฉา, ปาราชิโก โหติ อสํวาโส. ตตฺถายสฺมนฺเต ปุจฺฉามิ—  “กจฺจิตฺถ ปริสุทฺธา”? ทุติยมฺปิ ปุจฺฉามิ—  “กจฺจิตฺถ ปริสุทฺธา”? ตติยมฺปิ ปุจฺฉามิ—  “กจฺจิตฺถ ปริสุทฺธา”? ปริสุทฺเธตฺถายสฺมนฺโต, ตสฺมา ตุณฺหี, เอวเมตํ ธารยามีติ.
 
 </Paragraph>
 </Division>
