--- a/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-1.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-2/1-2-1.mdx
@@ -32,21 +32,21 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="234" book="para">
 
 <Paragraph number="775" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา เสยฺยสโก อนภิรโต พฺรหฺมจริยํ จรติ. โส เตน กิโส โหติ ลูโข ทุพฺพณฺโณ อุปฺปณฺฑุปฺปณฺฑุกชาโต ธมนิสนฺถตคตฺโต. อทฺทส โข อายสฺมา อุทายี อายสฺมนฺตํ เสยฺยสกํ กิสํ ลูขํ ทุพฺพณฺณํ อุปฺปณฺฑุปฺปณฺฑุกชาตํ ธมนิสนฺถตคตฺตํ. ทิสฺวาน อายสฺมนฺตํ เสยฺยสกํ เอตทโวจ—  “กิสฺส ตฺวํ, อาวุโส เสยฺยสก, กิโส ลูโข ทุพฺพณฺโณ อุปฺปณฺฑุปฺปณฺฑุกชาโต ธมนิสนฺถตคตฺโต? กจฺจิ โน ตฺวํ, อาวุโส เสยฺยสก, อนภิรโต พฺรหฺมจริยํ จรสี”ติ? “เอวมาวุโส”ติ. “เตน หิ ตฺวํ, อาวุโส เสยฺยสก, ยาวทตฺถํ ภุญฺช ยาวทตฺถํ สุป ยาวทตฺถํ นฺหาย. ยาวทตฺถํ ภุญฺชิตฺวา ยาวทตฺถํ สุปิตฺวา ยาวทตฺถํ นฺหายิตฺวา ยทา เต อนภิรติ อุปฺปชฺชติ ราโค จิตฺตํ อนุทฺธํเสติ ตทา หตฺเถน อุปกฺกมิตฺวา อสุจึ โมเจหี”ติ. “กึ นุ โข, อาวุโส, กปฺปติ เอวรูปํ กาตุนฺ”ติ? “อาม, อาวุโส. อหมฺปิ เอวํ กโรมี”ติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน อายสฺมา เสยฺยสโก อนภิรโต พฺรหฺมจริยํ จรติ. โส เตน กิโส โหติ ลูโข ทุพฺพณฺโณ อุปฺปณฺฑุปฺปณฺฑุกชาโต ธมนิสนฺถตคตฺโต. อทฺทส โข อายสฺมา อุทายี อายสฺมนฺตํ เสยฺยสกํ กิสํ ลูขํ ทุพฺพณฺณํ อุปฺปณฺฑุปฺปณฺฑุกชาตํ ธมนิสนฺถตคตฺตํ. ทิสฺวาน อายสฺมนฺตํ เสยฺยสกํ เอตทโวจ—  “กิสฺส ตฺวํ, อาวุโส เสยฺยสก, กิโส ลูโข ทุพฺพณฺโณ อุปฺปณฺฑุปฺปณฺฑุกชาโต ธมนิสนฺถตคตฺโต? กจฺจิ โน ตฺวํ, อาวุโส เสยฺยสก, อนภิรโต พฺรหฺมจริยํ จรสี”ติ? “เอวมาวุโส”ติ. “เตน หิ ตฺวํ, อาวุโส เสยฺยสก, ยาวทตฺถํ ภุญฺช ยาวทตฺถํ สุป ยาวทตฺถํ นฺหาย. ยาวทตฺถํ ภุญฺชิตฺวา ยาวทตฺถํ สุปิตฺวา ยาวทตฺถํ นฺหายิตฺวา ยทา เต อนภิรติ อุปฺปชฺชติ ราโค จิตฺตํ อนุทฺธํเสติ ตทา หตฺเถน อุปกฺกมิตฺวา อสุจิํ โมเจหี”ติ. “กิํ นุ โข, อาวุโส, กปฺปติ เอวรูปํ กาตุนฺ”ติ? “อาม, อาวุโส. อหมฺปิ เอวํ กโรมี”ติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="776" book="para">
-อถ โข อายสฺมา เสยฺยสโก ยาวทตฺถํ ภุญฺชิ ยาวทตฺถํ สุปิ ยาวทตฺถํ นฺหายิ. ยาวทตฺถํ ภุญฺชิตฺวา ยาวทตฺถํ สุปิตฺวา ยาวทตฺถํ นฺหายิตฺวา ยทา อนภิรติ อุปฺปชฺชติ ราโค จิตฺตํ อนุทฺธํเสติ ตทา หตฺเถน อุปกฺกมิตฺวา อสุจึ โมเจสิ. อถ โข อายสฺมา เสยฺยสโก อปเรน สมเยน วณฺณวา อโหสิ ปีณินฺทฺริโย ปสนฺนมุขวณฺโณ วิปฺปสนฺนฉวิวณฺโณ. อถ โข อายสฺมโต เสยฺยสกสฺส สหายกา ภิกฺขู อายสฺมนฺตํ เสยฺยสกํ เอตทโวจุํ—  “ปุพฺเพ โข ตฺวํ, อาวุโส เสยฺยสก, กิโส อโหสิ ลูโข ทุพฺพณฺโณ อุปฺปณฺฑุปฺปณฺฑุกชาโต ธมนิสนฺถตคตฺโต. โส ทานิ ตฺวํ เอตรหิ วณฺณวา ปีณินฺทฺริโย ปสนฺนมุขวณฺโณ วิปฺปสนฺนฉวิวณฺโณ. กึ นุ โข ตฺวํ, อาวุโส เสยฺยสก, เภสชฺชํ กโรสี”ติ? “น โข อหํ, อาวุโส, เภสชฺชํ กโรมิ. อปิ จาหํ ยาวทตฺถํ ภุญฺชามิ ยาวทตฺถํ สุปามิ ยาวทตฺถํ นฺหายามิ. ยาวทตฺถํ ภุญฺชิตฺวา ยาวทตฺถํ สุปิตฺวา ยาวทตฺถํ นฺหายิตฺวา ยทา เม อนภิรติ อุปฺปชฺชติ ราโค จิตฺตํ อนุทฺธํเสติ ตทา หตฺเถน อุปกฺกมิตฺวา อสุจึ โมเจมี”ติ. “กึ ปน ตฺวํ, อาวุโส เสยฺยสก, เยเนว หตฺเถน สทฺธาเทยฺยํ ภุญฺชสิ เตเนว หตฺเถน อุปกฺกมิตฺวา อสุจึ โมเจสี”ติ? “เอวมาวุโส”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา เสยฺยสโก หตฺเถน อุปกฺกมิตฺวา อสุจึ โมเจสฺสตี”ติ.
+อถ โข อายสฺมา เสยฺยสโก ยาวทตฺถํ ภุญฺชิ ยาวทตฺถํ สุปิ ยาวทตฺถํ นฺหายิ. ยาวทตฺถํ ภุญฺชิตฺวา ยาวทตฺถํ สุปิตฺวา ยาวทตฺถํ นฺหายิตฺวา ยทา อนภิรติ อุปฺปชฺชติ ราโค จิตฺตํ อนุทฺธํเสติ ตทา หตฺเถน อุปกฺกมิตฺวา อสุจิํ โมเจสิ. อถ โข อายสฺมา เสยฺยสโก อปเรน สมเยน วณฺณวา อโหสิ ปีณินฺทฺริโย ปสนฺนมุขวณฺโณ วิปฺปสนฺนฉวิวณฺโณ. อถ โข อายสฺมโต เสยฺยสกสฺส สหายกา ภิกฺขู อายสฺมนฺตํ เสยฺยสกํ เอตทโวจุํ—  “ปุพฺเพ โข ตฺวํ, อาวุโส เสยฺยสก, กิโส อโหสิ ลูโข ทุพฺพณฺโณ อุปฺปณฺฑุปฺปณฺฑุกชาโต ธมนิสนฺถตคตฺโต. โส ทานิ ตฺวํ เอตรหิ วณฺณวา ปีณินฺทฺริโย ปสนฺนมุขวณฺโณ วิปฺปสนฺนฉวิวณฺโณ. กิํ นุ โข ตฺวํ, อาวุโส เสยฺยสก, เภสชฺชํ กโรสี”ติ? “น โข อหํ, อาวุโส, เภสชฺชํ กโรมิ. อปิ จาหํ ยาวทตฺถํ ภุญฺชามิ ยาวทตฺถํ สุปามิ ยาวทตฺถํ นฺหายามิ. ยาวทตฺถํ ภุญฺชิตฺวา ยาวทตฺถํ สุปิตฺวา ยาวทตฺถํ นฺหายิตฺวา ยทา เม อนภิรติ อุปฺปชฺชติ ราโค จิตฺตํ อนุทฺธํเสติ ตทา หตฺเถน อุปกฺกมิตฺวา อสุจิํ โมเจมี”ติ. “กิํ ปน ตฺวํ, อาวุโส เสยฺยสก, เยเนว หตฺเถน สทฺธาเทยฺยํ ภุญฺชสิ เตเนว หตฺเถน อุปกฺกมิตฺวา อสุจิํ โมเจสี”ติ? “เอวมาวุโส”ติ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา เสยฺยสโก หตฺเถน อุปกฺกมิตฺวา อสุจิํ โมเจสฺสตี”ติ.
 
 
 
 </Paragraph>
 
 <Paragraph number="777" book="para">
-อถ โข เต ภิกฺขู อายสฺมนฺตํ เสยฺยสกํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ เสยฺยสกํ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, เสยฺยสก, หตฺเถน อุปกฺกมิตฺวา อสุจึ โมเจสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริส, อนนุโลมิกํ อปฺปติรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตฺวํ, โมฆปุริส, หตฺเถน อุปกฺกมิตฺวา อสุจึ โมเจสฺสสิ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน วิราคาย ธมฺโม เทสิโต โน สราคาย, วิสญฺโญคาย ธมฺโม เทสิโต โน สญฺโญคาย, อนุปาทานาย ธมฺโม เทสิโต โน เสาปาทานาย. ตตฺถ นาม ตฺวํ, โมฆปุริส, มยา วิราคาย ธมฺเม เทสิเต สราคาย เจเตสฺสสิ, วิสญฺโญคาย ธมฺเม เทสิเต สญฺโญคาย เจเตสฺสสิ, อนุปาทานาย ธมฺเม เทสิเต เสาปาทานาย เจเตสฺสสิ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน ราควิราคาย ธมฺโม เทสิโต, มทนิมฺมทนาย ปิปาสวินยาย อาลยสมุคฺฆาตาย วฏฺฏุปจฺเฉทาย ตณฺหากฺขยาย วิราคาย นิโรธาย นิพฺพานาย ธมฺโม เทสิโต? นนุ มยา, โมฆปุริส, อเนกปริยาเยน กามานํ ปหานํ อกฺขาตํ, กามสญฺญานํ ปริญฺญา อกฺขาตา, กามปิปาสานํ ปฏิวินโย อกฺขาโต, กามวิตกฺกานํ สมุคฺฆาโต อกฺขาโต, กามปริฬาหานํ วูปสโม อกฺขาโต? เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย, ปสนฺนานํ วา ภิโยฺยภาวาย. อถ เขฺวตํ, โมฆปุริส, อปฺปสนฺนานญฺเจว อปฺปสาทาย, ปสนฺนานญฺจ เอกจฺจานํ อญฺญถตฺตายา”ติ. อถ โข ภควา อายสฺมนฺตํ เสยฺยสกํ อเนกปริยาเยน วิครหิตฺวา ทุพฺภรตาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข เต ภิกฺขู อายสฺมนฺตํ เสยฺยสกํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ภิกฺขุสํฆํ สนฺนิปาตาเปตฺวา อายสฺมนฺตํ เสยฺยสกํ ปฏิปุจฺฉิ—  “สจฺจํ กิร ตฺวํ, เสยฺยสก, หตฺเถน อุปกฺกมิตฺวา อสุจิํ โมเจสี”ติ? “สจฺจํ, ภควา”ติ. วิครหิ พุทฺโธ ภควา—  “อนนุจฺฉวิกํ, โมฆปุริส, อนนุโลมิกํ อปฺปติรูปํ อสฺสามณกํ อกปฺปิยํ อกรณียํ. กถญฺหิ นาม ตฺวํ, โมฆปุริส, หตฺเถน อุปกฺกมิตฺวา อสุจิํ โมเจสฺสสิ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน วิราคาย ธมฺโม เทสิโต โน สราคาย, วิสญฺโญคาย ธมฺโม เทสิโต โน สญฺโญคาย, อนุปาทานาย ธมฺโม เทสิโต โน เสาปาทานาย. ตตฺถ นาม ตฺวํ, โมฆปุริส, มยา วิราคาย ธมฺเม เทสิเต สราคาย เจเตสฺสสิ, วิสญฺโญคาย ธมฺเม เทสิเต สญฺโญคาย เจเตสฺสสิ, อนุปาทานาย ธมฺเม เทสิเต เสาปาทานาย เจเตสฺสสิ. นนุ มยา, โมฆปุริส, อเนกปริยาเยน ราควิราคาย ธมฺโม เทสิโต, มทนิมฺมทนาย ปิปาสวินยาย อาลยสมุคฺฆาตาย วฏฺฏุปจฺเฉทาย ตณฺหากฺขยาย วิราคาย นิโรธาย นิพฺพานาย ธมฺโม เทสิโต? นนุ มยา, โมฆปุริส, อเนกปริยาเยน กามานํ ปหานํ อกฺขาตํ, กามสญฺญานํ ปริญฺญา อกฺขาตา, กามปิปาสานํ ปฏิวินโย อกฺขาโต, กามวิตกฺกานํ สมุคฺฆาโต อกฺขาโต, กามปริฬาหานํ วูปสโม อกฺขาโต? เนตํ, โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย, ปสนฺนานํ วา ภิโยฺยภาวาย. อถ เขฺวตํ, โมฆปุริส, อปฺปสนฺนานญฺเจว อปฺปสาทาย, ปสนฺนานญฺจ เอกจฺจานํ อญฺญถตฺตายา”ติ. อถ โข ภควา อายสฺมนฺตํ เสยฺยสกํ อเนกปริยาเยน วิครหิตฺวา ทุพฺภรตาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 
 
 
@@ -70,7 +70,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="235" book="para">
 
 <Paragraph number="780" book="para">
-เตน โข ปน สมเยน ภิกฺขู ปณีตโภชนานิ ภุญฺชิตฺวา มุฏฺฐสฺสตี อสมฺปชานา นิทฺทํ โอกฺกมนฺติ. เตสํ มุฏฺฐสฺสตีนํ อสมฺปชานานํ นิทฺทํ โอกฺกมนฺตานํ สุปินนฺเตน อสุจิ มุจฺจติ. เตสํ กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ—  ‘สญฺเจตนิกา สุกฺกวิสฺสฏฺฐิ สํฆาทิเสโส’ติ. อมฺหากญฺจ สุปินนฺเตน อสุจิ มุจฺจติ. อตฺถิ เจตฺถ เจตนา ลพฺภติ. กจฺจิ นุ โข มยํ สํฆาทิเสสํ อาปตฺตึ อาปนฺนา”ติ? ภควโต เอตมตฺถํ อาโรเจสุํ. “อตฺเถสา, ภิกฺขเว, เจตนา; สา จ โข อพฺโพหาริกาติ. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+เตน โข ปน สมเยน ภิกฺขู ปณีตโภชนานิ ภุญฺชิตฺวา มุฏฺฐสฺสตี อสมฺปชานา นิทฺทํ โอกฺกมนฺติ. เตสํ มุฏฺฐสฺสตีนํ อสมฺปชานานํ นิทฺทํ โอกฺกมนฺตานํ สุปินนฺเตน อสุจิ มุจฺจติ. เตสํ กุกฺกุจฺจํ อโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ—  ‘สญฺเจตนิกา สุกฺกวิสฺสฏฺฐิ สํฆาทิเสโส’ติ. อมฺหากญฺจ สุปินนฺเตน อสุจิ มุจฺจติ. อตฺถิ เจตฺถ เจตนา ลพฺภติ. กจฺจิ นุ โข มยํ สํฆาทิเสสํ อาปตฺติํ อาปนฺนา”ติ? ภควโต เอตมตฺถํ อาโรเจสุํ. “อตฺเถสา, ภิกฺขเว, เจตนา; สา จ โข อพฺโพหาริกาติ. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 
 
 
@@ -125,7 +125,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="787" book="para">
-อชฺฌตฺตรูเป โมเจติ, พหิทฺธารูเป โมเจติ, อชฺฌตฺตพหิทฺธารูเป โมเจติ, อากาเส กฏึ กมฺเปนฺโต โมเจติ; ราคูปตฺถมฺเภ โมเจติ, วจฺจูปตฺถมฺเภ โมเจติ, ปสฺสาวูปตฺถมฺเภ โมเจติ, วาตูปตฺถมฺเภ โมเจติ, อุจฺจาลิงฺคปาณกทฏฺฐูปตฺถมฺเภ โมเจติ; อาโรคฺยตฺถาย โมเจติ, สุขตฺถาย โมเจติ, เภสชฺชตฺถาย โมเจติ, ทานตฺถาย โมเจติ, ปุญฺญตฺถาย โมเจติ, ยญฺญตฺถาย โมเจติ, สคฺคตฺถาย โมเจติ, พีชตฺถาย โมเจติ, วีมํสตฺถาย โมเจติ, ทวตฺถาย โมเจติ; นีลํ โมเจติ, ปีตกํ โมเจติ, โลหิตกํ โมเจติ, โอทาตํ โมเจติ, ตกฺกวณฺณํ โมเจติ, ทกวณฺณํ โมเจติ, เตลวณฺณํ โมเจติ, ขีรวณฺณํ โมเจติ, ทธิวณฺณํ โมเจติ, สปฺปิวณฺณํ โมเจติ.
+อชฺฌตฺตรูเป โมเจติ, พหิทฺธารูเป โมเจติ, อชฺฌตฺตพหิทฺธารูเป โมเจติ, อากาเส กฏิํ กมฺเปนฺโต โมเจติ; ราคูปตฺถมฺเภ โมเจติ, วจฺจูปตฺถมฺเภ โมเจติ, ปสฺสาวูปตฺถมฺเภ โมเจติ, วาตูปตฺถมฺเภ โมเจติ, อุจฺจาลิงฺคปาณกทฏฺฐูปตฺถมฺเภ โมเจติ; อาโรคฺยตฺถาย โมเจติ, สุขตฺถาย โมเจติ, เภสชฺชตฺถาย โมเจติ, ทานตฺถาย โมเจติ, ปุญฺญตฺถาย โมเจติ, ยญฺญตฺถาย โมเจติ, สคฺคตฺถาย โมเจติ, พีชตฺถาย โมเจติ, วีมํสตฺถาย โมเจติ, ทวตฺถาย โมเจติ; นีลํ โมเจติ, ปีตกํ โมเจติ, โลหิตกํ โมเจติ, โอทาตํ โมเจติ, ตกฺกวณฺณํ โมเจติ, ทกวณฺณํ โมเจติ, เตลวณฺณํ โมเจติ, ขีรวณฺณํ โมเจติ, ทธิวณฺณํ โมเจติ, สปฺปิวณฺณํ โมเจติ.
 
 
 
@@ -156,7 +156,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="791" book="para">
-<Emphasis>อากาเส กฏึ กมฺเปนฺโต</Emphasis>ติ อากาเส วายมนฺตสฺส องฺคชาตํ กมฺมนิยํ โหติ.
+<Emphasis>อากาเส กฏิํ กมฺเปนฺโต</Emphasis>ติ อากาเส วายมนฺตสฺส องฺคชาตํ กมฺมนิยํ โหติ.
 
 
 
@@ -295,7 +295,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="810" book="para">
-อากาเส กฏึ กมฺเปนฺโต เจเตติ อุปกฺกมติ มุจฺจติ, อาปตฺติ สํฆาทิเสสสฺส.
+อากาเส กฏิํ กมฺเปนฺโต เจเตติ อุปกฺกมติ มุจฺจติ, อาปตฺติ สํฆาทิเสสสฺส.
 
 
 
