--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-1.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-1.mdx
@@ -17,7 +17,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 
 
 <Paragraph number="1861" type="center" book="para">
-อิเม โข ปนายสฺมนฺโต ตึส นิสฺสคฺคิยา ปาจิตฺติยา
+อิเม โข ปนายสฺมนฺโต ติํส นิสฺสคฺคิยา ปาจิตฺติยา
 
   
 ธมฺมา อุทฺเทสํ อาคจฺฉนฺติ.
@@ -50,14 +50,14 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="461" book="para">
 
 <Paragraph number="1866" book="para">
-เตน โข ปน สมเยน อายสฺมโต อานนฺทสฺส อติเรกจีวรํ อุปฺปนฺนํ โหติ. อายสฺมา จ อานนฺโท ตํ จีวรํ อายสฺมโต สาริปุตฺตสฺส ทาตุกาโม โหติ. อายสฺมา จ สาริปุตฺโต สาเกเต วิหรติ. อถ โข อายสฺมโต อานนฺทสฺส เอตทโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ—  ‘น อติเรกจีวรํ ธาเรตพฺพนฺ’ติ. อิทญฺจ เม อติเรกจีวรํ อุปฺปนฺนํ. อหญฺจิมํ จีวรํ อายสฺมโต สาริปุตฺตสฺส ทาตุกาโม. อายสฺมา จ สาริปุตฺโต สาเกเต วิหรติ. กถํ นุ โข มยา ปฏิปชฺชิตพฺพนฺ”ติ? อถ โข อายสฺมา อานนฺโท ภควโต เอตมตฺถํ อาโรเจสิ. “กีวจิรํ ปนานนฺท, สาริปุตฺโต อาคจฺฉิสฺสตี”ติ? “นวมํ วา, ภควา, ทิวสํ ทสมํ วา”ติ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, ทสาหปรมํ อติเรกจีวรํ ธาเรตุํ. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+เตน โข ปน สมเยน อายสฺมโต อานนฺทสฺส อติเรกจีวรํ อุปฺปนฺนํ โหติ. อายสฺมา จ อานนฺโท ตํ จีวรํ อายสฺมโต สาริปุตฺตสฺส ทาตุกาโม โหติ. อายสฺมา จ สาริปุตฺโต สาเกเต วิหรติ. อถ โข อายสฺมโต อานนฺทสฺส เอตทโหสิ—  “ภควตา สิกฺขาปทํ ปญฺญตฺตํ—  ‘น อติเรกจีวรํ ธาเรตพฺพนฺ’ติ. อิทญฺจ เม อติเรกจีวรํ อุปฺปนฺนํ. อหญฺจิมํ จีวรํ อายสฺมโต สาริปุตฺตสฺส ทาตุกาโม. อายสฺมา จ สาริปุตฺโต สาเกเต วิหรติ. กถํ นุ โข มยา ปฏิปชฺชิตพฺพนฺ”ติ? อถ โข อายสฺมา อานนฺโท ภควโต เอตมตฺถํ อาโรเจสิ. “กีวจิรํ ปนานนฺท, สาริปุตฺโต อาคจฺฉิสฺสตี”ติ? “นวมํ วา, ภควา, ทิวสํ ทสมํ วา”ติ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, ทสาหปรมํ อติเรกจีวรํ ธาเรตุํ. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 </Paragraph>
 
 </Division>
 <Division number="462" book="para">
 
 <Paragraph number="1867" book="para">
-<Emphasis>“นิฏฺฐิตจีวรสฺมึ ภิกฺขุนา อุพฺภตสฺมึ กถิเน ทสาหปรมํ อติเรกจีวรํ ธาเรตพฺพํ. ตํ อติกฺกามยโต นิสฺสคฺคิยํ ปาจิตฺติยนฺ”</Emphasis>ติ. (*1*:<Emphasis>20</Emphasis>)
+<Emphasis>“นิฏฺฐิตจีวรสฺมิํ ภิกฺขุนา อุพฺภตสฺมิํ กถิเน ทสาหปรมํ อติเรกจีวรํ ธาเรตพฺพํ. ตํ อติกฺกามยโต นิสฺสคฺคิยํ ปาจิตฺติยนฺ”</Emphasis>ติ. (*1*:<Emphasis>20</Emphasis>)
 </Paragraph>
 
 </Division>
@@ -68,7 +68,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1869" book="para">
-<Emphasis>อุพฺภตสฺมึ กถิเน</Emphasis>ติ อฏฺฐนฺนํ มาติกานํ อญฺญตราย มาติกาย อุพฺภตํ โหติ, สํเฆน วา อนฺตรา อุพฺภตํ โหติ.
+<Emphasis>อุพฺภตสฺมิํ กถิเน</Emphasis>ติ อฏฺฐนฺนํ มาติกานํ อญฺญตราย มาติกาย อุพฺภตํ โหติ, สํเฆน วา อนฺตรา อุพฺภตํ โหติ.
 </Paragraph>
 
 <Paragraph number="1870" book="para">
@@ -84,7 +84,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1873" book="para">
-<Emphasis>ตํ อติกฺกามยโต นิสฺสคฺคิยํ โหตีติ</Emphasis> เอกาทเส อรุณุคฺคมเน นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ. เตน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อิทํ เม, ภนฺเต, จีวรํ ทสาหาติกฺกนฺตํ นิสฺสคฺคิยํ, อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา. นิสฺสฏฺฐจีวรํ ทาตพฺพํ—
+<Emphasis>ตํ อติกฺกามยโต นิสฺสคฺคิยํ โหตีติ</Emphasis> เอกาทเส อรุณุคฺคมเน นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ. เตน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อิทํ เม, ภนฺเต, จีวรํ ทสาหาติกฺกนฺตํ นิสฺสคฺคิยํ, อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา. นิสฺสฏฺฐจีวรํ ทาตพฺพํ—
 </Paragraph>
 
 </Division>
@@ -98,7 +98,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="465" book="para">
 
 <Paragraph number="1875" book="para">
-เตน ภิกฺขุนา สมฺพหุเล ภิกฺขู อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺสุ วจนียา—  “อิทํ เม, ภนฺเต, จีวรํ ทสาหาติกฺกนฺตํ นิสฺสคฺคิยํ. อิมาหํ อายสฺมนฺตานํ นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา. นิสฺสฏฺฐจีวรํ ทาตพฺพํ—
+เตน ภิกฺขุนา สมฺพหุเล ภิกฺขู อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺสุ วจนียา—  “อิทํ เม, ภนฺเต, จีวรํ ทสาหาติกฺกนฺตํ นิสฺสคฺคิยํ. อิมาหํ อายสฺมนฺตานํ นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา. นิสฺสฏฺฐจีวรํ ทาตพฺพํ—
 </Paragraph>
 
 </Division>
@@ -112,7 +112,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="467" book="para">
 
 <Paragraph number="1877" book="para">
-เตน ภิกฺขุนา เอกํ ภิกฺขุํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อิทํ เม, อาวุโส, จีวรํ ทสาหาติกฺกนฺตํ นิสฺสคฺคิยํ. อิมาหํ อายสฺมโต นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. เตน ภิกฺขุนา อาปตฺติ ปฏิคฺคเหตพฺพา. นิสฺสฏฺฐจีวรํ ทาตพฺพํ—  “อิมํ จีวรํ อายสฺมโต ทมฺมี”ติ.
+เตน ภิกฺขุนา เอกํ ภิกฺขุํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อิทํ เม, อาวุโส, จีวรํ ทสาหาติกฺกนฺตํ นิสฺสคฺคิยํ. อิมาหํ อายสฺมโต นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. เตน ภิกฺขุนา อาปตฺติ ปฏิคฺคเหตพฺพา. นิสฺสฏฺฐจีวรํ ทาตพฺพํ—  “อิมํ จีวรํ อายสฺมโต ทมฺมี”ติ.
 </Paragraph>
 
 </Division>
