--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-2.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-2.mdx
@@ -33,7 +33,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="472" book="para">
 
 <Paragraph number="1885" book="para">
-<Emphasis>“นิฏฺฐิตจีวรสฺมึ ภิกฺขุนา อุพฺภตสฺมึ กถิเน เอกรตฺตมฺปิ เจ ภิกฺขุ ติจีวเรน วิปฺปวเสยฺย, นิสฺสคฺคิยํ ปาจิตฺติยนฺ”</Emphasis>ติ.
+<Emphasis>“นิฏฺฐิตจีวรสฺมิํ ภิกฺขุนา อุพฺภตสฺมิํ กถิเน เอกรตฺตมฺปิ เจ ภิกฺขุ ติจีวเรน วิปฺปวเสยฺย, นิสฺสคฺคิยํ ปาจิตฺติยนฺ”</Emphasis>ติ.
 </Paragraph>
 
 <Paragraph number="1886" book="para">
@@ -44,18 +44,18 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="473" book="para">
 
 <Paragraph number="1887" book="para">
-เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ โกสมฺพิยํ คิลาโน โหติ. ญาตกา ตสฺส ภิกฺขุโน สนฺติเก ทูตํ ปาเหสุํ—  “อาคจฺฉตุ ภทนฺโต, มยํ, อุปฏฺฐหิสฺสามา”ติ. ภิกฺขูปิ เอวมาหํสุ—  “คจฺฉาวุโส, ญาตกา ตํ อุปฏฺฐหิสฺสนฺตี”ติ. โส เอวมาห—  “ภควตาวุโส, สิกฺขาปทํ ปญฺญตฺตํ—  ‘น ติจีวเรน วิปฺปวสิตพฺพนฺ’ติ. อหญฺจมฺหิ คิลาโน. น สกฺโกมิ ติจีวรํ อาทาย ปกฺกมิตุํ. นาหํ คมิสฺสามี”ติ. ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, คิลานสฺส ภิกฺขุโน ติจีวเรน อวิปฺปวาสสมฺมุตึ ทาตุํ. เอวญฺจ ปน, ภิกฺขเว, ทาตพฺพา. เตน คิลาเนน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  ‘อหํ, ภนฺเต, คิลาโน. น สกฺโกมิ ติจีวรํ อาทาย ปกฺกมิตุํ. โสหํ, ภนฺเต, สํฆํ ติจีวเรน อวิปฺปวาสสมฺมุตึ ยาจามี’ติ. ทุติยมฺปิ ยาจิตพฺพา. ตติยมฺปิ ยาจิตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
+เตน โข ปน สมเยน อญฺญตโร ภิกฺขุ โกสมฺพิยํ คิลาโน โหติ. ญาตกา ตสฺส ภิกฺขุโน สนฺติเก ทูตํ ปาเหสุํ—  “อาคจฺฉตุ ภทนฺโต, มยํ, อุปฏฺฐหิสฺสามา”ติ. ภิกฺขูปิ เอวมาหํสุ—  “คจฺฉาวุโส, ญาตกา ตํ อุปฏฺฐหิสฺสนฺตี”ติ. โส เอวมาห—  “ภควตาวุโส, สิกฺขาปทํ ปญฺญตฺตํ—  ‘น ติจีวเรน วิปฺปวสิตพฺพนฺ’ติ. อหญฺจมฺหิ คิลาโน. น สกฺโกมิ ติจีวรํ อาทาย ปกฺกมิตุํ. นาหํ คมิสฺสามี”ติ. ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, คิลานสฺส ภิกฺขุโน ติจีวเรน อวิปฺปวาสสมฺมุติํ ทาตุํ. เอวญฺจ ปน, ภิกฺขเว, ทาตพฺพา. เตน คิลาเนน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  ‘อหํ, ภนฺเต, คิลาโน. น สกฺโกมิ ติจีวรํ อาทาย ปกฺกมิตุํ. โสหํ, ภนฺเต, สํฆํ ติจีวเรน อวิปฺปวาสสมฺมุติํ ยาจามี’ติ. ทุติยมฺปิ ยาจิตพฺพา. ตติยมฺปิ ยาจิตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
 </Paragraph>
 
 </Division>
 <Division number="474" book="para">
 
 <Paragraph number="1888" book="para">
-‘สุณาตุ เม, ภนฺเต, สํโฆ. อยํ อิตฺถนฺนาโม ภิกฺขุ คิลาโน. น สกฺโกติ ติจีวรํ อาทาย ปกฺกมิตุํ. โส สํฆํ ติจีวเรน อวิปฺปวาสสมฺมุตึ ยาจติ. ยทิ สํฆสฺส ปตฺตกลฺลํ, สํโฆ อิตฺถนฺนามสฺส ภิกฺขุโน ติจีวเรน อวิปฺปวาสสมฺมุตึ ทเทยฺย. เอสา ญตฺติ.
+‘สุณาตุ เม, ภนฺเต, สํโฆ. อยํ อิตฺถนฺนาโม ภิกฺขุ คิลาโน. น สกฺโกติ ติจีวรํ อาทาย ปกฺกมิตุํ. โส สํฆํ ติจีวเรน อวิปฺปวาสสมฺมุติํ ยาจติ. ยทิ สํฆสฺส ปตฺตกลฺลํ, สํโฆ อิตฺถนฺนามสฺส ภิกฺขุโน ติจีวเรน อวิปฺปวาสสมฺมุติํ ทเทยฺย. เอสา ญตฺติ.
 </Paragraph>
 
 <Paragraph number="1889" book="para">
-สุณาตุ เม, ภนฺเต, สํโฆ. อยํ อิตฺถนฺนาโม ภิกฺขุ คิลาโน. น สกฺโกติ ติจีวรํ อาทาย ปกฺกมิตุํ. โส สํฆํ ติจีวเรน อวิปฺปวาสสมฺมุตึ ยาจติ. สํโฆ อิตฺถนฺนามสฺส ภิกฺขุโน ติจีวเรน อวิปฺปวาสสมฺมุตึ เทติ. ยสฺสายสฺมโต ขมติ อิตฺถนฺนามสฺส ภิกฺขุโน ติจีวเรน อวิปฺปวาสสมฺมุติยา ทานํ, โส ตุณฺหสฺส; ยสฺส นกฺขมติ, โส ภาเสยฺย.
+สุณาตุ เม, ภนฺเต, สํโฆ. อยํ อิตฺถนฺนาโม ภิกฺขุ คิลาโน. น สกฺโกติ ติจีวรํ อาทาย ปกฺกมิตุํ. โส สํฆํ ติจีวเรน อวิปฺปวาสสมฺมุติํ ยาจติ. สํโฆ อิตฺถนฺนามสฺส ภิกฺขุโน ติจีวเรน อวิปฺปวาสสมฺมุติํ เทติ. ยสฺสายสฺมโต ขมติ อิตฺถนฺนามสฺส ภิกฺขุโน ติจีวเรน อวิปฺปวาสสมฺมุติยา ทานํ, โส ตุณฺหสฺส; ยสฺส นกฺขมติ, โส ภาเสยฺย.
 </Paragraph>
 
 <Paragraph number="1890" book="para">
@@ -70,7 +70,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="475" book="para">
 
 <Paragraph number="1892" book="para">
-<Emphasis>“นิฏฺฐิตจีวรสฺมึ ภิกฺขุนา อุพฺภตสฺมึ กถิเน เอกรตฺตมฺปิ เจ ภิกฺขุ ติจีวเรน วิปฺปวเสยฺย, อญฺญตฺร ภิกฺขุสมฺมุติยา, นิสฺสคฺคิยํ ปาจิตฺติยนฺ”</Emphasis>ติ. (*2*:<Emphasis>21</Emphasis>)
+<Emphasis>“นิฏฺฐิตจีวรสฺมิํ ภิกฺขุนา อุพฺภตสฺมิํ กถิเน เอกรตฺตมฺปิ เจ ภิกฺขุ ติจีวเรน วิปฺปวเสยฺย, อญฺญตฺร ภิกฺขุสมฺมุติยา, นิสฺสคฺคิยํ ปาจิตฺติยนฺ”</Emphasis>ติ. (*2*:<Emphasis>21</Emphasis>)
 </Paragraph>
 
 </Division>
@@ -81,7 +81,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1894" book="para">
-<Emphasis>อุพฺภตสฺมึ กถิเน</Emphasis>ติ อฏฺฐนฺนํ มาติกานํ อญฺญตราย มาติกาย อุพฺภตํ โหติ, สํเฆน วา อนฺตรา อุพฺภตํ โหติ.
+<Emphasis>อุพฺภตสฺมิํ กถิเน</Emphasis>ติ อฏฺฐนฺนํ มาติกานํ อญฺญตราย มาติกาย อุพฺภตํ โหติ, สํเฆน วา อนฺตรา อุพฺภตํ โหติ.
 </Paragraph>
 
 <Paragraph number="1895" book="para">
@@ -89,7 +89,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1896" book="para">
-<Emphasis>อญฺญตฺร ภิกฺขุสมฺมุติยา</Emphasis>ติ ฐเปตฺวา ภิกฺขุสมฺมุตึ.
+<Emphasis>อญฺญตฺร ภิกฺขุสมฺมุติยา</Emphasis>ติ ฐเปตฺวา ภิกฺขุสมฺมุติํ.
 </Paragraph>
 
 <Paragraph number="1897" book="para">
@@ -107,77 +107,77 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="478" book="para">
 
 <Paragraph number="1899" book="para">
-<Emphasis>คาโม เอกูปจาโร</Emphasis> นาม เอกกุลสฺส คาโม โหติ ปริกฺขิตฺโต จ. อนฺโตคาเม จีวรํ นิกฺขิปิตฺวา อนฺโตคาเม วตฺถพฺพํ. อปริกฺขิตฺโต โหติ, ยสฺมึ ฆเร จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ ฆเร วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
+<Emphasis>คาโม เอกูปจาโร</Emphasis> นาม เอกกุลสฺส คาโม โหติ ปริกฺขิตฺโต จ. อนฺโตคาเม จีวรํ นิกฺขิปิตฺวา อนฺโตคาเม วตฺถพฺพํ. อปริกฺขิตฺโต โหติ, ยสฺมิํ ฆเร จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ ฆเร วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
 </Paragraph>
 
 </Division>
 <Division number="479" book="para">
 
 <Paragraph number="1900" book="para">
-นานากุลสฺส คาโม โหติ ปริกฺขิตฺโต จ. ยสฺมึ ฆเร จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ ฆเร วตฺถพฺพํ สภาเย วา ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ. สภายํ คจฺฉนฺเตน หตฺถปาเส จีวรํ นิกฺขิปิตฺวา สภาเย วา วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ. สภาเย จีวรํ นิกฺขิปิตฺวา สภาเย วา วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ. อปริกฺขิตฺโต โหติ, ยสฺมึ ฆเร จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ ฆเร วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
+นานากุลสฺส คาโม โหติ ปริกฺขิตฺโต จ. ยสฺมิํ ฆเร จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ ฆเร วตฺถพฺพํ สภาเย วา ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ. สภายํ คจฺฉนฺเตน หตฺถปาเส จีวรํ นิกฺขิปิตฺวา สภาเย วา วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ. สภาเย จีวรํ นิกฺขิปิตฺวา สภาเย วา วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ. อปริกฺขิตฺโต โหติ, ยสฺมิํ ฆเร จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ ฆเร วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
 </Paragraph>
 
 </Division>
 <Division number="480" book="para">
 
 <Paragraph number="1901" book="para">
-เอกกุลสฺส นิเวสนํ โหติ ปริกฺขิตฺตญฺจ, นานาคพฺภา นานาโอวรกา. อนฺโตนิเวสเน จีวรํ นิกฺขิปิตฺวา อนฺโตนิเวสเน วตฺถพฺพํ. อปริกฺขิตฺตํ โหติ, ยสฺมึ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ คพฺเภ วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
+เอกกุลสฺส นิเวสนํ โหติ ปริกฺขิตฺตญฺจ, นานาคพฺภา นานาโอวรกา. อนฺโตนิเวสเน จีวรํ นิกฺขิปิตฺวา อนฺโตนิเวสเน วตฺถพฺพํ. อปริกฺขิตฺตํ โหติ, ยสฺมิํ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ คพฺเภ วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
 </Paragraph>
 
 </Division>
 <Division number="481" book="para">
 
 <Paragraph number="1902" book="para">
-นานากุลสฺส นิเวสนํ โหติ ปริกฺขิตฺตญฺจ, นานาคพฺภา นานาโอวรกา. ยสฺมึ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ คพฺเภ วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ. อปริกฺขิตฺตํ โหติ, ยสฺมึ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ คพฺเภ วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
+นานากุลสฺส นิเวสนํ โหติ ปริกฺขิตฺตญฺจ, นานาคพฺภา นานาโอวรกา. ยสฺมิํ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ คพฺเภ วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ. อปริกฺขิตฺตํ โหติ, ยสฺมิํ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ คพฺเภ วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
 </Paragraph>
 
 </Division>
 <Division number="482" book="para">
 
 <Paragraph number="1903" book="para">
-เอกกุลสฺส อุโทสิโต โหติ ปริกฺขิตฺโต จ, นานาคพฺภา นานาโอวรกา. อนฺโตอุโทสิเต จีวรํ นิกฺขิปิตฺวา อนฺโตอุโทสิเต วตฺถพฺพํ. อปริกฺขิตฺโต โหติ, ยสฺมึ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ คพฺเภ วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
+เอกกุลสฺส อุโทสิโต โหติ ปริกฺขิตฺโต จ, นานาคพฺภา นานาโอวรกา. อนฺโตอุโทสิเต จีวรํ นิกฺขิปิตฺวา อนฺโตอุโทสิเต วตฺถพฺพํ. อปริกฺขิตฺโต โหติ, ยสฺมิํ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ คพฺเภ วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
 </Paragraph>
 
 </Division>
 <Division number="483" book="para">
 
 <Paragraph number="1904" book="para">
-นานากุลสฺส อุโทสิโต โหติ ปริกฺขิตฺโต จ, นานาคพฺภา นานาโอวรกา. ยสฺมึ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ คพฺเภ วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ. อปริกฺขิตฺโต โหติ, ยสฺมึ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ คพฺเภ วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
+นานากุลสฺส อุโทสิโต โหติ ปริกฺขิตฺโต จ, นานาคพฺภา นานาโอวรกา. ยสฺมิํ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ คพฺเภ วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ. อปริกฺขิตฺโต โหติ, ยสฺมิํ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ คพฺเภ วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
 </Paragraph>
 
 </Division>
 <Division number="484" book="para">
 
 <Paragraph number="1905" book="para">
-เอกกุลสฺส อฏฺโฏ โหติ, อนฺโตอฏฺเฏ จีวรํ นิกฺขิปิตฺวา อนฺโตอฏฺเฏ วตฺถพฺพํ. นานากุลสฺส อฏฺโฏ โหติ, นานาคพฺภา นานาโอวรกา. ยสฺมึ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ คพฺเภ วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ.
+เอกกุลสฺส อฏฺโฏ โหติ, อนฺโตอฏฺเฏ จีวรํ นิกฺขิปิตฺวา อนฺโตอฏฺเฏ วตฺถพฺพํ. นานากุลสฺส อฏฺโฏ โหติ, นานาคพฺภา นานาโอวรกา. ยสฺมิํ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ คพฺเภ วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ.
 </Paragraph>
 
 </Division>
 <Division number="485" book="para">
 
 <Paragraph number="1906" book="para">
-เอกกุลสฺส มาโฬ โหติ, อนฺโตมาเฬ จีวรํ นิกฺขิปิตฺวา อนฺโตมาเฬ วตฺถพฺพํ. นานากุลสฺส มาโฬ โหติ นานาคพฺภา นานาโอวรกา, ยสฺมึ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ คพฺเภ วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ.
+เอกกุลสฺส มาโฬ โหติ, อนฺโตมาเฬ จีวรํ นิกฺขิปิตฺวา อนฺโตมาเฬ วตฺถพฺพํ. นานากุลสฺส มาโฬ โหติ นานาคพฺภา นานาโอวรกา, ยสฺมิํ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ คพฺเภ วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ.
 </Paragraph>
 
 </Division>
 <Division number="486" book="para">
 
 <Paragraph number="1907" book="para">
-เอกกุลสฺส ปาสาโท โหติ, อนฺโตปาสาเท จีวรํ นิกฺขิปิตฺวา อนฺโตปาสาเท วตฺถพฺพํ. นานากุลสฺส ปาสาโท โหติ, นานาคพฺภา นานาโอวรกา. ยสฺมึ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ คพฺเภ วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ.
+เอกกุลสฺส ปาสาโท โหติ, อนฺโตปาสาเท จีวรํ นิกฺขิปิตฺวา อนฺโตปาสาเท วตฺถพฺพํ. นานากุลสฺส ปาสาโท โหติ, นานาคพฺภา นานาโอวรกา. ยสฺมิํ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ คพฺเภ วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ.
 </Paragraph>
 
 </Division>
 <Division number="487" book="para">
 
 <Paragraph number="1908" book="para">
-เอกกุลสฺส หมฺมิยํ โหติ. อนฺโตหมฺมิเย จีวรํ นิกฺขิปิตฺวา อนฺโตหมฺมิเย วตฺถพฺพํ. นานากุลสฺส หมฺมิยํ โหติ, นานาคพฺภา นานาโอวรกา. ยสฺมึ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ คพฺเภ วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ.
+เอกกุลสฺส หมฺมิยํ โหติ. อนฺโตหมฺมิเย จีวรํ นิกฺขิปิตฺวา อนฺโตหมฺมิเย วตฺถพฺพํ. นานากุลสฺส หมฺมิยํ โหติ, นานาคพฺภา นานาโอวรกา. ยสฺมิํ คพฺเภ จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ คพฺเภ วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ.
 </Paragraph>
 
 </Division>
 <Division number="488" book="para">
 
 <Paragraph number="1909" book="para">
-เอกกุลสฺส นาวา โหติ. อนฺโตนาวาย จีวรํ นิกฺขิปิตฺวา อนฺโตนาวาย วตฺถพฺพํ. นานากุลสฺส นาวา โหติ นานาคพฺภา นานาโอวรกา. ยสฺมึ โอวรเก จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ โอวรเก วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
+เอกกุลสฺส นาวา โหติ. อนฺโตนาวาย จีวรํ นิกฺขิปิตฺวา อนฺโตนาวาย วตฺถพฺพํ. นานากุลสฺส นาวา โหติ นานาคพฺภา นานาโอวรกา. ยสฺมิํ โอวรเก จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ โอวรเก วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
 </Paragraph>
 
 </Division>
@@ -212,7 +212,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="493" book="para">
 
 <Paragraph number="1914" book="para">
-เอกกุลสฺส วิหาโร โหติ ปริกฺขิตฺโต จ. อนฺโตวิหาเร จีวรํ นิกฺขิปิตฺวา อนฺโตวิหาเร วตฺถพฺพํ. อปริกฺขิตฺโต โหติ, ยสฺมึ วิหาเร จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ วิหาเร วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ. นานากุลสฺส วิหาโร โหติ ปริกฺขิตฺโต จ. ยสฺมึ วิหาเร จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ วิหาเร วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ. อปริกฺขิตฺโต โหติ, ยสฺมึ วิหาเร จีวรํ นิกฺขิตฺตํ โหติ ตสฺมึ วิหาเร วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
+เอกกุลสฺส วิหาโร โหติ ปริกฺขิตฺโต จ. อนฺโตวิหาเร จีวรํ นิกฺขิปิตฺวา อนฺโตวิหาเร วตฺถพฺพํ. อปริกฺขิตฺโต โหติ, ยสฺมิํ วิหาเร จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ วิหาเร วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ. นานากุลสฺส วิหาโร โหติ ปริกฺขิตฺโต จ. ยสฺมิํ วิหาเร จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ วิหาเร วตฺถพฺพํ ทฺวารมูเล วา, หตฺถปาสา วา น วิชหิตพฺพํ. อปริกฺขิตฺโต โหติ, ยสฺมิํ วิหาเร จีวรํ นิกฺขิตฺตํ โหติ ตสฺมิํ วิหาเร วตฺถพฺพํ, หตฺถปาสา วา น วิชหิตพฺพํ.
 </Paragraph>
 
 </Division>
