--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-5.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-1/1-4-1-5.mdx
@@ -18,15 +18,15 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="508" book="para">
 
 <Paragraph number="1956" book="para">
-เตน สมเยน พุทฺโธ ภควา ราชคเห วิหรติ เวฬุวเน กลนฺทกนิวาเป. เตน โข ปน สมเยน อุปฺปลวณฺณา ภิกฺขุนี สาวตฺถิยํ วิหรติ. อถ โข อุปฺปลวณฺณา ภิกฺขุนี ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรมาทาย สาวตฺถึ ปิณฺฑาย ปาวิสิ. สาวตฺถิยํ ปิณฺฑาย จริตฺวา ปจฺฉาภตฺตํ ปิณฺฑปาตปฏิกฺกนฺตา เยน อนฺธวนํ เตนุปสงฺกมิ ทิวาวิหาราย. อนฺธวนํ อชฺโฌคาเหตฺวา อญฺญตรสฺมึ รุกฺขมูเล ทิวาวิหารํ นิสีทิ. เตน โข ปน สมเยน โจรา กตกมฺมา คาวึ วธิตฺวา มํสํ คเหตฺวา อนฺธวนํ ปวิสึสุ. อทฺทสา โข โจรคามณิโก อุปฺปลวณฺณํ ภิกฺขุนึ อญฺญตรสฺมึ รุกฺขมูเล ทิวาวิหารํ นิสินฺนํ. ทิสฺวานสฺส เอตทโหสิ—  “สเจ เม ปุตฺตภาตุกา ปสฺสิสฺสนฺติ วิเหฐิสฺสนฺติ อิมํ ภิกฺขุนินฺ”ติ อญฺเญน มคฺเคน อคมาสิ. อถ โข โส โจรคามณิโก มํเส ปกฺเก วรมํสานิ คเหตฺวา ปณฺณปุฏํ พนฺธิตฺวา อุปฺปลวณฺณาย ภิกฺขุนิยา อวิทูเร รุกฺเข อาลคฺเคตฺวา—  “โย ปสฺสติ สมโณ วา พฺราหฺมโณ วา ทินฺนํเยว หรตู”ติ, วตฺวา ปกฺกามิ. อโสฺสสิ โข อุปฺปลวณฺณา ภิกฺขุนี สมาธิมฺหา วุฏฺฐหิตฺวา ตสฺส โจรคามณิกสฺส อิมํ วาจํ ภาสมานสฺส. อถ โข อุปฺปลวณฺณา ภิกฺขุนี ตํ มํสํ คเหตฺวา อุปสฺสยํ อคมาสิ. อถ โข อุปฺปลวณฺณา ภิกฺขุนี ตสฺสา รตฺติยา อจฺจเยน ตํ มํสํ สมฺปาเทตฺวา อุตฺตราสงฺเคน ภณฺฑิกํ พนฺธิตฺวา เวหาสํ อพฺภุคฺคนฺตฺวา เวฬุวเน ปจฺจุฏฺฐาสิ.
+เตน สมเยน พุทฺโธ ภควา ราชคเห วิหรติ เวฬุวเน กลนฺทกนิวาเป. เตน โข ปน สมเยน อุปฺปลวณฺณา ภิกฺขุนี สาวตฺถิยํ วิหรติ. อถ โข อุปฺปลวณฺณา ภิกฺขุนี ปุพฺพณฺหสมยํ นิวาเสตฺวา ปตฺตจีวรมาทาย สาวตฺถิํ ปิณฺฑาย ปาวิสิ. สาวตฺถิยํ ปิณฺฑาย จริตฺวา ปจฺฉาภตฺตํ ปิณฺฑปาตปฏิกฺกนฺตา เยน อนฺธวนํ เตนุปสงฺกมิ ทิวาวิหาราย. อนฺธวนํ อชฺโฌคาเหตฺวา อญฺญตรสฺมิํ รุกฺขมูเล ทิวาวิหารํ นิสีทิ. เตน โข ปน สมเยน โจรา กตกมฺมา คาวิํ วธิตฺวา มํสํ คเหตฺวา อนฺธวนํ ปวิสิํสุ. อทฺทสา โข โจรคามณิโก อุปฺปลวณฺณํ ภิกฺขุนิํ อญฺญตรสฺมิํ รุกฺขมูเล ทิวาวิหารํ นิสินฺนํ. ทิสฺวานสฺส เอตทโหสิ—  “สเจ เม ปุตฺตภาตุกา ปสฺสิสฺสนฺติ วิเหฐิสฺสนฺติ อิมํ ภิกฺขุนินฺ”ติ อญฺเญน มคฺเคน อคมาสิ. อถ โข โส โจรคามณิโก มํเส ปกฺเก วรมํสานิ คเหตฺวา ปณฺณปุฏํ พนฺธิตฺวา อุปฺปลวณฺณาย ภิกฺขุนิยา อวิทูเร รุกฺเข อาลคฺเคตฺวา—  “โย ปสฺสติ สมโณ วา พฺราหฺมโณ วา ทินฺนํเยว หรตู”ติ, วตฺวา ปกฺกามิ. อโสฺสสิ โข อุปฺปลวณฺณา ภิกฺขุนี สมาธิมฺหา วุฏฺฐหิตฺวา ตสฺส โจรคามณิกสฺส อิมํ วาจํ ภาสมานสฺส. อถ โข อุปฺปลวณฺณา ภิกฺขุนี ตํ มํสํ คเหตฺวา อุปสฺสยํ อคมาสิ. อถ โข อุปฺปลวณฺณา ภิกฺขุนี ตสฺสา รตฺติยา อจฺจเยน ตํ มํสํ สมฺปาเทตฺวา อุตฺตราสงฺเคน ภณฺฑิกํ พนฺธิตฺวา เวหาสํ อพฺภุคฺคนฺตฺวา เวฬุวเน ปจฺจุฏฺฐาสิ.
 </Paragraph>
 
 <Paragraph number="1957" book="para">
-เตน โข ปน สมเยน ภควา คามํ ปิณฺฑาย ปวิฏฺโฐ โหติ. อายสฺมา อุทายี โอหิยฺยโก โหติ วิหารปาโล. อถ โข อุปฺปลวณฺณา ภิกฺขุนี เยนายสฺมา อุทายี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายึ เอตทโวจ—  “กหํ, ภนฺเต, ภควา”ติ? “ปวิฏฺโฐ, ภคินิ, ภควา คามํ ปิณฺฑายา”ติ. “อิมํ, ภนฺเต, มํสํ ภควโต เทหี”ติ. “สนฺตปฺปิโต ตยา, ภคินิ, ภควา มํเสน. สเจ เม ตฺวํ อนฺตรวาสกํ ทเทยฺยาสิ, เอวํ อหมฺปิ สนฺตปฺปิโต ภเวยฺยํ อนฺตรวาสเกนา”ติ. “มยํ โข, ภนฺเต, มาตุคามา นาม กิจฺฉลาภา. อิทญฺจ เม อนฺติมํ ปญฺจมํ จีวรํ. นาหํ ทสฺสามี”ติ. “เสยฺยถาปิ, ภคินิ, ปุริโส หตฺถึ ทตฺวา กจฺเฉ สชฺเชยฺย; เอวเมว โข ตฺวํ, ภคินิ, ภควโต มํสํ ทตฺวา มยิ อนฺตรวาสเก สชฺชสี”ติ. อถ โข อุปฺปลวณฺณา ภิกฺขุนี อายสฺมตา อุทายินา นิปฺปีฬิยมานา อนฺตรวาสกํ ทตฺวา อุปสฺสยํ อคมาสิ. ภิกฺขุนิโย อุปฺปลวณฺณาย ภิกฺขุนิยา ปตฺตจีวรํ ปฏิคฺคณฺหนฺติโย อุปฺปลวณฺณํ ภิกฺขุนึ เอตทโวจุํ—  “กหํ เต, อเยฺย, อนฺตรวาสโก”ติ? อุปฺปลวณฺณา ภิกฺขุนี ภิกฺขุนีนํ เอตมตฺถํ อาโรเจสิ. ภิกฺขุนิโย อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อโยฺย อุทายี ภิกฺขุนิยา จีวรํ ปฏิคฺคเหสฺสติ กิจฺฉลาโภ มาตุคาโม”ติ. อถ โข ตา ภิกฺขุนิโย ภิกฺขูนํ เอตมตฺถํ อาโรเจสุํ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา อุทายี ภิกฺขุนิยา จีวรํ ปฏิคฺคเหสฺสตี”ติ.
+เตน โข ปน สมเยน ภควา คามํ ปิณฺฑาย ปวิฏฺโฐ โหติ. อายสฺมา อุทายี โอหิยฺยโก โหติ วิหารปาโล. อถ โข อุปฺปลวณฺณา ภิกฺขุนี เยนายสฺมา อุทายี เตนุปสงฺกมิ; อุปสงฺกมิตฺวา อายสฺมนฺตํ อุทายิํ เอตทโวจ—  “กหํ, ภนฺเต, ภควา”ติ? “ปวิฏฺโฐ, ภคินิ, ภควา คามํ ปิณฺฑายา”ติ. “อิมํ, ภนฺเต, มํสํ ภควโต เทหี”ติ. “สนฺตปฺปิโต ตยา, ภคินิ, ภควา มํเสน. สเจ เม ตฺวํ อนฺตรวาสกํ ทเทยฺยาสิ, เอวํ อหมฺปิ สนฺตปฺปิโต ภเวยฺยํ อนฺตรวาสเกนา”ติ. “มยํ โข, ภนฺเต, มาตุคามา นาม กิจฺฉลาภา. อิทญฺจ เม อนฺติมํ ปญฺจมํ จีวรํ. นาหํ ทสฺสามี”ติ. “เสยฺยถาปิ, ภคินิ, ปุริโส หตฺถิํ ทตฺวา กจฺเฉ สชฺเชยฺย; เอวเมว โข ตฺวํ, ภคินิ, ภควโต มํสํ ทตฺวา มยิ อนฺตรวาสเก สชฺชสี”ติ. อถ โข อุปฺปลวณฺณา ภิกฺขุนี อายสฺมตา อุทายินา นิปฺปีฬิยมานา อนฺตรวาสกํ ทตฺวา อุปสฺสยํ อคมาสิ. ภิกฺขุนิโย อุปฺปลวณฺณาย ภิกฺขุนิยา ปตฺตจีวรํ ปฏิคฺคณฺหนฺติโย อุปฺปลวณฺณํ ภิกฺขุนิํ เอตทโวจุํ—  “กหํ เต, อเยฺย, อนฺตรวาสโก”ติ? อุปฺปลวณฺณา ภิกฺขุนี ภิกฺขุนีนํ เอตมตฺถํ อาโรเจสิ. ภิกฺขุนิโย อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อโยฺย อุทายี ภิกฺขุนิยา จีวรํ ปฏิคฺคเหสฺสติ กิจฺฉลาโภ มาตุคาโม”ติ. อถ โข ตา ภิกฺขุนิโย ภิกฺขูนํ เอตมตฺถํ อาโรเจสุํ. เย เต ภิกฺขู อปฺปิจฺฉา …เป…  เต อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม อายสฺมา อุทายี ภิกฺขุนิยา จีวรํ ปฏิคฺคเหสฺสตี”ติ.
 </Paragraph>
 
 <Paragraph number="1958" book="para">
-อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายึ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ …เป…  “สจฺจํ กิร ตฺวํ, อุทายิ, ภิกฺขุนิยา จีวรํ ปฏิคฺคเหสี”ติ? “สจฺจํ, ภควา”ติ. “ญาติกา เต, อุทายิ, อญฺญาติกา”ติ? “อญฺญาติกา, ภควา”ติ. “อญฺญาตโก, โมฆปุริส, อญฺญาติกาย น ชานาติ ปติรูปํ วา อปฺปติรูปํ วา สนฺตํ วา อสนฺตํ วา. ตตฺถ นาม ตฺวํ, โมฆปุริส, อญฺญาติกาย ภิกฺขุนิยา หตฺถโต จีวรํ ปฏิคฺคเหสฺสสิ. เนตํ โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข เต ภิกฺขู อายสฺมนฺตํ อุทายิํ อเนกปริยาเยน วิครหิตฺวา ภควโต เอตมตฺถํ อาโรเจสุํ …เป…  “สจฺจํ กิร ตฺวํ, อุทายิ, ภิกฺขุนิยา จีวรํ ปฏิคฺคเหสี”ติ? “สจฺจํ, ภควา”ติ. “ญาติกา เต, อุทายิ, อญฺญาติกา”ติ? “อญฺญาติกา, ภควา”ติ. “อญฺญาตโก, โมฆปุริส, อญฺญาติกาย น ชานาติ ปติรูปํ วา อปฺปติรูปํ วา สนฺตํ วา อสนฺตํ วา. ตตฺถ นาม ตฺวํ, โมฆปุริส, อญฺญาติกาย ภิกฺขุนิยา หตฺถโต จีวรํ ปฏิคฺคเหสฺสสิ. เนตํ โมฆปุริส, อปฺปสนฺนานํ วา ปสาทาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 </Paragraph>
 
 </Division>
@@ -48,7 +48,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="1962" book="para">
-อโสฺสสุํ โข ภิกฺขู ตาสํ ภิกฺขุนีนํ อุชฺฌายนฺตีนํ ขิยฺยนฺตีนํ วิปาเจนฺตีนํ. อถ โข เต ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, ปญฺจนฺนํ ปาริวตฺตกํ ปฏิคฺคเหตุํ—  ภิกฺขุสฺส, ภิกฺขุนิยา, สิกฺขมานาย, สามเณรสฺส, สามเณริยา. อนุชานามิ, ภิกฺขเว, อิเมสํ ปญฺจนฺนํ ปาริวตฺตกํ ปฏิคฺคเหตุํ. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อโสฺสสุํ โข ภิกฺขู ตาสํ ภิกฺขุนีนํ อุชฺฌายนฺตีนํ ขิยฺยนฺตีนํ วิปาเจนฺตีนํ. อถ โข เต ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, ปญฺจนฺนํ ปาริวตฺตกํ ปฏิคฺคเหตุํ—  ภิกฺขุสฺส, ภิกฺขุนิยา, สิกฺขมานาย, สามเณรสฺส, สามเณริยา. อนุชานามิ, ภิกฺขเว, อิเมสํ ปญฺจนฺนํ ปาริวตฺตกํ ปฏิคฺคเหตุํ. เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 </Paragraph>
 
 </Division>
@@ -62,7 +62,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="512" book="para">
 
 <Paragraph number="1964" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="1965" book="para">
