--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-2.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-2.mdx
@@ -40,7 +40,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="549" book="para">
 
 <Paragraph number="2113" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="2114" book="para">
@@ -70,7 +70,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="551" book="para">
 
 <Paragraph number="2119" book="para">
-อนาปตฺติ—  วิตานํ วา ภูมตฺถรณํ วา สาณิปาการํ วา ภิสึ วา พิพฺโพหนํ วา กโรติ, อุมฺมตฺตกสฺส, อาทิกมฺมิกสฺสาติ.
+อนาปตฺติ—  วิตานํ วา ภูมตฺถรณํ วา สาณิปาการํ วา ภิสิํ วา พิพฺโพหนํ วา กโรติ, อุมฺมตฺตกสฺส, อาทิกมฺมิกสฺสาติ.
 
 </Paragraph>
 </Division>
