--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-3.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-3.mdx
@@ -78,7 +78,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="556" book="para">
 
 <Paragraph number="2133" book="para">
-อนาปตฺติ—  ตุลํ โอทาตานํ ตุลํ โคจริยานํ อาทิยิตฺวา กโรติ, พหุตรํ โอทาตานํ พหุตรํ โคจริยานํ อาทิยิตฺวา กโรติ, สุทฺธํ โอทาตานํ สุทฺธํ โคจริยานํ อาทิยิตฺวา กโรติ, วิตานํ วา ภูมตฺถรณํ วา สาณิปาการํ วา ภิสึ วา พิพฺโพหนํ วา กโรติ, อุมฺมตฺตกสฺส, อาทิกมฺมิกสฺสาติ.
+อนาปตฺติ—  ตุลํ โอทาตานํ ตุลํ โคจริยานํ อาทิยิตฺวา กโรติ, พหุตรํ โอทาตานํ พหุตรํ โคจริยานํ อาทิยิตฺวา กโรติ, สุทฺธํ โอทาตานํ สุทฺธํ โคจริยานํ อาทิยิตฺวา กโรติ, วิตานํ วา ภูมตฺถรณํ วา สาณิปาการํ วา ภิสิํ วา พิพฺโพหนํ วา กโรติ, อุมฺมตฺตกสฺส, อาทิกมฺมิกสฺสาติ.
 
 </Paragraph>
 </Division>
