--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-4.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-4.mdx
@@ -18,7 +18,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="557" book="para">
 
 <Paragraph number="2135" book="para">
-เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน ภิกฺขู อนุวสฺสํ สนฺถตํ การาเปนฺติ. เต ยาจนพหุลา วิญฺญตฺติพหุลา วิหรนฺติ—  “เอฬกโลมานิ เทถ. เอฬกโลเมหิ อตฺโถ”ติ. มนุสฺสา อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม สมณา สกฺยปุตฺติยา อนุวสฺสํ สนฺถตํ การาเปสฺสนฺติ, ยาจนพหุลา วิญฺญตฺติพหุลา วิหริสฺสนฺติ—  ‘เอฬกโลมานิ เทถ, เอฬกโลเมหิ อตฺโถ’ติ. อมฺหากํ ปน สกึ กตานิ สนฺถตานิ ปญฺจปิ ฉปิ วสฺสานิ โหนฺติ, เยสํ โน ทารกา อุหทนฺติปิ อุมฺมิหนฺติปิ อุนฺทูเรหิปิ ขชฺชนฺติ. อิเม ปน สมณา สกฺยปุตฺติยา อนุวสฺสํ สนฺถตํ การาเปนฺติ, ยาจนพหุลา วิญฺญตฺติพหุลา วิหรนฺติ—  ‘เอฬกโลมานิ เทถ, เอฬกโลเมหิ อตฺโถ’”ติ.
+เตน สมเยน พุทฺโธ ภควา สาวตฺถิยํ วิหรติ เชตวเน อนาถปิณฺฑิกสฺส อาราเม. เตน โข ปน สมเยน ภิกฺขู อนุวสฺสํ สนฺถตํ การาเปนฺติ. เต ยาจนพหุลา วิญฺญตฺติพหุลา วิหรนฺติ—  “เอฬกโลมานิ เทถ. เอฬกโลเมหิ อตฺโถ”ติ. มนุสฺสา อุชฺฌายนฺติ ขิยฺยนฺติ วิปาเจนฺติ—  “กถญฺหิ นาม สมณา สกฺยปุตฺติยา อนุวสฺสํ สนฺถตํ การาเปสฺสนฺติ, ยาจนพหุลา วิญฺญตฺติพหุลา วิหริสฺสนฺติ—  ‘เอฬกโลมานิ เทถ, เอฬกโลเมหิ อตฺโถ’ติ. อมฺหากํ ปน สกิํ กตานิ สนฺถตานิ ปญฺจปิ ฉปิ วสฺสานิ โหนฺติ, เยสํ โน ทารกา อุหทนฺติปิ อุมฺมิหนฺติปิ อุนฺทูเรหิปิ ขชฺชนฺติ. อิเม ปน สมณา สกฺยปุตฺติยา อนุวสฺสํ สนฺถตํ การาเปนฺติ, ยาจนพหุลา วิญฺญตฺติพหุลา วิหรนฺติ—  ‘เอฬกโลมานิ เทถ, เอฬกโลเมหิ อตฺโถ’”ติ.
 </Paragraph>
 
 <Paragraph number="2136" book="para">
@@ -48,18 +48,18 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2141" book="para">
-อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, คิลานสฺส ภิกฺขุโน สนฺถตสมฺมุตึ ทาตุํ. เอวญฺจ ปน, ภิกฺขเว, ทาตพฺพา. เตน คิลาเนน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  ‘อหํ, ภนฺเต, คิลาโน น สกฺโกมิ สนฺถตํ อาทาย ปกฺกมิตุํ. โสหํ, ภนฺเต, สํฆํ สนฺถตสมฺมุตึ ยาจามี’ติ. ทุติยมฺปิ ยาจิตพฺพา. ตติยมฺปิ ยาจิตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
+อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “อนุชานามิ, ภิกฺขเว, คิลานสฺส ภิกฺขุโน สนฺถตสมฺมุติํ ทาตุํ. เอวญฺจ ปน, ภิกฺขเว, ทาตพฺพา. เตน คิลาเนน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  ‘อหํ, ภนฺเต, คิลาโน น สกฺโกมิ สนฺถตํ อาทาย ปกฺกมิตุํ. โสหํ, ภนฺเต, สํฆํ สนฺถตสมฺมุติํ ยาจามี’ติ. ทุติยมฺปิ ยาจิตพฺพา. ตติยมฺปิ ยาจิตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
 </Paragraph>
 
 </Division>
 <Division number="560" book="para">
 
 <Paragraph number="2142" book="para">
-‘สุณาตุ เม, ภนฺเต, สํโฆ. อยํ อิตฺถนฺนาโม ภิกฺขุ คิลาโน น สกฺโกติ สนฺถตํ อาทาย ปกฺกมิตุํ. โส สํฆํ สนฺถตสมฺมุตึ ยาจติ. ยทิ สํฆสฺส ปตฺตกลฺลํ, สํโฆ อิตฺถนฺนามสฺส ภิกฺขุโน สนฺถตสมฺมุตึ ทเทยฺย. เอสา ญตฺติ.
+‘สุณาตุ เม, ภนฺเต, สํโฆ. อยํ อิตฺถนฺนาโม ภิกฺขุ คิลาโน น สกฺโกติ สนฺถตํ อาทาย ปกฺกมิตุํ. โส สํฆํ สนฺถตสมฺมุติํ ยาจติ. ยทิ สํฆสฺส ปตฺตกลฺลํ, สํโฆ อิตฺถนฺนามสฺส ภิกฺขุโน สนฺถตสมฺมุติํ ทเทยฺย. เอสา ญตฺติ.
 </Paragraph>
 
 <Paragraph number="2143" book="para">
-สุณาตุ เม, ภนฺเต, สํโฆ. อยํ อิตฺถนฺนาโม ภิกฺขุ คิลาโน น สกฺโกติ สนฺถตํ อาทาย ปกฺกมิตุํ. โส สํฆํ สนฺถตสมฺมุตึ ยาจติ. สํโฆ อิตฺถนฺนามสฺส ภิกฺขุโน สนฺถตสมฺมุตึ เทติ. ยสฺสายสฺมโต ขมติ อิตฺถนฺนามสฺส ภิกฺขุโน สนฺถตสมฺมุติยา ทานํ, โส ตุณฺหสฺส; ยสฺส นกฺขมติ, โส ภาเสยฺย.
+สุณาตุ เม, ภนฺเต, สํโฆ. อยํ อิตฺถนฺนาโม ภิกฺขุ คิลาโน น สกฺโกติ สนฺถตํ อาทาย ปกฺกมิตุํ. โส สํฆํ สนฺถตสมฺมุติํ ยาจติ. สํโฆ อิตฺถนฺนามสฺส ภิกฺขุโน สนฺถตสมฺมุติํ เทติ. ยสฺสายสฺมโต ขมติ อิตฺถนฺนามสฺส ภิกฺขุโน สนฺถตสมฺมุติยา ทานํ, โส ตุณฺหสฺส; ยสฺส นกฺขมติ, โส ภาเสยฺย.
 </Paragraph>
 
 <Paragraph number="2144" book="para">
@@ -109,7 +109,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2154" book="para">
-<Emphasis>อญฺญตฺร ภิกฺขุสมฺมุติยา</Emphasis>ติ ฐเปตฺวา ภิกฺขุสมฺมุตึ อญฺญํ นวํ สนฺถตํ กโรติ วา การาเปติ วา, ปโยเค ทุกฺกฏํ. ปฏิลาเภน นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ …เป…  “อิทํ เม, ภนฺเต, สนฺถตํ อูนกฉพฺพสฺสานิ การาปิตํ, อญฺญตฺร ภิกฺขุสมฺมุติยา, นิสฺสคฺคิยํ. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ …เป…  ทเทยฺยาติ …เป…  ทเทยฺยุนฺติ …เป…  อายสฺมโต ทมฺมีติ.
+<Emphasis>อญฺญตฺร ภิกฺขุสมฺมุติยา</Emphasis>ติ ฐเปตฺวา ภิกฺขุสมฺมุติํ อญฺญํ นวํ สนฺถตํ กโรติ วา การาเปติ วา, ปโยเค ทุกฺกฏํ. ปฏิลาเภน นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ …เป…  “อิทํ เม, ภนฺเต, สนฺถตํ อูนกฉพฺพสฺสานิ การาปิตํ, อญฺญตฺร ภิกฺขุสมฺมุติยา, นิสฺสคฺคิยํ. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ …เป…  ทเทยฺยาติ …เป…  ทเทยฺยุนฺติ …เป…  อายสฺมโต ทมฺมีติ.
 </Paragraph>
 
 </Division>
@@ -123,7 +123,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="564" book="para">
 
 <Paragraph number="2156" book="para">
-อนาปตฺติ—  ฉพฺพสฺสานิ กโรติ, อติเรกฉพฺพสฺสานิ กโรติ, อญฺญสฺสตฺถาย กโรติ วา การาเปติ วา, อญฺเญน กตํ ปฏิลภิตฺวา ปริภุญฺชติ, วิตานํ วา ภูมตฺถรณํ วา สาณิปาการํ วา ภิสึ วา พิพฺโพหนํ วา กโรติ, ภิกฺขุสมฺมุติยา, อุมฺมตฺตกสฺส, อาทิกมฺมิกสฺสาติ.
+อนาปตฺติ—  ฉพฺพสฺสานิ กโรติ, อติเรกฉพฺพสฺสานิ กโรติ, อญฺญสฺสตฺถาย กโรติ วา การาเปติ วา, อญฺเญน กตํ ปฏิลภิตฺวา ปริภุญฺชติ, วิตานํ วา ภูมตฺถรณํ วา สาณิปาการํ วา ภิสิํ วา พิพฺโพหนํ วา กโรติ, ภิกฺขุสมฺมุติยา, อุมฺมตฺตกสฺส, อาทิกมฺมิกสฺสาติ.
 
 </Paragraph>
 </Division>
