--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-5.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-5.mdx
@@ -22,7 +22,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2159" book="para">
-อถ โข อายสฺมา อุปเสโน วงฺคนฺตปุตฺโต, สปริโส เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. อาจิณฺณํ โข ปเนตํ พุทฺธานํ ภควนฺตานํ อาคนฺตุเกหิ ภิกฺขูหิ สทฺธึ ปฏิสมฺโมทิตุํ. อถ โข ภควา อายสฺมนฺตํ อุปเสนํ วงฺคนฺตปุตฺตํ เอตทโวจ—  “กจฺจิ โว, อุปเสน, ขมนียํ กจฺจิ ยาปนียํ, กจฺจิตฺถ อปฺปกิลมเถน อทฺธานํ อาคตา”ติ? “ขมนียํ, ภควา, ยาปนียํ, ภควา. อปฺปกิลมเถน จ มยํ, ภนฺเต, อทฺธานํ อาคตา”ติ.
+อถ โข อายสฺมา อุปเสโน วงฺคนฺตปุตฺโต, สปริโส เยน ภควา เตนุปสงฺกมิ; อุปสงฺกมิตฺวา ภควนฺตํ อภิวาเทตฺวา เอกมนฺตํ นิสีทิ. อาจิณฺณํ โข ปเนตํ พุทฺธานํ ภควนฺตานํ อาคนฺตุเกหิ ภิกฺขูหิ สทฺธิํ ปฏิสมฺโมทิตุํ. อถ โข ภควา อายสฺมนฺตํ อุปเสนํ วงฺคนฺตปุตฺตํ เอตทโวจ—  “กจฺจิ โว, อุปเสน, ขมนียํ กจฺจิ ยาปนียํ, กจฺจิตฺถ อปฺปกิลมเถน อทฺธานํ อาคตา”ติ? “ขมนียํ, ภควา, ยาปนียํ, ภควา. อปฺปกิลมเถน จ มยํ, ภนฺเต, อทฺธานํ อาคตา”ติ.
 </Paragraph>
 
 <Paragraph number="2160" book="para">
@@ -41,18 +41,18 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2163" book="para">
-อถ โข เต ภิกฺขู—  “สจฺจํ โข อายสฺมา อุปเสโน อาห—  ‘น อปญฺญตฺตํ ปญฺญเปตพฺพํ, ปญฺญตฺตํ วา น สมุจฺฉินฺทิตพฺพํ, ยถาปญฺญตฺเตสุ สิกฺขาปเทสุ สมาทาย วตฺติตพฺพนฺ’”ติ. อโสฺสสุํ โข ภิกฺขู—  “อนุญฺญาตา กิร ภควตา—  ‘เย เต ภิกฺขู อารญฺญิกา ปิณฺฑปาติกา ปํสุกูลิกา ยถาสุขํ มํ ทสฺสนาย อุปสงฺกมนฺตู’”ติ. เต ภควนฺตํ ทสฺสนํ ปิเหนฺตา สนฺถตานิ อุชฺฌิตฺวา อารญฺญิกงฺคํ ปิณฺฑปาติกงฺคํ ปํสุกูลิกงฺคํ สมาทิยึสุ. อถ โข ภควา สมฺพหุเลหิ ภิกฺขูหิ สทฺธึ เสนาสนจาริกํ อาหิณฺฑนฺโต อทฺทส สนฺถตานิ ตหํ ตหํ อุชฺฌิตานิ. ปสฺสิตฺวา ภิกฺขู อามนฺเตสิ—  “กสฺสิมานิ, ภิกฺขเว, สนฺถตานิ ตหํ ตหํ อุชฺฌิตานี”ติ?
+อถ โข เต ภิกฺขู—  “สจฺจํ โข อายสฺมา อุปเสโน อาห—  ‘น อปญฺญตฺตํ ปญฺญเปตพฺพํ, ปญฺญตฺตํ วา น สมุจฺฉินฺทิตพฺพํ, ยถาปญฺญตฺเตสุ สิกฺขาปเทสุ สมาทาย วตฺติตพฺพนฺ’”ติ. อโสฺสสุํ โข ภิกฺขู—  “อนุญฺญาตา กิร ภควตา—  ‘เย เต ภิกฺขู อารญฺญิกา ปิณฺฑปาติกา ปํสุกูลิกา ยถาสุขํ มํ ทสฺสนาย อุปสงฺกมนฺตู’”ติ. เต ภควนฺตํ ทสฺสนํ ปิเหนฺตา สนฺถตานิ อุชฺฌิตฺวา อารญฺญิกงฺคํ ปิณฺฑปาติกงฺคํ ปํสุกูลิกงฺคํ สมาทิยิํสุ. อถ โข ภควา สมฺพหุเลหิ ภิกฺขูหิ สทฺธิํ เสนาสนจาริกํ อาหิณฺฑนฺโต อทฺทส สนฺถตานิ ตหํ ตหํ อุชฺฌิตานิ. ปสฺสิตฺวา ภิกฺขู อามนฺเตสิ—  “กสฺสิมานิ, ภิกฺขเว, สนฺถตานิ ตหํ ตหํ อุชฺฌิตานี”ติ?
 </Paragraph>
 
 <Paragraph number="2164" book="para">
-อถ โข เต ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมึ นิทาเน เอตสฺมึ ปกรเณ ธมฺมึ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “เตน หิ, ภิกฺขเว, ภิกฺขูนํ สิกฺขาปทํ ปญฺญเปสฺสามิ ทส อตฺถวเส ปฏิจฺจ—  สํฆสุฏฺฐุตาย, สํฆผาสุตาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
+อถ โข เต ภิกฺขู ภควโต เอตมตฺถํ อาโรเจสุํ. อถ โข ภควา เอตสฺมิํ นิทาเน เอตสฺมิํ ปกรเณ ธมฺมิํ กถํ กตฺวา ภิกฺขู อามนฺเตสิ—  “เตน หิ, ภิกฺขเว, ภิกฺขูนํ สิกฺขาปทํ ปญฺญเปสฺสามิ ทส อตฺถวเส ปฏิจฺจ—  สํฆสุฏฺฐุตาย, สํฆผาสุตาย …เป…  เอวญฺจ ปน, ภิกฺขเว, อิมํ สิกฺขาปทํ อุทฺทิเสยฺยาถ—
 </Paragraph>
 
 </Division>
 <Division number="567" book="para">
 
 <Paragraph number="2165" book="para">
-<Emphasis>“นิสีทนสนฺถตํ ปน ภิกฺขุนา การยมาเนน ปุราณสนฺถตสฺส สามนฺตา สุคตวิทตฺถิ อาทาตพฺพา ทุพฺพณฺณกรณาย, อนาทา เจ ภิกฺขุ ปุราณสนฺถตสฺส สามนฺตา สุคตวิทตฺถึ นวํ นิสีทนสนฺถตํ การาเปยฺย, นิสฺสคฺคิยํ ปาจิตฺติยนฺ”</Emphasis>ติ. (*15*:<Emphasis>34</Emphasis>)
+<Emphasis>“นิสีทนสนฺถตํ ปน ภิกฺขุนา การยมาเนน ปุราณสนฺถตสฺส สามนฺตา สุคตวิทตฺถิ อาทาตพฺพา ทุพฺพณฺณกรณาย, อนาทา เจ ภิกฺขุ ปุราณสนฺถตสฺส สามนฺตา สุคตวิทตฺถิํ นวํ นิสีทนสนฺถตํ การาเปยฺย, นิสฺสคฺคิยํ ปาจิตฺติยนฺ”</Emphasis>ติ. (*15*:<Emphasis>34</Emphasis>)
 </Paragraph>
 
 </Division>
@@ -71,7 +71,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2169" book="para">
-<Emphasis>ปุราณสนฺถตํ</Emphasis> นาม สกึ นิวตฺถมฺปิ สกึ ปารุตมฺปิ.
+<Emphasis>ปุราณสนฺถตํ</Emphasis> นาม สกิํ นิวตฺถมฺปิ สกิํ ปารุตมฺปิ.
 </Paragraph>
 
 <Paragraph number="2170" book="para">
@@ -79,7 +79,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2171" book="para">
-<Emphasis>อนาทา เจ ภิกฺขุ ปุราณสนฺถตสฺส สามนฺตา สุคตวิทตฺถินฺ</Emphasis>ติ อนาทิยิตฺวา ปุราณสนฺถตสฺส สามนฺตา สุคตวิทตฺถึ นวํ นิสีทนสนฺถตํ กโรติ วา การาเปติ วา, ปโยเค ทุกฺกฏํ, ปฏิลาเภน นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ …เป…  “อิทํ เม, ภนฺเต, นิสีทนสนฺถตํ อนาทิยิตฺวา ปุราณสนฺถตสฺส สามนฺตา สุคตวิทตฺถึ การาปิตํ นิสฺสคฺคิยํ. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ …เป…  ทเทยฺยาติ …เป…  ทเทยฺยุนฺติ …เป…  อายสฺมโต ทมฺมีติ.
+<Emphasis>อนาทา เจ ภิกฺขุ ปุราณสนฺถตสฺส สามนฺตา สุคตวิทตฺถินฺ</Emphasis>ติ อนาทิยิตฺวา ปุราณสนฺถตสฺส สามนฺตา สุคตวิทตฺถิํ นวํ นิสีทนสนฺถตํ กโรติ วา การาเปติ วา, ปโยเค ทุกฺกฏํ, ปฏิลาเภน นิสฺสคฺคิยํ โหติ. นิสฺสชฺชิตพฺพํ สํฆสฺส วา คณสฺส วา ปุคฺคลสฺส วา. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ …เป…  “อิทํ เม, ภนฺเต, นิสีทนสนฺถตํ อนาทิยิตฺวา ปุราณสนฺถตสฺส สามนฺตา สุคตวิทตฺถิํ การาปิตํ นิสฺสคฺคิยํ. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ …เป…  ทเทยฺยาติ …เป…  ทเทยฺยุนฺติ …เป…  อายสฺมโต ทมฺมีติ.
 </Paragraph>
 
 </Division>
@@ -97,7 +97,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="570" book="para">
 
 <Paragraph number="2174" book="para">
-อนาปตฺติ—  ปุราณสนฺถตสฺส สามนฺตา สุคตวิทตฺถึ อาทิยิตฺวา กโรติ, อลภนฺโต โถกตรํ อาทิยิตฺวา กโรติ, อลภนฺโต อนาทิยิตฺวา กโรติ, อญฺเญน กตํ ปฏิลภิตฺวา ปริภุญฺชติ, วิตานํ วา ภูมตฺถรณํ วา สาณิปาการํ วา ภิสึ วา พิพฺโพหนํ วา กโรติ, อุมฺมตฺตกสฺส อาทิกมฺมิกสฺสาติ.
+อนาปตฺติ—  ปุราณสนฺถตสฺส สามนฺตา สุคตวิทตฺถิํ อาทิยิตฺวา กโรติ, อลภนฺโต โถกตรํ อาทิยิตฺวา กโรติ, อลภนฺโต อนาทิยิตฺวา กโรติ, อญฺเญน กตํ ปฏิลภิตฺวา ปริภุญฺชติ, วิตานํ วา ภูมตฺถรณํ วา สาณิปาการํ วา ภิสิํ วา พิพฺโพหนํ วา กโรติ, อุมฺมตฺตกสฺส อาทิกมฺมิกสฺสาติ.
 
 </Paragraph>
 </Division>
