--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-9.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-2/1-4-2-9.mdx
@@ -40,7 +40,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="589" book="para">
 
 <Paragraph number="2226" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="2227" book="para">
@@ -52,7 +52,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 </Paragraph>
 
 <Paragraph number="2229" book="para">
-<Emphasis>สมาปชฺเชยฺยา</Emphasis>ติ กเตน กตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. กเตน อกตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. กเตน กตากตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. อกเตน กตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. อกเตน อกตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. อกเตน กตากตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. กตากเตน กตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. กตากเตน อกตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. กตากเตน กตากตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. สํฆมชฺเฌ นิสฺสชฺชิตพฺพํ. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ. เตน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลึ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อหํ, ภนฺเต, นานปฺปการกํ รูปิยสํโวหารํ สมาปชฺชึ. อิทํ เม นิสฺสคฺคิยํ. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา. สเจ ตตฺถ อาคจฺฉติ อารามิโก วา อุปาสโก วา โส วตฺตพฺโพ—  “อาวุโส, อิมํ ชานาหี”ติ. สเจ โส ภณติ—  “อิมินา กึ อาหริยฺยตู”ติ, น วตฺตพฺโพ—  “อิมํ วา อิมํ วา อาหรา”ติ. กปฺปิยํ อาจิกฺขิตพฺพํ—  สปฺปิ วา เตลํ วา มธุ วา ผาณิตํ วา. สเจ โส เตน ปริวตฺเตตฺวา กปฺปิยํ อาหรติ, รูปิยเจตาปกํ ฐเปตฺวา, สพฺเพเหว ปริภุญฺชิตพฺพํ. เอวญฺเจตํ ลเภถ, อิจฺเจตํ กุสลํ; โน เจ ลเภถ, โส วตฺตพฺโพ—  “อาวุโส, อิมํ ฉฑฺเฑหี”ติ. สเจ โส ฉฑฺเฑติ, อิจฺเจตํ กุสลํ; โน เจ ฉฑฺเฑติ, ปญฺจหงฺเคหิ สมนฺนาคโต ภิกฺขุ รูปิยฉฑฺฑโก สมฺมนฺนิตพฺโพ—  โย น ฉนฺทาคตึ คจฺเฉยฺย, น โทสาคตึ คจฺเฉยฺย, น โมหาคตึ คจฺเฉยฺย, น ภยาคตึ คจฺเฉยฺย, ฉฑฺฑิตาฉฑฺฑิตญฺจ ชาเนยฺย. “เอวญฺจ ปน, ภิกฺขเว, สมฺมนฺนิตพฺโพ. ปฐมํ ภิกฺขุ ยาจิตพฺโพ. ยาจิตฺวา พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
+<Emphasis>สมาปชฺเชยฺยา</Emphasis>ติ กเตน กตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. กเตน อกตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. กเตน กตากตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. อกเตน กตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. อกเตน อกตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. อกเตน กตากตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. กตากเตน กตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. กตากเตน อกตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. กตากเตน กตากตํ เจตาเปติ, นิสฺสคฺคิยํ ปาจิตฺติยํ. สํฆมชฺเฌ นิสฺสชฺชิตพฺพํ. เอวญฺจ ปน, ภิกฺขเว, นิสฺสชฺชิตพฺพํ. เตน ภิกฺขุนา สํฆํ อุปสงฺกมิตฺวา เอกํสํ อุตฺตราสงฺคํ กริตฺวา วุฑฺฒานํ ภิกฺขูนํ ปาเท วนฺทิตฺวา อุกฺกุฏิกํ นิสีทิตฺวา อญฺชลิํ ปคฺคเหตฺวา เอวมสฺส วจนีโย—  “อหํ, ภนฺเต, นานปฺปการกํ รูปิยสํโวหารํ สมาปชฺชิํ. อิทํ เม นิสฺสคฺคิยํ. อิมาหํ สํฆสฺส นิสฺสชฺชามี”ติ. นิสฺสชฺชิตฺวา อาปตฺติ เทเสตพฺพา. พฺยตฺเตน ภิกฺขุนา ปฏิพเลน อาปตฺติ ปฏิคฺคเหตพฺพา. สเจ ตตฺถ อาคจฺฉติ อารามิโก วา อุปาสโก วา โส วตฺตพฺโพ—  “อาวุโส, อิมํ ชานาหี”ติ. สเจ โส ภณติ—  “อิมินา กิํ อาหริยฺยตู”ติ, น วตฺตพฺโพ—  “อิมํ วา อิมํ วา อาหรา”ติ. กปฺปิยํ อาจิกฺขิตพฺพํ—  สปฺปิ วา เตลํ วา มธุ วา ผาณิตํ วา. สเจ โส เตน ปริวตฺเตตฺวา กปฺปิยํ อาหรติ, รูปิยเจตาปกํ ฐเปตฺวา, สพฺเพเหว ปริภุญฺชิตพฺพํ. เอวญฺเจตํ ลเภถ, อิจฺเจตํ กุสลํ; โน เจ ลเภถ, โส วตฺตพฺโพ—  “อาวุโส, อิมํ ฉฑฺเฑหี”ติ. สเจ โส ฉฑฺเฑติ, อิจฺเจตํ กุสลํ; โน เจ ฉฑฺเฑติ, ปญฺจหงฺเคหิ สมนฺนาคโต ภิกฺขุ รูปิยฉฑฺฑโก สมฺมนฺนิตพฺโพ—  โย น ฉนฺทาคติํ คจฺเฉยฺย, น โทสาคติํ คจฺเฉยฺย, น โมหาคติํ คจฺเฉยฺย, น ภยาคติํ คจฺเฉยฺย, ฉฑฺฑิตาฉฑฺฑิตญฺจ ชาเนยฺย. “เอวญฺจ ปน, ภิกฺขเว, สมฺมนฺนิตพฺโพ. ปฐมํ ภิกฺขุ ยาจิตพฺโพ. ยาจิตฺวา พฺยตฺเตน ภิกฺขุนา ปฏิพเลน สํโฆ ญาเปตพฺโพ—
 </Paragraph>
 
 </Division>
