--- a/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-6.mdx
+++ b/src/content/docs/thai/tipitaka/vi/para/1/1-4/1-4-3/1-4-3-6.mdx
@@ -40,7 +40,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <Division number="638" book="para">
 
 <Paragraph number="2354" book="para">
-<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมึ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
+<Emphasis>โย ปนา</Emphasis>ติ โย ยาทิโส …เป…  <Emphasis>ภิกฺขู</Emphasis>ติ …เป…  อยํ อิมสฺมิํ อตฺเถ อธิปฺเปโต ภิกฺขูติ.
 </Paragraph>
 
 <Paragraph number="2355" book="para">
